Added multiple lang

--- a/keyOS/res/values-zh/strings.xml
+++ b/keyOS/res/values-zh/strings.xml
@@ -207,4 +207,171 @@
     <string name="activity_not_found">应用未安装。</string>
     <string name="out_of_space">桌面上没有更多空间了。</string>
     <string name="hotseat_out_of_space">Dock 栏已满</string>
+
+
+    <string name="app_name">键盘操作系统</string>
+    <string name="exit_button_text">出口亭</string>
+    <string name="widget_button_text">小部件</string>
+    <string name="button_overview_mode">概述模式</string>
+    <string name="password">密码</string>
+    <string name="activities">活动项目</string>
+    <string name="cancel">取消</string>
+    <string name="done">完成了</string>
+    <string name="phoneBook">电话簿</string>
+    <string name="manual">手册</string>
+    <string name="create_new">创建新的</string>
+    <string name="contact">联系</string>
+    <string name="number">数</string>
+    <string name="hide_icon">隐藏图标</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">在KeyOS主页中隐藏启动器/快捷方式图标</string>
+    <string name="block_activities">阻止活动</string>
+    <string name="block_unwanted_pages_activities_windows">阻止不需要的页面/活动/窗口</string>
+    <string name="time_limit">时限</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">设置时间限制，例如。每天1小时</string>
+    <string name="system_settings">系统设置</string>
+    <string name="restrictions">限制条件</string>
+    <string name="edit_app">编辑应用</string>
+    <string name="import_amp_export">进出口</string>
+    <string name="scan">扫瞄</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">扫描keyOS二维码以应用相同的设置策略</string>
+    <string name="generate">生成</string>
+    <string name="generate_keyos_qr_code">生成keyOS QrCode</string>
+    <string name="import_text">进口</string>
+    <string name="import_keyos_setting_from_storage">从存储导入keyOS设置</string>
+    <string name="export_text">出口</string>
+    <string name="import_keyos_setting_to_storage">将keyOS设置导入存储</string>
+    <string name="recovery_email">辅助邮箱</string>
+    <string name="old_password">旧密码</string>
+    <string name="confirm_password">确认密码</string>
+    <string name="allow_calls">允许通话</string>
+    <string name="incoming">传入</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">这将允许所有来电进入您的手机</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">这将允许所有拨出电话到您的手机</string>
+    <string name="whitelist_contacts">白名单联系人</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">保存在白名单下的联系人只能呼叫您</string>
+    <string name="blacklist_contacts">黑名单联系人</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">“保存在黑名单下的联系人将无法给您打电话”</string>
+    <string name="automatic_whitelist">自动白名单</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">如果通讯录中有联系人，则允许通话</string>
+    <string name="additional">额外</string>
+    <string name="whitelist_amp_blacklist">白名单黑名单</string>
+    <string name="phone_book">电话簿</string>
+    <string name="import_amp_export_settings">导入导出设置</string>
+    <string name="services">服务</string>
+    <string name="single_app">单一应用</string>
+    <string name="apps_amp_services">应用服务</string>
+    <string name="peripheral">周边设备</string>
+    <string name="advance">提前</string>
+    <string name="disable_camera">禁用相机</string>
+    <string name="call_settings">通话设置</string>
+    <string name="web_filter">网页过滤器</string>
+    <string name="screen_saver">屏幕保护</string>
+    <string name="phone_settings">手机设置</string>
+    <string name="notification_panel">通知面板</string>
+    <string name="security">安全</string>
+    <string name="launch">发射</string>
+    <string name="phone_call_subheading">如果您在拨打电话时遇到麻烦，请允许所有与电话相关的服务</string>
+    <string name="phone_call_subheading_hint">提示：在服务部分搜索电话</string>
+    <string name="web_filter_subheading">Web筛选器是一项功能强大的服务，可让您阻止不需要的网站</string>
+    <string name="web_filter_supported_browsers">支持的浏览器：chrome，firefox，brave，edge，opera，duckduckgo</string>
+    <string name="off">关</string>
+    <string name="whitelist_websites">白名单网站</string>
+    <string name="whitelist_website_info">网站保存在白名单下，只能由浏览器访问</string>
+    <string name="blacklist_websites">黑名单网站</string>
+    <string name="blacklist_websites_info">“保存在黑名单下的网站将无法通过浏览器访问”</string>
+    <string name="block_adult_websites">封锁成人网站</string>
+    <string name="adult_websites_info">这将自动阻止800个成人网站</string>
+    <string name="whitelist">白名单</string>
+    <string name="add_websites">新增网站</string>
+    <string name="website">网站</string>
+    <string name="add_websites_subheading">请输入要添加到白名单中的网站，例如：www.google.com</string>
+    <string name="otp_verification">Otp验证</string>
+    <string name="otp_verification_subheading">请输入我们发送到您注册的电子邮件地址的4位数otp</string>
+    <string name="password_prompt_subheading">“如果您尚未更改密码，请尝试1234”</string>
+    <string name="forget">算了</string>
+    <string name="user_agreement">用户协议</string>
+    <string name="user_agreement_2">我们会将已安装的应用程序和电话号码列表存储在您的设备中。仅当您使用QrCode功能时，此数据才会从您的设备中获取，并且此数据将在一小时内自动从服务器中删除</string>
+    <string name="no_thanks">不用了，谢谢</string>
+    <string name="accept_amp_continue">接受</string>
+    <string name="usage_access">使用权限</string>
+    <string name="overlay">覆盖</string>
+    <string name="write_settings">写入设定</string>
+    <string name="sound_access">声音存取</string>
+    <string name="other_permissions">其他权限</string>
+    <string name="accessibility">辅助功能</string>
+    <string name="device_id">设备编号</string>
+    <string name="feedback_amp_suggestions">建议</string>
+    <string name="quick_survey">小调查</string>
+    <string name="bug_report">错误报告</string>
+    <string name="visit">访问</string>
+    <string name="rate">率</string>
+    <string name="share">分享</string>
+    <string name="app_info">应用程式资讯</string>
+    <string name="check_for_update">检查更新</string>
+    <string name="developer_contact">开发人员联系方式</string>
+    <string name="terms_amp_conditions">条款</string>
+    <string name="privacy_policy">隐私政策</string>
+    <string name="outgoing">外向</string>
+    <string name="always_on">上</string>
+    <string name="always_off">关</string>
+    <string name="dont_care">“不在乎”</string>
+    <string name="landscape">景观</string>
+    <string name="portrait">肖像</string>
+    <string name="silent">无声</string>
+    <string name="normal">正常</string>
+    <string name="select_activity_sunHeading">选择您要阻止的活动/页面/窗口</string>
+    <string name="apps">应用</string>
+    <string name="whitelist_apps">白名单应用</string>
+    <string name="whitelist_services">白名单服务</string>
+    <string name="whitelist_apps_subheading">“选择您要访问的应用程序”</string>
+    <string name="whitelist_service_heading">“选择要授予访问权限的服务”</string>
+    <string name="single_app_subheading">“选择要在前台使用的应用程序”</string>
+    <string name="blacklist">黑名单</string>
+    <string name="contacts_blacklist_subheading">“保存在黑名单下的联系人将无法再拨打您的Android手机”</string>
+    <string name="contacts_whitelist_subheading">保存在白名单下的联系人只能再拨打您的Android手机</string>
+    <string name="delete">删除</string>
+    <string name="delete_contact_subheading">确定要删除此项目</string>
+    <string name="invalid_name">名称无效</string>
+    <string name="invalid_number">无效号码</string>
+    <string name="hours">小时</string>
+    <string name="minutes">分钟</string>
+    <string name="file_exported_to">文件导出到</string>
+    <string name="select_a_file_to_upload">选择要上传的文件</string>
+    <string name="please_install_a_file_manager">请安装文件管理器。</string>
+    <string name="invalid_backup_file">无效的备份文件</string>
+    <string name="imported_successfully">成功导入</string>
+    <string name="password_successfully_send">密码已成功发送到您的电子邮件地址</string>
+    <string name="password_recovery_failed">密码恢复失败</string>
+    <string name="recovery_email_not_registered">辅助邮箱未注册</string>
+    <string name="change_your">改变你的</string>
+    <string name="forgot_caps">忘记 ？</string>
+    <string name="password_successfully_changed">你已经成功更改密码</string>
+    <string name="invalid_email_address">无效的邮件地址</string>
+    <string name="password_min">密码必须包含至少8个字符</string>
+    <string name="old_password_must_not_new">旧密码不能是新密码</string>
+    <string name="password_not_match">密码不匹配</string>
+    <string name="invalid_old_pasword">无效的旧密码</string>
+    <string name="phonebook_blacklist_subheading">“选择要添加到黑名单中的联系人”</string>
+    <string name="phonebook_whitelist_subheading">“选择要添加到白名单中的联系人”</string>
+    <string name="camera_not_init">相机初始化错误：</string>
+    <string name="please_wait">请耐心等待</string>
+    <string name="invalid_qr">无效的QrCode！</string>
+    <string name="successfully_done">成功完成！</string>
+    <string name="on_caps">上</string>
+    <string name="off_caps">关</string>
+    <string name="webfilter_blacklist_subheading">“保存在黑名单下的网站将无法通过浏览器访问”</string>
+    <string name="webfilter_whitelist_subheading">网站保存在白名单下，只能由浏览器访问</string>
+    <string name="dialog_website_blacklist_subheading">请输入要添加到黑名单中的网站，例如：www.google.com</string>
+    <string name="dialog_website_white_subheading">请输入要添加到白名单中的网站，例如：www.google.com</string>
+    <string name="invalid_url">无效的网址</string>
+    <string name="invalid_otp">无效的Otp</string>
+    <string name="user_agreement_1">为了改善KeyOS并确保所有功能正常运行，将匿名收集您的一些使用情况数据。您必须阅读并同意我们的隐私政策和条款。在使用KeyOS之前</string>
+    <string name="select_all">全选</string>
+    <string name="initializing_desktop">初始化桌面…</string>
+    <string name="loading_settings">正在载入设定</string>
+    <string name="exiting_keyos">退出中</string>
+    <string name="dialog_qrcode_subheading">扫描此KeyOS Qr代码以在KeyOS设备中应用相同的设置</string>
+
+
+
 </resources>
