--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -139,4 +139,167 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Kennisgewings en programme is af"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Maak toe"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Toe"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Verlaat die kiosk</string>
+    <string name="button_overview_mode">Oorsigmodus</string>
+    <string name="password">Wagwoord</string>
+    <string name="activities">Aktiwiteite</string>
+    <string name="cancel">Kanselleer</string>
+    <string name="done">Klaar</string>
+    <string name="phoneBook">Telefoon boek</string>
+    <string name="manual">Handleiding</string>
+    <string name="create_new">Skep \'n nuwe</string>
+    <string name="contact">Kontak</string>
+    <string name="name">Naam</string>
+    <string name="number">Nommer</string>
+    <string name="hide_icon">Versteek ikoon</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">versteek lanseerder /kortpad-ikoon van KeyOS-tuis af</string>
+    <string name="block_activities">Blokkeer aktiwiteite</string>
+    <string name="block_unwanted_pages_activities_windows">Blokkeer ongewenste bladsye /aktiwiteite /vensters</string>
+    <string name="time_limit">Tydsbeperking</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Stel tydsbeperking, bv. 1 uur per dag</string>
+    <string name="system_settings">Stelselinstellings</string>
+    <string name="restrictions">Beperkings</string>
+    <string name="edit_app">Wysig app</string>
+    <string name="import_amp_export">Invoer uitvoer</string>
+    <string name="scan">Skandeer</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Skandeer keyOS qr-kode om dieselfde instellingsbeleid toe te pas</string>
+    <string name="generate">Genereer</string>
+    <string name="generate_keyos_qr_code">Genereer keyOS QrCode</string>
+    <string name="import_text">Invoer</string>
+    <string name="import_keyos_setting_from_storage">Voer keyOS-instelling uit die stoorplek in</string>
+    <string name="export_text">Uitvoer</string>
+    <string name="import_keyos_setting_to_storage">Voer keyOS-instelling na stoorplek in</string>
+    <string name="recovery_email">Herstel-e-posadres</string>
+    <string name="old_password">Ou wagwoord</string>
+    <string name="confirm_password">Bevestig Wagwoord</string>
+    <string name="allow_calls">Laat oproepe toe</string>
+    <string name="incoming">Inkomende</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Dit sal alle inkomende oproepe na u selfoon moontlik maak</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Dit sal alle uitgaande oproepe na u selfoon moontlik maak</string>
+    <string name="whitelist_contacts">Kontakte witlys</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakte word op witlys gestoor, en kan u slegs skakel</string>
+    <string name="blacklist_contacts">Kontak op die swartlys</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Kontakte wat onder swartlys gestoor word, kan u nie skakel nie"</string>
+    <string name="automatic_whitelist">Outomatiese witlys</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Laat oproepe toe as kontak in die telefoonboek beskikbaar is</string>
+    <string name="additional">Bykomend</string>
+    <string name="whitelist_amp_blacklist">Witlys op die swartlys</string>
+    <string name="phone_book">Telefoon boek</string>
+    <string name="import_amp_export_settings">Voer uitvoerinstellings in</string>
+    <string name="services">Dienste</string>
+    <string name="single_app">Enkele app</string>
+    <string name="apps_amp_services">Apps Dienste</string>
+    <string name="peripheral">Perifere</string>
+    <string name="advance">Vooruit</string>
+    <string name="disable_camera">Skakel kamera uit</string>
+    <string name="call_settings">Oproepinstellings</string>
+    <string name="web_filter">Webfilter</string>
+    <string name="screen_saver">Skermbewaarder</string>
+    <string name="phone_settings">Telefooninstellings</string>
+    <string name="notification_panel">Kennisgewingpaneel</string>
+    <string name="security">Veiligheid</string>
+    <string name="launch">Begin</string>
+    <string name="phone_call_subheading">As u probleme ondervind om oproepe te maak, moet u alle dienste wat verband hou met telefoonoproepe toelaat</string>
+    <string name="phone_call_subheading_hint">wenk: Soek die telefoon in die diensafdeling</string>
+    <string name="web_filter_subheading">Webfilter is \'n kragtige diens waarmee u ongewenste webwerwe kan blokkeer</string>
+    <string name="web_filter_supported_browsers">Ondersteunde blaaiers: chroom, Firefox, dapper, edge, opera, duckduckgo</string>
+    <string name="off">Uit</string>
+    <string name="whitelist_websites">Witlys-webwerwe</string>
+    <string name="whitelist_website_info">Webwerwe wat op witlys gestoor word, het slegs toegang tot die blaaier</string>
+    <string name="blacklist_websites">Swartlys-webwerwe</string>
+    <string name="blacklist_websites_info">"Webwerwe wat onder die swartlys gestoor word, sal nie per blaaier toegang hê nie"</string>
+    <string name="block_adult_websites">Blokkeer webwerwe vir volwassenes</string>
+    <string name="adult_websites_info">Dit sal 800 webwerwe vir volwassenes outomaties blokkeer</string>
+    <string name="whitelist">Witlys</string>
+    <string name="add_websites">Voeg webwerf by</string>
+    <string name="website">Webwerf</string>
+    <string name="add_websites_subheading">Voer die webwerf in wat u wil byvoeg in die witlys, byvoorbeeld: www.google.com</string>
+    <string name="otp_verification">Otp-verifikasie</string>
+    <string name="otp_verification_subheading">Voer asseblief die 4-syfer-otp in wat u na u geregistreerde e-posadres gestuur het</string>
+    <string name="password_prompt_subheading">"as u nog nie u wagwoord verander het nie, probeer asseblief 1234"</string>
+    <string name="forget">vergeet?</string>
+    <string name="user_agreement">Gebruikersooreenkoms</string>
+    <string name="user_agreement_2">Ons sal die lys van die geïnstalleerde app en telefoonnommer op u toestel stoor. Hierdie data sal slegs van u toestel af geneem word as u die QrCode-funksie gebruik en hierdie data binne een uur outomaties van die bediener verwyder word</string>
+    <string name="no_thanks">Nee dankie</string>
+    <string name="accept_amp_continue">Aanvaar</string>
+    <string name="usage_access">Toegang tot gebruik</string>
+    <string name="overlay">Overlay</string>
+    <string name="write_settings">Skryf instellings</string>
+    <string name="sound_access">Klanktoegang</string>
+    <string name="other_permissions">Ander toestemmings</string>
+    <string name="accessibility">Toeganklikheid</string>
+    <string name="device_id">Toestel-ID</string>
+    <string name="feedback_amp_suggestions">voorstelle</string>
+    <string name="quick_survey">Vinnige opname</string>
+    <string name="bug_report">Fout verslag</string>
+    <string name="visit">Besoek</string>
+    <string name="rate">Koers</string>
+    <string name="share">Deel</string>
+    <string name="app_info">Programinligting</string>
+    <string name="check_for_update">Kyk vir opdatering</string>
+    <string name="developer_contact">Ontwikkelaarskontak</string>
+    <string name="terms_amp_conditions">Voorwaardes</string>
+    <string name="privacy_policy">Privaatheidsbeleid</string>
+    <string name="outgoing">Uitgaande</string>
+    <string name="always_on">aan</string>
+    <string name="always_off">af</string>
+    <string name="dont_care">"Gee nie om nie"</string>
+    <string name="landscape">Landskap</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Stil</string>
+    <string name="normal">Normaal</string>
+    <string name="select_activity_sunHeading">Kies watter aktiwiteite /bladsye /vensters u wil blokkeer</string>
+    <string name="apps">Programme</string>
+    <string name="whitelist_apps">Witlys-toepassings</string>
+    <string name="whitelist_services">Witlysdienste</string>
+    <string name="whitelist_apps_subheading">"Kies tot watter programme u toegang wil gee"</string>
+    <string name="whitelist_service_heading">"Kies watter dienste u wil gee"</string>
+    <string name="single_app_subheading">"Kies watter program u op die voorgrond beskikbaar wil hê"</string>
+    <string name="blacklist">Swartlys</string>
+    <string name="contacts_blacklist_subheading">"Kontakte wat onder die swartlys gestoor is, sal nie meer na u Android-foon kan skakel nie"</string>
+    <string name="contacts_whitelist_subheading">Kontakte wat onder die witlys gestoor is, kan slegs u Android-foon meer skakel</string>
+    <string name="delete">Vee uit</string>
+    <string name="delete_contact_subheading">Is u seker dat u hierdie items wil verwyder?</string>
+    <string name="invalid_name">Ongeldige naam</string>
+    <string name="invalid_number">Ongeldige nommer</string>
+    <string name="hours">Ure</string>
+    <string name="minutes">Minute</string>
+    <string name="file_exported_to">Lêer uitgevoer na</string>
+    <string name="select_a_file_to_upload">Kies \'n lêer om op te laai</string>
+    <string name="please_install_a_file_manager">Installeer asseblief \'n lêerbestuurder.</string>
+    <string name="invalid_backup_file">Ongeldige rugsteunlêer</string>
+    <string name="imported_successfully">Suksesvol ingevoer</string>
+    <string name="password_successfully_send">Wagwoord is suksesvol na u e-posadres gestuur</string>
+    <string name="password_recovery_failed">Kon nie wagwoord herstel nie</string>
+    <string name="recovery_email_not_registered">Herstel-e-posadres is nie geregistreer nie</string>
+    <string name="change_your">Verander u</string>
+    <string name="forgot_caps">Vergeet?</string>
+    <string name="password_successfully_changed">U wagwoord is suksesvol verander</string>
+    <string name="invalid_email_address">Ongeldige e-posadres</string>
+    <string name="password_min">Wagwoord moet minstens 8 karakters bevat</string>
+    <string name="old_password_must_not_new">Ou wagwoord mag nie nuwe wagwoord wees nie</string>
+    <string name="password_not_match">Wagwoord stem nie ooreen nie</string>
+    <string name="invalid_old_pasword">Ongeldige ou wagwoord</string>
+    <string name="phonebook_blacklist_subheading">"Kies watter kontakte u in die swartlys wil byvoeg"</string>
+    <string name="phonebook_whitelist_subheading">"Kies watter kontakte u in die witlys wil byvoeg"</string>
+    <string name="camera_not_init">Inisialiseringsfout van die kamera:</string>
+    <string name="please_wait">Wag asseblief</string>
+    <string name="invalid_qr">Ongeldige QrCode!</string>
+    <string name="successfully_done">Suksesvol gedoen!</string>
+    <string name="on_caps">AAN</string>
+    <string name="off_caps">AF</string>
+    <string name="webfilter_blacklist_subheading">"Webwerwe wat onder die swartlys gestoor word, sal nie per blaaier toegang hê nie"</string>
+    <string name="webfilter_whitelist_subheading">Webwerwe wat op witlys gestoor word, het slegs toegang tot die blaaier</string>
+    <string name="dialog_website_blacklist_subheading">Voer die webwerf in wat u in die swartlys wil byvoeg, byvoorbeeld: www.google.com</string>
+    <string name="dialog_website_white_subheading">Voer die webwerf in wat u wil byvoeg op die witlys, bv. Www.google.com</string>
+    <string name="invalid_url">Ongeldige URL</string>
+    <string name="invalid_otp">Ongeldige Otp</string>
+    <string name="user_agreement_1">Om KeyOS te verbeter en seker te maak dat al die funksies reg werk, sal sommige van u gebruiksdata anoniem versamel word. U moet ons privaatheidsbeleid en -voorwaardes lees en instem. voordat u KeyOS gebruik</string>
+    <string name="select_all">Kies Alles</string>
+    <string name="initializing_desktop">Initialiseer tans lessenaar ...</string>
+    <string name="loading_settings">Laai tans instellings</string>
+    <string name="exiting_keyos">Uitgang</string>
+    <string name="dialog_qrcode_subheading">Skandeer hierdie KeyOS Qr-kode om dieselfde instellings op u KeyOS-toestel toe te pas</string>
 </resources>
