--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -144,4 +144,167 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"الإشعارات والتطبيقات متوقفة."</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"إغلاق"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"تمّ الإغلاق"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">كشك الخروج</string>
+    <string name="button_overview_mode">وضع النظرة العامة</string>
+    <string name="password">كلمه السر</string>
+    <string name="activities">أنشطة</string>
+    <string name="cancel">إلغاء</string>
+    <string name="done">منجز</string>
+    <string name="phoneBook">سجل الهاتف</string>
+    <string name="manual">كتيب</string>
+    <string name="create_new">خلق جديد إبداع جديد</string>
+    <string name="contact">اتصل</string>
+    <string name="name">اسم</string>
+    <string name="number">رقم</string>
+    <string name="hide_icon">إخفاء الأيقونة</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">إخفاء رمز المشغل /الاختصار من صفحة KeyOS الرئيسية</string>
+    <string name="block_activities">كتلة الأنشطة</string>
+    <string name="block_unwanted_pages_activities_windows">منع الصفحات /الأنشطة /النوافذ غير المرغوب فيها</string>
+    <string name="time_limit">المهلة الزمنية</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">تعيين قيود التوقيت على سبيل المثال. ساعة واحدة في اليوم</string>
+    <string name="system_settings">اعدادات النظام</string>
+    <string name="restrictions">قيود</string>
+    <string name="edit_app">تحرير التطبيق</string>
+    <string name="import_amp_export">استيراد و تصدير</string>
+    <string name="scan">مسح</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">امسح رمز qr الخاص بالمفتاح لتطبيق نفس سياسة الإعدادات</string>
+    <string name="generate">انشاء</string>
+    <string name="generate_keyos_qr_code">توليد keyOS QrCode</string>
+    <string name="import_text">استيراد</string>
+    <string name="import_keyos_setting_from_storage">استيراد إعداد keyOS من التخزين</string>
+    <string name="export_text">تصدير</string>
+    <string name="import_keyos_setting_to_storage">استيراد إعداد keyOS إلى التخزين</string>
+    <string name="recovery_email">استعادة البريد الإلكتروني</string>
+    <string name="old_password">كلمة سر قديمة</string>
+    <string name="confirm_password">تأكيد كلمة المرور</string>
+    <string name="allow_calls">السماح بالمكالمات</string>
+    <string name="incoming">واردة</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">سيسمح هذا لجميع المكالمات الواردة إلى هاتفك المحمول</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">سيسمح هذا لجميع المكالمات الصادرة إلى هاتفك المحمول</string>
+    <string name="whitelist_contacts">القائمة البيضاء للاتصالات</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">جهات الاتصال حفظ تحت القائمة البيضاء قادرة فقط على الاتصال بك</string>
+    <string name="blacklist_contacts">القائمة السوداء جهات الاتصال</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"لن تتمكن جهات الاتصال المحفوظة في القائمة السوداء من الاتصال بك"</string>
+    <string name="automatic_whitelist">القائمة البيضاء التلقائية</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">السماح بالمكالمات إذا كانت جهة الاتصال متوفرة في دفتر الهاتف</string>
+    <string name="additional">إضافي</string>
+    <string name="whitelist_amp_blacklist">القائمة البيضاء في القائمة السوداء</string>
+    <string name="phone_book">سجل الهاتف</string>
+    <string name="import_amp_export_settings">استيراد إعدادات التصدير</string>
+    <string name="services">خدمات</string>
+    <string name="single_app">تطبيق واحد</string>
+    <string name="apps_amp_services">خدمات التطبيقات</string>
+    <string name="peripheral">محيطي</string>
+    <string name="advance">تقدم</string>
+    <string name="disable_camera">تعطيل الكاميرا</string>
+    <string name="call_settings">اعدادات الاتصال</string>
+    <string name="web_filter">عامل تصفية الويب</string>
+    <string name="screen_saver">حافظة الشاشة</string>
+    <string name="phone_settings">اعدادات الهاتف</string>
+    <string name="notification_panel">لوحة الإشعار</string>
+    <string name="security">الأمان</string>
+    <string name="launch">إطلاق</string>
+    <string name="phone_call_subheading">إذا واجهت أي مشكلة في إجراء المكالمات ، فيرجى السماح لجميع الخدمات المتعلقة بالمكالمة الهاتفية</string>
+    <string name="phone_call_subheading_hint">تلميح: ابحث عن الهاتف في قسم الخدمة</string>
+    <string name="web_filter_subheading">تصفية الويب هي خدمة قوية تسمح لك بحظر المواقع غير المرغوب فيها</string>
+    <string name="web_filter_supported_browsers">المتصفحات المدعومة: Chrome و Firefox و brave و edge و Opera و duckduckgo</string>
+    <string name="off">إيقاف</string>
+    <string name="whitelist_websites">مواقع القائمة البيضاء</string>
+    <string name="whitelist_website_info">يتم حفظ مواقع الويب ضمن القائمة البيضاء ولا يمكن الوصول إليها إلا من خلال المتصفح</string>
+    <string name="blacklist_websites">مواقع القائمة السوداء</string>
+    <string name="blacklist_websites_info">"مواقع الويب المحفوظة ضمن القائمة السوداء لن تتمكن من الوصول إليها عن طريق المتصفح"</string>
+    <string name="block_adult_websites">حظر مواقع البالغين</string>
+    <string name="adult_websites_info">سيؤدي هذا تلقائيًا إلى حظر 800 موقع ويب للبالغين</string>
+    <string name="whitelist">القائمة البيضاء</string>
+    <string name="add_websites">أضف الموقع</string>
+    <string name="website">موقع الكتروني</string>
+    <string name="add_websites_subheading">الرجاء إدخال موقع الويب الذي تريد إضافته في القائمة البيضاء على سبيل المثال: www.google.com</string>
+    <string name="otp_verification">التحقق من Otp</string>
+    <string name="otp_verification_subheading">الرجاء إدخال otp المكون من 4 أرقام والذي أرسلناه إلى عنوان بريدك الإلكتروني المسجل</string>
+    <string name="password_prompt_subheading">"إذا لم تقم بتغيير كلمة مرورك بعد ، فيرجى تجربة 1234"</string>
+    <string name="forget">ننسى ؟</string>
+    <string name="user_agreement">اتفاقية المستخدم</string>
+    <string name="user_agreement_2">سنقوم بتخزين قائمة التطبيق المثبت ورقم الهاتف في جهازك. ستؤخذ هذه البيانات من جهازك فقط إذا كنت تستخدم ميزة QrCode وستتم إزالة هذه البيانات تلقائيًا من الخادم خلال ساعة واحدة</string>
+    <string name="no_thanks">لا شكرا</string>
+    <string name="accept_amp_continue">قبول</string>
+    <string name="usage_access">وصول الاستخدام</string>
+    <string name="overlay">تراكب</string>
+    <string name="write_settings">كتابة الإعدادات</string>
+    <string name="sound_access">وصول الصوت</string>
+    <string name="other_permissions">أذونات أخرى</string>
+    <string name="accessibility">إمكانية الوصول</string>
+    <string name="device_id">معرف الجهاز</string>
+    <string name="feedback_amp_suggestions">اقتراحات</string>
+    <string name="quick_survey">مسح سريع</string>
+    <string name="bug_report">تقرير الشوائب</string>
+    <string name="visit">يزور</string>
+    <string name="rate">معدل</string>
+    <string name="share">شارك</string>
+    <string name="app_info">معلومات التطبيق</string>
+    <string name="check_for_update">فحص التحديثات</string>
+    <string name="developer_contact">جهة اتصال المطور</string>
+    <string name="terms_amp_conditions">شروط</string>
+    <string name="privacy_policy">سياسة الخصوصية</string>
+    <string name="outgoing">منفتح</string>
+    <string name="always_on">على</string>
+    <string name="always_off">إيقاف</string>
+    <string name="dont_care">"لا تهتم"</string>
+    <string name="landscape">المناظر الطبيعيه</string>
+    <string name="portrait">صورة</string>
+    <string name="silent">صامتة</string>
+    <string name="normal">عادي</string>
+    <string name="select_activity_sunHeading">حدد الأنشطة /الصفحات /النوافذ التي تريد حظرها</string>
+    <string name="apps">تطبيقات</string>
+    <string name="whitelist_apps">تطبيقات القائمة البيضاء</string>
+    <string name="whitelist_services">خدمات القائمة البيضاء</string>
+    <string name="whitelist_apps_subheading">"حدد التطبيقات التي تريد الوصول إليها"</string>
+    <string name="whitelist_service_heading">"حدد الخدمات التي تريد منحها حق الوصول"</string>
+    <string name="single_app_subheading">"حدد التطبيق الذي تريده متاحًا في المقدمة"</string>
+    <string name="blacklist">القائمة السوداء</string>
+    <string name="contacts_blacklist_subheading">"لن تتمكن جهات الاتصال المحفوظة ضمن القائمة السوداء من الاتصال بهاتف Android بعد الآن"</string>
+    <string name="contacts_whitelist_subheading">جهات الاتصال المحفوظة ضمن القائمة البيضاء قادرة فقط على الاتصال بهاتف Android الخاص بك بعد الآن</string>
+    <string name="delete">حذف</string>
+    <string name="delete_contact_subheading">هل أنت متأكد أنك تريد حذف هذه العناصر</string>
+    <string name="invalid_name">اسم غير صحيح</string>
+    <string name="invalid_number">رقم غير صالح</string>
+    <string name="hours">ساعات</string>
+    <string name="minutes">الدقائق</string>
+    <string name="file_exported_to">تم تصدير الملف إلى</string>
+    <string name="select_a_file_to_upload">حدد الملف المراد تحميله</string>
+    <string name="please_install_a_file_manager">الرجاء تثبيت مدير الملفات.</string>
+    <string name="invalid_backup_file">ملف النسخ الاحتياطي غير صالح</string>
+    <string name="imported_successfully">تم الاستيراد بنجاح</string>
+    <string name="password_successfully_send">تم إرسال كلمة المرور بنجاح إلى عنوان بريدك الإلكتروني</string>
+    <string name="password_recovery_failed">فشل استعادة كلمة المرور</string>
+    <string name="recovery_email_not_registered">البريد الإلكتروني الخاص بالاسترداد غير مسجل</string>
+    <string name="change_your">تغيير الخاص بك</string>
+    <string name="forgot_caps">نسيت؟</string>
+    <string name="password_successfully_changed">تم تغيير كلمة المرور الخاصة بك بنجاح</string>
+    <string name="invalid_email_address">عنوان البريد الإلكتروني غير صالح</string>
+    <string name="password_min">يجب أن تحتوي كلمة المرور على 8 أحرف على الأقل</string>
+    <string name="old_password_must_not_new">يجب ألا تكون كلمة المرور القديمة كلمة مرور جديدة</string>
+    <string name="password_not_match">كلمة السر ليست جيدة</string>
+    <string name="invalid_old_pasword">كلمة المرور القديمة غير صحيحة</string>
+    <string name="phonebook_blacklist_subheading">"حدد جهات الاتصال التي تريد إضافتها إلى القائمة السوداء"</string>
+    <string name="phonebook_whitelist_subheading">"حدد جهات الاتصال التي تريد إضافتها إلى القائمة البيضاء"</string>
+    <string name="camera_not_init">خطأ في تهيئة الكاميرا:</string>
+    <string name="please_wait">أرجو الإنتظار</string>
+    <string name="invalid_qr">QrCode غير صالح!</string>
+    <string name="successfully_done">فعلت بنجاح!</string>
+    <string name="on_caps">على</string>
+    <string name="off_caps">إيقاف</string>
+    <string name="webfilter_blacklist_subheading">"مواقع الويب المحفوظة ضمن القائمة السوداء لن تتمكن من الوصول إليها عن طريق المتصفح"</string>
+    <string name="webfilter_whitelist_subheading">يتم حفظ مواقع الويب ضمن القائمة البيضاء ولا يمكن الوصول إليها إلا من خلال المتصفح</string>
+    <string name="dialog_website_blacklist_subheading">الرجاء إدخال موقع الويب الذي تريد إضافته في القائمة السوداء على سبيل المثال: www.google.com</string>
+    <string name="dialog_website_white_subheading">الرجاء إدخال موقع الويب الذي تريد إضافته في القائمة البيضاء على سبيل المثال: www.google.com</string>
+    <string name="invalid_url">URL غير صالح</string>
+    <string name="invalid_otp">Otp غير صالح</string>
+    <string name="user_agreement_1">لتحسين KeyOS والتأكد من أن جميع الميزات تعمل بشكل صحيح ، سيتم جمع بعض بيانات الاستخدام الخاصة بك بشكل مجهول. يجب عليك قراءة سياسة الخصوصية والشروط الخاصة بنا والموافقة عليها. قبل استخدام KeyOS</string>
+    <string name="select_all">اختر الكل</string>
+    <string name="initializing_desktop">جارٍ تهيئة سطح المكتب ...</string>
+    <string name="loading_settings">إعدادات التحميل</string>
+    <string name="exiting_keyos">الخروج</string>
+    <string name="dialog_qrcode_subheading">امسح رمز KeyOS Qr هذا لتطبيق نفس الإعدادات في جهاز KeyOS الخاص بك</string>
 </resources>
