--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -139,4 +139,167 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Bildiriş və tətbiqlər deaktivdir"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Bağlayın"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Bağlıdır"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Köşkdən çıxın</string>
+    <string name="button_overview_mode">Baxış rejimi</string>
+    <string name="password">Şifrə</string>
+    <string name="activities">Fəaliyyət</string>
+    <string name="cancel">Ləğv et</string>
+    <string name="done">Bitdi</string>
+    <string name="phoneBook">Telefon kitabçası</string>
+    <string name="manual">Əl ilə</string>
+    <string name="create_new">Yeni yaradın</string>
+    <string name="contact">Əlaqə</string>
+    <string name="name">Ad</string>
+    <string name="number">Sayı</string>
+    <string name="hide_icon">Nişanı gizlədin</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">başlatma /qısayol nişanını KeyOS evindən gizlədin</string>
+    <string name="block_activities">Fəaliyyətləri bloklayın</string>
+    <string name="block_unwanted_pages_activities_windows">İstənməyən səhifələri /fəaliyyətləri /pəncərələri bloklayın</string>
+    <string name="time_limit">Vaxt limiti</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Vaxt məhdudiyyətini təyin edin Məsələn. Gündə 1 saat</string>
+    <string name="system_settings">Sistem parametrləri</string>
+    <string name="restrictions">Məhdudiyyətlər</string>
+    <string name="edit_app">Tətbiqi redaktə edin</string>
+    <string name="import_amp_export">İdxal ixrac</string>
+    <string name="scan">Tara</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Eyni parametrlər siyasətini tətbiq etmək üçün keyOS qr kodunu tarayın</string>
+    <string name="generate">Yaradın</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode yaradın</string>
+    <string name="import_text">İdxal</string>
+    <string name="import_keyos_setting_from_storage">KeyOS ayarını yaddaşdan idxal edin</string>
+    <string name="export_text">İxrac</string>
+    <string name="import_keyos_setting_to_storage">KeyOS ayarını yaddaşı idxal edin</string>
+    <string name="recovery_email">Qurtarma e-poçtu</string>
+    <string name="old_password">köhnə Şifrə</string>
+    <string name="confirm_password">Şifrəni təsdiq edin</string>
+    <string name="allow_calls">Zənglərə icazə verin</string>
+    <string name="incoming">Gələn</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Bu, mobil telefonunuza gələn bütün zənglərə imkan verəcəkdir</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Bu, mobil telefonunuza gedən bütün zənglərə imkan verəcəkdir</string>
+    <string name="whitelist_contacts">Əlaqə siyahıları</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontaktlar yalnız sizə zəng edə bilən ağ siyahıda saxlanılır</string>
+    <string name="blacklist_contacts">Qara Siyahı Əlaqə</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Qara siyahı altında saxlanan əlaqələr sizə zəng edə bilməyəcək"</string>
+    <string name="automatic_whitelist">Avtomatik ağ siyahı</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Telefon kitabçasında əlaqə varsa zənglərə icazə verin</string>
+    <string name="additional">Əlavə</string>
+    <string name="whitelist_amp_blacklist">Ağ siyahı</string>
+    <string name="phone_book">Telefon kitabçası</string>
+    <string name="import_amp_export_settings">İxrac parametrlərini idxal edin</string>
+    <string name="services">Xidmətlər</string>
+    <string name="single_app">Tək tətbiqetmə</string>
+    <string name="apps_amp_services">Tətbiq xidmətləri</string>
+    <string name="peripheral">Periferik</string>
+    <string name="advance">Əvvəlcədən</string>
+    <string name="disable_camera">Kameranı deaktiv edin</string>
+    <string name="call_settings">Zəng parametrləri</string>
+    <string name="web_filter">Veb filtri</string>
+    <string name="screen_saver">Ekran Qoruyucu</string>
+    <string name="phone_settings">Telefon parametrləri</string>
+    <string name="notification_panel">Bildiriş paneli</string>
+    <string name="security">Təhlükəsizlik</string>
+    <string name="launch">Başlat</string>
+    <string name="phone_call_subheading">Zəng etmək üçün hər hansı bir problemlə qarşılaşsanız, telefon zəngi ilə əlaqəli bütün xidmətlərə icazə verin</string>
+    <string name="phone_call_subheading_hint">ipucu: Xidmət bölməsində telefon axtarın</string>
+    <string name="web_filter_subheading">Veb filtri, istənməyən veb saytları bloklamağa imkan verən güclü bir xidmətdir</string>
+    <string name="web_filter_supported_browsers">Dəstəklənən brauzerlər: xrom, firefox, cəsarətli, kənar, opera, duckduckgo</string>
+    <string name="off">Qapalı</string>
+    <string name="whitelist_websites">Ağ saytları</string>
+    <string name="whitelist_website_info">Veb saytları yalnız brauzer vasitəsilə daxil ola bilən ağ siyahıda saxlayır</string>
+    <string name="blacklist_websites">Qara siyahıdakı veb saytlar</string>
+    <string name="blacklist_websites_info">"Qara siyahı altında saxlanan veb saytlara brauzer vasitəsilə daxil olmaq mümkün olmayacaq"</string>
+    <string name="block_adult_websites">Yetkin veb saytları bloklayın</string>
+    <string name="adult_websites_info">Bu, 800 yetkin veb saytını avtomatik olaraq bloklayacaq</string>
+    <string name="whitelist">Ağ siyahı</string>
+    <string name="add_websites">Veb sayt əlavə edin</string>
+    <string name="website">Veb səhifə</string>
+    <string name="add_websites_subheading">Zəhmət olmasa ağ siyahıya əlavə etmək istədiyiniz veb saytı daxil edin: www.google.com</string>
+    <string name="otp_verification">Otp Doğrulaması</string>
+    <string name="otp_verification_subheading">Zəhmət olmasa qeydiyyatdan keçmiş e-poçt adresinizə göndərdiyimiz 4 rəqəmli otp daxil edin</string>
+    <string name="password_prompt_subheading">"şifrənizi hələ dəyişdirməmisinizsə, zəhmət olmasa 1234 cəhd edin"</string>
+    <string name="forget">unutmaq?</string>
+    <string name="user_agreement">İstifadəçi razılaşması</string>
+    <string name="user_agreement_2">Qurulmuş tətbiq siyahısını və telefon nömrənizi cihazınızda saxlayacağıq. Bu məlumatlar cihazınızdan yalnız QrCode xüsusiyyətindən istifadə etdiyiniz zaman alınacaq və bu məlumatlar bir saat ərzində avtomatik olaraq serverdən silinəcəkdir.</string>
+    <string name="no_thanks">Xeyr, təşəkkürlər</string>
+    <string name="accept_amp_continue">Qəbul et</string>
+    <string name="usage_access">İstifadəyə giriş</string>
+    <string name="overlay">Yer üstü</string>
+    <string name="write_settings">Parametrləri yazın</string>
+    <string name="sound_access">Səs girişi</string>
+    <string name="other_permissions">Digər icazələr</string>
+    <string name="accessibility">Əlçatımlılıq</string>
+    <string name="device_id">Cihaz nömrəsi</string>
+    <string name="feedback_amp_suggestions">təkliflər</string>
+    <string name="quick_survey">Tez sorğu</string>
+    <string name="bug_report">Hata hesabatı</string>
+    <string name="visit">Ziyarət edin</string>
+    <string name="rate">Dərəcəsi</string>
+    <string name="share">Paylaş</string>
+    <string name="app_info">Tətbiq məlumatı</string>
+    <string name="check_for_update">Yeniləməni yoxlayın</string>
+    <string name="developer_contact">Geliştirici ilə əlaqə</string>
+    <string name="terms_amp_conditions">Şərtlər</string>
+    <string name="privacy_policy">Gizlilik Siyasəti</string>
+    <string name="outgoing">Gedən</string>
+    <string name="always_on">haqqında</string>
+    <string name="always_off">off</string>
+    <string name="dont_care">"Fərqi yoxdur"</string>
+    <string name="landscape">Mənzərə</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Səssiz</string>
+    <string name="normal">Normal</string>
+    <string name="select_activity_sunHeading">Blok etmək istədiyiniz fəaliyyətləri /Səhifələri /pəncərələri seçin</string>
+    <string name="apps">Tətbiqlər</string>
+    <string name="whitelist_apps">Ağ siyahı tətbiqləri</string>
+    <string name="whitelist_services">Ağ siyahı xidmətləri</string>
+    <string name="whitelist_apps_subheading">"Hansı tətbiqlərdən istifadə etmək istədiyinizi seçin"</string>
+    <string name="whitelist_service_heading">"Hansı xidmətlərə giriş vermək istədiyinizi seçin"</string>
+    <string name="single_app_subheading">"Hansı tətbiqetməni ön planda görmək istədiyinizi seçin"</string>
+    <string name="blacklist">Qara siyahı</string>
+    <string name="contacts_blacklist_subheading">"Qara siyahı altında saxlanılan kontaktlar artıq Android telefonunuza zəng edə bilməyəcək"</string>
+    <string name="contacts_whitelist_subheading">Ağ siyahıda saxlanılan əlaqələr yalnız artıq Android telefonunuza zəng edə bilər</string>
+    <string name="delete">Sil</string>
+    <string name="delete_contact_subheading">Bu elementləri silmək istədiyinizə əminsiniz</string>
+    <string name="invalid_name">Yanlış ad</string>
+    <string name="invalid_number">Yanlış nömrə</string>
+    <string name="hours">Saat</string>
+    <string name="minutes">Dəqiqələr</string>
+    <string name="file_exported_to">Fayl ixrac edildi</string>
+    <string name="select_a_file_to_upload">Yükləmək üçün bir fayl seçin</string>
+    <string name="please_install_a_file_manager">Zəhmət olmasa bir Fayl Meneceri quraşdırın.</string>
+    <string name="invalid_backup_file">Yanlış ehtiyat faylı</string>
+    <string name="imported_successfully">Uğurla idxal edildi</string>
+    <string name="password_successfully_send">Şifrə uğurla e-poçt ünvanınıza göndərildi</string>
+    <string name="password_recovery_failed">Parol bərpa edilmədi</string>
+    <string name="recovery_email_not_registered">Qurtarma e-poçtu qeydə alınmayıb</string>
+    <string name="change_your">Dəyişdirin</string>
+    <string name="forgot_caps">Unutmusan?</string>
+    <string name="password_successfully_changed">Parolunuz uğurla dəyişdirildi</string>
+    <string name="invalid_email_address">Yalnış email ünvanı</string>
+    <string name="password_min">Şifrə min 8 simvoldan ibarət olmalıdır</string>
+    <string name="old_password_must_not_new">Köhnə parol yeni parol olmamalıdır</string>
+    <string name="password_not_match">Parol uyğun gəlmir</string>
+    <string name="invalid_old_pasword">Yanlış köhnə parol</string>
+    <string name="phonebook_blacklist_subheading">"Qara siyahıya hansı kontaktları əlavə etmək istədiyinizi seçin"</string>
+    <string name="phonebook_whitelist_subheading">"Hansı kontaktları ağ siyahıya əlavə etmək istədiyinizi seçin"</string>
+    <string name="camera_not_init">Kamera başlatma xətası:</string>
+    <string name="please_wait">Zəhmət olmasa, gözləyin</string>
+    <string name="invalid_qr">Yanlış QrCode!</string>
+    <string name="successfully_done">Uğurla bitdi!</string>
+    <string name="on_caps">AÇIQDIR</string>
+    <string name="off_caps">QAPALI</string>
+    <string name="webfilter_blacklist_subheading">"Qara siyahı altında saxlanan veb saytlara brauzer vasitəsilə daxil olmaq mümkün olmayacaq"</string>
+    <string name="webfilter_whitelist_subheading">Veb saytları yalnız brauzer vasitəsilə daxil ola bilən ağ siyahıda saxlayır</string>
+    <string name="dialog_website_blacklist_subheading">Zəhmət olmasa qara siyahıya əlavə etmək istədiyiniz veb saytı daxil edin. Məsələn: www.google.com</string>
+    <string name="dialog_website_white_subheading">Zəhmət olmasa ağ siyahıya əlavə etmək istədiyiniz veb saytı daxil edin: www.google.com</string>
+    <string name="invalid_url">Yanlış URL</string>
+    <string name="invalid_otp">Yanlış Otp</string>
+    <string name="user_agreement_1">KeyOS-u yaxşılaşdırmaq və bütün xüsusiyyətlərin düzgün işləməsini təmin etmək üçün bəzi istifadə məlumatlarınız anonim olaraq toplanacaq. Məxfilik Siyasətimizi və Qaydalarımızı oxumalı və qəbul etməlisiniz. KeyOS istifadə etməzdən əvvəl</string>
+    <string name="select_all">Hamısını seç</string>
+    <string name="initializing_desktop">Masa üstü işə salınır ...</string>
+    <string name="loading_settings">Ayarlar yüklənir</string>
+    <string name="exiting_keyos">Çıxır</string>
+    <string name="dialog_qrcode_subheading">KeyOS cihazınızda eyni parametrləri tətbiq etmək üçün bu KeyOS Qr kodunu skan edin</string>
 </resources>
