--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -141,4 +141,167 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Апавяшчэнні і праграмы выключаны"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Закрыць"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Закрытыя"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Выход из киоска</string>
+    <string name="button_overview_mode">Обзорный режим</string>
+    <string name="password">пароль</string>
+    <string name="activities">мероприятия</string>
+    <string name="cancel">отменить</string>
+    <string name="done">Готово</string>
+    <string name="phoneBook">Телефонная книга</string>
+    <string name="manual">Руководство</string>
+    <string name="create_new">Создать новый</string>
+    <string name="contact">Связаться с нами</string>
+    <string name="name">имя</string>
+    <string name="number">номер</string>
+    <string name="hide_icon">Скрытая иконка</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">скрыть значок запуска /ярлыка из дома KeyOS</string>
+    <string name="block_activities">Блокировать действия</string>
+    <string name="block_unwanted_pages_activities_windows">Блокировать нежелательные страницы /действия /окна</string>
+    <string name="time_limit">Лимит времени</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Установить ограничение по времени Например. 1 час в день</string>
+    <string name="system_settings">Настройки системы</string>
+    <string name="restrictions">Ограничения</string>
+    <string name="edit_app">Редактировать приложение</string>
+    <string name="import_amp_export">Импорт Экспорт</string>
+    <string name="scan">Сканировать</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Отсканируйте qr-код keyOS, чтобы применить ту же политику настроек</string>
+    <string name="generate">Генерировать</string>
+    <string name="generate_keyos_qr_code">Сгенерировать keyOS QrCode</string>
+    <string name="import_text">импорт</string>
+    <string name="import_keyos_setting_from_storage">Импортировать настройки keyOS из хранилища</string>
+    <string name="export_text">Экспорт</string>
+    <string name="import_keyos_setting_to_storage">Импортировать настройки keyOS в хранилище</string>
+    <string name="recovery_email">Восстановление электронной почты</string>
+    <string name="old_password">Прежний пароль</string>
+    <string name="confirm_password">Подтвердите Пароль</string>
+    <string name="allow_calls">Разрешить звонки</string>
+    <string name="incoming">Входящий</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Это позволит все входящие звонки на ваш мобильный</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Это позволит все исходящие звонки на ваш мобильный</string>
+    <string name="whitelist_contacts">Добавить контакты в белый список</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Контакты, сохраненные в белом списке, могут звонить только вам</string>
+    <string name="blacklist_contacts">Черный список контактов</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">«Контакты, сохраненные в черном списке, не смогут вам позвонить»</string>
+    <string name="automatic_whitelist">Автоматический белый список</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Разрешить звонки, если контакт есть в телефонной книге</string>
+    <string name="additional">Дополнительные</string>
+    <string name="whitelist_amp_blacklist">Белый список черного списка</string>
+    <string name="phone_book">Телефонная книга</string>
+    <string name="import_amp_export_settings">Импортировать настройки экспорта</string>
+    <string name="services">Сервисы</string>
+    <string name="single_app">Одно приложение</string>
+    <string name="apps_amp_services">Службы приложений</string>
+    <string name="peripheral">Периферийный</string>
+    <string name="advance">Заранее</string>
+    <string name="disable_camera">Отключить камеру</string>
+    <string name="call_settings">Настройки звонка</string>
+    <string name="web_filter">Веб-фильтр</string>
+    <string name="screen_saver">Экранная заставка</string>
+    <string name="phone_settings">Настройки телефона</string>
+    <string name="notification_panel">Панель уведомлений</string>
+    <string name="security">Безопасность</string>
+    <string name="launch">Запуск</string>
+    <string name="phone_call_subheading">Если у вас возникнут проблемы с совершением звонков, разрешите все услуги, связанные с телефонным звонком.</string>
+    <string name="phone_call_subheading_hint">подсказка: Найдите телефон в сервисном разделе</string>
+    <string name="web_filter_subheading">Веб-фильтр - это мощный сервис, который позволяет блокировать нежелательные веб-сайты.</string>
+    <string name="web_filter_supported_browsers">Поддерживаемые браузеры: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">Выключено</string>
+    <string name="whitelist_websites">Внести сайты в белый список</string>
+    <string name="whitelist_website_info">Веб-сайты, сохраненные в белом списке, доступны только через браузер.</string>
+    <string name="blacklist_websites">Черные списки сайтов</string>
+    <string name="blacklist_websites_info">«Веб-сайты, сохраненные в черном списке, не смогут получить доступ через браузер»</string>
+    <string name="block_adult_websites">Блокировать сайты для взрослых</string>
+    <string name="adult_websites_info">Это автоматически заблокирует 800 веб-сайтов для взрослых.</string>
+    <string name="whitelist">Белый список</string>
+    <string name="add_websites">Добавить сайт</string>
+    <string name="website">Веб-сайт</string>
+    <string name="add_websites_subheading">Введите веб-сайт, который вы хотите добавить в белый список, например: www.google.com</string>
+    <string name="otp_verification">Otp проверка</string>
+    <string name="otp_verification_subheading">Пожалуйста, введите 4-значный ОТП, который мы отправили на ваш зарегистрированный адрес электронной почты.</string>
+    <string name="password_prompt_subheading">"если вы еще не изменили свой пароль, попробуйте 1234"</string>
+    <string name="forget">забыть?</string>
+    <string name="user_agreement">Пользовательское Соглашение</string>
+    <string name="user_agreement_2">Список установленных приложений и телефонный номер мы сохраним на вашем устройстве. Эти данные будут взяты с вашего устройства, только если вы используете функцию QrCode, и эти данные будут автоматически удалены с сервера в течение одного часа.</string>
+    <string name="no_thanks">Нет, спасибо</string>
+    <string name="accept_amp_continue">Принять</string>
+    <string name="usage_access">Доступ к использованию</string>
+    <string name="overlay">Оверлей</string>
+    <string name="write_settings">Настройки записи</string>
+    <string name="sound_access">Звуковой доступ</string>
+    <string name="other_permissions">Прочие разрешения</string>
+    <string name="accessibility">Доступность</string>
+    <string name="device_id">Идентификатор устройства</string>
+    <string name="feedback_amp_suggestions">предложения</string>
+    <string name="quick_survey">Быстрый опрос</string>
+    <string name="bug_report">Сообщение об ошибке</string>
+    <string name="visit">Визит</string>
+    <string name="rate">Ставка</string>
+    <string name="share">Поделиться</string>
+    <string name="app_info">Информация о приложении</string>
+    <string name="check_for_update">Проверить обновления</string>
+    <string name="developer_contact">Контакты разработчика</string>
+    <string name="terms_amp_conditions">сроки</string>
+    <string name="privacy_policy">политика конфиденциальности</string>
+    <string name="outgoing">Исходящий</string>
+    <string name="always_on">на</string>
+    <string name="always_off">выключен</string>
+    <string name="dont_care">"Плевать"</string>
+    <string name="landscape">Пейзаж</string>
+    <string name="portrait">Портрет</string>
+    <string name="silent">Тихий</string>
+    <string name="normal">Обычный</string>
+    <string name="select_activity_sunHeading">Выберите, какие действия /страницы /окна вы хотите заблокировать</string>
+    <string name="apps">Программы</string>
+    <string name="whitelist_apps">Добавить приложения в белый список</string>
+    <string name="whitelist_services">Услуги белого списка</string>
+    <string name="whitelist_apps_subheading">«Выберите, к каким приложениям вы хотите получить доступ»</string>
+    <string name="whitelist_service_heading">"Выберите, к каким службам вы хотите предоставить доступ"</string>
+    <string name="single_app_subheading">«Выберите, какое приложение вы хотите видеть на переднем плане»</string>
+    <string name="blacklist">Черный список</string>
+    <string name="contacts_blacklist_subheading">«Контакты, сохраненные в черном списке, больше не смогут звонить на ваш телефон Android»</string>
+    <string name="contacts_whitelist_subheading">Контакты, сохраненные в белом списке, больше могут звонить только на ваш телефон Android</string>
+    <string name="delete">удалять</string>
+    <string name="delete_contact_subheading">Вы уверены, что хотите удалить эти элементы?</string>
+    <string name="invalid_name">Неверное имя</string>
+    <string name="invalid_number">Неправильный номер</string>
+    <string name="hours">Часы</string>
+    <string name="minutes">Минуты</string>
+    <string name="file_exported_to">Файл экспортирован в</string>
+    <string name="select_a_file_to_upload">Выберите файл для загрузки</string>
+    <string name="please_install_a_file_manager">Пожалуйста, установите файловый менеджер.</string>
+    <string name="invalid_backup_file">Неверный файл резервной копии</string>
+    <string name="imported_successfully">Импортировано успешно</string>
+    <string name="password_successfully_send">Пароль успешно отправлен на ваш электронный адрес</string>
+    <string name="password_recovery_failed">Не удалось восстановить пароль</string>
+    <string name="recovery_email_not_registered">Резервный адрес электронной почты не зарегистрирован</string>
+    <string name="change_your">Измените свой</string>
+    <string name="forgot_caps">Забыл ?</string>
+    <string name="password_successfully_changed">Ваш пароль был успешно изменен</string>
+    <string name="invalid_email_address">Неверный адрес электронной почты</string>
+    <string name="password_min">Пароль должен содержать минимум 8 символов</string>
+    <string name="old_password_must_not_new">Старый пароль не должен быть новым паролем</string>
+    <string name="password_not_match">Пароль не совпадает</string>
+    <string name="invalid_old_pasword">Неверный старый пароль</string>
+    <string name="phonebook_blacklist_subheading">«Выберите, какие контакты вы хотите добавить в черный список»</string>
+    <string name="phonebook_whitelist_subheading">«Выберите, какие контакты вы хотите добавить в белый список»</string>
+    <string name="camera_not_init">Ошибка инициализации камеры:</string>
+    <string name="please_wait">пожалуйста, подождите</string>
+    <string name="invalid_qr">Недействительный QR-код!</string>
+    <string name="successfully_done">Готово!</string>
+    <string name="on_caps">НА</string>
+    <string name="off_caps">ВЫКЛ.</string>
+    <string name="webfilter_blacklist_subheading">«Веб-сайты, сохраненные в черном списке, не смогут получить доступ через браузер»</string>
+    <string name="webfilter_whitelist_subheading">Веб-сайты, сохраненные в белом списке, доступны только через браузер.</string>
+    <string name="dialog_website_blacklist_subheading">Введите веб-сайт, который вы хотите добавить в черный список. Например: www.google.com</string>
+    <string name="dialog_website_white_subheading">Введите веб-сайт, который вы хотите добавить в белый список, например: www.google.com</string>
+    <string name="invalid_url">Неверная ссылка</string>
+    <string name="invalid_otp">Неверный Otp</string>
+    <string name="user_agreement_1">Чтобы улучшить KeyOS и убедиться, что все функции работают должным образом, некоторые данные об использовании будут собираться анонимно. Вы должны прочитать и согласиться с нашей Политикой конфиденциальности и Условиями. перед использованием KeyOS</string>
+    <string name="select_all">Выбрать все</string>
+    <string name="initializing_desktop">Инициализация рабочего стола…</string>
+    <string name="loading_settings">Загрузка настроек</string>
+    <string name="exiting_keyos">Выход</string>
+    <string name="dialog_qrcode_subheading">Отсканируйте этот QR-код KeyOS, чтобы применить те же настройки на вашем устройстве KeyOS.</string>
 </resources>
