--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -139,4 +139,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Известията и приложенията са изключени"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Затваряне"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Затворено"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Излез от павилиона</string>
+    <string name="button_overview_mode">Режим за преглед</string>
+    <string name="password">Парола</string>
+    <string name="activities">Дейности</string>
+    <string name="cancel">Отказ</string>
+    <string name="done">Свършен</string>
+    <string name="phoneBook">Телефонен указател</string>
+    <string name="manual">Ръчно</string>
+    <string name="create_new">Създай нов</string>
+    <string name="contact">Контакт</string>
+    <string name="name">Име</string>
+    <string name="number">Брой</string>
+    <string name="hide_icon">Скрита икона</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">скрийте иконата за стартиране /пряк път от дома на KeyOS</string>
+    <string name="block_activities">Блокиране на дейности</string>
+    <string name="block_unwanted_pages_activities_windows">Блокирайте нежелани страници /дейности /прозорци</string>
+    <string name="time_limit">Краен срок</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Задайте ограничение на времето, напр. 1 час на ден</string>
+    <string name="system_settings">Системни настройки</string>
+    <string name="restrictions">Ограничения</string>
+    <string name="edit_app">Редактиране на приложение</string>
+    <string name="import_amp_export">Внос износ</string>
+    <string name="scan">Сканиране</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Сканирайте keyOS qr кода, за да приложите същата политика за настройки</string>
+    <string name="generate">Генериране</string>
+    <string name="generate_keyos_qr_code">Генерирайте keyOS QrCode</string>
+    <string name="import_text">Внос</string>
+    <string name="import_keyos_setting_from_storage">Импортирайте настройката на keyOS от хранилището</string>
+    <string name="export_text">Износ</string>
+    <string name="import_keyos_setting_to_storage">Импортирайте настройката на keyOS в хранилището</string>
+    <string name="recovery_email">Имейл за възстановяване</string>
+    <string name="old_password">Стара парола</string>
+    <string name="confirm_password">Потвърди парола</string>
+    <string name="allow_calls">Разрешаване на обаждания</string>
+    <string name="incoming">Входящи</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Това ще позволи всички входящи повиквания към вашия мобилен телефон</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Това ще позволи всички изходящи повиквания към вашия мобилен телефон</string>
+    <string name="whitelist_contacts">Бял списък с контакти</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Контактите, запазени под белия списък, могат само да ви се обадят</string>
+    <string name="blacklist_contacts">Черен списък с контакти</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Контактите, запазени в черния списък, няма да могат да ви се обадят“</string>
+    <string name="automatic_whitelist">Автоматичен бял списък</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Разрешаване на обаждания, ако контактът е наличен в телефонния указател</string>
+    <string name="additional">Допълнителен</string>
+    <string name="whitelist_amp_blacklist">Черен списък на белия списък</string>
+    <string name="phone_book">Телефонен указател</string>
+    <string name="import_amp_export_settings">Импортиране на настройки за експортиране</string>
+    <string name="services">Услуги</string>
+    <string name="single_app">Единично приложение</string>
+    <string name="apps_amp_services">Услуги за приложения</string>
+    <string name="peripheral">Периферни</string>
+    <string name="advance">Предварително</string>
+    <string name="disable_camera">Деактивирайте камерата</string>
+    <string name="call_settings">Настройки за обаждания</string>
+    <string name="web_filter">Уеб филтър</string>
+    <string name="screen_saver">Скрийнсейвър</string>
+    <string name="phone_settings">Настройки на телефона</string>
+    <string name="notification_panel">Панел за известия</string>
+    <string name="security">Сигурност</string>
+    <string name="launch">Стартиране</string>
+    <string name="phone_call_subheading">Ако се сблъскате с някакви проблеми при осъществяване на обаждания, любезно разрешете всички услуги, свързани с телефонно обаждане</string>
+    <string name="phone_call_subheading_hint">подсказка: Потърсете телефон в сервизната секция</string>
+    <string name="web_filter_subheading">Уеб филтърът е мощна услуга, която ви позволява да блокирате нежелани уебсайтове</string>
+    <string name="web_filter_supported_browsers">Поддържани браузъри: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">Изключено</string>
+    <string name="whitelist_websites">Уебсайтове с бял списък</string>
+    <string name="whitelist_website_info">Уебсайтовете се запазват под бял списък и имат достъп само от браузъра</string>
+    <string name="blacklist_websites">Черен списък на уебсайтове</string>
+    <string name="blacklist_websites_info">„Уебсайтовете, запазени в черния списък, няма да имат достъп до браузъра“</string>
+    <string name="block_adult_websites">Блокирайте уебсайтове за възрастни</string>
+    <string name="adult_websites_info">Това автоматично ще блокира 800 уебсайта за възрастни</string>
+    <string name="whitelist">Бял списък</string>
+    <string name="add_websites">Добавете уебсайт</string>
+    <string name="website">Уебсайт</string>
+    <string name="add_websites_subheading">Моля, въведете уебсайта, който искате да добавите в белия списък, напр. Www.google.com</string>
+    <string name="otp_verification">Otp Проверка</string>
+    <string name="otp_verification_subheading">Моля, въведете 4-цифрения otp, който изпратихме на вашия регистриран имейл адрес</string>
+    <string name="password_prompt_subheading">"ако все още не сте сменили паролата си, моля опитайте 1234"</string>
+    <string name="forget">забрави?</string>
+    <string name="user_agreement">споразумение с потребителя</string>
+    <string name="user_agreement_2">Ние ще съхраним списъка с инсталирано приложение и телефонен номер във вашето устройство. Тези данни ще бъдат взети от вашето устройство само ако използвате функцията QrCode и тези данни автоматично ще бъдат премахнати от сървъра за един час</string>
+    <string name="no_thanks">Не благодаря</string>
+    <string name="accept_amp_continue">Приемете</string>
+    <string name="usage_access">Достъп до използване</string>
+    <string name="overlay">Наслагване</string>
+    <string name="write_settings">Настройки за писане</string>
+    <string name="sound_access">Достъп до звук</string>
+    <string name="other_permissions">Други разрешения</string>
+    <string name="accessibility">Достъпност</string>
+    <string name="device_id">Идентификатор на устройството</string>
+    <string name="feedback_amp_suggestions">предложения</string>
+    <string name="quick_survey">Бърза анкета</string>
+    <string name="bug_report">Доклад за грешка</string>
+    <string name="visit">Посетете</string>
+    <string name="rate">Оценете</string>
+    <string name="share">Дял</string>
+    <string name="app_info">Информация за приложението</string>
+    <string name="check_for_update">Проверка за актуализация</string>
+    <string name="developer_contact">Контакт с разработчика</string>
+    <string name="terms_amp_conditions">Условия</string>
+    <string name="privacy_policy">Политика за поверителност</string>
+    <string name="outgoing">Изходящи</string>
+    <string name="always_on">На</string>
+    <string name="always_off">изключен</string>
+    <string name="dont_care">"Не ми пука"</string>
+    <string name="landscape">Пейзаж</string>
+    <string name="portrait">Портрет</string>
+    <string name="silent">Безшумен</string>
+    <string name="normal">Нормално</string>
+    <string name="select_activity_sunHeading">Изберете кои дейности /страници /прозорци искате да блокирате</string>
+    <string name="apps">Приложения</string>
+    <string name="whitelist_apps">Бели приложения</string>
+    <string name="whitelist_services">Услуги за бял списък</string>
+    <string name="whitelist_apps_subheading">„Изберете до кои приложения искате да получите достъп“</string>
+    <string name="whitelist_service_heading">„Изберете кои услуги искате да дадете достъп“</string>
+    <string name="single_app_subheading">„Изберете кое приложение искате да бъде достъпно на преден план“</string>
+    <string name="blacklist">Черен списък</string>
+    <string name="contacts_blacklist_subheading">„Контактите, запазени в черния списък, вече няма да могат да се обаждат на телефона ви с Android“</string>
+    <string name="contacts_whitelist_subheading">Контактите, запазени под белия списък, вече могат да се обаждат само на вашия телефон с Android</string>
+    <string name="delete">Изтрий</string>
+    <string name="delete_contact_subheading">Наистина ли искате да изтриете тези елементи</string>
+    <string name="invalid_name">Невалидно име</string>
+    <string name="invalid_number">Невалиден номер</string>
+    <string name="hours">Часа</string>
+    <string name="minutes">Минути</string>
+    <string name="file_exported_to">Файлът е експортиран в</string>
+    <string name="select_a_file_to_upload">Изберете файл за качване</string>
+    <string name="please_install_a_file_manager">Моля, инсталирайте File Manager.</string>
+    <string name="invalid_backup_file">Невалиден архивен файл</string>
+    <string name="imported_successfully">Импортиран успешно</string>
+    <string name="password_successfully_send">Паролата е успешно изпратена до вашия имейл адрес</string>
+    <string name="password_recovery_failed">Възстановяването на паролата не бе успешно</string>
+    <string name="recovery_email_not_registered">Имейл за възстановяване не е регистриран</string>
+    <string name="change_your">Променете вашия</string>
+    <string name="forgot_caps">Забравена?</string>
+    <string name="password_successfully_changed">Паролата ви е променена успешно</string>
+    <string name="invalid_email_address">Невалиден имейл адрес</string>
+    <string name="password_min">Паролата трябва да съдържа минимум 8 знака</string>
+    <string name="old_password_must_not_new">Старата парола не трябва да е нова парола</string>
+    <string name="password_not_match">Паролата не съвпада</string>
+    <string name="invalid_old_pasword">Невалидна стара парола</string>
+    <string name="phonebook_blacklist_subheading">„Изберете кои контакти искате да добавите в черния списък“</string>
+    <string name="phonebook_whitelist_subheading">„Изберете кои контакти искате да добавите в белия списък“</string>
+    <string name="camera_not_init">Грешка при инициализация на камерата:</string>
+    <string name="please_wait">Моля Изчакай</string>
+    <string name="invalid_qr">Невалиден QrCode!</string>
+    <string name="successfully_done">Успешно направено!</string>
+    <string name="on_caps">НА</string>
+    <string name="off_caps">ИЗКЛЮЧЕНО</string>
+    <string name="webfilter_blacklist_subheading">„Уебсайтовете, запазени в черния списък, няма да имат достъп до браузъра“</string>
+    <string name="webfilter_whitelist_subheading">Уебсайтовете се запазват под бял списък и имат достъп само от браузъра</string>
+    <string name="dialog_website_blacklist_subheading">Моля, въведете уебсайта, който искате да добавите в черния списък, напр. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Моля, въведете уебсайта, който искате да добавите в белия списък, напр. Www.google.com</string>
+    <string name="invalid_url">Невалиден адрес</string>
+    <string name="invalid_otp">Невалиден Otp</string>
+    <string name="user_agreement_1">За да подобрите KeyOS и да се уверите, че всички функции работят правилно, някои от вашите данни за използване ще бъдат събрани анонимно. Трябва да прочетете и да се съгласите с нашата Политика за поверителност и Условия. преди да използвате KeyOS</string>
+    <string name="select_all">Избери всичко</string>
+    <string name="initializing_desktop">Инициализиране на работния плот ...</string>
+    <string name="loading_settings">Настройки за зареждане</string>
+    <string name="exiting_keyos">Излизане</string>
+    <string name="dialog_qrcode_subheading">Сканирайте този KeyOS Qr код, за да приложите същите настройки във вашето KeyOS устройство</string>
+
+
+
 </resources>
