--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -141,4 +141,167 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"বিজ্ঞপ্তি এবং অ্যাপ বন্ধ আছে"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"বন্ধ করুন"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"বন্ধ"</string>
+
+    <string name="app_name">কীওএস</string>
+    <string name="exit_button_text">কিওস্ক থেকে প্রস্থান করুন</string>
+    <string name="button_overview_mode">ওভারভিউ মোড</string>
+    <string name="password">Password</string>
+    <string name="activities">ক্রিয়াকলাপ</string>
+    <string name="cancel">বাতিল</string>
+    <string name="done">সম্পন্ন</string>
+    <string name="phoneBook">ফোন বই</string>
+    <string name="manual">ম্যানুয়াল</string>
+    <string name="create_new">নতুন তৈরী করা</string>
+    <string name="contact">যোগাযোগ</string>
+    <string name="name">নাম</string>
+    <string name="number">সংখ্যা</string>
+    <string name="hide_icon">আইকনটি লুকান</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">কীওএস হোম থেকে লঞ্চার /শর্টকাট আইকনটি লুকান</string>
+    <string name="block_activities">ব্লক ক্রিয়াকলাপ</string>
+    <string name="block_unwanted_pages_activities_windows">অযাচিত পৃষ্ঠাগুলি /ক্রিয়াকলাপ /উইন্ডোগুলি অবরুদ্ধ করুন</string>
+    <string name="time_limit">সময় সীমা</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">সময় সীমাবদ্ধতা সেট করুন। প্রতিদিন 1 ঘন্টা</string>
+    <string name="system_settings">পদ্ধতি নির্ধারণ</string>
+    <string name="restrictions">সীমাবদ্ধতা</string>
+    <string name="edit_app">অ্যাপ্লিকেশন সম্পাদনা করুন</string>
+    <string name="import_amp_export">আমদানি রপ্তানি</string>
+    <string name="scan">স্ক্যান</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">একই সেটিংস নীতি প্রয়োগ করতে keyOS qr কোড স্ক্যান করুন</string>
+    <string name="generate">উত্পন্ন</string>
+    <string name="generate_keyos_qr_code">কীওএস কিউরকোড তৈরি করুন</string>
+    <string name="import_text">আমদানি করুন</string>
+    <string name="import_keyos_setting_from_storage">স্টোরেজ থেকে কীস সেটিংস আমদানি করুন</string>
+    <string name="export_text">রফতানি</string>
+    <string name="import_keyos_setting_to_storage">স্টোরেজে কীস সেটিংস আমদানি করুন</string>
+    <string name="recovery_email">পুনরুদ্ধার ইমেল</string>
+    <string name="old_password">পুরানো পাসওয়ার্ড</string>
+    <string name="confirm_password">পাসওয়ার্ড নিশ্চিত করুন</string>
+    <string name="allow_calls">কল করার অনুমতি দিন</string>
+    <string name="incoming">ইনকামিং</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">এটি আপনার মোবাইলে সমস্ত আগত কলকে অনুমতি দেবে</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">এটি আপনার মোবাইলে সমস্ত বহির্গামী কলকে মঞ্জুরি দেবে</string>
+    <string name="whitelist_contacts">শ্বেত তালিকা যোগাযোগ</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">পরিচিতিগুলি কেবলমাত্র আপনাকে কল করতে সক্ষম হোয়াইটলিস্টের আওতায় সংরক্ষণ করে</string>
+    <string name="blacklist_contacts">ব্ল্যাকলিস্ট যোগাযোগ</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"ব্ল্যাকলিস্টের অধীনে পরিচিতিগুলি সংরক্ষণ করা আপনাকে কল করতে সক্ষম হবে না"</string>
+    <string name="automatic_whitelist">স্বয়ংক্রিয় শ্বেত তালিকা</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">ফোন বইয়ে যোগাযোগ পাওয়া গেলে কলগুলিকে অনুমতি দিন</string>
+    <string name="additional">অতিরিক্ত</string>
+    <string name="whitelist_amp_blacklist">হোয়াইটলিস্ট ব্ল্যাকলিস্ট</string>
+    <string name="phone_book">ফোন বই</string>
+    <string name="import_amp_export_settings">আমদানি রফতানি সেটিংস</string>
+    <string name="services">সেবা</string>
+    <string name="single_app">একক অ্যাপ্লিকেশন</string>
+    <string name="apps_amp_services">অ্যাপ্লিকেশন পরিষেবা</string>
+    <string name="peripheral">পেরিফেরাল</string>
+    <string name="advance">অগ্রিম</string>
+    <string name="disable_camera">ক্যামেরা অক্ষম করুন</string>
+    <string name="call_settings">কল সেটিংস</string>
+    <string name="web_filter">ওয়েব ফিল্টার</string>
+    <string name="screen_saver">স্ক্রিন সেভার</string>
+    <string name="phone_settings">ফোন সেটিংস</string>
+    <string name="notification_panel">বিজ্ঞপ্তি প্যানেল</string>
+    <string name="security">সুরক্ষা</string>
+    <string name="launch">শুরু করা</string>
+    <string name="phone_call_subheading">কল করার ক্ষেত্রে যদি আপনার কোনও সমস্যার মুখোমুখি হয় তবে দয়া করে ফোন কল সম্পর্কিত সমস্ত পরিষেবাদির অনুমতি দিন</string>
+    <string name="phone_call_subheading_hint">ইঙ্গিত: পরিষেবা বিভাগে ফোনের জন্য অনুসন্ধান করুন</string>
+    <string name="web_filter_subheading">ওয়েব ফিল্টার একটি শক্তিশালী পরিষেবা যা আপনাকে অবাঞ্ছিত ওয়েবসাইটগুলি ব্লক করতে দেয়</string>
+    <string name="web_filter_supported_browsers">সমর্থিত ব্রাউজারগুলি: ক্রোম, ফায়ারফক্স, সাহসী, প্রান্ত, অপেরা, ডাকাকডকগো</string>
+    <string name="off">বন্ধ</string>
+    <string name="whitelist_websites">হোয়াইটলিস্ট ওয়েবসাইটগুলি</string>
+    <string name="whitelist_website_info">ওয়েবসাইটগুলি কেবল ব্রাউজারের মাধ্যমে অ্যাক্সেস করতে সক্ষম হোয়াইটলিস্টের আওতায় সংরক্ষণ করে</string>
+    <string name="blacklist_websites">ব্ল্যাকলিস্ট ওয়েবসাইটগুলি</string>
+    <string name="blacklist_websites_info">"ব্ল্যাকলিস্টের আওতায় সংরক্ষণ করা ওয়েবসাইটগুলি ব্রাউজারের মাধ্যমে অ্যাক্সেস করতে সক্ষম হবে না"</string>
+    <string name="block_adult_websites">প্রাপ্তবয়স্ক ওয়েবসাইটগুলি অবরুদ্ধ করুন</string>
+    <string name="adult_websites_info">এটি স্বয়ংক্রিয়ভাবে 800 প্রাপ্তবয়স্কদের ওয়েবসাইট অবরুদ্ধ করবে</string>
+    <string name="whitelist">হোয়াইটলিস্ট</string>
+    <string name="add_websites">ওয়েবসাইট যুক্ত করুন</string>
+    <string name="website">ওয়েবসাইট</string>
+    <string name="add_websites_subheading">আপনি যে ওয়েবসাইটটি সাদা রঙের তালিকাতে যুক্ত করতে চান দয়া করে উদ্বোধন করুন: www.google.com</string>
+    <string name="otp_verification">ওটিপি যাচাইকরণ</string>
+    <string name="otp_verification_subheading">দয়া করে 4 টি অঙ্কের ওটিপি প্রবেশ করান যা আমরা আপনার নিবন্ধিত ইমেল ঠিকানায় প্রেরণ করেছি</string>
+    <string name="password_prompt_subheading">"আপনি যদি এখনও নিজের পাসওয়ার্ড পরিবর্তন না করেন তবে দয়া করে 1234 চেষ্টা করুন"</string>
+    <string name="forget">ভুলে যাবি?</string>
+    <string name="user_agreement">ব্যবহারকারী চুক্তি</string>
+    <string name="user_agreement_2">আমরা আপনার ডিভাইসে ইনস্টল থাকা অ্যাপ্লিকেশন এবং ফোন নম্বরটির তালিকা সঞ্চয় করব। আপনি কিউআরকোড বৈশিষ্ট্যটি ব্যবহার করছেন তবেই এই ডেটাটি আপনার ডিভাইস থেকে নেওয়া হবে এবং এই ডেটাটি এক ঘণ্টার মধ্যে সার্ভার থেকে স্বয়ংক্রিয়ভাবে সরানো হবে</string>
+    <string name="no_thanks">না ধন্যবাদ</string>
+    <string name="accept_amp_continue">গ্রহণ করুন</string>
+    <string name="usage_access">ব্যবহার অ্যাক্সেস</string>
+    <string name="overlay">ওভারলে</string>
+    <string name="write_settings">সেটিংস লিখুন</string>
+    <string name="sound_access">শব্দ অ্যাক্সেস</string>
+    <string name="other_permissions">অন্যান্য অনুমতি</string>
+    <string name="accessibility">অ্যাক্সেসযোগ্যতা</string>
+    <string name="device_id">ডিভাইস আইডি</string>
+    <string name="feedback_amp_suggestions">পরামর্শ</string>
+    <string name="quick_survey">দ্রুত জরিপ</string>
+    <string name="bug_report">বাগ রিপোর্ট</string>
+    <string name="visit">দর্শন</string>
+    <string name="rate">হার</string>
+    <string name="share">ভাগ করুন</string>
+    <string name="app_info">অ্যাপ্লিকেশন তথ্য</string>
+    <string name="check_for_update">আপডেটের জন্য পরীক্ষা করুন</string>
+    <string name="developer_contact">বিকাশকারীদের যোগাযোগ</string>
+    <string name="terms_amp_conditions">শর্তাদি</string>
+    <string name="privacy_policy">গোপনীয়তা নীতি</string>
+    <string name="outgoing">বহির্গামী</string>
+    <string name="always_on">চালু</string>
+    <string name="always_off">বন্ধ</string>
+    <string name="dont_care">"যত্ন নেই"</string>
+    <string name="landscape">ল্যান্ডস্কেপ</string>
+    <string name="portrait">প্রতিকৃতি</string>
+    <string name="silent">নীরব</string>
+    <string name="normal">সাধারণ</string>
+    <string name="select_activity_sunHeading">আপনি কোন ক্রিয়াকলাপ /পৃষ্ঠাগুলি /উইন্ডোজ ব্লক করতে চান তা নির্বাচন করুন</string>
+    <string name="apps">অ্যাপস</string>
+    <string name="whitelist_apps">হোয়াইটলিস্ট অ্যাপস</string>
+    <string name="whitelist_services">হোয়াইটলিস্ট পরিষেবাদি</string>
+    <string name="whitelist_apps_subheading">"আপনি কোন অ্যাপ্লিকেশন অ্যাক্সেস দিতে চান তা নির্বাচন করুন"</string>
+    <string name="whitelist_service_heading">"আপনি কোন পরিষেবাগুলিতে অ্যাক্সেস দিতে চান তা নির্বাচন করুন"</string>
+    <string name="single_app_subheading">"আপনি অগ্রভাগে কোন অ্যাপ্লিকেশনটি চান তা নির্বাচন করুন"</string>
+    <string name="blacklist">ব্ল্যাকলিস্ট</string>
+    <string name="contacts_blacklist_subheading">"ব্ল্যাকলিস্টের আওতায় সংরক্ষিত যোগাযোগগুলি আপনার অ্যান্ড্রয়েড ফোনটিকে আর কল করতে পারবে না"</string>
+    <string name="contacts_whitelist_subheading">হোয়াইটলিস্টের অধীনে পরিচিতিগুলি সংরক্ষণ করা কেবলমাত্র আপনার অ্যান্ড্রয়েড ফোনটিতে আর কল করতে সক্ষম</string>
+    <string name="delete">মুছে ফেলা</string>
+    <string name="delete_contact_subheading">আপনি কি নিশ্চিত যে আপনি এই আইটেমগুলি মুছতে চান?</string>
+    <string name="invalid_name">অবৈধ নাম</string>
+    <string name="invalid_number">অবৈধ সংখ্যা</string>
+    <string name="hours">ঘন্টার</string>
+    <string name="minutes">মিনিট</string>
+    <string name="file_exported_to">ফাইলটি রফতানি হয়েছে</string>
+    <string name="select_a_file_to_upload">আপলোড করার জন্য একটি ফাইল নির্বাচন করুন</string>
+    <string name="please_install_a_file_manager">একটি ফাইল ম্যানেজার ইনস্টল করুন।</string>
+    <string name="invalid_backup_file">অবৈধ ব্যাকআপ ফাইল</string>
+    <string name="imported_successfully">সাফল্যের সাথে আমদানি করা হয়েছে</string>
+    <string name="password_successfully_send">পাসওয়ার্ড সফলভাবে আপনার ইমেল ঠিকানায় প্রেরণ করা হয়েছে</string>
+    <string name="password_recovery_failed">পাসওয়ার্ড পুনরুদ্ধার ব্যর্থ হয়েছে</string>
+    <string name="recovery_email_not_registered">পুনরুদ্ধার ইমেল নিবন্ধভুক্ত নয়</string>
+    <string name="change_your">পরিবর্তন করুন আপনার</string>
+    <string name="forgot_caps">ভুলে গেছেন?</string>
+    <string name="password_successfully_changed">আপনার পাসওয়ার্ড সফলভাবে পরিবর্তন করা হয়েছে</string>
+    <string name="invalid_email_address">অকার্যকর ইমেইল ঠিকানা</string>
+    <string name="password_min">পাসওয়ার্ডে কমপক্ষে 8 টি অক্ষর থাকতে হবে</string>
+    <string name="old_password_must_not_new">পুরানো পাসওয়ার্ড অবশ্যই নতুন পাসওয়ার্ড নয়</string>
+    <string name="password_not_match">পাসওয়ার্ড মেলে না</string>
+    <string name="invalid_old_pasword">অবৈধ পুরাতন পাসওয়ার্ড</string>
+    <string name="phonebook_blacklist_subheading">"আপনি কালো তালিকাতে কোন পরিচিতি যুক্ত করতে চান তা নির্বাচন করুন"</string>
+    <string name="phonebook_whitelist_subheading">"হোয়াইটলিস্টে আপনি কোন পরিচিতি যুক্ত করতে চান তা নির্বাচন করুন"</string>
+    <string name="camera_not_init">ক্যামেরা সূচনা ত্রুটি:</string>
+    <string name="please_wait">অনুগ্রহপূর্বক অপেক্ষা করুন</string>
+    <string name="invalid_qr">অবৈধ QrCode!</string>
+    <string name="successfully_done">সাফল্যের সাথে সম্পন্ন!</string>
+    <string name="on_caps">চালু</string>
+    <string name="off_caps">বন্ধ</string>
+    <string name="webfilter_blacklist_subheading">"ব্ল্যাকলিস্টের আওতায় সংরক্ষণ করা ওয়েবসাইটগুলি ব্রাউজারের মাধ্যমে অ্যাক্সেস করতে সক্ষম হবে না"</string>
+    <string name="webfilter_whitelist_subheading">ওয়েবসাইটগুলি কেবল ব্রাউজারের মাধ্যমে অ্যাক্সেস করতে সক্ষম হোয়াইটলিস্টের আওতায় সংরক্ষণ করে</string>
+    <string name="dialog_website_blacklist_subheading">আপনি যে ওয়েবসাইটটি ব্ল্যাকলিস্টে যুক্ত করতে চান দয়া করে উদ্বোধন করুন: www.google.com</string>
+    <string name="dialog_website_white_subheading">আপনি যে ওয়েবসাইটটি সাদা রঙের তালিকাতে যুক্ত করতে চান দয়া করে উদ্বোধন করুন: www.google.com</string>
+    <string name="invalid_url">অবৈধ url</string>
+    <string name="invalid_otp">অবৈধ ওটিপি</string>
+    <string name="user_agreement_1">কীওএস উন্নত করতে এবং সমস্ত বৈশিষ্ট্য সঠিকভাবে কাজ করছে তা নিশ্চিত করতে, আপনার ব্যবহারের কিছু ডেটা বেনামে সংগ্রহ করা হবে। আপনাকে অবশ্যই আমাদের গোপনীয়তা নীতি এবং শর্তাদি পড়তে হবে এবং তাতে সম্মত হতে হবে। কীওএস ব্যবহার করার আগে</string>
+    <string name="select_all">সমস্ত নির্বাচন করুন</string>
+    <string name="initializing_desktop">ডেস্কটপ শুরু করা হচ্ছে ...</string>
+    <string name="loading_settings">সেটিংস লোড হচ্ছে</string>
+    <string name="exiting_keyos">প্রস্থান করা হচ্ছে</string>
+    <string name="dialog_qrcode_subheading">আপনার কীওএস ডিভাইসে একই সেটিংস প্রয়োগ করতে এই কীওএস কিউআর কোডটি স্ক্যান করুন</string>
 </resources>
