--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -140,4 +140,167 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Notifikacije i aplikacije su isključene"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Zatvori"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Zatvoreno"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Izlazni kiosk</string>
+    <string name="button_overview_mode">Način pregleda</string>
+    <string name="password">Lozinka</string>
+    <string name="activities">Aktivnosti</string>
+    <string name="cancel">Otkaži</string>
+    <string name="done">Gotovo</string>
+    <string name="phoneBook">Imenik</string>
+    <string name="manual">Priručnik</string>
+    <string name="create_new">Napravi novi</string>
+    <string name="contact">Kontakt</string>
+    <string name="name">Ime</string>
+    <string name="number">Broj</string>
+    <string name="hide_icon">Sakrij ikonu</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">sakrij ikonu pokretača /prečice sa kuće KeyOS</string>
+    <string name="block_activities">Blokiraj aktivnosti</string>
+    <string name="block_unwanted_pages_activities_windows">Blokirajte neželjene stranice /aktivnosti /prozore</string>
+    <string name="time_limit">Rok</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Podesite vremensko ograničenje Npr. 1 sat dnevno</string>
+    <string name="system_settings">Postavke sistema</string>
+    <string name="restrictions">Ograničenja</string>
+    <string name="edit_app">Uredi aplikaciju</string>
+    <string name="import_amp_export">Uvoz Izvoz</string>
+    <string name="scan">Skeniraj</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Skenirajte keyOS qr kôd da biste primijenili istu politiku postavki</string>
+    <string name="generate">Generiraj</string>
+    <string name="generate_keyos_qr_code">Generiraj keyOS QrCode</string>
+    <string name="import_text">Uvoz</string>
+    <string name="import_keyos_setting_from_storage">Uvezite postavku keyOS iz memorije</string>
+    <string name="export_text">Izvoz</string>
+    <string name="import_keyos_setting_to_storage">Uvezite postavku keyOS-a u memoriju</string>
+    <string name="recovery_email">E-adresa za oporavak</string>
+    <string name="old_password">Stara šifra</string>
+    <string name="confirm_password">Potvrdi šifru</string>
+    <string name="allow_calls">Dozvoli pozive</string>
+    <string name="incoming">Dolazni</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Ovo će omogućiti sve dolazne pozive na vaš mobitel</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Ovo će omogućiti sve odlazne pozive na vaš mobitel</string>
+    <string name="whitelist_contacts">Bijela lista kontakata</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakti spremljeni na bijeloj listi mogu vas samo pozvati</string>
+    <string name="blacklist_contacts">Crna lista kontakata</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Kontakti sačuvani na crnoj listi neće vas moći nazvati"</string>
+    <string name="automatic_whitelist">Automatska bijela lista</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Dozvoli pozive ako je kontakt dostupan u telefonskom imeniku</string>
+    <string name="additional">Dodatno</string>
+    <string name="whitelist_amp_blacklist">Crna lista s bijele liste</string>
+    <string name="phone_book">Imenik</string>
+    <string name="import_amp_export_settings">Uvoz postavki izvoza</string>
+    <string name="services">Usluge</string>
+    <string name="single_app">Jedna aplikacija</string>
+    <string name="apps_amp_services">Usluge aplikacija</string>
+    <string name="peripheral">Periferno</string>
+    <string name="advance">Napred</string>
+    <string name="disable_camera">Onemogući kameru</string>
+    <string name="call_settings">Postavke poziva</string>
+    <string name="web_filter">Web filter</string>
+    <string name="screen_saver">Čuvar zaslona</string>
+    <string name="phone_settings">Postavke telefona</string>
+    <string name="notification_panel">Panel za obavještavanje</string>
+    <string name="security">Sigurnost</string>
+    <string name="launch">Lansiranje</string>
+    <string name="phone_call_subheading">Ako naiđete na bilo kakve probleme prilikom upućivanja poziva, dopustite sve usluge povezane s telefonskim pozivom</string>
+    <string name="phone_call_subheading_hint">savjet: Potražite telefon u odjeljku servisa</string>
+    <string name="web_filter_subheading">Web filter je moćna usluga koja vam omogućava blokiranje neželjenih web lokacija</string>
+    <string name="web_filter_supported_browsers">Podržani preglednici: chrome, firefox, hrabri, edge, opera, duckduckgo</string>
+    <string name="off">Isključeno</string>
+    <string name="whitelist_websites">Web stranice s bijele liste</string>
+    <string name="whitelist_website_info">Web lokacije spremaju se na bijelu listu i imaju pristup samo putem pregledača</string>
+    <string name="blacklist_websites">Web stranice sa crne liste</string>
+    <string name="blacklist_websites_info">"Web stranice spremljene na crnoj listi neće moći pristupiti putem preglednika"</string>
+    <string name="block_adult_websites">Blokirajte web lokacije za odrasle</string>
+    <string name="adult_websites_info">Ovo će automatski blokirati 800 web lokacija za odrasle</string>
+    <string name="whitelist">Bijela lista</string>
+    <string name="add_websites">Dodajte web lokaciju</string>
+    <string name="website">Web stranica</string>
+    <string name="add_websites_subheading">Molimo unesite web lokaciju koju želite dodati na bijelu listu Npr. Www.google.com</string>
+    <string name="otp_verification">Otp verifikacija</string>
+    <string name="otp_verification_subheading">Unesite 4-znamenkasti otp koji smo poslali na vašu registriranu adresu e-pošte</string>
+    <string name="password_prompt_subheading">"ako još niste promijenili lozinku, pokušajte 1234"</string>
+    <string name="forget">zaboraviti ?</string>
+    <string name="user_agreement">Korisnički ugovor</string>
+    <string name="user_agreement_2">Popis instalirane aplikacije i telefonski broj pohranit ćemo u vaš uređaj. Ovi će se podaci preuzeti s vašeg uređaja samo ako koristite QrCode funkciju i oni će se automatski ukloniti sa servera u roku od jednog sata</string>
+    <string name="no_thanks">Ne hvala</string>
+    <string name="accept_amp_continue">Prihvati</string>
+    <string name="usage_access">Pristup upotrebi</string>
+    <string name="overlay">Prekrivanje</string>
+    <string name="write_settings">Napišite postavke</string>
+    <string name="sound_access">Pristup zvuku</string>
+    <string name="other_permissions">Ostale dozvole</string>
+    <string name="accessibility">Pristupačnost</string>
+    <string name="device_id">ID uređaja</string>
+    <string name="feedback_amp_suggestions">prijedlozi</string>
+    <string name="quick_survey">Brza anketa</string>
+    <string name="bug_report">Izvještaj o greškama</string>
+    <string name="visit">Posjetite</string>
+    <string name="rate">Ocijenite</string>
+    <string name="share">Podijeli</string>
+    <string name="app_info">Informacije o aplikaciji</string>
+    <string name="check_for_update">Provjerite ima li ažuriranja</string>
+    <string name="developer_contact">Kontakt za programera</string>
+    <string name="terms_amp_conditions">Uslovi</string>
+    <string name="privacy_policy">Politika privatnosti</string>
+    <string name="outgoing">Odlazni</string>
+    <string name="always_on">na</string>
+    <string name="always_off">isključeno</string>
+    <string name="dont_care">"Ne zanima me"</string>
+    <string name="landscape">Pejzaž</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Nečujno</string>
+    <string name="normal">Uobičajeno</string>
+    <string name="select_activity_sunHeading">Odaberite koje aktivnosti /stranice /prozore želite blokirati</string>
+    <string name="apps">Aplikacije</string>
+    <string name="whitelist_apps">Bijela lista aplikacija</string>
+    <string name="whitelist_services">Bijela lista usluge</string>
+    <string name="whitelist_apps_subheading">"Odaberite kojim aplikacijama želite pristupiti"</string>
+    <string name="whitelist_service_heading">"Odaberite kojim uslugama želite dati pristup"</string>
+    <string name="single_app_subheading">"Odaberite koju aplikaciju želite da bude dostupna u prvom planu"</string>
+    <string name="blacklist">Crna lista</string>
+    <string name="contacts_blacklist_subheading">"Kontakti sačuvani na crnoj listi više neće moći pozivati ​​vaš Android telefon"</string>
+    <string name="contacts_whitelist_subheading">Kontakti sačuvani na bijeloj listi više mogu pozivati ​​samo vaš Android telefon</string>
+    <string name="delete">Izbriši</string>
+    <string name="delete_contact_subheading">Jeste li sigurni da želite izbrisati ove stavke</string>
+    <string name="invalid_name">Nevažeće ime</string>
+    <string name="invalid_number">Nevažeći broj</string>
+    <string name="hours">Sati</string>
+    <string name="minutes">Minutes</string>
+    <string name="file_exported_to">Datoteka je izvezena u</string>
+    <string name="select_a_file_to_upload">Odaberite datoteku za prijenos</string>
+    <string name="please_install_a_file_manager">Molimo instalirajte File Manager.</string>
+    <string name="invalid_backup_file">Nevaljana datoteka sigurnosne kopije</string>
+    <string name="imported_successfully">Uvezeno uspješno</string>
+    <string name="password_successfully_send">Lozinka je uspješno poslana na vašu adresu e-pošte</string>
+    <string name="password_recovery_failed">Oporavak lozinke nije uspio</string>
+    <string name="recovery_email_not_registered">E-adresa za oporavak nije registrirana</string>
+    <string name="change_your">Promijenite svoj</string>
+    <string name="forgot_caps">Zaboravili ste?</string>
+    <string name="password_successfully_changed">Vaša lozinka je uspješno promijenjena</string>
+    <string name="invalid_email_address">pogrešna email adresa</string>
+    <string name="password_min">Lozinka mora sadržavati najmanje 8 znakova</string>
+    <string name="old_password_must_not_new">Stara lozinka ne smije biti nova lozinka</string>
+    <string name="password_not_match">Lozinka se ne podudara</string>
+    <string name="invalid_old_pasword">Nevažeća stara lozinka</string>
+    <string name="phonebook_blacklist_subheading">"Odaberite kontakte koje želite dodati na crnu listu"</string>
+    <string name="phonebook_whitelist_subheading">"Odaberite kontakte koje želite dodati na bijelu listu"</string>
+    <string name="camera_not_init">Pogreška inicijalizacije kamere:</string>
+    <string name="please_wait">Molimo sačekajte</string>
+    <string name="invalid_qr">Nevažeći QrCode!</string>
+    <string name="successfully_done">Uspješno urađeno!</string>
+    <string name="on_caps">ON</string>
+    <string name="off_caps">ISKLJUČENO</string>
+    <string name="webfilter_blacklist_subheading">"Web stranice spremljene na crnoj listi neće moći pristupiti putem preglednika"</string>
+    <string name="webfilter_whitelist_subheading">Web lokacije spremaju se na bijelu listu i imaju pristup samo putem pregledača</string>
+    <string name="dialog_website_blacklist_subheading">Unesite web lokaciju koju želite dodati na crnu listu Npr. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Molimo unesite web lokaciju koju želite dodati na bijelu listu Npr. Www.google.com</string>
+    <string name="invalid_url">Nevažeći URL</string>
+    <string name="invalid_otp">Nevažeći Otp</string>
+    <string name="user_agreement_1">Da bismo poboljšali KeyOS i osigurali da sve funkcije rade ispravno, neki će se vaši podaci o upotrebi prikupljati anonimno. Morate pročitati i prihvatiti našu Politiku privatnosti i uvjete. pre upotrebe KeyOS-a</string>
+    <string name="select_all">Označi sve</string>
+    <string name="initializing_desktop">Inicijalizacija radne površine ...</string>
+    <string name="loading_settings">Postavke učitavanja</string>
+    <string name="exiting_keyos">Izlaz</string>
+    <string name="dialog_qrcode_subheading">Skenirajte ovaj KeyOS Qr kod da biste primijenili iste postavke na svom KeyOS uređaju</string>
 </resources>
