--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -140,4 +140,168 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Les notificacions i les aplicacions estan desactivades"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Tanca"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"S\'ha tancat"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Kiosk de sortida</string>
+    <string name="button_overview_mode">Mode de visió general</string>
+    <string name="password">Contrasenya</string>
+    <string name="activities">Activitats</string>
+    <string name="cancel">Cancel · lar</string>
+    <string name="done">Fet</string>
+    <string name="phoneBook">Guia telefònica</string>
+    <string name="manual">Manual</string>
+    <string name="create_new">Crea un nou</string>
+    <string name="contact">Contacte</string>
+    <string name="name">Nom</string>
+    <string name="number">Número</string>
+    <string name="hide_icon">Amaga la icona</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">amaga la icona del llançador /drecera des de la pàgina d\'inici de KeyOS</string>
+    <string name="block_activities">Activitats de blocs</string>
+    <string name="block_unwanted_pages_activities_windows">Bloqueja les pàgines /activitats /finestres no desitjades</string>
+    <string name="time_limit">Termini</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Estableix la restricció de temps Per exemple. 1 hora al dia</string>
+    <string name="system_settings">Ajustos del sistema</string>
+    <string name="restrictions">Restriccions</string>
+    <string name="edit_app">Edita l\'aplicació</string>
+    <string name="import_amp_export">Importació-exportació</string>
+    <string name="scan">Escaneja</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Escaneja el codi qOS keyOS per aplicar la mateixa política de configuració</string>
+    <string name="generate">Generar</string>
+    <string name="generate_keyos_qr_code">Genereu keyOS QrCode</string>
+    <string name="import_text">Importació</string>
+    <string name="import_keyos_setting_from_storage">Importeu la configuració de keyOS des de l’emmagatzematge</string>
+    <string name="export_text">Exporta</string>
+    <string name="import_keyos_setting_to_storage">Importeu la configuració de keyOS a l\'emmagatzematge</string>
+    <string name="recovery_email">Correu electrònic de recuperació</string>
+    <string name="old_password">contrasenya antiga</string>
+    <string name="confirm_password">Confirma la contrassenya</string>
+    <string name="allow_calls">Permet trucades</string>
+    <string name="incoming">Entrant</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Això permetrà totes les trucades entrants al vostre mòbil</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Això permetrà totes les trucades sortints al vostre mòbil</string>
+    <string name="whitelist_contacts">Contactes de la llista blanca</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Els contactes desats a la llista blanca només us poden trucar</string>
+    <string name="blacklist_contacts">Contactes a la llista negra</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Els contactes desats a la llista negra no us podran trucar"</string>
+    <string name="automatic_whitelist">Llista blanca automàtica</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Permet les trucades si hi ha contacte disponible a la guia telefònica</string>
+    <string name="additional">Addicional</string>
+    <string name="whitelist_amp_blacklist">Llista negra de la llista blanca</string>
+    <string name="phone_book">Guia telefònica</string>
+    <string name="import_amp_export_settings">Importa la configuració d\'exportació</string>
+    <string name="services">Serveis</string>
+    <string name="single_app">Aplicació única</string>
+    <string name="apps_amp_services">Serveis d\'aplicacions</string>
+    <string name="peripheral">Perifèric</string>
+    <string name="advance">Avanç</string>
+    <string name="disable_camera">Desactiva la càmera</string>
+    <string name="call_settings">Configuració de trucades</string>
+    <string name="web_filter">Filtre web</string>
+    <string name="screen_saver">Salvapantalles</string>
+    <string name="phone_settings">Configuració del telèfon</string>
+    <string name="notification_panel">Tauler de notificacions</string>
+    <string name="security">Seguretat</string>
+    <string name="launch">Llançament</string>
+    <string name="phone_call_subheading">Si teniu problemes per fer trucades, permeteu tots els serveis relacionats amb la trucada telefònica</string>
+    <string name="phone_call_subheading_hint">suggeriment: cerqueu el telèfon a la secció de servei</string>
+    <string name="web_filter_subheading">El filtre web és un potent servei que us permet bloquejar llocs web no desitjats</string>
+    <string name="web_filter_supported_browsers">Navegadors compatibles: Chrome, Firefox, Brave, Edge, Opera, duckduckgo</string>
+    <string name="off">Desactivat</string>
+    <string name="whitelist_websites">Llocs web de la llista blanca</string>
+    <string name="whitelist_website_info">Els llocs web desats a la llista blanca només poden accedir amb el navegador</string>
+    <string name="blacklist_websites">Llocs web de llista negra</string>
+    <string name="blacklist_websites_info">"Els llocs web desats a la llista negra no podran accedir amb el navegador"</string>
+    <string name="block_adult_websites">Bloqueja llocs web per a adults</string>
+    <string name="adult_websites_info">Això bloquejarà automàticament 800 llocs web per a adults</string>
+    <string name="whitelist">Llista blanca</string>
+    <string name="add_websites">Afegiu un lloc web</string>
+    <string name="website">Lloc web</string>
+    <string name="add_websites_subheading">Introduïu el lloc web que vulgueu afegir a la llista blanca, per exemple: www.google.com</string>
+    <string name="otp_verification">Verificació Otp</string>
+    <string name="otp_verification_subheading">Introduïu l’OTP de 4 dígits que hem enviat a la vostra adreça electrònica registrada</string>
+    <string name="password_prompt_subheading">"si encara no heu canviat la contrasenya, proveu 1234"</string>
+    <string name="forget">oblidar?</string>
+    <string name="user_agreement">Acord d’usuari</string>
+    <string name="user_agreement_2">Desarem la llista de l’aplicació instal·lada i el número de telèfon al vostre dispositiu. Aquestes dades només s\'extreuran del dispositiu si utilitzeu la funció QrCode i aquestes dades s\'eliminaran automàticament del servidor en una hora</string>
+    <string name="no_thanks">No gràcies</string>
+    <string name="accept_amp_continue">Accepta</string>
+    <string name="usage_access">Accés d’ús</string>
+    <string name="overlay">Superposició</string>
+    <string name="write_settings">Configuració d\'escriptura</string>
+    <string name="sound_access">Accés al so</string>
+    <string name="other_permissions">Altres permisos</string>
+    <string name="accessibility">Accessibilitat</string>
+    <string name="device_id">Identificador de dispositiu</string>
+    <string name="feedback_amp_suggestions">suggeriments</string>
+    <string name="quick_survey">Enquesta ràpida</string>
+    <string name="bug_report">Informe d\'error</string>
+    <string name="visit">Visita</string>
+    <string name="rate">Taxa</string>
+    <string name="share">Compartir</string>
+    <string name="app_info">Informació de l\'aplicació</string>
+    <string name="check_for_update">Cercar actualitzacions</string>
+    <string name="developer_contact">Contacte amb el desenvolupador</string>
+    <string name="terms_amp_conditions">Termes</string>
+    <string name="privacy_policy">Política de privacitat</string>
+    <string name="outgoing">Sortint</string>
+    <string name="always_on">encès</string>
+    <string name="always_off">apagat</string>
+    <string name="dont_care">"No m\'importa"</string>
+    <string name="landscape">Paisatge</string>
+    <string name="portrait">Retrat</string>
+    <string name="silent">Silenciós</string>
+    <string name="normal">Normal</string>
+    <string name="select_activity_sunHeading">Seleccioneu quines activitats /pàgines /finestres voleu bloquejar</string>
+    <string name="apps">Aplicacions</string>
+    <string name="whitelist_apps">Aplicacions de la llista blanca</string>
+    <string name="whitelist_services">Serveis de la llista blanca</string>
+    <string name="whitelist_apps_subheading">"Seleccioneu a quines aplicacions voleu accedir"</string>
+    <string name="whitelist_service_heading">"Seleccioneu a quins serveis voleu donar accés"</string>
+    <string name="single_app_subheading">"Seleccioneu quina aplicació voleu que estigui disponible en primer pla"</string>
+    <string name="blacklist">Llista negra</string>
+    <string name="contacts_blacklist_subheading">"Els contactes desats a la llista negra ja no podran trucar al vostre telèfon Android"</string>
+    <string name="contacts_whitelist_subheading">Els contactes desats a la llista blanca només poden trucar al vostre telèfon Android</string>
+    <string name="delete">Suprimeix</string>
+    <string name="delete_contact_subheading">Esteu segur que voleu suprimir aquests elements?</string>
+    <string name="invalid_name">Nom no vàlid</string>
+    <string name="invalid_number">Número no vàlid</string>
+    <string name="hours">Hores</string>
+    <string name="minutes">Minuts</string>
+    <string name="file_exported_to">Fitxer exportat a</string>
+    <string name="select_a_file_to_upload">Seleccioneu un fitxer per penjar</string>
+    <string name="please_install_a_file_manager">Instal·leu un gestor de fitxers.</string>
+    <string name="invalid_backup_file">El fitxer de còpia de seguretat no és vàlid</string>
+    <string name="imported_successfully">S\'ha importat correctament</string>
+    <string name="password_successfully_send">La contrasenya s\'ha enviat correctament a la vostra adreça de correu electrònic</string>
+    <string name="password_recovery_failed">Ha fallat la recuperació de la contrasenya</string>
+    <string name="recovery_email_not_registered">El correu electrònic de recuperació no està registrat</string>
+    <string name="change_your">Canvieu el vostre</string>
+    <string name="forgot_caps">Heu oblidat?</string>
+    <string name="password_successfully_changed">La vostra contrasenya s\'ha canviat correctament</string>
+    <string name="invalid_email_address">adressa de correu invàlida</string>
+    <string name="password_min">La contrasenya ha de contenir un mínim de 8 caràcters</string>
+    <string name="old_password_must_not_new">La contrasenya antiga no ha de ser una contrasenya nova</string>
+    <string name="password_not_match">La contrasenya no coincideix</string>
+    <string name="invalid_old_pasword">La contrasenya antiga no és vàlida</string>
+    <string name="phonebook_blacklist_subheading">"Seleccioneu quins contactes voleu afegir a la llista negra"</string>
+    <string name="phonebook_whitelist_subheading">"Seleccioneu quins contactes voleu afegir a la llista blanca"</string>
+    <string name="camera_not_init">Error d\'inicialització de la càmera:</string>
+    <string name="please_wait">Espereu, si us plau</string>
+    <string name="invalid_qr">QrCode no és vàlid.</string>
+    <string name="successfully_done">Fet amb èxit.</string>
+    <string name="on_caps">ACTIVAT</string>
+    <string name="off_caps">DESACTIVAT</string>
+    <string name="webfilter_blacklist_subheading">"Els llocs web desats a la llista negra no podran accedir amb el navegador"</string>
+    <string name="webfilter_whitelist_subheading">Els llocs web desats a la llista blanca només poden accedir amb el navegador</string>
+    <string name="dialog_website_blacklist_subheading">Introduïu el lloc web que vulgueu afegir a la llista negra, per exemple: www.google.com</string>
+    <string name="dialog_website_white_subheading">Introduïu el lloc web que vulgueu afegir a la llista blanca, per exemple: www.google.com</string>
+    <string name="invalid_url">URL no vàlid</string>
+    <string name="invalid_otp">Otp no vàlid</string>
+    <string name="user_agreement_1">Per millorar KeyOS i assegurar-vos que totes les funcions funcionen correctament, algunes de les vostres dades d’ús es recopilaran de forma anònima. Heu de llegir i acceptar la nostra Política de privadesa i els nostres Termes. abans d’utilitzar KeyOS</string>
+    <string name="select_all">Seleccionar tot</string>
+    <string name="initializing_desktop">S\'està inicialitzant l\'escriptori ...</string>
+    <string name="loading_settings">S\'està carregant la configuració</string>
+    <string name="exiting_keyos">S\'està sortint</string>
+    <string name="dialog_qrcode_subheading">Escanegeu aquest codi KeyOS Qr per aplicar la mateixa configuració al dispositiu KeyOS</string>
+
 </resources>
