--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -142,4 +142,167 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Oznámení a aplikace jsou vypnuty"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Zavřít"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Zavřeno"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Ukončete kiosek</string>
+    <string name="button_overview_mode">Přehledový režim</string>
+    <string name="password">Heslo</string>
+    <string name="activities">Činnosti</string>
+    <string name="cancel">zrušení</string>
+    <string name="done">Hotovo</string>
+    <string name="phoneBook">Telefonní seznam</string>
+    <string name="manual">Manuál</string>
+    <string name="create_new">Vytvořit nový</string>
+    <string name="contact">Kontakt</string>
+    <string name="name">název</string>
+    <string name="number">Číslo</string>
+    <string name="hide_icon">Skrytá ikona</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">skrýt ikonu spouštěče /zástupce z domovské stránky KeyOS</string>
+    <string name="block_activities">Blokovat aktivity</string>
+    <string name="block_unwanted_pages_activities_windows">Blokujte nežádoucí stránky /aktivity /okna</string>
+    <string name="time_limit">Lhůta</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Nastavit časové omezení Např. 1 hodinu denně</string>
+    <string name="system_settings">Nastavení systému</string>
+    <string name="restrictions">Omezení</string>
+    <string name="edit_app">Upravit aplikaci</string>
+    <string name="import_amp_export">Import Export</string>
+    <string name="scan">Skenovat</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Naskenujte kód keyOS qr a použijte stejnou zásadu nastavení</string>
+    <string name="generate">generovat</string>
+    <string name="generate_keyos_qr_code">Generovat keyOS QrCode</string>
+    <string name="import_text">Import</string>
+    <string name="import_keyos_setting_from_storage">Importujte nastavení keyOS z úložiště</string>
+    <string name="export_text">Vývozní</string>
+    <string name="import_keyos_setting_to_storage">Importujte nastavení keyOS do úložiště</string>
+    <string name="recovery_email">Email pro obnovení</string>
+    <string name="old_password">staré heslo</string>
+    <string name="confirm_password">Potvrďte heslo</string>
+    <string name="allow_calls">Povolit hovory</string>
+    <string name="incoming">Přicházející</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">To umožní všechny příchozí hovory na váš mobil</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">To umožní všechny odchozí hovory na váš mobil</string>
+    <string name="whitelist_contacts">Seznamy povolených kontaktů</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakty se ukládají do seznamu povolených pouze proto, aby vám mohly volat</string>
+    <string name="blacklist_contacts">Kontakty na černou listinu</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Kontakty uložené na černé listině vám nebudou moci zavolat“</string>
+    <string name="automatic_whitelist">Automatický seznam povolených</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Povolte hovory, pokud je kontakt k dispozici v telefonním seznamu</string>
+    <string name="additional">Další</string>
+    <string name="whitelist_amp_blacklist">Černá listina seznamu povolených</string>
+    <string name="phone_book">Telefonní seznam</string>
+    <string name="import_amp_export_settings">Importovat nastavení exportu</string>
+    <string name="services">Služby</string>
+    <string name="single_app">Single App</string>
+    <string name="apps_amp_services">Služby aplikací</string>
+    <string name="peripheral">Obvodový</string>
+    <string name="advance">Záloha</string>
+    <string name="disable_camera">Zakázat kameru</string>
+    <string name="call_settings">Nastavení hovoru</string>
+    <string name="web_filter">Webový filtr</string>
+    <string name="screen_saver">Spořič obrazovky</string>
+    <string name="phone_settings">Nastavení telefonu</string>
+    <string name="notification_panel">Oznamovací panel</string>
+    <string name="security">Bezpečnostní</string>
+    <string name="launch">Zahájení</string>
+    <string name="phone_call_subheading">Pokud se při telefonování setkáte s problémy, laskavě povolte všechny služby spojené s telefonním hovorem</string>
+    <string name="phone_call_subheading_hint">nápověda: Vyhledejte telefon v servisní sekci</string>
+    <string name="web_filter_subheading">Webový filtr je výkonná služba, která umožňuje blokovat nežádoucí webové stránky</string>
+    <string name="web_filter_supported_browsers">Podporované prohlížeče: Chrome, Firefox, Brave, Edge, Opera, Duckduckgo</string>
+    <string name="off">Vypnuto</string>
+    <string name="whitelist_websites">Webové stránky na seznamu povolených</string>
+    <string name="whitelist_website_info">Webové stránky se ukládají pod seznam povolených, ke kterým má přístup pouze prohlížeč</string>
+    <string name="blacklist_websites">Webové stránky černé listiny</string>
+    <string name="blacklist_websites_info">„Webové stránky uložené na černou listinu nebudou mít přístup přes prohlížeč“</string>
+    <string name="block_adult_websites">Blokovat webové stránky pro dospělé</string>
+    <string name="adult_websites_info">Tím se automaticky zablokuje 800 webů pro dospělé</string>
+    <string name="whitelist">Seznam povolených</string>
+    <string name="add_websites">Přidat web</string>
+    <string name="website">webová stránka</string>
+    <string name="add_websites_subheading">Zadejte prosím web, který chcete přidat do seznamu povolených, např. Www.google.com</string>
+    <string name="otp_verification">Ověření Otp</string>
+    <string name="otp_verification_subheading">Zadejte 4místné číslo OPP, které jsme zaslali na vaši registrovanou e-mailovou adresu</string>
+    <string name="password_prompt_subheading">"pokud jste ještě nezměnili své heslo, zkuste prosím 1234"</string>
+    <string name="forget">zapomenout?</string>
+    <string name="user_agreement">Smlouva s uživatelem</string>
+    <string name="user_agreement_2">Uložíme seznam nainstalované aplikace a telefonní číslo ve vašem zařízení. Tato data budou z vašeho zařízení převzata, pouze pokud používáte funkci QrCode a tato data budou automaticky odstraněna ze serveru za jednu hodinu</string>
+    <string name="no_thanks">Ne, díky</string>
+    <string name="accept_amp_continue">Akceptovat</string>
+    <string name="usage_access">Přístup k používání</string>
+    <string name="overlay">Překrytí</string>
+    <string name="write_settings">Nastavení zápisu</string>
+    <string name="sound_access">Zvukový přístup</string>
+    <string name="other_permissions">Další oprávnění</string>
+    <string name="accessibility">Přístupnost</string>
+    <string name="device_id">ID zařízení</string>
+    <string name="feedback_amp_suggestions">návrhy</string>
+    <string name="quick_survey">Rychlý dotazník</string>
+    <string name="bug_report">Zpráva o chybě</string>
+    <string name="visit">Návštěva</string>
+    <string name="rate">Hodnotit</string>
+    <string name="share">Podíl</string>
+    <string name="app_info">Informace o aplikaci</string>
+    <string name="check_for_update">Zkontrolovat aktualizace</string>
+    <string name="developer_contact">Kontakt na vývojáře</string>
+    <string name="terms_amp_conditions">Podmínky</string>
+    <string name="privacy_policy">Zásady ochrany osobních údajů</string>
+    <string name="outgoing">Odchozí</string>
+    <string name="always_on">na</string>
+    <string name="always_off">vypnuto</string>
+    <string name="dont_care">„Je mi to jedno“</string>
+    <string name="landscape">Krajina</string>
+    <string name="portrait">Portrét</string>
+    <string name="silent">Tichý</string>
+    <string name="normal">Normální</string>
+    <string name="select_activity_sunHeading">Vyberte, které aktivity /stránky /okna chcete blokovat</string>
+    <string name="apps">Aplikace</string>
+    <string name="whitelist_apps">Seznam povolených aplikací</string>
+    <string name="whitelist_services">Seznam povolených služeb</string>
+    <string name="whitelist_apps_subheading">„Vyberte, ke kterým aplikacím chcete ive přistupovat“</string>
+    <string name="whitelist_service_heading">„Vyberte, ke kterým službám chcete udělit přístup“</string>
+    <string name="single_app_subheading">„Vyberte aplikaci, kterou chcete mít k dispozici v popředí“</string>
+    <string name="blacklist">Blacklist</string>
+    <string name="contacts_blacklist_subheading">„Kontakty uložené pod černou listinou již nebudou moci volat na váš telefon Android“</string>
+    <string name="contacts_whitelist_subheading">Kontakty uložené pod seznamem povolených už mohou volat pouze na váš telefon Android</string>
+    <string name="delete">Vymazat</string>
+    <string name="delete_contact_subheading">Opravdu chcete tyto položky smazat</string>
+    <string name="invalid_name">Neplatné jméno</string>
+    <string name="invalid_number">Neplatné číslo</string>
+    <string name="hours">Hodin</string>
+    <string name="minutes">Minut</string>
+    <string name="file_exported_to">Soubor exportován do</string>
+    <string name="select_a_file_to_upload">Vyberte soubor k nahrání</string>
+    <string name="please_install_a_file_manager">Nainstalujte si prosím Správce souborů.</string>
+    <string name="invalid_backup_file">Neplatný záložní soubor</string>
+    <string name="imported_successfully">Importováno úspěšně</string>
+    <string name="password_successfully_send">Heslo úspěšně odesláno na vaši e-mailovou adresu</string>
+    <string name="password_recovery_failed">Obnovení hesla se nezdařilo</string>
+    <string name="recovery_email_not_registered">E-mail pro obnovení není zaregistrován</string>
+    <string name="change_your">Změn svůj</string>
+    <string name="forgot_caps">Zapomněli jste?</string>
+    <string name="password_successfully_changed">Vaše heslo bylo úspěšně změněno</string>
+    <string name="invalid_email_address">neplatná emailová adresa</string>
+    <string name="password_min">Heslo musí obsahovat minimálně 8 znaků</string>
+    <string name="old_password_must_not_new">Staré heslo nesmí být nové heslo</string>
+    <string name="password_not_match">Heslo se neshoduje</string>
+    <string name="invalid_old_pasword">Neplatné staré heslo</string>
+    <string name="phonebook_blacklist_subheading">„Vyberte kontakty, které chcete přidat na černou listinu“</string>
+    <string name="phonebook_whitelist_subheading">„Vyberte kontakty, které chcete přidat na seznam povolených“</string>
+    <string name="camera_not_init">Chyba inicializace kamery:</string>
+    <string name="please_wait">Prosím, čekejte</string>
+    <string name="invalid_qr">Neplatný QrCode!</string>
+    <string name="successfully_done">Úspěšně hotovo!</string>
+    <string name="on_caps">NA</string>
+    <string name="off_caps">VYPNUTO</string>
+    <string name="webfilter_blacklist_subheading">„Webové stránky uložené na černou listinu nebudou mít přístup přes prohlížeč“</string>
+    <string name="webfilter_whitelist_subheading">Webové stránky se ukládají pod seznam povolených, ke kterým má přístup pouze prohlížeč</string>
+    <string name="dialog_website_blacklist_subheading">Zadejte prosím web, který chcete přidat na černou listinu, např. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Zadejte prosím web, který chcete přidat do seznamu povolených, např. Www.google.com</string>
+    <string name="invalid_url">Neplatná URL</string>
+    <string name="invalid_otp">Neplatný Otp</string>
+    <string name="user_agreement_1">Abychom vylepšili KeyOS a zajistili správné fungování všech funkcí, budou některá vaše data o používání shromažďována anonymně. Musíte si přečíst a souhlasit s našimi zásadami ochrany osobních údajů a podmínkami. před použitím KeyOS</string>
+    <string name="select_all">Vybrat vše</string>
+    <string name="initializing_desktop">Probíhá inicializace plochy…</string>
+    <string name="loading_settings">Načítání nastavení</string>
+    <string name="exiting_keyos">Opouští se</string>
+    <string name="dialog_qrcode_subheading">Naskenujte tento kód KeyOS Qr a použijte stejné nastavení ve vašem zařízení KeyOS</string>
 </resources>
