--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -140,4 +140,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Benachrichtigungen und Apps sind deaktiviert"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Schließen"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Geschlossen"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Verlassen Sie den Kiosk</string>
+    <string name="button_overview_mode">Übersichtsmodus</string>
+    <string name="password">Passwort</string>
+    <string name="activities">Aktivitäten</string>
+    <string name="cancel">Stornieren</string>
+    <string name="done">Getan</string>
+    <string name="phoneBook">Telefonbuch</string>
+    <string name="manual">Handbuch</string>
+    <string name="create_new">Erstelle neu</string>
+    <string name="contact">Kontakt</string>
+    <string name="name">Name</string>
+    <string name="number">Nummer</string>
+    <string name="hide_icon">Icon verbergen</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">Launcher /Shortcut-Symbol von KeyOS Home ausblenden</string>
+    <string name="block_activities">Aktivitäten blockieren</string>
+    <string name="block_unwanted_pages_activities_windows">Blockieren Sie unerwünschte Seiten /Aktivitäten /Fenster</string>
+    <string name="time_limit">Zeitlimit</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Zeitbeschränkung einstellen ZB. 1 Stunde pro Tag</string>
+    <string name="system_settings">Systemeinstellungen</string>
+    <string name="restrictions">Beschränkungen</string>
+    <string name="edit_app">App bearbeiten</string>
+    <string name="import_amp_export">Import Export</string>
+    <string name="scan">Scan</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Scannen Sie den keyOS qr-Code, um die gleichen Einstellungsrichtlinien anzuwenden</string>
+    <string name="generate">Generieren</string>
+    <string name="generate_keyos_qr_code">Generieren Sie keyOS QrCode</string>
+    <string name="import_text">Importieren</string>
+    <string name="import_keyos_setting_from_storage">Importieren Sie die keyOS-Einstellung aus dem Speicher</string>
+    <string name="export_text">Export</string>
+    <string name="import_keyos_setting_to_storage">Importieren Sie die keyOS-Einstellung in den Speicher</string>
+    <string name="recovery_email">Wiederherstellungs-E-Mail</string>
+    <string name="old_password">Altes Passwort</string>
+    <string name="confirm_password">Kennwort bestätigen</string>
+    <string name="allow_calls">Anrufe zulassen</string>
+    <string name="incoming">Eingehend</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Dies ermöglicht alle eingehenden Anrufe auf Ihr Handy</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Dies ermöglicht alle ausgehenden Anrufe auf Ihr Handy</string>
+    <string name="whitelist_contacts">Whitelist-Kontakte</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakte, die unter der Whitelist gespeichert sind, können Sie nur anrufen</string>
+    <string name="blacklist_contacts">Blacklist-Kontakte</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Kontakte, die unter der schwarzen Liste gespeichert sind, können Sie nicht anrufen."</string>
+    <string name="automatic_whitelist">Automatische Whitelist</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Anrufe zulassen, wenn Kontakt im Telefonbuch verfügbar ist</string>
+    <string name="additional">Zusätzlich</string>
+    <string name="whitelist_amp_blacklist">Whitelist Blacklist</string>
+    <string name="phone_book">Telefonbuch</string>
+    <string name="import_amp_export_settings">Exporteinstellungen importieren</string>
+    <string name="services">Dienstleistungen</string>
+    <string name="single_app">Einzelne App</string>
+    <string name="apps_amp_services">Apps-Dienste</string>
+    <string name="peripheral">Peripherie</string>
+    <string name="advance">Voraus</string>
+    <string name="disable_camera">Kamera deaktivieren</string>
+    <string name="call_settings">Anrufeinstellungen</string>
+    <string name="web_filter">Webfilter</string>
+    <string name="screen_saver">Bildschirmschoner</string>
+    <string name="phone_settings">Telefoneinstellungen</string>
+    <string name="notification_panel">Benachrichtigungsfeld</string>
+    <string name="security">Sicherheit</string>
+    <string name="launch">Starten</string>
+    <string name="phone_call_subheading">Wenn Sie Probleme beim Telefonieren haben, lassen Sie bitte alle mit dem Telefonieren verbundenen Dienste zu</string>
+    <string name="phone_call_subheading_hint">Hinweis: Suchen Sie im Servicebereich nach dem Telefon</string>
+    <string name="web_filter_subheading">Der Webfilter ist ein leistungsstarker Dienst, mit dem Sie unerwünschte Websites blockieren können</string>
+    <string name="web_filter_supported_browsers">Unterstützte Browser: Chrome, Firefox, Brave, Edge, Opera, Duckduckgo</string>
+    <string name="off">aus</string>
+    <string name="whitelist_websites">Whitelist-Websites</string>
+    <string name="whitelist_website_info">Websites, die unter einer Whitelist gespeichert sind und nur über den Browser aufgerufen werden können</string>
+    <string name="blacklist_websites">Blacklist-Websites</string>
+    <string name="blacklist_websites_info">"Websites, die unter einer schwarzen Liste gespeichert sind, können nicht per Browser aufgerufen werden."</string>
+    <string name="block_adult_websites">Blockieren Sie Websites für Erwachsene</string>
+    <string name="adult_websites_info">Dadurch werden automatisch 800 Websites für Erwachsene blockiert</string>
+    <string name="whitelist">Whitelist</string>
+    <string name="add_websites">Website hinzufügen</string>
+    <string name="website">Webseite</string>
+    <string name="add_websites_subheading">Bitte geben Sie die Website, die Sie hinzufügen möchten, in die Whitelist ein. Beispiel: www.google.com</string>
+    <string name="otp_verification">Otp-Überprüfung</string>
+    <string name="otp_verification_subheading">Bitte geben Sie das 4-stellige otp ein, das wir an Ihre registrierte E-Mail-Adresse gesendet haben</string>
+    <string name="password_prompt_subheading">"Wenn Sie Ihr Passwort noch nicht geändert haben, versuchen Sie es bitte mit 1234"</string>
+    <string name="forget">vergessen?</string>
+    <string name="user_agreement">Nutzungsbedingungen</string>
+    <string name="user_agreement_2">Wir speichern die Liste der installierten App und Telefonnummer auf Ihrem Gerät. Diese Daten werden nur dann von Ihrem Gerät übernommen, wenn Sie die QrCode-Funktion verwenden, und diese Daten werden innerhalb einer Stunde automatisch vom Server entfernt</string>
+    <string name="no_thanks">Nein Danke</string>
+    <string name="accept_amp_continue">Akzeptieren</string>
+    <string name="usage_access">Nutzungszugriff</string>
+    <string name="overlay">Überlagerung</string>
+    <string name="write_settings">Schreibe Einstellungen</string>
+    <string name="sound_access">Soundzugang</string>
+    <string name="other_permissions">Andere Berechtigungen</string>
+    <string name="accessibility">Barrierefreiheit</string>
+    <string name="device_id">Geräte ID</string>
+    <string name="feedback_amp_suggestions">Vorschläge</string>
+    <string name="quick_survey">Schnelle Umfrage</string>
+    <string name="bug_report">Fehlerbericht</string>
+    <string name="visit">Besuch</string>
+    <string name="rate">Bewertung</string>
+    <string name="share">Aktie</string>
+    <string name="app_info">App-Information</string>
+    <string name="check_for_update">Überprüfe auf Updates</string>
+    <string name="developer_contact">Entwicklerkontakt</string>
+    <string name="terms_amp_conditions">Bedingungen</string>
+    <string name="privacy_policy">Datenschutz-Bestimmungen</string>
+    <string name="outgoing">Ausgehend</string>
+    <string name="always_on">auf</string>
+    <string name="always_off">aus</string>
+    <string name="dont_care">"Ist mir egal"</string>
+    <string name="landscape">Landschaft</string>
+    <string name="portrait">Porträt</string>
+    <string name="silent">Leise</string>
+    <string name="normal">Normal</string>
+    <string name="select_activity_sunHeading">Wählen Sie aus, welche Aktivitäten /Seiten /Fenster Sie blockieren möchten</string>
+    <string name="apps">Apps</string>
+    <string name="whitelist_apps">Whitelist Apps</string>
+    <string name="whitelist_services">Whitelist-Dienste</string>
+    <string name="whitelist_apps_subheading">"Wählen Sie aus, auf welche Apps Sie zugreifen möchten"</string>
+    <string name="whitelist_service_heading">"Wählen Sie aus, welchen Diensten Sie Zugriff gewähren möchten"</string>
+    <string name="single_app_subheading">"Wählen Sie aus, welche App im Vordergrund verfügbar sein soll"</string>
+    <string name="blacklist">Schwarze Liste</string>
+    <string name="contacts_blacklist_subheading">"Unter Blacklist gespeicherte Kontakte können Ihr Android-Handy nicht mehr anrufen."</string>
+    <string name="contacts_whitelist_subheading">Unter Whitelist gespeicherte Kontakte können nur noch Ihr Android-Telefon anrufen</string>
+    <string name="delete">Löschen</string>
+    <string name="delete_contact_subheading">Sind Sie sicher, dass Sie diese Elemente löschen möchten?</string>
+    <string name="invalid_name">Ungültiger Name</string>
+    <string name="invalid_number">Ungültige Nummer</string>
+    <string name="hours">Std</string>
+    <string name="minutes">Protokoll</string>
+    <string name="file_exported_to">Datei exportiert nach</string>
+    <string name="select_a_file_to_upload">Wählen Sie eine Datei zum Hochladen aus</string>
+    <string name="please_install_a_file_manager">Bitte installieren Sie einen Dateimanager.</string>
+    <string name="invalid_backup_file">Ungültige Sicherungsdatei</string>
+    <string name="imported_successfully">Erfolgreich importiert</string>
+    <string name="password_successfully_send">Passwort erfolgreich an Ihre E-Mail-Adresse gesendet</string>
+    <string name="password_recovery_failed">Kennwortwiederherstellung fehlgeschlagen</string>
+    <string name="recovery_email_not_registered">Wiederherstellungs-E-Mail nicht registriert</string>
+    <string name="change_your">Ändere dein</string>
+    <string name="forgot_caps">Vergessen ?</string>
+    <string name="password_successfully_changed">Ihr Passwort wurde erfolgreich geändert</string>
+    <string name="invalid_email_address">Ungültige E-Mail-Adresse</string>
+    <string name="password_min">Das Passwort muss mindestens 8 Zeichen enthalten</string>
+    <string name="old_password_must_not_new">Altes Passwort darf kein neues Passwort sein</string>
+    <string name="password_not_match">Passwort stimmt nicht überein</string>
+    <string name="invalid_old_pasword">Ungültiges altes Passwort</string>
+    <string name="phonebook_blacklist_subheading">"Wählen Sie aus, welche Kontakte Sie zur Blacklist hinzufügen möchten"</string>
+    <string name="phonebook_whitelist_subheading">"Wählen Sie aus, welche Kontakte Sie zur Whitelist hinzufügen möchten"</string>
+    <string name="camera_not_init">Kamera-Initialisierungsfehler:</string>
+    <string name="please_wait">Warten Sie mal</string>
+    <string name="invalid_qr">Ungültiger QrCode!</string>
+    <string name="successfully_done">Erfolgreich gemacht!</string>
+    <string name="on_caps">AUF</string>
+    <string name="off_caps">AUS</string>
+    <string name="webfilter_blacklist_subheading">"Websites, die unter einer schwarzen Liste gespeichert sind, können nicht per Browser aufgerufen werden."</string>
+    <string name="webfilter_whitelist_subheading">Websites, die unter einer Whitelist gespeichert sind und nur vom Browser aufgerufen werden können</string>
+    <string name="dialog_website_blacklist_subheading">Bitte geben Sie die Website ein, die Sie in die schwarze Liste aufnehmen möchten. Beispiel: www.google.com</string>
+    <string name="dialog_website_white_subheading">Bitte geben Sie die Website, die Sie hinzufügen möchten, in die Whitelist ein. Beispiel: www.google.com</string>
+    <string name="invalid_url">Ungültige URL</string>
+    <string name="invalid_otp">Ungültiger Otp</string>
+    <string name="user_agreement_1">Um KeyOS zu verbessern und sicherzustellen, dass alle Funktionen ordnungsgemäß funktionieren, werden einige Ihrer Nutzungsdaten anonym erfasst. Sie müssen unsere Datenschutzrichtlinien und Nutzungsbedingungen lesen und ihnen zustimmen. vor der Verwendung von KeyOS</string>
+    <string name="select_all">Wählen Sie Alle</string>
+    <string name="initializing_desktop">Desktop initialisieren…</string>
+    <string name="loading_settings">Einstellungen laden</string>
+    <string name="exiting_keyos">Verlassen</string>
+    <string name="dialog_qrcode_subheading">Scannen Sie diesen KeyOS Qr-Code, um dieselben Einstellungen auf Ihrem KeyOS-Gerät anzuwenden</string>
+
+
 </resources>
