--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -140,4 +140,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Las notificaciones y las aplicaciones están desactivadas"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Cerrar"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Cerrada"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Quiosco de salida</string>
+<!--    <string name="widget_button_text">Widgets</string>-->
+    <string name="button_overview_mode">Modo de vista general</string>
+    <string name="password">Contraseña</string>
+    <string name="activities">Ocupaciones</string>
+    <string name="cancel">Cancelar</string>
+    <string name="done">Hecho</string>
+    <string name="phoneBook">Directorio telefónico</string>
+    <string name="manual">Manual</string>
+    <string name="create_new">Crear nuevo</string>
+    <string name="contact">Contacto</string>
+    <string name="name">Nombre</string>
+    <string name="number">Número</string>
+    <string name="hide_icon">Ícono escondido</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ocultar el icono de inicio /acceso directo de KeyOS</string>
+    <string name="block_activities">Actividades de bloque</string>
+    <string name="block_unwanted_pages_activities_windows">Bloquear páginas /actividades /ventanas no deseadas</string>
+    <string name="time_limit">Límite de tiempo</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Establecer restricción de tiempo Ej. 1 hora por día</string>
+    <string name="system_settings">Ajustes del sistema</string>
+    <string name="restrictions">Restricciones</string>
+    <string name="edit_app">Editar aplicación</string>
+    <string name="import_amp_export">Importación y exportación</string>
+    <string name="scan">Escanear</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Escanee el código qr de keyOS para aplicar la misma política de configuración</string>
+    <string name="generate">Generar</string>
+    <string name="generate_keyos_qr_code">Generar keyOS QrCode</string>
+    <string name="import_text">Importar</string>
+    <string name="import_keyos_setting_from_storage">Importar la configuración de keyOS desde el almacenamiento</string>
+    <string name="export_text">Exportar</string>
+    <string name="import_keyos_setting_to_storage">Importar la configuración de keyOS al almacenamiento</string>
+    <string name="recovery_email">Correo electrónico de recuperación</string>
+    <string name="old_password">Contraseña anterior</string>
+    <string name="confirm_password">Confirmar contraseña</string>
+    <string name="allow_calls">Permitir llamadas</string>
+    <string name="incoming">Entrante</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Esto permitirá que todas las llamadas entrantes a tu móvil</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Esto permitirá que todas las llamadas salientes a su móvil</string>
+    <string name="whitelist_contacts">Contactos de la lista blanca</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Los contactos guardados en la lista blanca solo pueden llamarte</string>
+    <string name="blacklist_contacts">Contactos de la lista negra</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Los contactos guardados en la lista negra no podrán llamarte"</string>
+    <string name="automatic_whitelist">Lista blanca automática</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Permitir llamadas si el contacto está disponible en la agenda telefónica</string>
+    <string name="additional">Adicional</string>
+    <string name="whitelist_amp_blacklist">Lista negra de la lista blanca</string>
+    <string name="phone_book">Directorio telefónico</string>
+    <string name="import_amp_export_settings">Importar configuración de exportación</string>
+    <string name="services">Servicios</string>
+    <string name="single_app">Aplicación única</string>
+    <string name="apps_amp_services">Servicios de aplicaciones</string>
+    <string name="peripheral">Periférico</string>
+    <string name="advance">Avanzar</string>
+    <string name="disable_camera">Desactivar cámara</string>
+    <string name="call_settings">Ajustes de llamada</string>
+    <string name="web_filter">Web Filter</string>
+    <string name="screen_saver">Salvapantallas</string>
+    <string name="phone_settings">Ajustes de teléfono</string>
+    <string name="notification_panel">Panel de notificación</string>
+    <string name="security">Seguridad</string>
+    <string name="launch">Lanzamiento</string>
+    <string name="phone_call_subheading">Si tiene algún problema para realizar llamadas, permita todos los servicios relacionados con la llamada telefónica.</string>
+    <string name="phone_call_subheading_hint">sugerencia: busque el teléfono en la sección de servicio</string>
+    <string name="web_filter_subheading">El filtro web es un servicio poderoso que le permite bloquear sitios web no deseados</string>
+    <string name="web_filter_supported_browsers">Navegadores compatibles: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">Apagado</string>
+    <string name="whitelist_websites">Sitios web de la lista blanca</string>
+    <string name="whitelist_website_info">Los sitios web se guardan en la lista blanca a los que solo se puede acceder mediante el navegador</string>
+    <string name="blacklist_websites">Sitios web de lista negra</string>
+    <string name="blacklist_websites_info">"Los sitios web guardados en la lista negra no podrán acceder mediante el navegador"</string>
+    <string name="block_adult_websites">Bloquear sitios web para adultos</string>
+    <string name="adult_websites_info">Esto bloqueará automáticamente 800 sitios web para adultos.</string>
+    <string name="whitelist">Lista blanca</string>
+    <string name="add_websites">Agregar sitio web</string>
+    <string name="website">Sitio web</string>
+    <string name="add_websites_subheading">Ingrese el sitio web que desea agregar a la lista blanca, por ejemplo: www.google.com</string>
+    <string name="otp_verification">Verificación Otp</string>
+    <string name="otp_verification_subheading">Ingrese el otp de 4 dígitos que le enviamos a su dirección de correo electrónico registrada</string>
+    <string name="password_prompt_subheading">"si aún no ha cambiado su contraseña, intente 1234"</string>
+    <string name="forget">olvidar ?</string>
+    <string name="user_agreement">Acuerdo del Usuario</string>
+    <string name="user_agreement_2">Almacenaremos la lista de la aplicación instalada y el número de teléfono en su dispositivo. Estos datos se tomarán de su dispositivo solo si está utilizando la función QrCode y estos datos se eliminarán automáticamente del servidor en una hora</string>
+    <string name="no_thanks">No, gracias</string>
+    <string name="accept_amp_continue">Aceptar</string>
+    <string name="usage_access">Acceso de uso</string>
+    <string name="overlay">Cubrir</string>
+    <string name="write_settings">Configuración de escritura</string>
+    <string name="sound_access">Acceso de sonido</string>
+    <string name="other_permissions">Otros permisos</string>
+    <string name="accessibility">Accesibilidad</string>
+    <string name="device_id">ID del dispositivo</string>
+    <string name="feedback_amp_suggestions">sugerencias</string>
+    <string name="quick_survey">Encuesta rápida</string>
+    <string name="bug_report">Informe de error</string>
+    <string name="visit">Visitar</string>
+    <string name="rate">Velocidad</string>
+    <string name="share">Compartir</string>
+    <string name="app_info">Informacion de la applicacion</string>
+    <string name="check_for_update">Buscar actualizaciones</string>
+    <string name="developer_contact">Contacto del desarrollador</string>
+    <string name="terms_amp_conditions">Condiciones</string>
+    <string name="privacy_policy">Política de privacidad</string>
+    <string name="outgoing">Saliente</string>
+    <string name="always_on">en</string>
+    <string name="always_off">apagado</string>
+    <string name="dont_care">"No me importa"</string>
+    <string name="landscape">Paisaje</string>
+    <string name="portrait">Retrato</string>
+    <string name="silent">Silencio</string>
+    <string name="normal">Normal</string>
+    <string name="select_activity_sunHeading">Seleccione qué actividades /páginas /ventanas desea bloquear</string>
+    <string name="apps">Aplicaciones</string>
+    <string name="whitelist_apps">Aplicaciones de la lista blanca</string>
+    <string name="whitelist_services">Servicios de lista blanca</string>
+    <string name="whitelist_apps_subheading">"Seleccione las aplicaciones a las que desea acceder"</string>
+    <string name="whitelist_service_heading">"Seleccione los servicios a los que desea dar acceso"</string>
+    <string name="single_app_subheading">"Seleccione la aplicación que desea que esté disponible en primer plano"</string>
+    <string name="blacklist">Lista negra</string>
+    <string name="contacts_blacklist_subheading">"Los contactos guardados en la lista negra ya no podrán llamar a su teléfono Android"</string>
+    <string name="contacts_whitelist_subheading">Los contactos guardados en la lista blanca ya solo pueden llamar a su teléfono Android</string>
+    <string name="delete">Eliminar</string>
+    <string name="delete_contact_subheading">¿Estás seguro de que quieres eliminar estos elementos?</string>
+    <string name="invalid_name">Nombre inválido</string>
+    <string name="invalid_number">Número invalido</string>
+    <string name="hours">Horas</string>
+    <string name="minutes">Minutos</string>
+    <string name="file_exported_to">Archivo exportado a</string>
+    <string name="select_a_file_to_upload">Seleccione un archivo para cargar</string>
+    <string name="please_install_a_file_manager">Instale un Administrador de archivos.</string>
+    <string name="invalid_backup_file">Archivo de copia de seguridad no válido</string>
+    <string name="imported_successfully">Importado correctamente</string>
+    <string name="password_successfully_send">Contraseña enviada correctamente a su dirección de correo electrónico</string>
+    <string name="password_recovery_failed">Falló la recuperación de contraseña</string>
+    <string name="recovery_email_not_registered">Correo electrónico de recuperación no registrado</string>
+    <string name="change_your">Cambia tu</string>
+    <string name="forgot_caps">Olvidó ?</string>
+    <string name="password_successfully_changed">tu contraseña ha sido cambiada exitosamente</string>
+    <string name="invalid_email_address">Dirección de correo electrónico inválida</string>
+    <string name="password_min">La contraseña debe contener un mínimo de 8 caracteres</string>
+    <string name="old_password_must_not_new">La contraseña anterior no debe ser una contraseña nueva</string>
+    <string name="password_not_match">La contraseña no coincide</string>
+    <string name="invalid_old_pasword">Contraseña antigua no válida</string>
+    <string name="phonebook_blacklist_subheading">"Seleccione los contactos que desea agregar a la lista negra"</string>
+    <string name="phonebook_whitelist_subheading">"Seleccione los contactos que desea agregar a la lista blanca"</string>
+    <string name="camera_not_init">Error de inicialización de la cámara:</string>
+    <string name="please_wait">por favor espera</string>
+    <string name="invalid_qr">QrCode no válido!</string>
+    <string name="successfully_done">¡Hecho exitosamente!</string>
+    <string name="on_caps">EN</string>
+    <string name="off_caps">APAGADO</string>
+    <string name="webfilter_blacklist_subheading">"Los sitios web guardados en la lista negra no podrán acceder mediante el navegador"</string>
+    <string name="webfilter_whitelist_subheading">Los sitios web se guardan en la lista blanca a los que solo se puede acceder mediante el navegador</string>
+    <string name="dialog_website_blacklist_subheading">Ingrese el sitio web que desea agregar a la lista negra, por ejemplo: www.google.com</string>
+    <string name="dialog_website_white_subheading">Ingrese el sitio web que desea agregar a la lista blanca, por ejemplo: www.google.com</string>
+    <string name="invalid_url">URL invalida</string>
+    <string name="invalid_otp">Otp no válido</string>
+    <string name="user_agreement_1">Para mejorar KeyOS y asegurarse de que todas las funciones funcionen correctamente, algunos de sus datos de uso se recopilarán de forma anónima. Debe leer y aceptar nuestra Política y Términos de Privacidad. antes de usar KeyOS</string>
+    <string name="select_all">Seleccionar todo</string>
+    <string name="initializing_desktop">Inicializando escritorio…</string>
+    <string name="loading_settings">Cargando configuración</string>
+    <string name="exiting_keyos">Saliendo</string>
+    <string name="dialog_qrcode_subheading">Escanee este código KeyOS Qr para aplicar la misma configuración en su dispositivo KeyOS</string>
 </resources>
