--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -139,4 +139,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Märguanded ja rakendused on välja lülitatud"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Sule"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Suletud"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Väljuge kioskist</string>
+    <string name="button_overview_mode">Ülevaate režiim</string>
+    <string name="password">Parool</string>
+    <string name="activities">Tegevused</string>
+    <string name="cancel">Tühista</string>
+    <string name="done">Valmis</string>
+    <string name="phoneBook">Telefoniraamat</string>
+    <string name="manual">Käsitsi</string>
+    <string name="create_new">Loo uus</string>
+    <string name="contact">Võta ühendust</string>
+    <string name="name">Nimi</string>
+    <string name="number">Arv</string>
+    <string name="hide_icon">Peida ikoon</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">peida käivitaja /otsetee ikoon KeyOS-i kodust</string>
+    <string name="block_activities">Blokeeri tegevused</string>
+    <string name="block_unwanted_pages_activities_windows">Blokeerige soovimatud lehed /tegevused /aknad</string>
+    <string name="time_limit">Ajapiirang</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Määra ajastuspiirang Nt. 1 tund päevas</string>
+    <string name="system_settings">Süsteemisätted</string>
+    <string name="restrictions">Piirangud</string>
+    <string name="edit_app">Redigeeri rakendust</string>
+    <string name="import_amp_export">Import ja eksport</string>
+    <string name="scan">Skannimine</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Skannige keyOS qr-koodi, et rakendada sama seadete poliitikat</string>
+    <string name="generate">Loo</string>
+    <string name="generate_keyos_qr_code">Genereeri keyOS QrCode</string>
+    <string name="import_text">Impordi</string>
+    <string name="import_keyos_setting_from_storage">Impordi keyOS-i seade salvestusruumist</string>
+    <string name="export_text">Eksport</string>
+    <string name="import_keyos_setting_to_storage">Impordi keyOS-i seade salvestusruumi</string>
+    <string name="recovery_email">E-posti varuaadress</string>
+    <string name="old_password">vana parool</string>
+    <string name="confirm_password">Kinnita salasõna</string>
+    <string name="allow_calls">Luba kõned</string>
+    <string name="incoming">Sissetulev</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">See võimaldab kõiki sissetulevaid kõnesid teie mobiiltelefonile</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">See võimaldab kõiki väljuvaid kõnesid teie mobiiltelefonile</string>
+    <string name="whitelist_contacts">Kontaktide lubatud loendisse lisamine</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontaktid salvestatakse lubatud loendi alla ja saavad ainult teile helistada</string>
+    <string name="blacklist_contacts">Kontaktide must nimekiri</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Musta nimekirja alla salvestatud kontaktid ei saa teile helistada"</string>
+    <string name="automatic_whitelist">Automaatne lubatud loend</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Luba kõned, kui kontakt on telefoniraamatus saadaval</string>
+    <string name="additional">Lisaks</string>
+    <string name="whitelist_amp_blacklist">Valgete nimekirja must nimekiri</string>
+    <string name="phone_book">Telefoniraamat</string>
+    <string name="import_amp_export_settings">Importige ekspordiseaded</string>
+    <string name="services">Teenused</string>
+    <string name="single_app">Üks rakendus</string>
+    <string name="apps_amp_services">Rakenduste teenused</string>
+    <string name="peripheral">Perifeerne</string>
+    <string name="advance">Ettemaks</string>
+    <string name="disable_camera">Keela kaamera</string>
+    <string name="call_settings">Kõneseaded</string>
+    <string name="web_filter">Veebifilter</string>
+    <string name="screen_saver">Ekraanisäästja</string>
+    <string name="phone_settings">Telefoni seaded</string>
+    <string name="notification_panel">Teatepaneel</string>
+    <string name="security">Turvalisus</string>
+    <string name="launch">Käivitage</string>
+    <string name="phone_call_subheading">Kui teil on probleeme helistamisega, lubage palun kõik telefonikõnedega seotud teenused</string>
+    <string name="phone_call_subheading_hint">vihje: telefoni otsimine teenuse jaotisest</string>
+    <string name="web_filter_subheading">Veebifilter on võimas teenus, mis võimaldab blokeerida soovimatud veebisaidid</string>
+    <string name="web_filter_supported_browsers">Toetatud brauserid: kroom, Firefox, julge, serv, ooper, duckduckgo</string>
+    <string name="off">Väljas</string>
+    <string name="whitelist_websites">Lubatud loendis olevad veebisaidid</string>
+    <string name="whitelist_website_info">Veebisaidid salvestatakse lubatud loendi alla, millele pääsevad juurde ainult brauserid</string>
+    <string name="blacklist_websites">Musta nimekirja veebisaidid</string>
+    <string name="blacklist_websites_info">"Musta nimekirja alla salvestatud veebisaidid ei pääse brauseri kaudu juurde"</string>
+    <string name="block_adult_websites">Blokeeri täiskasvanute veebisaidid</string>
+    <string name="adult_websites_info">See blokeerib automaatselt 800 täiskasvanutele mõeldud veebisaiti</string>
+    <string name="whitelist">Lubatud loend</string>
+    <string name="add_websites">Lisage veebisait</string>
+    <string name="website">Veebisait</string>
+    <string name="add_websites_subheading">Sisestage veebisait, mille soovite lisada lubatud loendisse, nt: www.google.com</string>
+    <string name="otp_verification">Otp kontrollimine</string>
+    <string name="otp_verification_subheading">Sisestage neljakohaline otsepunkt, mille saatsime teie registreeritud e-posti aadressile</string>
+    <string name="password_prompt_subheading">"kui te pole veel oma parooli muutnud, proovige 1234"</string>
+    <string name="forget">unustama?</string>
+    <string name="user_agreement">Kasutajaleping</string>
+    <string name="user_agreement_2">Salvestame teie seadmesse installitud rakenduse ja telefoninumbri loendi. Need andmed võetakse teie seadmest ainult siis, kui kasutate QrCode\'i funktsiooni ja need andmed eemaldatakse automaatselt ühe tunni jooksul serverist</string>
+    <string name="no_thanks">Ei aitäh</string>
+    <string name="accept_amp_continue">Nõus</string>
+    <string name="usage_access">Kasutusjuurdepääs</string>
+    <string name="overlay">Ülekate</string>
+    <string name="write_settings">Seadete kirjutamine</string>
+    <string name="sound_access">Heli juurdepääs</string>
+    <string name="other_permissions">Muud load</string>
+    <string name="accessibility">Juurdepääsetavus</string>
+    <string name="device_id">Seadme ID</string>
+    <string name="feedback_amp_suggestions">ettepanekud</string>
+    <string name="quick_survey">Kiire küsitlus</string>
+    <string name="bug_report">Veateade</string>
+    <string name="visit">Külasta</string>
+    <string name="rate">Hinda</string>
+    <string name="share">Jaga</string>
+    <string name="app_info">Rakenduse teave</string>
+    <string name="check_for_update">Otsi uuendusi</string>
+    <string name="developer_contact">Arendaja kontakt</string>
+    <string name="terms_amp_conditions">Tingimused</string>
+    <string name="privacy_policy">Privaatsuspoliitika</string>
+    <string name="outgoing">Väljaminev</string>
+    <string name="always_on">peal</string>
+    <string name="always_off">väljas</string>
+    <string name="dont_care">"Ei huvita"</string>
+    <string name="landscape">Maastik</string>
+    <string name="portrait">Portree</string>
+    <string name="silent">Vaikne</string>
+    <string name="normal">Normaalne</string>
+    <string name="select_activity_sunHeading">Valige tegevused /lehed /aknad, mille soovite blokeerida</string>
+    <string name="apps">Rakendused</string>
+    <string name="whitelist_apps">Lubatud loendis olevad rakendused</string>
+    <string name="whitelist_services">Lubatud loenditeenused</string>
+    <string name="whitelist_apps_subheading">"Valige rakendused, millele soovite juurdepääsu võimaldada"</string>
+    <string name="whitelist_service_heading">"Valige teenused, millele soovite juurdepääsu anda"</string>
+    <string name="single_app_subheading">"Valige rakendus, mille soovite esiplaanil saada"</string>
+    <string name="blacklist">Must nimekiri</string>
+    <string name="contacts_blacklist_subheading">"Musta nimekirja alla salvestatud kontaktid ei saa enam teie Android-telefonile helistada"</string>
+    <string name="contacts_whitelist_subheading">Lubatud loendisse salvestatud kontaktid saavad teie Android-telefonile enam helistada</string>
+    <string name="delete">Kustuta</string>
+    <string name="delete_contact_subheading">Kas soovite kindlasti need üksused kustutada</string>
+    <string name="invalid_name">Vale nimi</string>
+    <string name="invalid_number">Kehtetu number</string>
+    <string name="hours">Tunnid</string>
+    <string name="minutes">Protokollid</string>
+    <string name="file_exported_to">Fail on eksporditud</string>
+    <string name="select_a_file_to_upload">Valige üleslaaditav fail</string>
+    <string name="please_install_a_file_manager">Palun installige failihaldur.</string>
+    <string name="invalid_backup_file">Vale varundusfail</string>
+    <string name="imported_successfully">Imporditud edukalt</string>
+    <string name="password_successfully_send">Teie e-posti aadressile saadeti parool edukalt</string>
+    <string name="password_recovery_failed">Parooli taastamine nurjus</string>
+    <string name="recovery_email_not_registered">E-posti varuaadress pole registreeritud</string>
+    <string name="change_your">Muutke oma</string>
+    <string name="forgot_caps">Unustasid?</string>
+    <string name="password_successfully_changed">Teie parool on edukalt muudetud</string>
+    <string name="invalid_email_address">vale emaili aadress</string>
+    <string name="password_min">Parool peab sisaldama vähemalt 8 tähemärki</string>
+    <string name="old_password_must_not_new">Vana parool ei tohi olla uus parool</string>
+    <string name="password_not_match">Parool ei ühti</string>
+    <string name="invalid_old_pasword">Vale vana parool</string>
+    <string name="phonebook_blacklist_subheading">"Valige, millised kontaktid soovite musta nimekirja lisada"</string>
+    <string name="phonebook_whitelist_subheading">"Valige, millised kontaktid soovite lubatud loendisse lisada"</string>
+    <string name="camera_not_init">Kaamera lähtestamisviga:</string>
+    <string name="please_wait">Palun oota</string>
+    <string name="invalid_qr">Vale QrCode!</string>
+    <string name="successfully_done">Edukalt tehtud!</string>
+    <string name="on_caps">PEAL</string>
+    <string name="off_caps">VÄLJAS</string>
+    <string name="webfilter_blacklist_subheading">"Musta nimekirja alla salvestatud veebisaidid ei pääse brauseri kaudu juurde"</string>
+    <string name="webfilter_whitelist_subheading">Veebisaidid salvestatakse lubatud loendi alla, millele pääsevad juurde ainult brauserid</string>
+    <string name="dialog_website_blacklist_subheading">Sisestage veebisait, mille soovite musta nimekirja lisada, nt: www.google.com</string>
+    <string name="dialog_website_white_subheading">Sisestage veebisait, mille soovite lisada lubatud loendisse, nt: www.google.com</string>
+    <string name="invalid_url">Vigane URL</string>
+    <string name="invalid_otp">Kehtetu Otp</string>
+    <string name="user_agreement_1">KeyOS-i täiustamiseks ja kõigi funktsioonide korraliku toimimise tagamiseks kogutakse osa teie kasutusandmetest anonüümselt. Peate tutvuma meie privaatsuseeskirjade ja tingimustega ning nõustuma nendega. enne KeyOS-i kasutamist</string>
+    <string name="select_all">Vali kõik</string>
+    <string name="initializing_desktop">Töölaua lähtestamine ...</string>
+    <string name="loading_settings">Seadete laadimine</string>
+    <string name="exiting_keyos">Väljumine</string>
+    <string name="dialog_qrcode_subheading">Skannige see KeyOS Qr-kood, et rakendada samu seadeid oma KeyOS-seadmes</string>
+
+
+
 </resources>
