--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -140,4 +140,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Ilmoitukset ja sovellukset ovat poissa käytöstä"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Sulje"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Suljettu"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Poistu kioskista</string>
+    <string name="button_overview_mode">Yleiskatsaus-tila</string>
+    <string name="password">Salasana</string>
+    <string name="activities">Toiminta</string>
+    <string name="cancel">Peruuttaa</string>
+    <string name="done">Tehty</string>
+    <string name="phoneBook">Puhelinluettelo</string>
+    <string name="manual">Manuaalinen</string>
+    <string name="create_new">Luo uusi</string>
+    <string name="contact">Ottaa yhteyttä</string>
+    <string name="name">Nimi</string>
+    <string name="number">Määrä</string>
+    <string name="hide_icon">Piilota kuvake</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">piilota kantoraketti /pikakuvake KeyOS-kodista</string>
+    <string name="block_activities">Estä aktiviteetit</string>
+    <string name="block_unwanted_pages_activities_windows">Estä ei-toivotut sivut /toiminnot /ikkunat</string>
+    <string name="time_limit">Määräaika</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Aseta ajoitusrajoitus Esim. 1 h päivässä</string>
+    <string name="system_settings">Järjestelmäasetukset</string>
+    <string name="restrictions">Rajoitukset</string>
+    <string name="edit_app">Muokkaa sovellusta</string>
+    <string name="import_amp_export">Tuonti ja vienti</string>
+    <string name="scan">Skannata</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Käytä samaa asetuskäytäntöä skannaamalla keyOS qr -koodi</string>
+    <string name="generate">Tuottaa</string>
+    <string name="generate_keyos_qr_code">Luo keyOS QrCode</string>
+    <string name="import_text">Tuonti</string>
+    <string name="import_keyos_setting_from_storage">Tuo keyOS-asetus tallennustilasta</string>
+    <string name="export_text">Viedä</string>
+    <string name="import_keyos_setting_to_storage">Tuo keyOS-asetus tallennustilaan</string>
+    <string name="recovery_email">Palautussähköposti</string>
+    <string name="old_password">vanha salasana</string>
+    <string name="confirm_password">Vahvista salasana</string>
+    <string name="allow_calls">Salli puhelut</string>
+    <string name="incoming">Saapuva</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Tämä sallii kaikki saapuvat puhelut matkapuhelimeesi</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Tämä sallii kaikki lähtevät puhelut matkapuhelimeesi</string>
+    <string name="whitelist_contacts">Sallittujen luettelo yhteystiedot</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Yhteystiedot, jotka on tallennettu sallittujen luetteloon, voivat soittaa sinulle</string>
+    <string name="blacklist_contacts">Mustan listan yhteystiedot</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Mustalle listalle tallennetut yhteystiedot eivät voi soittaa sinulle"</string>
+    <string name="automatic_whitelist">Automaattinen sallittujen luettelo</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Salli puhelut, jos yhteyshenkilö on käytettävissä puhelinluettelossa</string>
+    <string name="additional">Lisä</string>
+    <string name="whitelist_amp_blacklist">Sallittujen luettelo musta lista</string>
+    <string name="phone_book">Puhelinluettelo</string>
+    <string name="import_amp_export_settings">Tuo vienti-asetukset</string>
+    <string name="services">Palvelut</string>
+    <string name="single_app">Yksi sovellus</string>
+    <string name="apps_amp_services">Apps-palvelut</string>
+    <string name="peripheral">Perifeerinen</string>
+    <string name="advance">Ennakko</string>
+    <string name="disable_camera">Poista kamera käytöstä</string>
+    <string name="call_settings">Puheluasetukset</string>
+    <string name="web_filter">Verkkosuodatin</string>
+    <string name="screen_saver">Näytönsäästäjä</string>
+    <string name="phone_settings">Puhelinasetukset</string>
+    <string name="notification_panel">Ilmoituspaneeli</string>
+    <string name="security">Turvallisuus</string>
+    <string name="launch">Tuoda markkinoille</string>
+    <string name="phone_call_subheading">Jos sinulla on vaikeuksia puhelujen soittamisessa, salli kaikki puheluun liittyvät palvelut</string>
+    <string name="phone_call_subheading_hint">vihje: etsi puhelinta palveluosiosta</string>
+    <string name="web_filter_subheading">Verkkosuodatin on tehokas palvelu, jonka avulla voit estää ei-toivotut verkkosivustot</string>
+    <string name="web_filter_supported_browsers">Tuetut selaimet: kromi, Firefox, rohkea, reuna, ooppera, duckduckgo</string>
+    <string name="off">Vinossa</string>
+    <string name="whitelist_websites">Sallittujen luettelo verkkosivustot</string>
+    <string name="whitelist_website_info">Sivustot tallennetaan sallittujen luetteloon, ja niihin pääsee vain selaimen avulla</string>
+    <string name="blacklist_websites">Mustan listan verkkosivustot</string>
+    <string name="blacklist_websites_info">"Mustalle listalle tallennetut verkkosivustot eivät voi käyttää selainta"</string>
+    <string name="block_adult_websites">Estä aikuisille tarkoitetut verkkosivustot</string>
+    <string name="adult_websites_info">Tämä estää automaattisesti 800 aikuisille tarkoitettua verkkosivustoa</string>
+    <string name="whitelist">Sallittujen luettelo</string>
+    <string name="add_websites">Lisää verkkosivusto</string>
+    <string name="website">Verkkosivusto</string>
+    <string name="add_websites_subheading">Anna verkkosivusto, jonka haluat lisätä sallittujen luetteloon, esim. Www.google.com</string>
+    <string name="otp_verification">Otp-vahvistus</string>
+    <string name="otp_verification_subheading">Anna nelinumeroinen otp, jonka lähetimme rekisteröityyn sähköpostiosoitteeseesi</string>
+    <string name="password_prompt_subheading">"jos et ole vielä vaihtanut salasanaasi, kokeile 1234"</string>
+    <string name="forget">unohtaa?</string>
+    <string name="user_agreement">Käyttäjäsopimus</string>
+    <string name="user_agreement_2">Tallennamme laitteellesi luettelon asennetuista sovelluksista ja puhelinnumeroista. Nämä tiedot otetaan laitteeltasi vain, jos käytät QrCode-ominaisuutta, ja nämä tiedot poistetaan automaattisesti palvelimelta tunnissa</string>
+    <string name="no_thanks">Ei kiitos</string>
+    <string name="accept_amp_continue">Hyväksyä</string>
+    <string name="usage_access">Käyttöoikeus</string>
+    <string name="overlay">Päällekkäin</string>
+    <string name="write_settings">Kirjoita asetukset</string>
+    <string name="sound_access">Äänen käyttö</string>
+    <string name="other_permissions">Muut oikeudet</string>
+    <string name="accessibility">Esteettömyys</string>
+    <string name="device_id">Laitetunnus</string>
+    <string name="feedback_amp_suggestions">ehdotukset</string>
+    <string name="quick_survey">Pikakysely</string>
+    <string name="bug_report">Virhe raportti</string>
+    <string name="visit">Vierailla</string>
+    <string name="rate">Hinta</string>
+    <string name="share">Jaa</string>
+    <string name="app_info">Sovelluksen tiedot</string>
+    <string name="check_for_update">Tarkista päivitykset</string>
+    <string name="developer_contact">Kehittäjän yhteyshenkilö</string>
+    <string name="terms_amp_conditions">Ehdot</string>
+    <string name="privacy_policy">Tietosuojakäytäntö</string>
+    <string name="outgoing">Lähtevä</string>
+    <string name="always_on">päällä</string>
+    <string name="always_off">vinossa</string>
+    <string name="dont_care">"Älä välitä"</string>
+    <string name="landscape">Maisema</string>
+    <string name="portrait">Muotokuva</string>
+    <string name="silent">Hiljainen</string>
+    <string name="normal">Normaali</string>
+    <string name="select_activity_sunHeading">Valitse estettävät toiminnot /sivut /ikkunat</string>
+    <string name="apps">Sovellukset</string>
+    <string name="whitelist_apps">Sallittujen luettelo -sovellukset</string>
+    <string name="whitelist_services">Palvelut sallittujen luetteloon</string>
+    <string name="whitelist_apps_subheading">"Valitse, mitkä sovellukset haluat käyttää."</string>
+    <string name="whitelist_service_heading">"Valitse palvelut, joille haluat antaa pääsyn"</string>
+    <string name="single_app_subheading">"Valitse etualalla käytettävissä oleva sovellus"</string>
+    <string name="blacklist">Musta lista</string>
+    <string name="contacts_blacklist_subheading">"Mustalle listalle tallennetut yhteystiedot eivät voi enää soittaa Android-puhelimeesi"</string>
+    <string name="contacts_whitelist_subheading">Sallittujen luetteloon tallennetut yhteystiedot voivat enää soittaa vain Android-puhelimeesi</string>
+    <string name="delete">Poistaa</string>
+    <string name="delete_contact_subheading">Haluatko varmasti poistaa nämä kohteet</string>
+    <string name="invalid_name">Epäkelpo nimi</string>
+    <string name="invalid_number">Väärä numero</string>
+    <string name="hours">Tunnit</string>
+    <string name="minutes">Pöytäkirja</string>
+    <string name="file_exported_to">Tiedosto vietiin</string>
+    <string name="select_a_file_to_upload">Valitse ladattava tiedosto</string>
+    <string name="please_install_a_file_manager">Asenna tiedostojen hallinta.</string>
+    <string name="invalid_backup_file">Virheellinen varmuuskopiotiedosto</string>
+    <string name="imported_successfully">Tuonti onnistui</string>
+    <string name="password_successfully_send">Salasana lähetetty sähköpostiosoitteeseesi</string>
+    <string name="password_recovery_failed">Salasanan palautus epäonnistui</string>
+    <string name="recovery_email_not_registered">Palautussähköpostia ei ole rekisteröity</string>
+    <string name="change_your">Vaihda sinun</string>
+    <string name="forgot_caps">Unohtuiko?</string>
+    <string name="password_successfully_changed">Salasanasi on vaihdettu onnistuneesti</string>
+    <string name="invalid_email_address">Virheellinen sähköpostiosoite</string>
+    <string name="password_min">Salasanassa on oltava vähintään 8 merkkiä</string>
+    <string name="old_password_must_not_new">Vanha salasana ei saa olla uusi salasana</string>
+    <string name="password_not_match">Salasana ei täsmää</string>
+    <string name="invalid_old_pasword">Virheellinen vanha salasana</string>
+    <string name="phonebook_blacklist_subheading">"Valitse kontaktit, jotka haluat lisätä mustalle listalle"</string>
+    <string name="phonebook_whitelist_subheading">"Valitse kontaktit, jotka haluat lisätä sallittujen luetteloon"</string>
+    <string name="camera_not_init">Kameran alustusvirhe:</string>
+    <string name="please_wait">Odota</string>
+    <string name="invalid_qr">Virheellinen QrCode!</string>
+    <string name="successfully_done">Onnistui!</string>
+    <string name="on_caps">PÄÄLLÄ</string>
+    <string name="off_caps">VINOSSA</string>
+    <string name="webfilter_blacklist_subheading">"Mustalle listalle tallennetut verkkosivustot eivät voi käyttää selainta"</string>
+    <string name="webfilter_whitelist_subheading">Sivustot tallennetaan sallittujen luetteloon, ja niihin pääsee vain selaimen avulla</string>
+    <string name="dialog_website_blacklist_subheading">Anna verkkosivusto, jonka haluat lisätä mustalle listalle, esim. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Anna verkkosivusto, jonka haluat lisätä sallittujen luetteloon, esim. Www.google.com</string>
+    <string name="invalid_url">Virheellinen URL</string>
+    <string name="invalid_otp">Virheellinen Otp</string>
+    <string name="user_agreement_1">Parantamaan KeyOSia ja varmistamaan, että kaikki ominaisuudet toimivat oikein, osa käyttötiedoistasi kerätään nimettömästi. Sinun on luettava ja hyväksyttävä tietosuojakäytäntömme ja ehdot. ennen KeyOSin käyttöä</string>
+    <string name="select_all">Valitse kaikki</string>
+    <string name="initializing_desktop">Alustetaan työpöytää…</string>
+    <string name="loading_settings">Asetusten lataaminen</string>
+    <string name="exiting_keyos">Poistuminen</string>
+    <string name="dialog_qrcode_subheading">Skannaa tämä KeyOS Qr -koodi, jos haluat käyttää samoja asetuksia KeyOS-laitteessasi</string>
+
+
 </resources>
