--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -140,4 +140,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Les notifications et les applications sont désactivées"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Fermer"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Fermé"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Quitter le kiosque</string>
+    <string name="button_overview_mode">Mode aperçu</string>
+    <string name="password">Mot de passe</string>
+    <string name="activities">Activités</string>
+    <string name="cancel">Annuler</string>
+    <string name="done">Terminé</string>
+    <string name="phoneBook">Annuaire</string>
+    <string name="manual">Manuel</string>
+    <string name="create_new">Créer un nouveau</string>
+    <string name="contact">Contact</string>
+    <string name="name">Nom</string>
+    <string name="number">Nombre</string>
+    <string name="hide_icon">Icône cachée</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">masquer l\'icône du lanceur /raccourci de la page d\'accueil KeyOS</string>
+    <string name="block_activities">Bloquer les activités</string>
+    <string name="block_unwanted_pages_activities_windows">Bloquer les pages /activités /fenêtres indésirables</string>
+    <string name="time_limit">Limite de temps</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Définir la restriction de temps Par ex. 1h par jour</string>
+    <string name="system_settings">Les paramètres du système</string>
+    <string name="restrictions">Restrictions</string>
+    <string name="edit_app">Modifier l\'application</string>
+    <string name="import_amp_export">Importer /Exporter</string>
+    <string name="scan">Analyse</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Scannez le code qr keyOS pour appliquer la même politique de paramètres</string>
+    <string name="generate">produire</string>
+    <string name="generate_keyos_qr_code">Générer keyOS QrCode</string>
+    <string name="import_text">Importer</string>
+    <string name="import_keyos_setting_from_storage">Importer le paramètre keyOS à partir du stockage</string>
+    <string name="export_text">Exportation</string>
+    <string name="import_keyos_setting_to_storage">Importer le paramètre keyOS dans le stockage</string>
+    <string name="recovery_email">E-mail de secours</string>
+    <string name="old_password">ancien mot de passe</string>
+    <string name="confirm_password">Confirmez le mot de passe</string>
+    <string name="allow_calls">Autoriser les appels</string>
+    <string name="incoming">Entrant</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Cela permettra à tous les appels entrants sur votre mobile</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Cela permettra tous les appels sortants vers votre mobile</string>
+    <string name="whitelist_contacts">Contacts de la liste blanche</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Les contacts enregistrés dans la liste blanche ne peuvent vous appeler</string>
+    <string name="blacklist_contacts">Contacts de la liste noire</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Les contacts enregistrés dans la liste noire ne pourront pas vous appeler"</string>
+    <string name="automatic_whitelist">Liste blanche automatique</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Autoriser les appels si le contact est disponible dans le répertoire</string>
+    <string name="additional">Additionnel</string>
+    <string name="whitelist_amp_blacklist">Liste noire de la liste blanche</string>
+    <string name="phone_book">Annuaire</string>
+    <string name="import_amp_export_settings">Importer les paramètres d\'exportation</string>
+    <string name="services">Prestations de service</string>
+    <string name="single_app">Application unique</string>
+    <string name="apps_amp_services">Services d\'applications</string>
+    <string name="peripheral">Périphérique</string>
+    <string name="advance">Avance</string>
+    <string name="disable_camera">Désactiver la caméra</string>
+    <string name="call_settings">Paramètres d\'appel</string>
+    <string name="web_filter">Filtre Web</string>
+    <string name="screen_saver">Économiseur d\'écran</string>
+    <string name="phone_settings">Les paramètres du téléphone</string>
+    <string name="notification_panel">Panneau de notification</string>
+    <string name="security">Sécurité</string>
+    <string name="launch">lancement</string>
+    <string name="phone_call_subheading">Si vous rencontrez des problèmes pour passer des appels, veuillez autoriser tous les services liés à l\'appel téléphonique</string>
+    <string name="phone_call_subheading_hint">astuce: rechercher un téléphone dans la section service</string>
+    <string name="web_filter_subheading">Le filtre Web est un service puissant qui vous permet de bloquer les sites Web indésirables</string>
+    <string name="web_filter_supported_browsers">Navigateurs pris en charge: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">De</string>
+    <string name="whitelist_websites">Sites Web sur liste blanche</string>
+    <string name="whitelist_website_info">Les sites Web enregistrés sous liste blanche ne sont accessibles que par le navigateur</string>
+    <string name="blacklist_websites">Sites Web sur liste noire</string>
+    <string name="blacklist_websites_info">"Les sites Web enregistrés sous liste noire ne seront pas accessibles par navigateur"</string>
+    <string name="block_adult_websites">Bloquer les sites Web pour adultes</string>
+    <string name="adult_websites_info">Cela bloquera automatiquement 800 sites Web pour adultes</string>
+    <string name="whitelist">Liste blanche</string>
+    <string name="add_websites">Ajouter un site Web</string>
+    <string name="website">Site Internet</string>
+    <string name="add_websites_subheading">Veuillez saisir le site Web que vous souhaitez ajouter à la liste blanche, par exemple: www.google.com</string>
+    <string name="otp_verification">Vérification Otp</string>
+    <string name="otp_verification_subheading">Veuillez saisir l\'otp à 4 chiffres que nous avons envoyé à votre adresse e-mail enregistrée</string>
+    <string name="password_prompt_subheading">"si vous n\'avez pas encore changé votre mot de passe, veuillez essayer le 1234"</string>
+    <string name="forget">oublier ?</string>
+    <string name="user_agreement">Accord de l\'utilisateur</string>
+    <string name="user_agreement_2">Nous stockerons la liste des applications installées et le numéro de téléphone sur votre appareil. Ces données ne seront extraites de votre appareil que si vous utilisez la fonctionnalité QrCode et ces données seront automatiquement supprimées du serveur dans un délai d\'une heure.</string>
+    <string name="no_thanks">Non merci</string>
+    <string name="accept_amp_continue">J\'accepte</string>
+    <string name="usage_access">Accès à l\'utilisation</string>
+    <string name="overlay">Recouvrir</string>
+    <string name="write_settings">Ecrire les paramètres</string>
+    <string name="sound_access">Accès au son</string>
+    <string name="other_permissions">Autres autorisations</string>
+    <string name="accessibility">Accessibilité</string>
+    <string name="device_id">Reference de l\'appareil</string>
+    <string name="feedback_amp_suggestions">suggestions</string>
+    <string name="quick_survey">Enquête rapide</string>
+    <string name="bug_report">Rapport d\'erreur</string>
+    <string name="visit">Visite</string>
+    <string name="rate">Taux</string>
+    <string name="share">Partager</string>
+    <string name="app_info">Informations sur l\'application</string>
+    <string name="check_for_update">Vérifier la mise à jour</string>
+    <string name="developer_contact">Contact développeur</string>
+    <string name="terms_amp_conditions">termes</string>
+    <string name="privacy_policy">Politique de confidentialité</string>
+    <string name="outgoing">Sortant</string>
+    <string name="always_on">sur</string>
+    <string name="always_off">de</string>
+    <string name="dont_care">"Je m\'en fiche"</string>
+    <string name="landscape">Paysage</string>
+    <string name="portrait">Portrait</string>
+    <string name="silent">Silencieux</string>
+    <string name="normal">Ordinaire</string>
+    <string name="select_activity_sunHeading">Sélectionnez les activités /pages /fenêtres que vous souhaitez bloquer</string>
+    <string name="apps">applications</string>
+    <string name="whitelist_apps">Applications de la liste blanche</string>
+    <string name="whitelist_services">Services de liste blanche</string>
+    <string name="whitelist_apps_subheading">"Sélectionnez les applications auxquelles vous souhaitez accéder"</string>
+    <string name="whitelist_service_heading">"Sélectionnez les services auxquels vous souhaitez donner accès"</string>
+    <string name="single_app_subheading">"Sélectionnez l\'application que vous souhaitez voir disponible au premier plan"</string>
+    <string name="blacklist">Liste noire</string>
+    <string name="contacts_blacklist_subheading">"Les contacts enregistrés sous Liste noire ne pourront plus appeler votre téléphone Android"</string>
+    <string name="contacts_whitelist_subheading">Les contacts enregistrés dans la liste blanche ne peuvent plus appeler votre téléphone Android</string>
+    <string name="delete">Effacer</string>
+    <string name="delete_contact_subheading">Êtes-vous sûr de vouloir supprimer ces éléments</string>
+    <string name="invalid_name">Nom incorrect</string>
+    <string name="invalid_number">Numéro invalide</string>
+    <string name="hours">Heures</string>
+    <string name="minutes">Minutes</string>
+    <string name="file_exported_to">Fichier exporté vers</string>
+    <string name="select_a_file_to_upload">Sélectionnez un fichier à télécharger</string>
+    <string name="please_install_a_file_manager">Veuillez installer un gestionnaire de fichiers.</string>
+    <string name="invalid_backup_file">Fichier de sauvegarde non valide</string>
+    <string name="imported_successfully">Importé avec succès</string>
+    <string name="password_successfully_send">Mot de passe envoyé avec succès à votre adresse e-mail</string>
+    <string name="password_recovery_failed">La récupération du mot de passe a échoué</string>
+    <string name="recovery_email_not_registered">E-mail de récupération non enregistré</string>
+    <string name="change_your">Change ton</string>
+    <string name="forgot_caps">Oublié ?</string>
+    <string name="password_successfully_changed">Votre mot de passe a été changé avec succès</string>
+    <string name="invalid_email_address">Adresse e-mail invalide</string>
+    <string name="password_min">Le mot de passe doit contenir au moins 8 caractères</string>
+    <string name="old_password_must_not_new">L\'ancien mot de passe ne doit pas être un nouveau mot de passe</string>
+    <string name="password_not_match">Le mot de passe ne correspond pas</string>
+    <string name="invalid_old_pasword">Ancien mot de passe invalide</string>
+    <string name="phonebook_blacklist_subheading">"Sélectionnez les contacts que vous souhaitez ajouter à la liste noire"</string>
+    <string name="phonebook_whitelist_subheading">"Sélectionnez les contacts que vous souhaitez ajouter à la liste blanche"</string>
+    <string name="camera_not_init">Erreur d\'initialisation de la caméra:</string>
+    <string name="please_wait">S\'il vous plaît, attendez</string>
+    <string name="invalid_qr">QrCode invalide!</string>
+    <string name="successfully_done">C\'est fait avec succès!</string>
+    <string name="on_caps">SUR</string>
+    <string name="off_caps">DE</string>
+    <string name="webfilter_blacklist_subheading">"Les sites Web enregistrés dans la liste noire ne pourront pas accéder par navigateur"</string>
+    <string name="webfilter_whitelist_subheading">Les sites Web enregistrés sous liste blanche ne sont accessibles que par le navigateur</string>
+    <string name="dialog_website_blacklist_subheading">Veuillez entrer le site Web que vous souhaitez ajouter à la liste noire, par exemple: www.google.com</string>
+    <string name="dialog_website_white_subheading">Veuillez saisir le site Web que vous souhaitez ajouter à la liste blanche, par exemple: www.google.com</string>
+    <string name="invalid_url">URL invalide</string>
+    <string name="invalid_otp">Otp invalide</string>
+    <string name="user_agreement_1">Pour améliorer KeyOS et vous assurer que toutes les fonctionnalités fonctionnent correctement, certaines de vos données d\'utilisation seront collectées de manière anonyme. Vous devez lire et accepter notre politique de confidentialité et nos conditions. avant d\'utiliser KeyOS</string>
+    <string name="select_all">Tout sélectionner</string>
+    <string name="initializing_desktop">Initialisation du bureau…</string>
+    <string name="loading_settings">Chargement des paramètres</string>
+    <string name="exiting_keyos">Quitter</string>
+    <string name="dialog_qrcode_subheading">Scannez ce code KeyOS Qr pour appliquer les mêmes paramètres à votre appareil KeyOS</string>
+
+
 </resources>
