--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -141,4 +141,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"નોટિફિકેશન અને ઍપ બંધ છે"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"બંધ કરો"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"બંધ"</string>
+
+    <string name="app_name">કીઓએસ</string>
+    <string name="exit_button_text">કિઓસ્કથી બહાર નીકળો</string>
+    <string name="button_overview_mode">વિહંગાવલોકન મોડ</string>
+    <string name="password">પાસવર્ડ</string>
+    <string name="activities">પ્રવૃત્તિઓ</string>
+    <string name="cancel">રદ કરો</string>
+    <string name="done">થઈ ગયું</string>
+    <string name="phoneBook">ફોન બુક</string>
+    <string name="manual">મેન્યુઅલ</string>
+    <string name="create_new">નવું બનાવો</string>
+    <string name="contact">સંપર્ક કરો</string>
+    <string name="name">નામ</string>
+    <string name="number">નંબર</string>
+    <string name="hide_icon">છુપાવો ચિહ્ન</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">કીઓએસ હોમથી લ launંચર /શ shortcર્ટકટ આયકન છુપાવો</string>
+    <string name="block_activities">અવરોધિત પ્રવૃત્તિઓ</string>
+    <string name="block_unwanted_pages_activities_windows">અનિચ્છનીય પૃષ્ઠો /પ્રવૃત્તિઓ /વિંડોઝ અવરોધિત કરો</string>
+    <string name="time_limit">સમય મર્યાદા</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">સમય પ્રતિબંધ સેટ કરો દા.ત. દિવસ દીઠ 1 કલાક</string>
+    <string name="system_settings">સિસ્ટમ સેટિંગ્સ</string>
+    <string name="restrictions">પ્રતિબંધો</string>
+    <string name="edit_app">એપ્લિકેશન સંપાદિત કરો</string>
+    <string name="import_amp_export">આયાત નિકાસ</string>
+    <string name="scan">સ્કેન</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">સમાન સેટિંગ્સ નીતિ લાગુ કરવા માટે કીઓએસ ક્યુઆર કોડ સ્કેન કરો</string>
+    <string name="generate">પેદા</string>
+    <string name="generate_keyos_qr_code">કીઓએસ ક્યુઆરકોડ જનરેટ કરો</string>
+    <string name="import_text">આયાત કરો</string>
+    <string name="import_keyos_setting_from_storage">સ્ટોરેજમાંથી કીઓએસ સેટિંગ આયાત કરો</string>
+    <string name="export_text">નિકાસ કરો</string>
+    <string name="import_keyos_setting_to_storage">સ્ટોરેજ પર કીઓએસ સેટિંગ આયાત કરો</string>
+    <string name="recovery_email">પુનoveryપ્રાપ્તિ ઇમેઇલ</string>
+    <string name="old_password">જુનો પાસવર્ડ</string>
+    <string name="confirm_password">પાસવર્ડની પુષ્ટિ કરો</string>
+    <string name="allow_calls">કallsલ્સને મંજૂરી આપો</string>
+    <string name="incoming">ઇનકમિંગ</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">આ તમારા મોબાઇલ પર આવતા બધા ક incલ્સને મંજૂરી આપશે</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">આ તમારા મોબાઇલ પરના બધા આઉટગોઇંગ ક callsલ્સને મંજૂરી આપશે</string>
+    <string name="whitelist_contacts">વ્હાઇટલિસ્ટ સંપર્કો</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">સંપર્કો ફક્ત તમને ક toલ કરવામાં સક્ષમ, વ્હાઇટલિસ્ટ હેઠળ સાચવે છે</string>
+    <string name="blacklist_contacts">બ્લેકલિસ્ટ સંપર્કો</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"બ્લેકલિસ્ટ હેઠળ સાચવેલા સંપર્કો તમને ક callલ કરી શકશે નહીં"</string>
+    <string name="automatic_whitelist">આપોઆપ વ્હાઇટલિસ્ટ</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">જો ફોન બુકમાં સંપર્ક ઉપલબ્ધ હોય તો ક callsલ્સને મંજૂરી આપો</string>
+    <string name="additional">વધારાનુ</string>
+    <string name="whitelist_amp_blacklist">વ્હાઇટલિસ્ટ બ્લેકલિસ્ટ</string>
+    <string name="phone_book">ફોન બુક</string>
+    <string name="import_amp_export_settings">નિકાસ સેટિંગ્સ આયાત કરો</string>
+    <string name="services">સેવાઓ</string>
+    <string name="single_app">સિંગલ એપ્લિકેશન</string>
+    <string name="apps_amp_services">એપ્લિકેશંસ સેવાઓ</string>
+    <string name="peripheral">પેરિફેરલ</string>
+    <string name="advance">એડવાન્સ</string>
+    <string name="disable_camera">ક Cameraમેરો અક્ષમ કરો</string>
+    <string name="call_settings">સેટિંગ્સને ક Callલ કરો</string>
+    <string name="web_filter">વેબ ફિલ્ટર</string>
+    <string name="screen_saver">સ્ક્રીન સેવર</string>
+    <string name="phone_settings">ફોન સેટિંગ્સ</string>
+    <string name="notification_panel">સૂચના પેનલ</string>
+    <string name="security">સુરક્ષા</string>
+    <string name="launch">લોંચ</string>
+    <string name="phone_call_subheading">જો તમને ક callsલ કરવા માટે કોઈ મુશ્કેલીનો સામનો કરવો પડે છે, તો કૃપા કરીને ફોન ક toલ સંબંધિત બધી સેવાઓને મંજૂરી આપો</string>
+    <string name="phone_call_subheading_hint">સંકેત: સેવા વિભાગમાં ફોન માટે શોધ</string>
+    <string name="web_filter_subheading">વેબ ફિલ્ટર એક શક્તિશાળી સેવા છે જે તમને અનિચ્છનીય વેબસાઇટ્સને અવરોધિત કરવાની મંજૂરી આપે છે</string>
+    <string name="web_filter_supported_browsers">સપોર્ટેડ બ્રાઉઝર્સ: ક્રોમ, ફાયરફોક્સ, બહાદુર, ધાર, ઓપેરા, ડકડkક્ક્ગો</string>
+    <string name="off">બંધ</string>
+    <string name="whitelist_websites">વ્હાઇટલિસ્ટ વેબસાઇટ્સ</string>
+    <string name="whitelist_website_info">વેબસાઇટ્સ ફક્ત બ્રાઉઝર દ્વારા toક્સેસ કરવામાં સક્ષમ વ્હાઇટલિસ્ટ હેઠળ સાચવે છે</string>
+    <string name="blacklist_websites">બ્લેકલિસ્ટ વેબસાઇટ્સ</string>
+    <string name="blacklist_websites_info">"બ્લેકલિસ્ટ હેઠળ સાચવેલી વેબસાઇટ્સ બ્રાઉઝર દ્વારા accessક્સેસ કરી શકશે નહીં"</string>
+    <string name="block_adult_websites">પુખ્ત વયના વેબસાઇટ્સને અવરોધિત કરો</string>
+    <string name="adult_websites_info">આ 800 પુખ્ત વેબસાઇટ્સને આપમેળે અવરોધિત કરશે</string>
+    <string name="whitelist">વ્હાઇટલિસ્ટ</string>
+    <string name="add_websites">વેબસાઇટ ઉમેરો</string>
+    <string name="website">વેબસાઇટ</string>
+    <string name="add_websites_subheading">કૃપા કરીને વેબસાઇટને દાખલ કરો કે જેને તમે વ્હાઇટલિસ્ટમાં ઉમેરવા માંગો છો દા.ત.: www.google.com</string>
+    <string name="otp_verification">ઓ.ટી.પી. ચકાસણી</string>
+    <string name="otp_verification_subheading">કૃપા કરી 4 અંકની ઓટીપી દાખલ કરો કે જે અમે તમારા નોંધાયેલા ઇમેઇલ સરનામાં પર મોકલી છે</string>
+    <string name="password_prompt_subheading">"જો તમે હજી તમારો પાસવર્ડ બદલ્યો નથી, તો કૃપા કરીને 1234 પ્રયાસ કરો"</string>
+    <string name="forget">ભૂલી જાઓ છો?</string>
+    <string name="user_agreement">વપરાશકર્તા કરાર</string>
+    <string name="user_agreement_2">અમે તમારા ડિવાઇસમાં ઇન્સ્ટોલ કરેલી એપ્લિકેશન અને ફોન નંબરની સૂચિ સ્ટોર કરીશું. આ ડેટા ફક્ત તમારા ડિવાઇસમાંથી લેવામાં આવશે જો તમે ક્યુઆરકોડ સુવિધાનો ઉપયોગ કરી રહ્યાં છો અને આ ડેટા એક કલાકમાં સાથે આપમેળે સર્વરથી દૂર થઈ જશે</string>
+    <string name="no_thanks">ના આભાર</string>
+    <string name="accept_amp_continue">સ્વીકારો</string>
+    <string name="usage_access">વપરાશ વપરાશ</string>
+    <string name="overlay">ઓવરલે</string>
+    <string name="write_settings">સેટિંગ્સ લખો</string>
+    <string name="sound_access">ધ્વનિ પ્રવેશ</string>
+    <string name="other_permissions">અન્ય અનુમતિઓ</string>
+    <string name="accessibility">ઉપલ્બધતા</string>
+    <string name="device_id">ઉપકરણ ID</string>
+    <string name="feedback_amp_suggestions">સૂચનો</string>
+    <string name="quick_survey">ઝડપી સર્વે</string>
+    <string name="bug_report">ક્ષતિ અહેવાલ</string>
+    <string name="visit">મુલાકાત લો</string>
+    <string name="rate">દર</string>
+    <string name="share">શેર કરો</string>
+    <string name="app_info">એપ્લિકેશન માહિતી</string>
+    <string name="check_for_update">અપડેટ માટે તપાસો</string>
+    <string name="developer_contact">વિકાસકર્તાનો સંપર્ક</string>
+    <string name="terms_amp_conditions">શરતો</string>
+    <string name="privacy_policy">ગોપનીયતા નીતિ</string>
+    <string name="outgoing">આઉટગોઇંગ</string>
+    <string name="always_on">પર</string>
+    <string name="always_off">બંધ</string>
+    <string name="dont_care">"પરવા નથી"</string>
+    <string name="landscape">લેન્ડસ્કેપ</string>
+    <string name="portrait">પોટ્રેટ</string>
+    <string name="silent">મૌન</string>
+    <string name="normal">સામાન્ય</string>
+    <string name="select_activity_sunHeading">તમે કઈ પ્રવૃત્તિઓ /પાના /વિંડોઝને અવરોધિત કરવા માંગો છો તે પસંદ કરો</string>
+    <string name="apps">એપ્લિકેશન્સ</string>
+    <string name="whitelist_apps">વ્હાઇટલિસ્ટ એપ્લિકેશન્સ</string>
+    <string name="whitelist_services">વ્હાઇટલિસ્ટ સેવાઓ</string>
+    <string name="whitelist_apps_subheading">"તમે કઈ એપ્લિકેશનોને accessક્સેસ કરવા માંગો છો તે પસંદ કરો"</string>
+    <string name="whitelist_service_heading">"તમે કઈ સેવાઓ accessક્સેસ આપવા માંગો છો તે પસંદ કરો"</string>
+    <string name="single_app_subheading">"તમે અગ્રભાગમાં કઈ એપ્લિકેશનને ઉપલબ્ધ કરવા માંગો છો તે પસંદ કરો"</string>
+    <string name="blacklist">બ્લેકલિસ્ટ</string>
+    <string name="contacts_blacklist_subheading">"બ્લેકલિસ્ટ હેઠળ સાચવેલ સંપર્કો હવેથી તમારા Android ફોન પર ક callલ કરી શકશે નહીં."</string>
+    <string name="contacts_whitelist_subheading">વ્હાઇટલિસ્ટ હેઠળ સાચવેલ સંપર્કો ફક્ત તમારા Android ફોનને હવે ક callલ કરવામાં સક્ષમ છે</string>
+    <string name="delete">કા .ી નાખો</string>
+    <string name="delete_contact_subheading">શું તમે ખરેખર આ આઇટમ્સ કા toી નાખવા માંગો છો?</string>
+    <string name="invalid_name">અમાન્ય નામ</string>
+    <string name="invalid_number">અમાન્ય નંબર</string>
+    <string name="hours">કલાકો</string>
+    <string name="minutes">મિનિટ</string>
+    <string name="file_exported_to">ફાઇલને નિકાસ કરી</string>
+    <string name="select_a_file_to_upload">અપલોડ કરવા માટે એક ફાઇલ પસંદ કરો</string>
+    <string name="please_install_a_file_manager">કૃપા કરીને ફાઇલ મેનેજર ઇન્સ્ટોલ કરો.</string>
+    <string name="invalid_backup_file">અમાન્ય બેકઅપ ફાઇલ</string>
+    <string name="imported_successfully">સફળતાપૂર્વક આયાત કર્યું</string>
+    <string name="password_successfully_send">પાસવર્ડ સફળતાપૂર્વક તમારા ઇમેઇલ સરનામાં પર મોકલ્યો</string>
+    <string name="password_recovery_failed">પાસવર્ડ પુન recoveryપ્રાપ્તિ નિષ્ફળ</string>
+    <string name="recovery_email_not_registered">પુનoveryપ્રાપ્તિ ઇમેઇલ નોંધાયેલ નથી</string>
+    <string name="change_your">તમારી બદલો</string>
+    <string name="forgot_caps">ભૂલી ગયા છો?</string>
+    <string name="password_successfully_changed">તમારો પાસવર્ડ સફળતાપૂર્વક બદલાઈ ગયો છે</string>
+    <string name="invalid_email_address">અમાન્ય ઇમેઇલ સરનામું</string>
+    <string name="password_min">પાસવર્ડમાં ઓછામાં ઓછા 8 અક્ષરો હોવા આવશ્યક છે</string>
+    <string name="old_password_must_not_new">જૂનો પાસવર્ડ નવો પાસવર્ડ હોવો જોઈએ નહીં</string>
+    <string name="password_not_match">પાસવર્ડ મેળ ખાતો નથી</string>
+    <string name="invalid_old_pasword">અમાન્ય જૂનો પાસવર્ડ</string>
+    <string name="phonebook_blacklist_subheading">"તમે બ્લેકલિસ્ટમાં કયા સંપર્કો ઉમેરવા માંગો છો તે પસંદ કરો"</string>
+    <string name="phonebook_whitelist_subheading">"તમે વ્હાઇટલિસ્ટમાં કયા સંપર્કો ઉમેરવા માંગો છો તે પસંદ કરો"</string>
+    <string name="camera_not_init">કેમેરા પ્રારંભિક ભૂલ:</string>
+    <string name="please_wait">મહેરબાની કરી રાહ જુવો</string>
+    <string name="invalid_qr">અમાન્ય QrCode!</string>
+    <string name="successfully_done">સફળતાપૂર્વક થઈ ગયું!</string>
+    <string name="on_caps">ચાલુ</string>
+    <string name="off_caps">બંધ</string>
+    <string name="webfilter_blacklist_subheading">"બ્લેકલિસ્ટ હેઠળ સાચવેલી વેબસાઇટ્સ બ્રાઉઝર દ્વારા accessક્સેસ કરી શકશે નહીં"</string>
+    <string name="webfilter_whitelist_subheading">વેબસાઇટ્સ ફક્ત બ્રાઉઝર દ્વારા toક્સેસ કરવામાં સક્ષમ વ્હાઇટલિસ્ટ હેઠળ સાચવે છે</string>
+    <string name="dialog_website_blacklist_subheading">કૃપા કરીને વેબસાઇટ જેને તમે બ્લેકલિસ્ટમાં ઉમેરવા માંગો છો તે દાખલ કરો દા.ત.: www.google.com</string>
+    <string name="dialog_website_white_subheading">કૃપા કરીને વેબસાઇટને દાખલ કરો કે જેને તમે વ્હાઇટલિસ્ટમાં ઉમેરવા માંગો છો દા.ત.: www.google.com</string>
+    <string name="invalid_url">અમાન્ય url</string>
+    <string name="invalid_otp">અમાન્ય ઓ.ટી.પી.</string>
+    <string name="user_agreement_1">કીઓએસને સુધારવા અને ખાતરી કરવા માટે કે બધી સુવિધા યોગ્ય રીતે કાર્ય કરે છે, તમારો કેટલાક ઉપયોગ ડેટા અજ્ .ાત રૂપે એકત્રિત કરવામાં આવશે. તમારે અમારી ગોપનીયતા નીતિ અને શરતો વાંચવી અને સંમત થવી આવશ્યક છે. કીઓએસનો ઉપયોગ કરતા પહેલા</string>
+    <string name="select_all">બધા પસંદ કરો</string>
+    <string name="initializing_desktop">ડેસ્કટ Initialપ પ્રારંભ કરી રહ્યું છે…</string>
+    <string name="loading_settings">સેટિંગ્સ લોડ કરી રહ્યું છે</string>
+    <string name="exiting_keyos">બહાર નીકળી રહ્યું છે</string>
+    <string name="dialog_qrcode_subheading">તમારા કીઓએસ ડિવાઇસમાં સમાન સેટિંગ્સ લાગુ કરવા માટે આ કીઓએસ ક્યુઆર કોડને સ્કેન કરો</string>
+
+
 </resources>
