--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -140,4 +140,168 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Obavijesti i aplikacije isključeni su"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Zatvori"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Zatvoreno"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Izlazni kiosk</string>
+    <string name="button_overview_mode">Način pregleda</string>
+    <string name="password">Lozinka</string>
+    <string name="activities">Aktivnosti</string>
+    <string name="cancel">Otkazati</string>
+    <string name="done">Gotovo</string>
+    <string name="phoneBook">Telefonski imenik</string>
+    <string name="manual">Priručnik</string>
+    <string name="create_new">Stvori novo</string>
+    <string name="contact">Kontakt</string>
+    <string name="name">Ime</string>
+    <string name="number">Broj</string>
+    <string name="hide_icon">Sakrij ikonu</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">sakrij ikonu pokretača /prečaca iz kuće KeyOS</string>
+    <string name="block_activities">Blokiranje aktivnosti</string>
+    <string name="block_unwanted_pages_activities_windows">Blokirajte neželjene stranice /aktivnosti /prozore</string>
+    <string name="time_limit">Vremensko ograničenje</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Postavite vremensko ograničenje Npr. 1 sat dnevno</string>
+    <string name="system_settings">Postavke sustava</string>
+    <string name="restrictions">Ograničenja</string>
+    <string name="edit_app">Uredi aplikaciju</string>
+    <string name="import_amp_export">Uvoz izvoz</string>
+    <string name="scan">Skenirati</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Skenirajte keyOS qr kôd kako biste primijenili istu politiku postavki</string>
+    <string name="generate">Generirati</string>
+    <string name="generate_keyos_qr_code">Generiraj keyOS QrCode</string>
+    <string name="import_text">Uvoz</string>
+    <string name="import_keyos_setting_from_storage">Uvezite postavku keyOS iz pohrane</string>
+    <string name="export_text">Izvoz</string>
+    <string name="import_keyos_setting_to_storage">Uvoz postavke keyOS-a u pohranu</string>
+    <string name="recovery_email">E-adresa za oporavak</string>
+    <string name="old_password">stara lozinka</string>
+    <string name="confirm_password">Potvrdi lozinku</string>
+    <string name="allow_calls">Dopusti pozive</string>
+    <string name="incoming">Dolazni</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">To će omogućiti sve dolazne pozive na vaš mobitel</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">To će omogućiti sve odlazne pozive na vaš mobitel</string>
+    <string name="whitelist_contacts">Bijela lista kontakata</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakti spremljeni na bijelom popisu mogu vas samo nazvati</string>
+    <string name="blacklist_contacts">Crna lista kontakata</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Kontakti spremljeni na crnoj listi neće vas moći nazvati"</string>
+    <string name="automatic_whitelist">Automatski dopušteni popis</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Omogući pozive ako je kontakt dostupan u telefonskom imeniku</string>
+    <string name="additional">Dodatni</string>
+    <string name="whitelist_amp_blacklist">Popis dopuštenih na crnoj listi</string>
+    <string name="phone_book">Telefonski imenik</string>
+    <string name="import_amp_export_settings">Uvoz postavki izvoza</string>
+    <string name="services">Usluge</string>
+    <string name="single_app">Jedna aplikacija</string>
+    <string name="apps_amp_services">Usluge aplikacija</string>
+    <string name="peripheral">Periferna</string>
+    <string name="advance">Unaprijed</string>
+    <string name="disable_camera">Onemogući kameru</string>
+    <string name="call_settings">Postavke poziva</string>
+    <string name="web_filter">Web filtar</string>
+    <string name="screen_saver">Čuvar zaslona</string>
+    <string name="phone_settings">Postavke telefona</string>
+    <string name="notification_panel">Oglasna ploča</string>
+    <string name="security">Sigurnost</string>
+    <string name="launch">Pokreni</string>
+    <string name="phone_call_subheading">Ako imate bilo kakvih problema s upućivanjem poziva, dopustite sve usluge povezane s telefonskim pozivom</string>
+    <string name="phone_call_subheading_hint">savjet: Potražite telefon u odjeljku usluge</string>
+    <string name="web_filter_subheading">Web filter moćna je usluga koja vam omogućuje blokiranje neželjenih web stranica</string>
+    <string name="web_filter_supported_browsers">Podržani preglednici: chrome, firefox, hrabri, edge, opera, duckduckgo</string>
+    <string name="off">Isključeno</string>
+    <string name="whitelist_websites">Web stranice s dopuštene liste</string>
+    <string name="whitelist_website_info">Web mjesta spremaju se na popis dopuštenih, a pristup im omogućuje samo preglednik</string>
+    <string name="blacklist_websites">Web stranice s crne liste</string>
+    <string name="blacklist_websites_info">"Web stranice spremljene na crnoj listi neće moći pristupiti putem preglednika"</string>
+    <string name="block_adult_websites">Blokirajte web stranice za odrasle</string>
+    <string name="adult_websites_info">To će automatski blokirati 800 web lokacija za odrasle</string>
+    <string name="whitelist">Bijela lista</string>
+    <string name="add_websites">Dodajte web mjesto</string>
+    <string name="website">Web stranica</string>
+    <string name="add_websites_subheading">Molimo unesite web mjesto koje želite dodati na bijeli popis Npr. Www.google.com</string>
+    <string name="otp_verification">Otp provjera</string>
+    <string name="otp_verification_subheading">Unesite četveroznamenkasti otp koji smo poslali na vašu registriranu e-adresu</string>
+    <string name="password_prompt_subheading">"ako još niste promijenili lozinku, pokušajte 1234"</string>
+    <string name="forget">zaboraviti?</string>
+    <string name="user_agreement">Korisnički ugovor</string>
+    <string name="user_agreement_2">Popis instalirane aplikacije i telefonski broj pohranit ćemo u vaš uređaj. Ovi će se podaci preuzeti s vašeg uređaja samo ako koristite značajku QrCode i oni će se automatski ukloniti s poslužitelja za jedan sat</string>
+    <string name="no_thanks">Ne hvala</string>
+    <string name="accept_amp_continue">Prihvatiti</string>
+    <string name="usage_access">Pristup korištenju</string>
+    <string name="overlay">Prekrivanje</string>
+    <string name="write_settings">Napišite postavke</string>
+    <string name="sound_access">Pristup zvuku</string>
+    <string name="other_permissions">Ostala dopuštenja</string>
+    <string name="accessibility">Pristupačnost</string>
+    <string name="device_id">ID uređaja</string>
+    <string name="feedback_amp_suggestions">prijedlozi</string>
+    <string name="quick_survey">Brza anketa</string>
+    <string name="bug_report">Izvještaj o greškama</string>
+    <string name="visit">Posjetiti</string>
+    <string name="rate">Stopa</string>
+    <string name="share">Udio</string>
+    <string name="app_info">Informacije o aplikaciji</string>
+    <string name="check_for_update">Provjerite ima li ažuriranja</string>
+    <string name="developer_contact">Kontakt za programera</string>
+    <string name="terms_amp_conditions">Pojmovi</string>
+    <string name="privacy_policy">Pravila o privatnosti</string>
+    <string name="outgoing">Odlazni</string>
+    <string name="always_on">na</string>
+    <string name="always_off">isključiti</string>
+    <string name="dont_care">"Ne zanima me"</string>
+    <string name="landscape">Krajolik</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Nijemo</string>
+    <string name="normal">Normalan</string>
+    <string name="select_activity_sunHeading">Odaberite aktivnosti /stranice /prozore koje želite blokirati</string>
+    <string name="apps">Aplikacije</string>
+    <string name="whitelist_apps">Aplikacije s dopuštenog</string>
+    <string name="whitelist_services">Usluge dopuštene liste</string>
+    <string name="whitelist_apps_subheading">"Odaberite kojim aplikacijama želite pristupiti"</string>
+    <string name="whitelist_service_heading">"Odaberite uslugama kojima želite dati pristup"</string>
+    <string name="single_app_subheading">"Odaberite koju aplikaciju želite da bude dostupna u prvom planu"</string>
+    <string name="blacklist">Crna lista</string>
+    <string name="contacts_blacklist_subheading">"Kontakti spremljeni na crnoj listi više neće moći nazvati vaš Android telefon"</string>
+    <string name="contacts_whitelist_subheading">Kontakti spremljeni na bijelom popisu više mogu pozivati ​​samo vaš Android telefon</string>
+    <string name="delete">Izbrisati</string>
+    <string name="delete_contact_subheading">Jeste li sigurni da želite izbrisati ove stavke</string>
+    <string name="invalid_name">Nevažeće ime</string>
+    <string name="invalid_number">Pogrešan broj</string>
+    <string name="hours">Sati</string>
+    <string name="minutes">Zapisnik</string>
+    <string name="file_exported_to">Datoteka je izvezena u</string>
+    <string name="select_a_file_to_upload">Odaberite datoteku za prijenos</string>
+    <string name="please_install_a_file_manager">Molimo instalirajte File Manager.</string>
+    <string name="invalid_backup_file">Nevaljana datoteka sigurnosne kopije</string>
+    <string name="imported_successfully">Uvoz uspješno</string>
+    <string name="password_successfully_send">Lozinka je uspješno poslana na vašu adresu e-pošte</string>
+    <string name="password_recovery_failed">Oporavak lozinke nije uspio</string>
+    <string name="recovery_email_not_registered">E-adresa za oporavak nije registrirana</string>
+    <string name="change_your">Promijenite svoj</string>
+    <string name="forgot_caps">Zaboravili?</string>
+    <string name="password_successfully_changed">Vaša je lozinka uspješno promijenjena</string>
+    <string name="invalid_email_address">Nevažeća adresa e-pošte</string>
+    <string name="password_min">Lozinka mora sadržavati najmanje 8 znakova</string>
+    <string name="old_password_must_not_new">Stara lozinka ne smije biti nova lozinka</string>
+    <string name="password_not_match">Lozinka se ne podudara</string>
+    <string name="invalid_old_pasword">Nevažeća stara lozinka</string>
+    <string name="phonebook_blacklist_subheading">"Odaberite kontakte koje želite dodati na crnu listu"</string>
+    <string name="phonebook_whitelist_subheading">"Odaberite kontakte koje želite dodati na popis dopuštenih"</string>
+    <string name="camera_not_init">Pogreška inicijalizacije kamere:</string>
+    <string name="please_wait">Molim te pričekaj</string>
+    <string name="invalid_qr">Nevažeći QrCode!</string>
+    <string name="successfully_done">Uspješno odrađeno!</string>
+    <string name="on_caps">NA</string>
+    <string name="off_caps">ISKLJUČENO</string>
+    <string name="webfilter_blacklist_subheading">"Web stranice spremljene na crnoj listi neće moći pristupiti putem preglednika"</string>
+    <string name="webfilter_whitelist_subheading">Web mjesta spremaju se na popis dopuštenih, a pristup im omogućuje samo preglednik</string>
+    <string name="dialog_website_blacklist_subheading">Unesite web mjesto koje želite dodati na crnu listu Npr. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Molimo unesite web mjesto koje želite dodati na bijeli popis Npr. Www.google.com</string>
+    <string name="invalid_url">Neispravna poveznica</string>
+    <string name="invalid_otp">Nevažeći Otp</string>
+    <string name="user_agreement_1">Da bismo poboljšali KeyOS i osigurali da sve značajke rade ispravno, neki će se vaši podaci o upotrebi prikupljati anonimno. Morate pročitati i prihvatiti naša Pravila o privatnosti i Uvjete. prije korištenja KeyOS-a</string>
+    <string name="select_all">Odaberi sve</string>
+    <string name="initializing_desktop">Inicijalizacija radne površine ...</string>
+    <string name="loading_settings">Postavke učitavanja</string>
+    <string name="exiting_keyos">Izlaz</string>
+    <string name="dialog_qrcode_subheading">Skenirajte ovaj KeyOS Qr kôd da biste primijenili iste postavke na svom KeyOS uređaju</string>
+
 </resources>
