--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -139,4 +139,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Ծանուցումներն ու հավելվածներն անջատված են"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Փակել"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Փակվեց"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Ելք կրպակից</string>
+    <string name="button_overview_mode">Ակնարկի ռեժիմ</string>
+    <string name="password">Գաղտնաբառ</string>
+    <string name="activities">Գործունեություն</string>
+    <string name="cancel">Չեղարկել</string>
+    <string name="done">Կատարած</string>
+    <string name="phoneBook">Հեռախոսագիրք</string>
+    <string name="manual">Ձեռնարկ</string>
+    <string name="create_new">Ստեղծել նոր</string>
+    <string name="contact">Կապ</string>
+    <string name="name">Անուն</string>
+    <string name="number">Թիվ</string>
+    <string name="hide_icon">Թաքցնել պատկերակը</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">KeyOS- ի տնից թաքցնել գործարկման /դյուրանցման պատկերակը</string>
+    <string name="block_activities">Արգելափակել գործունեությունը</string>
+    <string name="block_unwanted_pages_activities_windows">Արգելափակել անցանկալի էջերը /գործողությունները /պատուհանները</string>
+    <string name="time_limit">Ժամկետը</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Սահմանեք ժամանակի սահմանափակում 1 ժամ օրական</string>
+    <string name="system_settings">Համակարգի կարգավորումներ</string>
+    <string name="restrictions">Սահմանափակումներ</string>
+    <string name="edit_app">Փոփոխել հավելվածը</string>
+    <string name="import_amp_export">Ներմուծման արտահանման</string>
+    <string name="scan">Scanննել</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Սկանացրեք keyOS qr կոդը ՝ նույն կարգավորումների քաղաքականությունը կիրառելու համար</string>
+    <string name="generate">Ստեղծել</string>
+    <string name="generate_keyos_qr_code">Ստեղծեք keyOS QrCode</string>
+    <string name="import_text">Ներմուծում</string>
+    <string name="import_keyos_setting_from_storage">Ներմուծեք keyOS- ի կարգավորումը պահեստից</string>
+    <string name="export_text">Արտահանում</string>
+    <string name="import_keyos_setting_to_storage">Ներմուծեք keyOS պարամետրը պահեստ</string>
+    <string name="recovery_email">Վերականգնման էլ</string>
+    <string name="old_password">Հին Գաղտնաբառ</string>
+    <string name="confirm_password">Հաստատել գաղտնաբառը</string>
+    <string name="allow_calls">Թույլատրել զանգեր</string>
+    <string name="incoming">Ներգնա</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Սա թույլ կտա բոլոր մուտքային զանգերը ձեր բջջայինին</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Սա թույլ կտա բոլոր ելքային զանգերը դեպի ձեր բջջային հեռախոս</string>
+    <string name="whitelist_contacts">Սպիտակ ցուցակի կոնտակտներ</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Կոնտակտները պահվում են սպիտակ ցուցակում, որոնք ունակ են միայն ձեզ զանգահարել</string>
+    <string name="blacklist_contacts">Սև ցուցակ</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">«Սև ցուցակում պահված կոնտակտները չեն կարողանա ձեզ զանգահարել»</string>
+    <string name="automatic_whitelist">Ավտոմատ սպիտակ ցուցակ</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Թույլատրել զանգերը, եթե կապը հասանելի է հեռախոսագրքում</string>
+    <string name="additional">Լրացուցիչ</string>
+    <string name="whitelist_amp_blacklist">Սպիտակ ցուցակի սեւ ցուցակ</string>
+    <string name="phone_book">Հեռախոսագիրք</string>
+    <string name="import_amp_export_settings">Ներմուծեք արտահանման կարգավորումները</string>
+    <string name="services">Առայություններ</string>
+    <string name="single_app">Միայնակ հավելված</string>
+    <string name="apps_amp_services">Sրագրերի ծառայություններ</string>
+    <string name="peripheral">Perայրամասային</string>
+    <string name="advance">Նախապես</string>
+    <string name="disable_camera">Անջատել տեսախցիկը</string>
+    <string name="call_settings">Callանգի կարգավորումներ</string>
+    <string name="web_filter">Վեբ զտիչ</string>
+    <string name="screen_saver">Էկրանապահիչ</string>
+    <string name="phone_settings">Հեռախոսի կարգավորումներ</string>
+    <string name="notification_panel">Ificationանուցման վահանակ</string>
+    <string name="security">Անվտանգություն</string>
+    <string name="launch">Գործարկել</string>
+    <string name="phone_call_subheading">Եթե ​​զանգեր կատարելու համար խնդիրներ ունեք, սիրով թույլ տվեք հեռախոսազանգերին վերաբերող բոլոր ծառայությունները</string>
+    <string name="phone_call_subheading_hint">ակնարկ. Որոնել հեռախոսը ծառայության բաժնում</string>
+    <string name="web_filter_subheading">Վեբ ֆիլտրը հզոր ծառայություն է, որը թույլ է տալիս արգելափակել անցանկալի կայքերը</string>
+    <string name="web_filter_supported_browsers">Աջակցվող զննարկիչներ ՝ քրոմ, firefox, խիզախ, եզր, օպերա, բադկադկգո</string>
+    <string name="off">Անջատված է</string>
+    <string name="whitelist_websites">Սպիտակ ցուցակի կայքեր</string>
+    <string name="whitelist_website_info">Կայքերը պահվում են սպիտակ ցուցակում, որոնց մուտքը միայն զննարկիչն է</string>
+    <string name="blacklist_websites">Սև ցուցակ վեբ կայքեր</string>
+    <string name="blacklist_websites_info">«Սև ցուցակում պահված կայքերը զննարկիչով չեն կարողանա մուտք գործել»</string>
+    <string name="block_adult_websites">Արգելափակել մեծահասակների կայքերը</string>
+    <string name="adult_websites_info">Սա ավտոմատ կերպով կարգելափակի 800 մեծահասակների կայք</string>
+    <string name="whitelist">Սպիտակ ցուցակ</string>
+    <string name="add_websites">Ավելացնել կայք</string>
+    <string name="website">Կայք</string>
+    <string name="add_websites_subheading">Մուտքագրեք այն կայքը, որը ցանկանում եք ավելացնել սպիտակ ցուցակում, օրինակ ՝ www.google.com</string>
+    <string name="otp_verification">Otp ստուգում</string>
+    <string name="otp_verification_subheading">Խնդրում ենք մուտքագրել 4 նիշանոց otp, որը մենք ուղարկել ենք ձեր գրանցված էլ. Փոստի հասցեին</string>
+    <string name="password_prompt_subheading">«եթե դեռ չեք փոխել ձեր գաղտնաբառը, փորձեք 1234»:</string>
+    <string name="forget">մոռանա՞լ</string>
+    <string name="user_agreement">Օգտագործողի պայմանագիր</string>
+    <string name="user_agreement_2">Մենք ձեր սարքում կպահենք տեղադրված ծրագրի և հեռախոսահամարի ցուցակը: Այս տվյալները ձեր սարքից կհանվեն միայն այն դեպքում, եթե դուք օգտագործում եք QrCode հատկություն, և այս տվյալները մեկ ժամվա ընթացքում ավտոմատ կերպով կհեռացվեն սերվերից:</string>
+    <string name="no_thanks">Ոչ, շնորհակալություն</string>
+    <string name="accept_amp_continue">Ընդունել</string>
+    <string name="usage_access">Օգտագործման մատչում</string>
+    <string name="overlay">Layածկույթ</string>
+    <string name="write_settings">Գրեք Կարգավորումներ</string>
+    <string name="sound_access">Ձայնի հասանելիություն</string>
+    <string name="other_permissions">Այլ թույլտվություններ</string>
+    <string name="accessibility">Հասանելիություն</string>
+    <string name="device_id">Սարքի ID</string>
+    <string name="feedback_amp_suggestions">առաջարկություններ</string>
+    <string name="quick_survey">Արագ հարցում</string>
+    <string name="bug_report">Վրիպակի զեկույց</string>
+    <string name="visit">Այցելություն</string>
+    <string name="rate">Գնահատել</string>
+    <string name="share">Կիսվել</string>
+    <string name="app_info">Appրագրի մասին տեղեկություններ</string>
+    <string name="check_for_update">Ստուգեք թարմացման համար</string>
+    <string name="developer_contact">Մշակողի հետ կապը</string>
+    <string name="terms_amp_conditions">Պայմանները</string>
+    <string name="privacy_policy">Գաղտնիության քաղաքականություն</string>
+    <string name="outgoing">Արտագնա</string>
+    <string name="always_on">վրա</string>
+    <string name="always_off">անջատված</string>
+    <string name="dont_care">«Թքած ունես»</string>
+    <string name="landscape">Լանդշաֆտ</string>
+    <string name="portrait">Դիմանկար</string>
+    <string name="silent">Լուռ</string>
+    <string name="normal">Նորմալ</string>
+    <string name="select_activity_sunHeading">Ընտրեք, թե որ գործողությունները /էջերը /պատուհանները ցանկանում եք արգելափակել</string>
+    <string name="apps">Րագրեր</string>
+    <string name="whitelist_apps">Սպիտակ ցուցակի հավելվածներ</string>
+    <string name="whitelist_services">Սպիտակ ցուցակի ծառայություններ</string>
+    <string name="whitelist_apps_subheading">"Ընտրեք, թե որ ծրագրերն եք ցանկանում մուտք գործել"</string>
+    <string name="whitelist_service_heading">"Ընտրեք, թե որ ծառայություններն եք ցանկանում մուտք գործել"</string>
+    <string name="single_app_subheading">"Ընտրեք, թե որ ծրագիրն եք ցանկանում հասանելի լինել առաջին պլանում"</string>
+    <string name="blacklist">Սև ցուցակ</string>
+    <string name="contacts_blacklist_subheading">«Սև ցուցակում պահված կոնտակտները այլևս չեն կարողանա զանգահարել ձեր Android հեռախոսը»</string>
+    <string name="contacts_whitelist_subheading">Սպիտակ ցուցակում պահված կոնտակտներն այլևս չեն կարող զանգահարել ձեր Android հեռախոսը</string>
+    <string name="delete">Նջել</string>
+    <string name="delete_contact_subheading">Վստա՞հ եք, որ ցանկանում եք ջնջել այս տարրերը</string>
+    <string name="invalid_name">Անվավեր անուն</string>
+    <string name="invalid_number">Անվավեր համար</string>
+    <string name="hours">Ժամեր</string>
+    <string name="minutes">Րոպեներ</string>
+    <string name="file_exported_to">Ֆայլն արտահանվել է այստեղ</string>
+    <string name="select_a_file_to_upload">Ընտրեք Ֆայլ վերբեռնելու համար</string>
+    <string name="please_install_a_file_manager">Խնդրում ենք տեղադրել Ֆայլերի կառավարիչ:</string>
+    <string name="invalid_backup_file">Անվավեր պահուստային ֆայլ</string>
+    <string name="imported_successfully">Հաջող ներմուծում</string>
+    <string name="password_successfully_send">Գաղտնաբառը հաջողությամբ ուղարկվեց ձեր էլ. Փոստի հասցեին</string>
+    <string name="password_recovery_failed">Գաղտնաբառի վերականգնումը ձախողվեց</string>
+    <string name="recovery_email_not_registered">Վերականգնման էլ. Փոստը չի գրանցվել</string>
+    <string name="change_your">Փոխիր քո</string>
+    <string name="forgot_caps">Մոռացե՞լ եք</string>
+    <string name="password_successfully_changed">Ձեր գաղտնաբառը հաջողությամբ փոխվել է</string>
+    <string name="invalid_email_address">Էլ.փոստի հասցեն անվավեր է</string>
+    <string name="password_min">Գաղտնաբառը պետք է պարունակի նվազագույնը 8 նիշ</string>
+    <string name="old_password_must_not_new">Հին գաղտնաբառը չպետք է լինի նոր գաղտնաբառ</string>
+    <string name="password_not_match">Գաղտնաբառը չի համապատասխանում</string>
+    <string name="invalid_old_pasword">Անվավեր հին գաղտնաբառ</string>
+    <string name="phonebook_blacklist_subheading">"Ընտրեք, թե որ կոնտակտները ցանկանում եք ավելացնել սև ցուցակում"</string>
+    <string name="phonebook_whitelist_subheading">"Ընտրեք, թե որ կոնտակտները ցանկանում եք ավելացնել սպիտակ ցուցակում"</string>
+    <string name="camera_not_init">Խցիկի սկզբնավորման սխալ.</string>
+    <string name="please_wait">Խնդրում ենք սպասել</string>
+    <string name="invalid_qr">Անվավեր QrCode:</string>
+    <string name="successfully_done">Հաջողությամբ արված:</string>
+    <string name="on_caps">ՎՐԱ</string>
+    <string name="off_caps">Անջատված է</string>
+    <string name="webfilter_blacklist_subheading">«Սև ցուցակում պահված կայքերը զննարկիչով չեն կարողանա մուտք գործել»</string>
+    <string name="webfilter_whitelist_subheading">Կայքերը պահվում են սպիտակ ցուցակում, որոնց մուտքը միայն զննարկիչն է</string>
+    <string name="dialog_website_blacklist_subheading">Խնդրում ենք մուտք գործել կայք, որը ցանկանում եք ավելացնել սև ցուցակում, օրինակ ՝ www.google.com</string>
+    <string name="dialog_website_white_subheading">Մուտքագրեք այն կայքը, որը ցանկանում եք ավելացնել սպիտակ ցուցակում, օրինակ ՝ www.google.com</string>
+    <string name="invalid_url">Անվավեր URL</string>
+    <string name="invalid_otp">Անվավեր Otp</string>
+    <string name="user_agreement_1">KeyOS- ը բարելավելու և համոզվելու համար, որ բոլոր հատկությունները ճիշտ են աշխատում, ձեր օգտագործման որոշ տվյալներ կհավաքվեն անանուն: Դուք պետք է կարդաք և համաձայնվեք մեր Գաղտնիության քաղաքականության և Պայմանների հետ: նախքան KeyOS օգտագործելը</string>
+    <string name="select_all">Ընտրել բոլորը</string>
+    <string name="initializing_desktop">Նախնականացնում է աշխատասեղանը</string>
+    <string name="loading_settings">Բեռնվում է կարգավորումները</string>
+    <string name="exiting_keyos">Ելք</string>
+    <string name="dialog_qrcode_subheading">Սկանեք այս KeyOS Qr կոդը ՝ KeyOS սարքում նույն կարգավորումները կիրառելու համար</string>
+
+
 </resources>
