--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -141,4 +141,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"ಅಧಿಸೂಚನೆಗಳು ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್‌ಗಳು ಆಫ್ ಆಗಿವೆ"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"ಮುಚ್ಚಿ"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"ಮುಚ್ಚಲಾಗಿದೆ"</string>
+
+
+    <string name="app_name">ಕೀಯೋಸ್</string>
+    <string name="exit_button_text">ಕಿಯೋಸ್ಕ್ನಿಂದ ನಿರ್ಗಮಿಸಿ</string>
+    <string name="button_overview_mode">ಅವಲೋಕನ ಮೋಡ್</string>
+    <string name="password">ಗುಪ್ತಪದ</string>
+    <string name="activities">ಚಟುವಟಿಕೆಗಳು</string>
+    <string name="cancel">ರದ್ದುಮಾಡಿ</string>
+    <string name="done">ಮುಗಿದಿದೆ</string>
+    <string name="phoneBook">ದೂರವಾಣಿ ಪುಸ್ತಕ</string>
+    <string name="manual">ಕೈಪಿಡಿ</string>
+    <string name="create_new">ಹೊಸದನ್ನು ರಚಿಸಿ</string>
+    <string name="contact">ಸಂಪರ್ಕಿಸಿ</string>
+    <string name="name">ಹೆಸರು</string>
+    <string name="number">ಸಂಖ್ಯೆ</string>
+    <string name="hide_icon">ಐಕಾನ್ ಮರೆಮಾಡಿ</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ಕೀಯೋಸ್ ಮನೆಯಿಂದ ಲಾಂಚರ್ /ಶಾರ್ಟ್‌ಕಟ್ ಐಕಾನ್ ಅನ್ನು ಮರೆಮಾಡಿ</string>
+    <string name="block_activities">ಚಟುವಟಿಕೆಗಳನ್ನು ನಿರ್ಬಂಧಿಸಿ</string>
+    <string name="block_unwanted_pages_activities_windows">ಅನಗತ್ಯ ಪುಟಗಳು /ಚಟುವಟಿಕೆಗಳು /ವಿಂಡೋಗಳನ್ನು ನಿರ್ಬಂಧಿಸಿ</string>
+    <string name="time_limit">ಸಮಯ ಮಿತಿ</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">ಸಮಯ ನಿರ್ಬಂಧವನ್ನು ಹೊಂದಿಸಿ ಉದಾ. ದಿನಕ್ಕೆ 1 ಗಂ</string>
+    <string name="system_settings">ಸಿಸ್ಟಮ್ ಸೆಟ್ಟಿಂಗ್</string>
+    <string name="restrictions">ನಿರ್ಬಂಧಗಳು</string>
+    <string name="edit_app">ಅಪ್ಲಿಕೇಶನ್ ಸಂಪಾದಿಸಿ</string>
+    <string name="import_amp_export">ಆಮದು ರಫ್ತು</string>
+    <string name="scan">ಸ್ಕ್ಯಾನ್ ಮಾಡಿ</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">ಒಂದೇ ಸೆಟ್ಟಿಂಗ್‌ಗಳ ನೀತಿಯನ್ನು ಅನ್ವಯಿಸಲು keyOS qr ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿ</string>
+    <string name="generate">ರಚಿಸಿ</string>
+    <string name="generate_keyos_qr_code">ಕೀಓಎಸ್ QrCode ಅನ್ನು ರಚಿಸಿ</string>
+    <string name="import_text">ಆಮದು</string>
+    <string name="import_keyos_setting_from_storage">ಕೀಓಎಸ್ ಸೆಟ್ಟಿಂಗ್ ಅನ್ನು ಸಂಗ್ರಹಣೆಯಿಂದ ಆಮದು ಮಾಡಿ</string>
+    <string name="export_text">ರಫ್ತು ಮಾಡಿ</string>
+    <string name="import_keyos_setting_to_storage">ಕೀಓಎಸ್ ಸೆಟ್ಟಿಂಗ್ ಅನ್ನು ಸಂಗ್ರಹಣೆಗೆ ಆಮದು ಮಾಡಿ</string>
+    <string name="recovery_email">ಮರುಪಡೆಯುವಿಕೆ ಇಮೇಲ್</string>
+    <string name="old_password">ಹಳೆಯ ಪಾಸ್‌ವರ್ಡ್</string>
+    <string name="confirm_password">ಪಾಸ್ವರ್ಡ್ ದೃಢೀಕರಿಸಿ</string>
+    <string name="allow_calls">ಕರೆಗಳನ್ನು ಅನುಮತಿಸಿ</string>
+    <string name="incoming">ಒಳಬರುವ</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">ಇದು ನಿಮ್ಮ ಮೊಬೈಲ್‌ಗೆ ಎಲ್ಲಾ ಒಳಬರುವ ಕರೆಗಳನ್ನು ಅನುಮತಿಸುತ್ತದೆ</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">ಇದು ನಿಮ್ಮ ಮೊಬೈಲ್‌ಗೆ ಹೊರಹೋಗುವ ಎಲ್ಲಾ ಕರೆಗಳನ್ನು ಅನುಮತಿಸುತ್ತದೆ</string>
+    <string name="whitelist_contacts">ಶ್ವೇತಪಟ್ಟಿ ಸಂಪರ್ಕಗಳು</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">ಸಂಪರ್ಕಗಳು ನಿಮ್ಮನ್ನು ಕರೆ ಮಾಡಲು ಮಾತ್ರ ಶ್ವೇತಪಟ್ಟಿಯಡಿಯಲ್ಲಿ ಉಳಿಸುತ್ತವೆ</string>
+    <string name="blacklist_contacts">ಕಪ್ಪುಪಟ್ಟಿ ಸಂಪರ್ಕಗಳು</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"ಕಪ್ಪುಪಟ್ಟಿಯ ಅಡಿಯಲ್ಲಿ ಉಳಿಸಲಾದ ಸಂಪರ್ಕಗಳು ನಿಮಗೆ ಕರೆ ಮಾಡಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ"</string>
+    <string name="automatic_whitelist">ಸ್ವಯಂಚಾಲಿತ ಶ್ವೇತಪಟ್ಟಿ</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">ಫೋನ್ ಪುಸ್ತಕದಲ್ಲಿ ಸಂಪರ್ಕ ಲಭ್ಯವಿದ್ದರೆ ಕರೆಗಳನ್ನು ಅನುಮತಿಸಿ</string>
+    <string name="additional">ಹೆಚ್ಚುವರಿ</string>
+    <string name="whitelist_amp_blacklist">ಶ್ವೇತಪಟ್ಟಿ ಕಪ್ಪುಪಟ್ಟಿ</string>
+    <string name="phone_book">ದೂರವಾಣಿ ಪುಸ್ತಕ</string>
+    <string name="import_amp_export_settings">ರಫ್ತು ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಆಮದು ಮಾಡಿ</string>
+    <string name="services">ಸೇವೆಗಳು</string>
+    <string name="single_app">ಏಕ ಅಪ್ಲಿಕೇಶನ್</string>
+    <string name="apps_amp_services">ಅಪ್ಲಿಕೇಶನ್‌ಗಳ ಸೇವೆಗಳು</string>
+    <string name="peripheral">ಬಾಹ್ಯ</string>
+    <string name="advance">ಮುಂಗಡ</string>
+    <string name="disable_camera">ಕ್ಯಾಮೆರಾವನ್ನು ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ</string>
+    <string name="call_settings">ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಕರೆ ಮಾಡಿ</string>
+    <string name="web_filter">ವೆಬ್ ಫಿಲ್ಟರ್</string>
+    <string name="screen_saver">ಸ್ಕ್ರೀನ್ ಸೇವರ್</string>
+    <string name="phone_settings">ದೂರವಾಣಿ ಸಂಯೋಜನೆಗಳು</string>
+    <string name="notification_panel">ಅಧಿಸೂಚನೆ ಫಲಕ</string>
+    <string name="security">ಭದ್ರತೆ</string>
+    <string name="launch">ಪ್ರಾರಂಭಿಸಿ</string>
+    <string name="phone_call_subheading">ಕರೆಗಳನ್ನು ಮಾಡಲು ನಿಮಗೆ ಯಾವುದೇ ತೊಂದರೆ ಎದುರಾದರೆ ಫೋನ್ ಕರೆಗೆ ಸಂಬಂಧಿಸಿದ ಎಲ್ಲಾ ಸೇವೆಗಳನ್ನು ದಯೆಯಿಂದ ಅನುಮತಿಸಿ</string>
+    <string name="phone_call_subheading_hint">ಸುಳಿವು: ಸೇವಾ ವಿಭಾಗದಲ್ಲಿ ಫೋನ್‌ಗಾಗಿ ಹುಡುಕಿ</string>
+    <string name="web_filter_subheading">ವೆಬ್ ಫಿಲ್ಟರ್ ಪ್ರಬಲ ಸೇವೆಯಾಗಿದ್ದು ಅದು ಅನಗತ್ಯ ವೆಬ್‌ಸೈಟ್‌ಗಳನ್ನು ನಿರ್ಬಂಧಿಸಲು ನಿಮಗೆ ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ</string>
+    <string name="web_filter_supported_browsers">ಬೆಂಬಲಿತ ಬ್ರೌಸರ್‌ಗಳು: ಕ್ರೋಮ್, ಫೈರ್‌ಫಾಕ್ಸ್, ಬ್ರೇವ್, ಎಡ್ಜ್, ಒಪೆರಾ, ಡಕ್‌ಡಕ್ಗೊ</string>
+    <string name="off">ಆರಿಸಿ</string>
+    <string name="whitelist_websites">ಶ್ವೇತಪಟ್ಟಿ ವೆಬ್‌ಸೈಟ್‌ಗಳು</string>
+    <string name="whitelist_website_info">ವೆಬ್‌ಸೈಟ್‌ಗಳು ಬ್ರೌಸರ್‌ನಿಂದ ಮಾತ್ರ ಪ್ರವೇಶಿಸಲು ಶ್ವೇತಪಟ್ಟಿಯಡಿಯಲ್ಲಿ ಉಳಿಸುತ್ತವೆ</string>
+    <string name="blacklist_websites">ಕಪ್ಪುಪಟ್ಟಿ ವೆಬ್‌ಸೈಟ್‌ಗಳು</string>
+    <string name="blacklist_websites_info">"ಕಪ್ಪುಪಟ್ಟಿಯ ಅಡಿಯಲ್ಲಿ ಉಳಿಸುವ ವೆಬ್‌ಸೈಟ್‌ಗಳು ಬ್ರೌಸರ್ ಮೂಲಕ ಪ್ರವೇಶಿಸಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ"</string>
+    <string name="block_adult_websites">ವಯಸ್ಕ ವೆಬ್‌ಸೈಟ್‌ಗಳನ್ನು ನಿರ್ಬಂಧಿಸಿ</string>
+    <string name="adult_websites_info">ಇದು 800 ವಯಸ್ಕ ವೆಬ್‌ಸೈಟ್‌ಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ನಿರ್ಬಂಧಿಸುತ್ತದೆ</string>
+    <string name="whitelist">ಶ್ವೇತಪಟ್ಟಿ</string>
+    <string name="add_websites">ವೆಬ್‌ಸೈಟ್ ಸೇರಿಸಿ</string>
+    <string name="website">ಜಾಲತಾಣ</string>
+    <string name="add_websites_subheading">ನೀವು ಶ್ವೇತಪಟ್ಟಿಯಲ್ಲಿ ಸೇರಿಸಲು ಬಯಸುವ ವೆಬ್‌ಸೈಟ್ ಅನ್ನು ದಯವಿಟ್ಟು ನಮೂದಿಸಿ ಉದಾ: www.google.com</string>
+    <string name="otp_verification">Otp ಪರಿಶೀಲನೆ</string>
+    <string name="otp_verification_subheading">ನಿಮ್ಮ ನೋಂದಾಯಿತ ಇಮೇಲ್ ವಿಳಾಸಕ್ಕೆ ನಾವು ಕಳುಹಿಸಿದ 4 ಅಂಕಿಯ ಒಟಿಪಿಯನ್ನು ದಯವಿಟ್ಟು ನಮೂದಿಸಿ</string>
+    <string name="password_prompt_subheading">"ನಿಮ್ಮ ಪಾಸ್‌ವರ್ಡ್ ಅನ್ನು ನೀವು ಇನ್ನೂ ಬದಲಾಯಿಸದಿದ್ದರೆ ದಯವಿಟ್ಟು 1234 ಅನ್ನು ಪ್ರಯತ್ನಿಸಿ"</string>
+    <string name="forget">ಮರೆತುಬಿಡಿ?</string>
+    <string name="user_agreement">ಬಳಕೆದಾರರ ಒಪ್ಪಂದ</string>
+    <string name="user_agreement_2">ನಿಮ್ಮ ಸಾಧನದಲ್ಲಿ ಸ್ಥಾಪಿಸಲಾದ ಅಪ್ಲಿಕೇಶನ್ ಮತ್ತು ಫೋನ್ ಸಂಖ್ಯೆಯ ಪಟ್ಟಿಯನ್ನು ನಾವು ಸಂಗ್ರಹಿಸುತ್ತೇವೆ. ನೀವು QrCode ವೈಶಿಷ್ಟ್ಯವನ್ನು ಬಳಸುತ್ತಿದ್ದರೆ ಮಾತ್ರ ಈ ಡೇಟಾವನ್ನು ನಿಮ್ಮ ಸಾಧನದಿಂದ ತೆಗೆದುಕೊಳ್ಳಲಾಗುತ್ತದೆ ಮತ್ತು ಈ ಡೇಟಾವನ್ನು ಒಂದು ಗಂಟೆಯಲ್ಲಿ ಸರ್ವರ್‌ನಿಂದ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ತೆಗೆದುಹಾಕಲಾಗುತ್ತದೆ</string>
+    <string name="no_thanks">ಬೇಡ ಧನ್ಯವಾದಗಳು</string>
+    <string name="accept_amp_continue">ಒಪ್ಪಿಕೊಳ್ಳಿ</string>
+    <string name="usage_access">ಬಳಕೆ ಪ್ರವೇಶ</string>
+    <string name="overlay">ಒವರ್ಲೆ</string>
+    <string name="write_settings">ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಬರೆಯಿರಿ</string>
+    <string name="sound_access">ಧ್ವನಿ ಪ್ರವೇಶ</string>
+    <string name="other_permissions">ಇತರ ಅನುಮತಿಗಳು</string>
+    <string name="accessibility">ಪ್ರವೇಶಿಸುವಿಕೆ</string>
+    <string name="device_id">ಸಾಧನ ID</string>
+    <string name="feedback_amp_suggestions">ಸಲಹೆಗಳು</string>
+    <string name="quick_survey">ತ್ವರಿತ ಸಮೀಕ್ಷೆ</string>
+    <string name="bug_report">ದೋಷ ವರದಿ</string>
+    <string name="visit">ಭೇಟಿ</string>
+    <string name="rate">ದರ</string>
+    <string name="share">ಹಂಚಿಕೊಳ್ಳಿ</string>
+    <string name="app_info">ಅಪ್ಲಿಕೇಶನ್ ಮಾಹಿತಿ</string>
+    <string name="check_for_update">ನವೀಕರಣಕ್ಕಾಗಿ ಪರಿಶೀಲಿಸಿ</string>
+    <string name="developer_contact">ಡೆವಲಪರ್ ಸಂಪರ್ಕ</string>
+    <string name="terms_amp_conditions">ನಿಯಮಗಳು</string>
+    <string name="privacy_policy">ಗೌಪ್ಯತಾ ನೀತಿ</string>
+    <string name="outgoing">ಹೊರಹೋಗುವ</string>
+    <string name="always_on">ಆನ್</string>
+    <string name="always_off">ಆರಿಸಿ</string>
+    <string name="dont_care">"ಹೆದರುವುದಿಲ್ಲ"</string>
+    <string name="landscape">ಭೂದೃಶ್ಯ</string>
+    <string name="portrait">ಭಾವಚಿತ್ರ</string>
+    <string name="silent">ಮೂಕ</string>
+    <string name="normal">ಸಾಮಾನ್ಯ</string>
+    <string name="select_activity_sunHeading">ನೀವು ನಿರ್ಬಂಧಿಸಲು ಬಯಸುವ ಚಟುವಟಿಕೆಗಳು /ಪುಟಗಳು /ವಿಂಡೋಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ</string>
+    <string name="apps">ಅಪ್ಲಿಕೇಶನ್‌ಗಳು</string>
+    <string name="whitelist_apps">ಶ್ವೇತಪಟ್ಟಿ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು</string>
+    <string name="whitelist_services">ಶ್ವೇತಪಟ್ಟಿ ಸೇವೆಗಳು</string>
+    <string name="whitelist_apps_subheading">"ನೀವು ಪ್ರವೇಶಿಸಲು ಬಯಸುವ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
+    <string name="whitelist_service_heading">"ನೀವು ಪ್ರವೇಶವನ್ನು ನೀಡಲು ಬಯಸುವ ಸೇವೆಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
+    <string name="single_app_subheading">"ಮುಂಭಾಗದಲ್ಲಿ ಯಾವ ಅಪ್ಲಿಕೇಶನ್ ಲಭ್ಯವಿರಬೇಕು ಎಂದು ಆಯ್ಕೆಮಾಡಿ"</string>
+    <string name="blacklist">ಕಪ್ಪುಪಟ್ಟಿ</string>
+    <string name="contacts_blacklist_subheading">"ಕಪ್ಪುಪಟ್ಟಿಯ ಅಡಿಯಲ್ಲಿ ಉಳಿಸಲಾದ ಸಂಪರ್ಕಗಳಿಗೆ ನಿಮ್ಮ Android ಫೋನ್‌ಗೆ ಕರೆ ಮಾಡಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ"</string>
+    <string name="contacts_whitelist_subheading">ವೈಟ್‌ಲಿಸ್ಟ್ ಅಡಿಯಲ್ಲಿ ಉಳಿಸಲಾದ ಸಂಪರ್ಕಗಳು ಇನ್ನು ಮುಂದೆ ನಿಮ್ಮ Android ಫೋನ್‌ಗೆ ಕರೆ ಮಾಡಲು ಮಾತ್ರ ಸಾಧ್ಯವಾಗುತ್ತದೆ</string>
+    <string name="delete">ಅಳಿಸಿ</string>
+    <string name="delete_contact_subheading">ಈ ವಸ್ತುಗಳನ್ನು ಅಳಿಸಲು ನೀವು ಖಚಿತವಾಗಿ ಬಯಸುವಿರಾ</string>
+    <string name="invalid_name">ಅಮಾನ್ಯ ಹೆಸರು</string>
+    <string name="invalid_number">ಅಮಾನ್ಯ ಸಂಖ್ಯೆ</string>
+    <string name="hours">ಗಂಟೆಗಳು</string>
+    <string name="minutes">ನಿಮಿಷಗಳು</string>
+    <string name="file_exported_to">ಫೈಲ್ ಅನ್ನು ರಫ್ತು ಮಾಡಲಾಗಿದೆ</string>
+    <string name="select_a_file_to_upload">ಅಪ್‌ಲೋಡ್ ಮಾಡಲು ಫೈಲ್ ಆಯ್ಕೆಮಾಡಿ</string>
+    <string name="please_install_a_file_manager">ದಯವಿಟ್ಟು ಫೈಲ್ ಮ್ಯಾನೇಜರ್ ಅನ್ನು ಸ್ಥಾಪಿಸಿ.</string>
+    <string name="invalid_backup_file">ಅಮಾನ್ಯ ಬ್ಯಾಕಪ್ ಫೈಲ್</string>
+    <string name="imported_successfully">ಯಶಸ್ವಿಯಾಗಿ ಆಮದು ಮಾಡಲಾಗಿದೆ</string>
+    <string name="password_successfully_send">ಪಾಸ್ವರ್ಡ್ ಅನ್ನು ನಿಮ್ಮ ಇಮೇಲ್ ವಿಳಾಸಕ್ಕೆ ಯಶಸ್ವಿಯಾಗಿ ಕಳುಹಿಸಲಾಗಿದೆ</string>
+    <string name="password_recovery_failed">ಪಾಸ್ವರ್ಡ್ ಮರುಪಡೆಯುವಿಕೆ ವಿಫಲವಾಗಿದೆ</string>
+    <string name="recovery_email_not_registered">ಮರುಪಡೆಯುವಿಕೆ ಇಮೇಲ್ ನೋಂದಾಯಿಸಲಾಗಿಲ್ಲ</string>
+    <string name="change_your">ನಿಮ್ಮ ಬದಲಾವಣೆ</string>
+    <string name="forgot_caps">ಮರೆತಿರುವಿರಾ?</string>
+    <string name="password_successfully_changed">ನಿಮ್ಮ ಪಾಸ್‌ವರ್ಡ್ ಅನ್ನು ಯಶಸ್ವಿಯಾಗಿ ಬದಲಾಯಿಸಲಾಗಿದೆ</string>
+    <string name="invalid_email_address">ಅಮಾನ್ಯ ಇಮೇಲ್ ವಿಳಾಸ</string>
+    <string name="password_min">ಪಾಸ್ವರ್ಡ್ ಕನಿಷ್ಠ 8 ಅಕ್ಷರಗಳನ್ನು ಹೊಂದಿರಬೇಕು</string>
+    <string name="old_password_must_not_new">ಹಳೆಯ ಪಾಸ್‌ವರ್ಡ್ ಹೊಸ ಪಾಸ್‌ವರ್ಡ್ ಆಗಿರಬಾರದು</string>
+    <string name="password_not_match">ಪಾಸ್ವರ್ಡ್ ಹೊಂದಿಕೆಯಾಗುವುದಿಲ್ಲ</string>
+    <string name="invalid_old_pasword">ಹಳೆಯ ಪಾಸ್‌ವರ್ಡ್ ಅಮಾನ್ಯವಾಗಿದೆ</string>
+    <string name="phonebook_blacklist_subheading">"ಕಪ್ಪುಪಟ್ಟಿಯಲ್ಲಿ ನೀವು ಯಾವ ಸಂಪರ್ಕಗಳನ್ನು ಸೇರಿಸಲು ಬಯಸುತ್ತೀರಿ ಎಂಬುದನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
+    <string name="phonebook_whitelist_subheading">"ಶ್ವೇತಪಟ್ಟಿಯಲ್ಲಿ ನೀವು ಯಾವ ಸಂಪರ್ಕಗಳನ್ನು ಸೇರಿಸಲು ಬಯಸುತ್ತೀರಿ ಎಂಬುದನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
+    <string name="camera_not_init">ಕ್ಯಾಮೆರಾ ಪ್ರಾರಂಭಿಕ ದೋಷ:</string>
+    <string name="please_wait">ದಯಮಾಡಿ ನಿರೀಕ್ಷಿಸಿ</string>
+    <string name="invalid_qr">QrCode ಅಮಾನ್ಯವಾಗಿದೆ!</string>
+    <string name="successfully_done">ಯಶಸ್ವಿಯಾಗಿ ಮಾಡಲಾಗಿದೆ!</string>
+    <string name="on_caps">ಆನ್ ಆಗಿದೆ</string>
+    <string name="off_caps">ಆರಿಸಿ</string>
+    <string name="webfilter_blacklist_subheading">"ಕಪ್ಪುಪಟ್ಟಿಯ ಅಡಿಯಲ್ಲಿ ಉಳಿಸುವ ವೆಬ್‌ಸೈಟ್‌ಗಳು ಬ್ರೌಸರ್ ಮೂಲಕ ಪ್ರವೇಶಿಸಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ"</string>
+    <string name="webfilter_whitelist_subheading">ವೆಬ್‌ಸೈಟ್‌ಗಳು ಬ್ರೌಸರ್‌ನಿಂದ ಮಾತ್ರ ಪ್ರವೇಶಿಸಲು ಶ್ವೇತಪಟ್ಟಿಯಡಿಯಲ್ಲಿ ಉಳಿಸುತ್ತವೆ</string>
+    <string name="dialog_website_blacklist_subheading">ನೀವು ಕಪ್ಪುಪಟ್ಟಿಯಲ್ಲಿ ಸೇರಿಸಲು ಬಯಸುವ ವೆಬ್‌ಸೈಟ್ ಅನ್ನು ದಯವಿಟ್ಟು ನಮೂದಿಸಿ ಉದಾ: www.google.com</string>
+    <string name="dialog_website_white_subheading">ನೀವು ಶ್ವೇತಪಟ್ಟಿಯಲ್ಲಿ ಸೇರಿಸಲು ಬಯಸುವ ವೆಬ್‌ಸೈಟ್ ಅನ್ನು ದಯವಿಟ್ಟು ನಮೂದಿಸಿ ಉದಾ: www.google.com</string>
+    <string name="invalid_url">ಅಮಾನ್ಯ URL</string>
+    <string name="invalid_otp">ಅಮಾನ್ಯ Otp</string>
+    <string name="user_agreement_1">ಕೀಯೋಸ್ ಅನ್ನು ಸುಧಾರಿಸಲು ಮತ್ತು ಎಲ್ಲಾ ವೈಶಿಷ್ಟ್ಯಗಳು ಸರಿಯಾಗಿ ಕಾರ್ಯನಿರ್ವಹಿಸುತ್ತಿದೆಯೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಲು, ನಿಮ್ಮ ಕೆಲವು ಬಳಕೆಯ ಡೇಟಾವನ್ನು ಅನಾಮಧೇಯವಾಗಿ ಸಂಗ್ರಹಿಸಲಾಗುತ್ತದೆ. ನಮ್ಮ ಗೌಪ್ಯತೆ ನೀತಿ ಮತ್ತು ನಿಯಮಗಳನ್ನು ನೀವು ಓದಬೇಕು ಮತ್ತು ಒಪ್ಪಿಕೊಳ್ಳಬೇಕು. ಕೀಯೋಸ್ ಬಳಸುವ ಮೊದಲು</string>
+    <string name="select_all">ಎಲ್ಲವನ್ನು ಆರಿಸು</string>
+    <string name="initializing_desktop">ಡೆಸ್ಕ್‌ಟಾಪ್ ಅನ್ನು ಪ್ರಾರಂಭಿಸಲಾಗುತ್ತಿದೆ…</string>
+    <string name="loading_settings">ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ</string>
+    <string name="exiting_keyos">ನಿರ್ಗಮಿಸುತ್ತಿದೆ</string>
+    <string name="dialog_qrcode_subheading">ನಿಮ್ಮ ಕೀಯೋಸ್ ಸಾಧನದಲ್ಲಿ ಒಂದೇ ರೀತಿಯ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಅನ್ವಯಿಸಲು ಈ ಕೀಯೋಸ್ ಕ್ಯೂಆರ್ ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮಾಡಿ</string>
+
+
+
 </resources>
