--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -140,4 +140,168 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"알림 및 앱 사용 중지됨"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"닫기"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"종료됨"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">키오스크 종료</string>
+    <string name="button_overview_mode">개요 모드</string>
+    <string name="password">암호</string>
+    <string name="activities">활동</string>
+    <string name="cancel">취소</string>
+    <string name="done">끝난</string>
+    <string name="phoneBook">전화 번호부</string>
+    <string name="manual">설명서</string>
+    <string name="create_new">새로 만들기</string>
+    <string name="contact">접촉</string>
+    <string name="name">이름</string>
+    <string name="number">번호</string>
+    <string name="hide_icon">숨겨진 아이콘</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">KeyOS 홈에서 실행기 /바로 가기 아이콘 숨기기</string>
+    <string name="block_activities">블록 활동</string>
+    <string name="block_unwanted_pages_activities_windows">원치 않는 페이지 /활동 /창 차단</string>
+    <string name="time_limit">시간 제한</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">타이밍 제한 설정 예. 하루 1 시간</string>
+    <string name="system_settings">환경 설정</string>
+    <string name="restrictions">제한</string>
+    <string name="edit_app">앱 수정</string>
+    <string name="import_amp_export">수입 수출</string>
+    <string name="scan">주사</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">동일한 설정 정책을 적용하려면 keyOS QR 코드를 스캔하십시오.</string>
+    <string name="generate">일으키다</string>
+    <string name="generate_keyos_qr_code">keyOS QrCode 생성</string>
+    <string name="import_text">수입</string>
+    <string name="import_keyos_setting_from_storage">저장소에서 keyOS 설정 가져 오기</string>
+    <string name="export_text">수출</string>
+    <string name="import_keyos_setting_to_storage">keyOS 설정을 저장소로 가져 오기</string>
+    <string name="recovery_email">복구 이메일</string>
+    <string name="old_password">기존 비밀번호</string>
+    <string name="confirm_password">비밀번호 확인</string>
+    <string name="allow_calls">통화 허용</string>
+    <string name="incoming">들어오는</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">이것은 모든 수신 전화를 모바일로 허용합니다.</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">이렇게하면 모든 발신 전화가 모바일로 허용됩니다.</string>
+    <string name="whitelist_contacts">화이트리스트 연락처</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">연락처는 나에게만 전화 할 수있는 화이트리스트에 저장됩니다.</string>
+    <string name="blacklist_contacts">블랙리스트 연락처</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"블랙리스트에 저장된 연락처로 전화를 걸 수 없습니다."</string>
+    <string name="automatic_whitelist">자동 화이트리스트</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">전화 번호부에 연락처가있는 경우 통화 허용</string>
+    <string name="additional">추가</string>
+    <string name="whitelist_amp_blacklist">화이트리스트 블랙리스트</string>
+    <string name="phone_book">전화 번호부</string>
+    <string name="import_amp_export_settings">내보내기 설정 가져 오기</string>
+    <string name="services">서비스</string>
+    <string name="single_app">단일 앱</string>
+    <string name="apps_amp_services">앱 서비스</string>
+    <string name="peripheral">주변</string>
+    <string name="advance">전진</string>
+    <string name="disable_camera">카메라 비활성화</string>
+    <string name="call_settings">통화 설정</string>
+    <string name="web_filter">웹 필터</string>
+    <string name="screen_saver">화면 보호기</string>
+    <string name="phone_settings">전화 설정</string>
+    <string name="notification_panel">알림 패널</string>
+    <string name="security">보안</string>
+    <string name="launch">시작하다</string>
+    <string name="phone_call_subheading">전화를 거는 데 어려움이 있으시면 전화와 관련된 모든 서비스를 허용 해 주시기 바랍니다.</string>
+    <string name="phone_call_subheading_hint">힌트 : 서비스 섹션에서 전화 검색</string>
+    <string name="web_filter_subheading">웹 필터는 원치 않는 웹 사이트를 차단할 수있는 강력한 서비스입니다.</string>
+    <string name="web_filter_supported_browsers">지원되는 브라우저 : chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">떨어져서</string>
+    <string name="whitelist_websites">화이트리스트 웹 사이트</string>
+    <string name="whitelist_website_info">웹 사이트는 브라우저로만 액세스 할 수있는 화이트리스트 아래에 저장됩니다.</string>
+    <string name="blacklist_websites">블랙리스트 웹 사이트</string>
+    <string name="blacklist_websites_info">"블랙리스트에 저장된 웹 사이트는 브라우저로 액세스 할 수 없습니다."</string>
+    <string name="block_adult_websites">성인 웹 사이트 차단</string>
+    <string name="adult_websites_info">800 개의 성인용 웹 사이트가 자동으로 차단됩니다.</string>
+    <string name="whitelist">화이트리스트</string>
+    <string name="add_websites">웹 사이트 추가</string>
+    <string name="website">웹 사이트</string>
+    <string name="add_websites_subheading">화이트리스트에 추가 할 웹 사이트를 입력하세요. 예 : www.google.com</string>
+    <string name="otp_verification">OTP 확인</string>
+    <string name="otp_verification_subheading">등록하신 이메일 주소로 보내 드린 4 자리 OTP를 입력 해주세요.</string>
+    <string name="password_prompt_subheading">"아직 비밀번호를 변경하지 않았다면 1234를 시도해보십시오."</string>
+    <string name="forget">잊어?</string>
+    <string name="user_agreement">사용자 동의</string>
+    <string name="user_agreement_2">설치된 앱 목록과 전화 번호가 기기에 저장됩니다. 이 데이터는 QrCode 기능을 사용하는 경우에만 장치에서 가져 오며이 데이터는 1 시간 내에 서버에서 자동으로 제거됩니다.</string>
+    <string name="no_thanks">고맙지 만 사양 할게</string>
+    <string name="accept_amp_continue">동의하기</string>
+    <string name="usage_access">사용 액세스</string>
+    <string name="overlay">위에 까는 것</string>
+    <string name="write_settings">쓰기 설정</string>
+    <string name="sound_access">사운드 액세스</string>
+    <string name="other_permissions">기타 권한</string>
+    <string name="accessibility">접근성</string>
+    <string name="device_id">장치 아이디</string>
+    <string name="feedback_amp_suggestions">제안</string>
+    <string name="quick_survey">빠른 설문 조사</string>
+    <string name="bug_report">버그 신고</string>
+    <string name="visit">방문</string>
+    <string name="rate">율</string>
+    <string name="share">공유</string>
+    <string name="app_info">앱 정보</string>
+    <string name="check_for_update">업데이트를 확인</string>
+    <string name="developer_contact">개발자 연락처</string>
+    <string name="terms_amp_conditions">자귀</string>
+    <string name="privacy_policy">개인 정보 정책</string>
+    <string name="outgoing">나가는</string>
+    <string name="always_on">의 위에</string>
+    <string name="always_off">떨어져서</string>
+    <string name="dont_care">"상관 하지마"</string>
+    <string name="landscape">경치</string>
+    <string name="portrait">초상화</string>
+    <string name="silent">조용한</string>
+    <string name="normal">표준</string>
+    <string name="select_activity_sunHeading">차단할 활동 /페이지 /창 선택</string>
+    <string name="apps">앱</string>
+    <string name="whitelist_apps">화이트리스트 앱</string>
+    <string name="whitelist_services">화이트리스트 서비스</string>
+    <string name="whitelist_apps_subheading">"액세스 할 앱 선택"</string>
+    <string name="whitelist_service_heading">"액세스 권한을 부여 할 서비스 선택"</string>
+    <string name="single_app_subheading">"포 그라운드에서 사용할 수있는 앱 선택"</string>
+    <string name="blacklist">블랙리스트</string>
+    <string name="contacts_blacklist_subheading">"블랙리스트에 저장된 연락처는 더 이상 Android 휴대 전화로 전화를 걸 수 없습니다."</string>
+    <string name="contacts_whitelist_subheading">화이트리스트에 저장된 연락처는 더 이상 Android 휴대 전화로만 전화를 걸 수 있습니다.</string>
+    <string name="delete">지우다</string>
+    <string name="delete_contact_subheading">이 항목을 삭제 하시겠습니까?</string>
+    <string name="invalid_name">잘못된 이름</string>
+    <string name="invalid_number">잘못된 번호</string>
+    <string name="hours">시간</string>
+    <string name="minutes">의사록</string>
+    <string name="file_exported_to">내 보낸 파일</string>
+    <string name="select_a_file_to_upload">업로드 할 파일 선택</string>
+    <string name="please_install_a_file_manager">파일 관리자를 설치하십시오.</string>
+    <string name="invalid_backup_file">잘못된 백업 파일</string>
+    <string name="imported_successfully">성공적으로 가져옴</string>
+    <string name="password_successfully_send">이메일 주소로 비밀번호가 성공적으로 전송되었습니다.</string>
+    <string name="password_recovery_failed">비밀번호 복구 실패</string>
+    <string name="recovery_email_not_registered">복구 이메일이 등록되지 않았습니다.</string>
+    <string name="change_your">변경</string>
+    <string name="forgot_caps">잊으 셨나요?</string>
+    <string name="password_successfully_changed">비밀번호가 성공적으로 변경되었습니다</string>
+    <string name="invalid_email_address">잘못된 이메일 주소</string>
+    <string name="password_min">비밀번호는 8 자 이상이어야합니다.</string>
+    <string name="old_password_must_not_new">이전 비밀번호는 새 비밀번호가 아니어야합니다.</string>
+    <string name="password_not_match">비밀번호가 일치하지 않습니다</string>
+    <string name="invalid_old_pasword">잘못된 이전 비밀번호</string>
+    <string name="phonebook_blacklist_subheading">"블랙리스트에 추가 할 연락처 선택"</string>
+    <string name="phonebook_whitelist_subheading">"허용 목록에 추가 할 연락처 선택"</string>
+    <string name="camera_not_init">카메라 초기화 오류 :</string>
+    <string name="please_wait">기다려주세요</string>
+    <string name="invalid_qr">잘못된 QrCode!</string>
+    <string name="successfully_done">성공적으로 완료되었습니다!</string>
+    <string name="on_caps">의 위에</string>
+    <string name="off_caps">떨어져서</string>
+    <string name="webfilter_blacklist_subheading">"블랙리스트에 저장된 웹 사이트는 브라우저로 액세스 할 수 없습니다."</string>
+    <string name="webfilter_whitelist_subheading">웹 사이트는 브라우저로만 액세스 할 수있는 화이트리스트 아래에 저장됩니다.</string>
+    <string name="dialog_website_blacklist_subheading">블랙리스트에 추가 할 웹 사이트를 입력하세요. 예 : www.google.com</string>
+    <string name="dialog_website_white_subheading">화이트리스트에 추가 할 웹 사이트를 입력하세요. 예 : www.google.com</string>
+    <string name="invalid_url">잘못된 URL</string>
+    <string name="invalid_otp">잘못된 Otp</string>
+    <string name="user_agreement_1">KeyOS를 개선하고 모든 기능이 제대로 작동하는지 확인하기 위해 일부 사용 데이터가 익명으로 수집됩니다. 귀하는 당사의 개인 정보 보호 정책 및 약관을 읽고 동의해야합니다. KeyOS를 사용하기 전에</string>
+    <string name="select_all">모두 선택</string>
+    <string name="initializing_desktop">데스크톱 초기화 중…</string>
+    <string name="loading_settings">설정로드 중</string>
+    <string name="exiting_keyos">종료</string>
+    <string name="dialog_qrcode_subheading">이 KeyOS Qr 코드를 스캔하여 KeyOS 장치에 동일한 설정을 적용하십시오.</string>
+
 </resources>
