--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -139,4 +139,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"ການແຈ້ງເຕືອນ ແລະ ແອັບຖືກປິດໄວ້"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"ປິດ"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"ປິດແລ້ວ"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">ອອກຈາກ Kiosk</string>
+    <string name="button_overview_mode">ຮູບແບບພາບລວມ</string>
+    <string name="password">ລະຫັດຜ່ານ</string>
+    <string name="activities">ກິດຈະ ກຳ</string>
+    <string name="cancel">ຍົກເລີກ</string>
+    <string name="done">ເຮັດແລ້ວ</string>
+    <string name="phoneBook">ປຶ້ມ​ໂທລະ​ສັບ</string>
+    <string name="manual">ຄູ່ມື</string>
+    <string name="create_new">ສ້າງ ໃໝ່</string>
+    <string name="contact">ຕິດຕໍ່</string>
+    <string name="name">ຊື່</string>
+    <string name="number">ເລກ</string>
+    <string name="hide_icon">ເຊື່ອງ Icon</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ຊ່ອນຮູບສັນຍາລັກ launcher /ທາງລັດຈາກເຮືອນ KeyOS</string>
+    <string name="block_activities">ກິດຈະ ກຳ ຕັນ</string>
+    <string name="block_unwanted_pages_activities_windows">ຂັດຂວາງຫນ້າ /ກິດຈະ ກຳ /ປ່ອງຢ້ຽມທີ່ບໍ່ຕ້ອງການ</string>
+    <string name="time_limit">ເວລາ ຈຳ ກັດ</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">ກຳ ນົດການ ຈຳ ກັດເວລາ Eg. 1hr ຕໍ່ມື້</string>
+    <string name="system_settings">ການຕັ້ງຄ່າລະບົບ</string>
+    <string name="restrictions">ຂໍ້ ຈຳ ກັດ</string>
+    <string name="edit_app">ແກ້ໄຂ App</string>
+    <string name="import_amp_export">ການ ນຳ ເຂົ້າສົ່ງອອກ</string>
+    <string name="scan">ສະແກນ</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">ສະແກນລະຫັດ keyOS qr ເພື່ອ ນຳ ໃຊ້ນະໂຍບາຍການຕັ້ງຄ່າດຽວກັນ</string>
+    <string name="generate">ຜະລິດ</string>
+    <string name="generate_keyos_qr_code">ສ້າງ keyOS QrCode</string>
+    <string name="import_text">ການ ນຳ ເຂົ້າ</string>
+    <string name="import_keyos_setting_from_storage">ນຳ ເຂົ້າການຕັ້ງຄ່າ keyOS ຈາກບ່ອນຈັດເກັບຂໍ້ມູນ</string>
+    <string name="export_text">ການສົ່ງອອກ</string>
+    <string name="import_keyos_setting_to_storage">ນຳ ເຂົ້າການຕັ້ງຄ່າ keyOS ເຂົ້າໃນບ່ອນຈັດເກັບຂໍ້ມູນ</string>
+    <string name="recovery_email">ອີເມວກູ້ຂໍ້ມູນ</string>
+    <string name="old_password">ລະ​ຫັດ​ຜ່ານ​ເກົ່າ</string>
+    <string name="confirm_password">ຢືນ​ຢັນ​ລະ​ຫັດ</string>
+    <string name="allow_calls">ອະນຸຍາດການໂທ</string>
+    <string name="incoming">ເຂົ້າມາ</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">ນີ້ຈະຊ່ວຍໃຫ້ການໂທເຂົ້າທັງ ໝົດ ເຂົ້າໃນມືຖືຂອງທ່ານ</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">ນີ້ຈະຊ່ວຍໃຫ້ການໂທອອກທັງ ໝົດ ເຂົ້າໃນມືຖືຂອງທ່ານ</string>
+    <string name="whitelist_contacts">ລາຍຊື່ຜູ້ຕິດຕໍ່ບັນຊີ</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">ລາຍຊື່ຜູ້ຕິດຕໍ່ປະຫຍັດພາຍໃຕ້ whitelist ພຽງແຕ່ສາມາດໂທຫາທ່ານໄດ້</string>
+    <string name="blacklist_contacts">ລາຍຊື່ຜູ້ຕິດຕໍ່ທີ່ຢູ່ໃນບັນຊີ ດຳ</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"ລາຍຊື່ຜູ້ຕິດຕໍ່ທີ່ຢູ່ໃນບັນຊີ ດຳ ຈະບໍ່ສາມາດໂທຫາເຈົ້າໄດ້"</string>
+    <string name="automatic_whitelist">whitelist ອັດຕະໂນມັດ</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">ອະນຸຍາດການໂທຖ້າມີການຕິດຕໍ່ທີ່ມີຢູ່ໃນປື້ມໂທລະສັບ</string>
+    <string name="additional">ເພີ່ມເຕີມ</string>
+    <string name="whitelist_amp_blacklist">ດຳ ບັນຊີ ດຳ</string>
+    <string name="phone_book">ປຶ້ມ​ໂທລະ​ສັບ</string>
+    <string name="import_amp_export_settings">ນຳ ເຂົ້າການຕັ້ງຄ່າການສົ່ງອອກ</string>
+    <string name="services">ການບໍລິການ</string>
+    <string name="single_app">App ດຽວ</string>
+    <string name="apps_amp_services">ບໍລິການ Apps</string>
+    <string name="peripheral">ເຄື່ອງປະດັບ</string>
+    <string name="advance">ລ່ວງ ໜ້າ</string>
+    <string name="disable_camera">ປິດກ້ອງ</string>
+    <string name="call_settings">ຕັ້ງຄ່າການໂທ</string>
+    <string name="web_filter">ຕົວກອງເວັບ</string>
+    <string name="screen_saver">ເຄື່ອງປະຫຍັດ ໜ້າ ຈໍ</string>
+    <string name="phone_settings">ການຕັ້ງຄ່າໂທລະສັບ</string>
+    <string name="notification_panel">ກະດານແຈ້ງເຕືອນ</string>
+    <string name="security">ຄວາມປອດໄພ</string>
+    <string name="launch">ເປີດຕົວ</string>
+    <string name="phone_call_subheading">ຖ້າທ່ານປະສົບບັນຫາໃດໆໃນການໂທອອກດ້ວຍການອະນຸຍາດໃຫ້ບໍລິການທັງ ໝົດ ທີ່ກ່ຽວຂ້ອງກັບການໂທຫາໂທລະສັບ</string>
+    <string name="phone_call_subheading_hint">ຄຳ ແນະ ນຳ: ຄົ້ນຫາໂທລະສັບໃນສ່ວນການບໍລິການ</string>
+    <string name="web_filter_subheading">ຕົວກອງເວັບແມ່ນບໍລິການທີ່ມີປະສິດທິພາບເຊິ່ງຊ່ວຍໃຫ້ທ່ານສາມາດກີດຂວາງເວັບໄຊທ໌ທີ່ບໍ່ຕ້ອງການ</string>
+    <string name="web_filter_supported_browsers">ຕົວທ່ອງເວັບທີ່ສະຫນັບສະຫນູນ: chrome, firefox, ກ້າຫານ, ແຂບ, Opera, duckduckgo</string>
+    <string name="off">ປິດ</string>
+    <string name="whitelist_websites">ເວບໄຊທ໌ whitelist</string>
+    <string name="whitelist_website_info">ເວັບໄຊທ໌ບັນທຶກພາຍໃຕ້ whitelist ພຽງແຕ່ສາມາດເຂົ້າເຖິງໂດຍຕົວທ່ອງເວັບ</string>
+    <string name="blacklist_websites">ເວັບໄຊທ໌ບັນຊີດໍາ</string>
+    <string name="blacklist_websites_info">"ເວບໄຊທ໌ບັນທຶກຢູ່ໃນບັນຊີ ດຳ ຈະບໍ່ສາມາດເຂົ້າເຖິງໂດຍຕົວທ່ອງເວັບໄດ້"</string>
+    <string name="block_adult_websites">ຂັດຂວາງເວັບໄຊທ໌ຂອງຜູ້ໃຫຍ່</string>
+    <string name="adult_websites_info">ນີ້ຈະອັດຕະໂນມັດ 800 ເວັບໄຊທ໌ສໍາລັບຜູ້ໃຫຍ່</string>
+    <string name="whitelist">Whitelist</string>
+    <string name="add_websites">ເພີ່ມເວບໄຊທ໌</string>
+    <string name="website">ເວບໄຊທ໌</string>
+    <string name="add_websites_subheading">ກະລຸນາໃສ່ເວັບໄຊທ໌ທີ່ທ່ານຕ້ອງການເພີ່ມເຂົ້າໃນບັນຊີ whitelist Eg: www.google.com</string>
+    <string name="otp_verification">ການກວດສອບ Otp</string>
+    <string name="otp_verification_subheading">ກະລຸນາໃສ່ລະຫັດ otp 4 ຕົວເລກທີ່ພວກເຮົາໄດ້ສົ່ງໄປຫາທີ່ຢູ່ອີເມວທີ່ລົງທະບຽນຂອງທ່ານ</string>
+    <string name="password_prompt_subheading">msgstr "ຖ້າທ່ານຍັງບໍ່ປ່ຽນລະຫັດຜ່ານຂອງທ່ານກະລຸນາລອງ 1234"</string>
+    <string name="forget">ລືມ?</string>
+    <string name="user_agreement">ຂໍ້ຕົກລົງຂອງຜູ້ໃຊ້</string>
+    <string name="user_agreement_2">ພວກເຮົາຈະເກັບລາຍຊື່ແອັບແລະເບີໂທລະສັບທີ່ຕິດຕັ້ງໄວ້ໃນເຄື່ອງຂອງທ່ານ. ຂໍ້ມູນນີ້ຈະຖືກເອົາມາຈາກອຸປະກອນຂອງທ່ານເທົ່ານັ້ນຖ້າທ່ານ ກຳ ລັງໃຊ້ຄຸນສົມບັດ QrCode ແລະຂໍ້ມູນນີ້ຈະຖືກລຶບອອກຈາກເຊີບເວີໂດຍອັດຕະໂນມັດດ້ວຍເວລາ 1 ຊົ່ວໂມງ</string>
+    <string name="no_thanks">ບໍ່​ຂອບ​ໃຈ</string>
+    <string name="accept_amp_continue">ຍອມ​ຮັບ</string>
+    <string name="usage_access">ການ ນຳ ໃຊ້</string>
+    <string name="overlay">ການຊ້ອນກັນ</string>
+    <string name="write_settings">ຂຽນການຕັ້ງຄ່າ</string>
+    <string name="sound_access">ການເຂົ້າເຖິງສຽງ</string>
+    <string name="other_permissions">ສິດອື່ນໆ</string>
+    <string name="accessibility">ຄວາມສາມາດເຂົ້າເຖິງໄດ້</string>
+    <string name="device_id">ID ຂອງອຸປະກອນ</string>
+    <string name="feedback_amp_suggestions">ຄຳ ແນະ ນຳ</string>
+    <string name="quick_survey">ການ ສຳ ຫຼວດດ່ວນ</string>
+    <string name="bug_report">ບົດລາຍງານ bug</string>
+    <string name="visit">ຢ້ຽມຢາມ</string>
+    <string name="rate">ອັດຕາ</string>
+    <string name="share">ແບ່ງປັນ</string>
+    <string name="app_info">ຂໍ້ມູນຂອງແອັບ App</string>
+    <string name="check_for_update">ກວດ​ເບິ່ງ​ສໍາ​ລັບ​ການ​ປັບ​ປຸງ</string>
+    <string name="developer_contact">ຕິດຕໍ່ຜູ້ພັດທະນາ</string>
+    <string name="terms_amp_conditions">ເງື່ອນໄຂ</string>
+    <string name="privacy_policy">ນະໂຍບາຍຄວາມເປັນສ່ວນຕົວ</string>
+    <string name="outgoing">ຂາອອກ</string>
+    <string name="always_on">ສຸດ</string>
+    <string name="always_off">ປິດ</string>
+    <string name="dont_care">"ບໍ່ສົນໃຈ"</string>
+    <string name="landscape">ພູມສັນຖານ</string>
+    <string name="portrait">ຮູບຄົນ</string>
+    <string name="silent">ງຽບ</string>
+    <string name="normal">ທຳ ມະດາ</string>
+    <string name="select_activity_sunHeading">ເລືອກກິດຈະ ກຳ ໃດ /ໜ້າ /ປ່ອງຢ້ຽມທີ່ທ່ານຕ້ອງການປິດກັ້ນ</string>
+    <string name="apps">ແອັບ.</string>
+    <string name="whitelist_apps">Whitelist Apps</string>
+    <string name="whitelist_services">ການບໍລິການບັນຊີຂາວ</string>
+    <string name="whitelist_apps_subheading">"ເລືອກແອັບທີ່ທ່ານຕ້ອງການເຂົ້າເຖິງ"</string>
+    <string name="whitelist_service_heading">"ເລືອກບໍລິການໃດທີ່ທ່ານຕ້ອງການໃຫ້ເຂົ້າເຖິງ"</string>
+    <string name="single_app_subheading">"ເລືອກແອັບທີ່ທ່ານຕ້ອງການມີຢູ່ໃນ ໜ້າ ຈໍ"</string>
+    <string name="blacklist">ບັນຊີ ດຳ</string>
+    <string name="contacts_blacklist_subheading">"ລາຍຊື່ຜູ້ຕິດຕໍ່ຖືກບັນທຶກໄວ້ພາຍໃຕ້ບັນຊີ ດຳ ຈະບໍ່ສາມາດໂທຫາໂທລະສັບ Android ຂອງທ່ານອີກຕໍ່ໄປ"</string>
+    <string name="contacts_whitelist_subheading">ລາຍຊື່ຜູ້ຕິດຕໍ່ຖືກບັນທຶກພາຍໃຕ້ Whitelist ພຽງແຕ່ສາມາດໂທຫາໂທລະສັບ Android ຂອງທ່ານອີກຕໍ່ໄປ</string>
+    <string name="delete">ລົບ</string>
+    <string name="delete_contact_subheading">ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບລາຍການເຫຼົ່ານີ້</string>
+    <string name="invalid_name">ຊື່ບໍ່ຖືກຕ້ອງ</string>
+    <string name="invalid_number">ເບີບໍ່ຖືກຕ້ອງ</string>
+    <string name="hours">ຊົ່ວໂມງ</string>
+    <string name="minutes">ນາທີ</string>
+    <string name="file_exported_to">ແຟ້ມສົ່ງອອກໄປ</string>
+    <string name="select_a_file_to_upload">ເລືອກ File ທີ່ຈະອັບໂຫລດ</string>
+    <string name="please_install_a_file_manager">ກະລຸນາຕິດຕັ້ງ File Manager.</string>
+    <string name="invalid_backup_file">ເອກະສານ ສຳ ຮອງບໍ່ຖືກຕ້ອງ</string>
+    <string name="imported_successfully">ນຳ ເຂົ້າຢ່າງ ສຳ ເລັດຜົນ</string>
+    <string name="password_successfully_send">ລະຫັດຜ່ານຖືກສົ່ງໄປຫາທີ່ຢູ່ອີເມວຂອງທ່ານແລ້ວ</string>
+    <string name="password_recovery_failed">ການກູ້ລະຫັດຜ່ານລົ້ມເຫລວ</string>
+    <string name="recovery_email_not_registered">ອີເມວກູ້ຂໍ້ມູນບໍ່ໄດ້ລົງທະບຽນ</string>
+    <string name="change_your">ປ່ຽນທ່ານ</string>
+    <string name="forgot_caps">ລືມ?</string>
+    <string name="password_successfully_changed">ລະຫັດຜ່ານຂອງທ່ານໄດ້ຖືກປ່ຽນຢ່າງ ສຳ ເລັດຜົນແລ້ວ</string>
+    <string name="invalid_email_address">ທີ່ຢູ່ອີເມວບໍ່ຖືກຕ້ອງ</string>
+    <string name="password_min">ລະຫັດຜ່ານຕ້ອງມີຕົວອັກສອນນ້ອຍ 8 ໂຕ</string>
+    <string name="old_password_must_not_new">ລະຫັດຜ່ານເກົ່າບໍ່ຕ້ອງແມ່ນລະຫັດລັບ ໃໝ່</string>
+    <string name="password_not_match">ລະຫັດຜ່ານບໍ່ກົງ</string>
+    <string name="invalid_old_pasword">ລະຫັດຜ່ານເກົ່າບໍ່ຖືກຕ້ອງ</string>
+    <string name="phonebook_blacklist_subheading">"ເລືອກລາຍຊື່ຜູ້ຕິດຕໍ່ທີ່ທ່ານຕ້ອງການເພີ່ມເຂົ້າໃນບັນຊີ ດຳ"</string>
+    <string name="phonebook_whitelist_subheading">"ເລືອກລາຍຊື່ຜູ້ຕິດຕໍ່ໃດທີ່ທ່ານຕ້ອງການເພີ່ມເຂົ້າໃນບັນຊີ whitelist"</string>
+    <string name="camera_not_init">ຂໍ້ຜິດພາດໃນການເລີ່ມຕົ້ນຂອງກ້ອງ:</string>
+    <string name="please_wait">ກະ​ລຸ​ນາ​ລໍ​ຖ້າ</string>
+    <string name="invalid_qr">QrCode ບໍ່ຖືກຕ້ອງ!</string>
+    <string name="successfully_done">ສຳ ເລັດແລ້ວ!</string>
+    <string name="on_caps">ເປີດ</string>
+    <string name="off_caps">ເບີ</string>
+    <string name="webfilter_blacklist_subheading">"ເວບໄຊທ໌ບັນທຶກຢູ່ໃນບັນຊີ ດຳ ຈະບໍ່ສາມາດເຂົ້າເຖິງໂດຍຕົວທ່ອງເວັບໄດ້"</string>
+    <string name="webfilter_whitelist_subheading">ເວັບໄຊທ໌ບັນທຶກພາຍໃຕ້ whitelist ພຽງແຕ່ສາມາດເຂົ້າເຖິງໂດຍຕົວທ່ອງເວັບ</string>
+    <string name="dialog_website_blacklist_subheading">ກະລຸນາໃສ່ເວັບໄຊທ໌ທີ່ທ່ານຕ້ອງການເພີ່ມເຂົ້າໃນບັນຊີ ດຳ ເຊັ່ນ: www.google.com</string>
+    <string name="dialog_website_white_subheading">ກະລຸນາໃສ່ເວັບໄຊທ໌ທີ່ທ່ານຕ້ອງການເພີ່ມເຂົ້າໃນບັນຊີ whitelist Eg: www.google.com</string>
+    <string name="invalid_url">Url ບໍ່ຖືກຕ້ອງ</string>
+    <string name="invalid_otp">Otp ບໍ່ຖືກຕ້ອງ</string>
+    <string name="user_agreement_1">ເພື່ອປັບປຸງ KeyOS ແລະຮັບປະກັນວ່າຄຸນນະສົມບັດທັງ ໝົດ ເຮັດວຽກຢ່າງຖືກຕ້ອງ, ບາງຂໍ້ມູນການ ນຳ ໃຊ້ຂອງທ່ານຈະຖືກເກັບ ກຳ ໂດຍບໍ່ລະບຸຊື່. ທ່ານຕ້ອງອ່ານແລະເຫັນດີກັບນະໂຍບາຍຄວາມເປັນສ່ວນຕົວຂອງພວກເຮົາ. ກ່ອນທີ່ຈະໃຊ້ KeyOS</string>
+    <string name="select_all">ເລືອກ​ທັງ​ຫມົດ</string>
+    <string name="initializing_desktop">ກຳ ລັງເລີ່ມຕົ້ນ desktop ...</string>
+    <string name="loading_settings">ການຕັ້ງຄ່າການຕັ້ງຄ່າ</string>
+    <string name="exiting_keyos">ການອອກໄປ</string>
+    <string name="dialog_qrcode_subheading">ສະແກນລະຫັດ KeyOS Qr ນີ້ເພື່ອໃຊ້ການຕັ້ງຄ່າດຽວກັນໃນອຸປະກອນ KeyOS ຂອງທ່ານ</string>
+
 </resources>
