--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -141,4 +141,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Programos ir pranešimai išjungti"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Uždaryti"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Uždaryta"</string>
+
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Išeikite iš kiosko</string>
+    <string name="button_overview_mode">Apžvalgos režimas</string>
+    <string name="password">Slaptažodis</string>
+    <string name="activities">Veikla</string>
+    <string name="cancel">Atšaukti</string>
+    <string name="done">padaryta</string>
+    <string name="phoneBook">Telefonų knyga</string>
+    <string name="manual">Rankinis</string>
+    <string name="create_new">Sukurk naują</string>
+    <string name="contact">kontaktas</string>
+    <string name="name">vardas</string>
+    <string name="number">Skaičius</string>
+    <string name="hide_icon">Slėpti piktogramą</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">slėpti paleidimo priemonės /nuorodos piktogramą iš „KeyOS“ namų</string>
+    <string name="block_activities">Blokuoti veiklą</string>
+    <string name="block_unwanted_pages_activities_windows">Blokuokite nepageidaujamus puslapius /veiklas /langus</string>
+    <string name="time_limit">Terminas</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Nustatykite laiko apribojimą, pvz. 1 val. Per dieną</string>
+    <string name="system_settings">Sistemos nustatymai</string>
+    <string name="restrictions">Apribojimai</string>
+    <string name="edit_app">Redaguoti programą</string>
+    <string name="import_amp_export">Importas eksportas</string>
+    <string name="scan">Nuskaityti</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Nuskaitykite keyOS qr kodą, kad pritaikytumėte tą pačią nustatymų politiką</string>
+    <string name="generate">Generuoti</string>
+    <string name="generate_keyos_qr_code">Generuoti keyOS QrCode</string>
+    <string name="import_text">Importuoti</string>
+    <string name="import_keyos_setting_from_storage">Importuokite „keyOS“ nustatymą iš saugyklos</string>
+    <string name="export_text">Eksportuoti</string>
+    <string name="import_keyos_setting_to_storage">Importuokite „keyOS“ nustatymą į saugyklą</string>
+    <string name="recovery_email">Atkūrimo el. Paštas</string>
+    <string name="old_password">Senas slaptažodis</string>
+    <string name="confirm_password">Patvirtinti slaptažodį</string>
+    <string name="allow_calls">Leisti skambučius</string>
+    <string name="incoming">Gaunamasis</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Tai leis visus gaunamus skambučius į jūsų mobilųjį telefoną</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Tai leis visus išeinančius skambučius į jūsų mobilųjį telefoną</string>
+    <string name="whitelist_contacts">Baltasis sąrašas „Kontaktai“</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontaktai išsaugomi baltame sąraše, kad galėtumėte tik jums paskambinti</string>
+    <string name="blacklist_contacts">Juodojo sąrašo kontaktai</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Kontaktai, išsaugoti juodajame sąraše, negalės jums skambinti“</string>
+    <string name="automatic_whitelist">Automatinis baltasis sąrašas</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Leisti skambinti, jei kontaktas yra telefonų knygoje</string>
+    <string name="additional">Papildomas</string>
+    <string name="whitelist_amp_blacklist">Baltasis sąrašas juodasis sąrašas</string>
+    <string name="phone_book">Telefonų knyga</string>
+    <string name="import_amp_export_settings">Importuoti eksportavimo nustatymus</string>
+    <string name="services">Paslaugos</string>
+    <string name="single_app">Viena programa</string>
+    <string name="apps_amp_services">Programų paslaugos</string>
+    <string name="peripheral">Periferinis</string>
+    <string name="advance">Iš anksto</string>
+    <string name="disable_camera">Išjungti fotoaparatą</string>
+    <string name="call_settings">Skambučių nustatymai</string>
+    <string name="web_filter">Žiniatinklio filtras</string>
+    <string name="screen_saver">Ekrano užsklanda</string>
+    <string name="phone_settings">Telefono nustatymai</string>
+    <string name="notification_panel">Pranešimų skydelis</string>
+    <string name="security">Saugumas</string>
+    <string name="launch">Paleiskite</string>
+    <string name="phone_call_subheading">Jei kyla problemų dėl skambučių, maloniai leiskite naudotis visomis su telefono skambučiais susijusiomis paslaugomis</string>
+    <string name="phone_call_subheading_hint">užuomina: ieškokite telefono paslaugų skyriuje</string>
+    <string name="web_filter_subheading">Žiniatinklio filtras yra galinga paslauga, leidžianti užblokuoti nepageidaujamas svetaines</string>
+    <string name="web_filter_supported_browsers">Palaikomos naršyklės: chromas, „Firefox“, drąsus, kraštas, opera, „duckduckgo“</string>
+    <string name="off">Išjungta</string>
+    <string name="whitelist_websites">Tinklalapių įtraukimas į baltąjį sąrašą</string>
+    <string name="whitelist_website_info">Svetainės išsaugomos baltame sąraše, kurias gali pasiekti tik naršyklė</string>
+    <string name="blacklist_websites">Juodojo sąrašo svetainės</string>
+    <string name="blacklist_websites_info">„Svetainės, išsaugotos juodajame sąraše, negalės pasiekti naršyklės“</string>
+    <string name="block_adult_websites">Blokuokite svetaines suaugusiesiems</string>
+    <string name="adult_websites_info">Tai automatiškai užblokuos 800 suaugusiųjų svetainių</string>
+    <string name="whitelist">Baltasis sąrašas</string>
+    <string name="add_websites">Pridėti svetainę</string>
+    <string name="website">Interneto svetainė</string>
+    <string name="add_websites_subheading">Įveskite svetainę, kurią norite įtraukti į baltąjį sąrašą, pvz .: www.google.com</string>
+    <string name="otp_verification">Otp patikrinimas</string>
+    <string name="otp_verification_subheading">Įveskite 4 skaitmenų OTP, kurį išsiuntėme jūsų registruotu el. Pašto adresu</string>
+    <string name="password_prompt_subheading">"jei dar nepakeitėte slaptažodžio, pabandykite 1234"</string>
+    <string name="forget">pamiršti?</string>
+    <string name="user_agreement">vartotojo sutikimas</string>
+    <string name="user_agreement_2">Įrenginyje išsaugosime įdiegtų programų sąrašą ir telefono numerį. Šie duomenys bus paimti iš jūsų įrenginio tik tuo atveju, jei naudojate „QrCode“ funkciją, ir šie duomenys bus automatiškai pašalinti iš serverio per vieną valandą</string>
+    <string name="no_thanks">Ne, ačiū</string>
+    <string name="accept_amp_continue">Priimti</string>
+    <string name="usage_access">Naudojimo prieiga</string>
+    <string name="overlay">Perdanga</string>
+    <string name="write_settings">Rašymo nustatymai</string>
+    <string name="sound_access">Garso prieiga</string>
+    <string name="other_permissions">Kiti leidimai</string>
+    <string name="accessibility">Prieinamumas</string>
+    <string name="device_id">Įrenginio ID</string>
+    <string name="feedback_amp_suggestions">pasiūlymus</string>
+    <string name="quick_survey">Greita apklausa</string>
+    <string name="bug_report">Pranešimas apie klaidą</string>
+    <string name="visit">Apsilankykite</string>
+    <string name="rate">Įvertinti</string>
+    <string name="share">Dalintis</string>
+    <string name="app_info">Programos informacija</string>
+    <string name="check_for_update">Patikrinkite, ar yra naujinių</string>
+    <string name="developer_contact">Kūrėjo kontaktas</string>
+    <string name="terms_amp_conditions">Sąlygos</string>
+    <string name="privacy_policy">Privatumo politika</string>
+    <string name="outgoing">Išeinantis</string>
+    <string name="always_on">ant</string>
+    <string name="always_off">išjungtas</string>
+    <string name="dont_care">„Nesvarbu“</string>
+    <string name="landscape">Peizažas</string>
+    <string name="portrait">Portretas</string>
+    <string name="silent">Tylu</string>
+    <string name="normal">Normalus</string>
+    <string name="select_activity_sunHeading">Pasirinkite, kurias veiklas /puslapius /langus norite užblokuoti</string>
+    <string name="apps">Programos</string>
+    <string name="whitelist_apps">Baltojo sąrašo programos</string>
+    <string name="whitelist_services">Baltojo sąrašo paslaugos</string>
+    <string name="whitelist_apps_subheading">"Pasirinkite programas, prie kurių norite tiesiogiai prisijungti"</string>
+    <string name="whitelist_service_heading">„Pasirinkite, kurioms paslaugoms norite suteikti prieigą“</string>
+    <string name="single_app_subheading">„Pasirinkite programą, kurią norite pasiekti pirmame plane“</string>
+    <string name="blacklist">Juodasis sąrašas</string>
+    <string name="contacts_blacklist_subheading">„Pagal juodąjį sąrašą išsaugoti kontaktai nebegalės skambinti į jūsų„ Android “telefoną“</string>
+    <string name="contacts_whitelist_subheading">Pagal baltąjį sąrašą išsaugoti kontaktai nebegali skambinti tik į jūsų „Android“ telefoną</string>
+    <string name="delete">Ištrinti</string>
+    <string name="delete_contact_subheading">Ar tikrai norite ištrinti šiuos elementus</string>
+    <string name="invalid_name">Netinkamas vardas</string>
+    <string name="invalid_number">Neteisingas numeris</string>
+    <string name="hours">Valandos</string>
+    <string name="minutes">Protokolas</string>
+    <string name="file_exported_to">Failas eksportuotas į</string>
+    <string name="select_a_file_to_upload">Pasirinkite failą, kurį norite įkelti</string>
+    <string name="please_install_a_file_manager">Įdiekite failų tvarkyklę.</string>
+    <string name="invalid_backup_file">Neteisingas atsarginės kopijos failas</string>
+    <string name="imported_successfully">Importuota sėkmingai</string>
+    <string name="password_successfully_send">Slaptažodis sėkmingai išsiųstas jūsų el. Pašto adresu</string>
+    <string name="password_recovery_failed">Nepavyko atkurti slaptažodžio</string>
+    <string name="recovery_email_not_registered">Atkūrimo el. Pašto adresas neregistruotas</string>
+    <string name="change_your">Pakeiskite savo</string>
+    <string name="forgot_caps">Pamiršau ?</string>
+    <string name="password_successfully_changed">Jūsų slaptažodis sėkmingai pakeistas</string>
+    <string name="invalid_email_address">Neteisingas el. pašto adresas</string>
+    <string name="password_min">Slaptažodį turi sudaryti mažiausiai 8 simboliai</string>
+    <string name="old_password_must_not_new">Senas slaptažodis neturi būti naujas slaptažodis</string>
+    <string name="password_not_match">Slaptažodis neatitinka</string>
+    <string name="invalid_old_pasword">Netinkamas senas slaptažodis</string>
+    <string name="phonebook_blacklist_subheading">"Pasirinkite kontaktus, kuriuos norite įtraukti į juodąjį sąrašą"</string>
+    <string name="phonebook_whitelist_subheading">„Pasirinkite, kuriuos kontaktus norite įtraukti į baltąjį sąrašą“</string>
+    <string name="camera_not_init">Fotoaparato inicijavimo klaida:</string>
+    <string name="please_wait">Prašau palauk</string>
+    <string name="invalid_qr">Netinkamas QrCode!</string>
+    <string name="successfully_done">Sėkmingai atlikta!</string>
+    <string name="on_caps">ĮJUNGTA</string>
+    <string name="off_caps">IŠJUNGTA</string>
+    <string name="webfilter_blacklist_subheading">„Svetainės, išsaugotos juodajame sąraše, negalės pasiekti naršyklės“</string>
+    <string name="webfilter_whitelist_subheading">Svetainės išsaugomos baltame sąraše, kurias gali pasiekti tik naršyklė</string>
+    <string name="dialog_website_blacklist_subheading">Įveskite svetainę, kurią norite įtraukti į juodąjį sąrašą, pvz .: www.google.com</string>
+    <string name="dialog_website_white_subheading">Įveskite svetainę, kurią norite įtraukti į baltąjį sąrašą, pvz .: www.google.com</string>
+    <string name="invalid_url">Neteisingas URL</string>
+    <string name="invalid_otp">Netinkamas Otp</string>
+    <string name="user_agreement_1">Norint patobulinti „KeyOS“ ir įsitikinti, kad visos funkcijos veikia tinkamai, kai kurie jūsų naudojimo duomenys bus renkami anonimiškai. Turite perskaityti ir sutikti su mūsų privatumo politika ir sąlygomis. prieš naudojant „KeyOS“</string>
+    <string name="select_all">Pasirinkti viską</string>
+    <string name="initializing_desktop">Inicijuojamas darbalaukis ...</string>
+    <string name="loading_settings">Įkeliami nustatymai</string>
+    <string name="exiting_keyos">Išeina</string>
+    <string name="dialog_qrcode_subheading">Nuskaitykite šį „KeyOS Qr“ kodą ir pritaikykite tuos pačius nustatymus „KeyOS“ įrenginyje</string>
+
+
 </resources>
