--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -140,4 +140,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Paziņojumi un lietotnes ir izslēgtas"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Aizvērt"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Aizvērta"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Iziet no kioska</string>
+    <string name="button_overview_mode">Pārskata režīms</string>
+    <string name="password">Parole</string>
+    <string name="activities">Aktivitātes</string>
+    <string name="cancel">Atcelt</string>
+    <string name="done">Gatavs</string>
+    <string name="phoneBook">Tālruņu katalogs</string>
+    <string name="manual">Manuāli</string>
+    <string name="create_new">Izveidot jaunu</string>
+    <string name="contact">Kontakts</string>
+    <string name="name">Nosaukums</string>
+    <string name="number">Skaits</string>
+    <string name="hide_icon">Slēpt ikonu</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">paslēpt palaidēja /saīsnes ikonu no KeyOS mājas</string>
+    <string name="block_activities">Bloķēt darbības</string>
+    <string name="block_unwanted_pages_activities_windows">Bloķējiet nevēlamās lapas /darbības /logus</string>
+    <string name="time_limit">Laika limits</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Iestatīt laika ierobežojumu, piem. 1 stunda dienā</string>
+    <string name="system_settings">Sistēmas iestatījumi</string>
+    <string name="restrictions">Ierobežojumi</string>
+    <string name="edit_app">Rediģēt lietotni</string>
+    <string name="import_amp_export">Importa eksporta</string>
+    <string name="scan">Skenēt</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Skenējiet keyOS qr kodu, lai piemērotu to pašu iestatījumu politiku</string>
+    <string name="generate">Ģenerēt</string>
+    <string name="generate_keyos_qr_code">Ģenerējiet keyOS QrCode</string>
+    <string name="import_text">Importēt</string>
+    <string name="import_keyos_setting_from_storage">Importēt keyOS iestatījumu no atmiņas</string>
+    <string name="export_text">Eksportēt</string>
+    <string name="import_keyos_setting_to_storage">Importēt keyOS iestatījumu krātuvē</string>
+    <string name="recovery_email">Atkopšanas e-pasts</string>
+    <string name="old_password">Vecā parole</string>
+    <string name="confirm_password">Apstipriniet paroli</string>
+    <string name="allow_calls">Atļaut zvanus</string>
+    <string name="incoming">Ienākošie</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Tas ļaus visiem ienākošajiem zvaniem uz jūsu mobilo tālruni</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Tas ļaus visiem izejošajiem zvaniem uz jūsu mobilo tālruni</string>
+    <string name="whitelist_contacts">Baltā saraksta kontakti</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakti tiek saglabāti zem baltā saraksta, lai jūs varētu tikai piezvanīt</string>
+    <string name="blacklist_contacts">Kontaktu melnais saraksts</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Kontakti, kas saglabāti melnajā sarakstā, nevarēs jums piezvanīt"</string>
+    <string name="automatic_whitelist">Automātiskais baltais saraksts</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Atļaut zvanus, ja kontakts ir pieejams tālruņu katalogā</string>
+    <string name="additional">Papildu</string>
+    <string name="whitelist_amp_blacklist">Baltā saraksta melnais saraksts</string>
+    <string name="phone_book">Tālruņu katalogs</string>
+    <string name="import_amp_export_settings">Importēt eksportēšanas iestatījumus</string>
+    <string name="services">Pakalpojumi</string>
+    <string name="single_app">Viena lietotne</string>
+    <string name="apps_amp_services">Lietotņu pakalpojumi</string>
+    <string name="peripheral">Perifērijas</string>
+    <string name="advance">Iepriekš</string>
+    <string name="disable_camera">Atspējot kameru</string>
+    <string name="call_settings">Zvanu iestatījumi</string>
+    <string name="web_filter">Tīmekļa filtrs</string>
+    <string name="screen_saver">Ekrānsaudzētājs</string>
+    <string name="phone_settings">Tālruņa iestatījumi</string>
+    <string name="notification_panel">Paziņojumu panelis</string>
+    <string name="security">Drošība</string>
+    <string name="launch">Uzsākt</string>
+    <string name="phone_call_subheading">Ja jums rodas problēmas ar zvanu veikšanu, lūdzu, atļaujiet visus pakalpojumus, kas saistīti ar tālruņa zvaniem</string>
+    <string name="phone_call_subheading_hint">padoms: meklējiet tālruni servisa sadaļā</string>
+    <string name="web_filter_subheading">Tīmekļa filtrs ir spēcīgs pakalpojums, kas ļauj bloķēt nevēlamas vietnes</string>
+    <string name="web_filter_supported_browsers">Atbalstītās pārlūkprogrammas: hroms, Firefox, drosmīgs, edge, opera, duckduckgo</string>
+    <string name="off">Izslēgts</string>
+    <string name="whitelist_websites">Vietņu saraksts baltajā sarakstā</string>
+    <string name="whitelist_website_info">Vietnes tiek saglabātas baltajā sarakstā, kurām piekļūt var tikai pārlūkprogramma</string>
+    <string name="blacklist_websites">Melnā saraksta vietnes</string>
+    <string name="blacklist_websites_info">"Vietnes, kas saglabātas melnajā sarakstā, nevarēs piekļūt, izmantojot pārlūkprogrammu"</string>
+    <string name="block_adult_websites">Bloķēt pieaugušajiem paredzētas vietnes</string>
+    <string name="adult_websites_info">Tas automātiski bloķēs 800 pieaugušajiem paredzētas vietnes</string>
+    <string name="whitelist">Baltais saraksts</string>
+    <string name="add_websites">Pievienot vietni</string>
+    <string name="website">Vietne</string>
+    <string name="add_websites_subheading">Lūdzu, ievadiet vietni, kuru vēlaties pievienot baltajā sarakstā, piemēram: www.google.com</string>
+    <string name="otp_verification">Otp pārbaude</string>
+    <string name="otp_verification_subheading">Lūdzu, ievadiet četrciparu otp, kuru nosūtījām uz jūsu reģistrēto e-pasta adresi</string>
+    <string name="password_prompt_subheading">"ja vēl neesat nomainījis paroli, lūdzu, mēģiniet 1234"</string>
+    <string name="forget">aizmirst?</string>
+    <string name="user_agreement">Lietotāja līgums</string>
+    <string name="user_agreement_2">Mēs jūsu ierīcē saglabāsim instalēto lietotņu un tālruņa numuru sarakstu. Šie dati tiks ņemti no jūsu ierīces tikai tad, ja izmantojat QrCode funkciju, un šie dati tiks automātiski noņemti no servera vienas stundas laikā</string>
+    <string name="no_thanks">Nē paldies</string>
+    <string name="accept_amp_continue">Pieņemt</string>
+    <string name="usage_access">Piekļuve lietojumam</string>
+    <string name="overlay">Pārklājums</string>
+    <string name="write_settings">Rakstīt iestatījumus</string>
+    <string name="sound_access">Skaņas piekļuve</string>
+    <string name="other_permissions">Citas atļaujas</string>
+    <string name="accessibility">Pieejamība</string>
+    <string name="device_id">Ierīces ID</string>
+    <string name="feedback_amp_suggestions">ieteikumi</string>
+    <string name="quick_survey">Ātra aptauja</string>
+    <string name="bug_report">Kļūdu ziņojums</string>
+    <string name="visit">Apmeklējums</string>
+    <string name="rate">Likme</string>
+    <string name="share">Dalīties</string>
+    <string name="app_info">Informācija par lietotni</string>
+    <string name="check_for_update">Pārbaudiet atjauninājumu</string>
+    <string name="developer_contact">Izstrādātāja kontakts</string>
+    <string name="terms_amp_conditions">Noteikumi</string>
+    <string name="privacy_policy">Privātuma politika</string>
+    <string name="outgoing">Izejošais</string>
+    <string name="always_on">ieslēgts</string>
+    <string name="always_off">izslēgts</string>
+    <string name="dont_care">"Vienalga"</string>
+    <string name="landscape">Ainava</string>
+    <string name="portrait">Portrets</string>
+    <string name="silent">Kluss</string>
+    <string name="normal">Normāli</string>
+    <string name="select_activity_sunHeading">Atlasiet, kuras darbības /lapas /logus vēlaties bloķēt</string>
+    <string name="apps">Lietotnes</string>
+    <string name="whitelist_apps">Baltā saraksta lietotnes</string>
+    <string name="whitelist_services">Baltā saraksta pakalpojumi</string>
+    <string name="whitelist_apps_subheading">"Atlasiet lietotnes, kurām vēlaties piekļūt."</string>
+    <string name="whitelist_service_heading">"Atlasiet pakalpojumus, kuriem vēlaties piešķirt piekļuvi"</string>
+    <string name="single_app_subheading">"Atlasiet, kuru lietotni vēlaties iegūt priekšplānā"</string>
+    <string name="blacklist">Melnais saraksts</string>
+    <string name="contacts_blacklist_subheading">"Melnajā sarakstā saglabātie kontakti vairs nevarēs piezvanīt uz jūsu Android tālruni"</string>
+    <string name="contacts_whitelist_subheading">Zem baltā saraksta saglabātie kontakti vairs var zvanīt tikai uz jūsu Android tālruni</string>
+    <string name="delete">Dzēst</string>
+    <string name="delete_contact_subheading">Vai tiešām vēlaties dzēst šos vienumus</string>
+    <string name="invalid_name">Nederīgs nosaukums</string>
+    <string name="invalid_number">Nederīgs numurs</string>
+    <string name="hours">Stundas</string>
+    <string name="minutes">Protokols</string>
+    <string name="file_exported_to">Fails eksportēts uz</string>
+    <string name="select_a_file_to_upload">Atlasiet augšupielādējamo failu</string>
+    <string name="please_install_a_file_manager">Lūdzu, instalējiet failu pārvaldnieku.</string>
+    <string name="invalid_backup_file">Nederīgs dublējuma fails</string>
+    <string name="imported_successfully">Importēts veiksmīgi</string>
+    <string name="password_successfully_send">Parole veiksmīgi nosūtīta uz jūsu e-pasta adresi</string>
+    <string name="password_recovery_failed">Paroles atkopšana neizdevās</string>
+    <string name="recovery_email_not_registered">Atkopšanas e-pasts nav reģistrēts</string>
+    <string name="change_your">Mainiet savu</string>
+    <string name="forgot_caps">Aizmirsa ?</string>
+    <string name="password_successfully_changed">Jūsu parole ir veiksmīgi nomainīta</string>
+    <string name="invalid_email_address">nederīga e-pasta adrese</string>
+    <string name="password_min">Parolē jābūt vismaz 8 rakstzīmēm</string>
+    <string name="old_password_must_not_new">Vecā parole nedrīkst būt jauna parole</string>
+    <string name="password_not_match">Parole neatbilst</string>
+    <string name="invalid_old_pasword">Nederīga vecā parole</string>
+    <string name="phonebook_blacklist_subheading">"Atlasiet kontaktus, kurus vēlaties pievienot melnajā sarakstā"</string>
+    <string name="phonebook_whitelist_subheading">"Atlasiet kontaktus, kurus vēlaties pievienot baltajā sarakstā"</string>
+    <string name="camera_not_init">Kameras inicializācijas kļūda:</string>
+    <string name="please_wait">Lūdzu uzgaidiet</string>
+    <string name="invalid_qr">Nederīgs QrCode!</string>
+    <string name="successfully_done">Veiksmīgi izdarīts!</string>
+    <string name="on_caps">ON</string>
+    <string name="off_caps">IZSLĒGTS</string>
+    <string name="webfilter_blacklist_subheading">"Vietnes, kas saglabātas melnajā sarakstā, nevarēs piekļūt, izmantojot pārlūkprogrammu"</string>
+    <string name="webfilter_whitelist_subheading">Vietnes tiek saglabātas baltajā sarakstā, kurām piekļūt var tikai pārlūkprogramma</string>
+    <string name="dialog_website_blacklist_subheading">Lūdzu, ievadiet vietni, kuru vēlaties pievienot melnajā sarakstā, piemēram: www.google.com</string>
+    <string name="dialog_website_white_subheading">Lūdzu, ievadiet vietni, kuru vēlaties pievienot baltajā sarakstā, piemēram: www.google.com</string>
+    <string name="invalid_url">Nederīgs URL</string>
+    <string name="invalid_otp">Nederīgs Otp</string>
+    <string name="user_agreement_1">Lai uzlabotu KeyOS un pārliecinātos, ka visas funkcijas darbojas pareizi, daži no jūsu lietošanas datiem tiks apkopoti anonīmi. Jums ir jāizlasa un jāpiekrīt mūsu konfidencialitātes politikai un noteikumiem. pirms lietojat KeyOS</string>
+    <string name="select_all">Izvēlēties visus</string>
+    <string name="initializing_desktop">Notiek darbvirsmas inicializēšana ...</string>
+    <string name="loading_settings">Notiek iestatījumu ielāde</string>
+    <string name="exiting_keyos">Iziet</string>
+    <string name="dialog_qrcode_subheading">Skenējiet šo KeyOS Qr kodu, lai savā KeyOS ierīcē izmantotu tos pašus iestatījumus</string>
+
 </resources>
