--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -139,4 +139,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Известувањата и апликациите се исклучени"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Затвори"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Затворено"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Излезете од киоск</string>
+    <string name="button_overview_mode">Режим на преглед</string>
+    <string name="password">Лозинка</string>
+    <string name="activities">Активности</string>
+    <string name="cancel">Откажи</string>
+    <string name="done">Направено</string>
+    <string name="phoneBook">Именик</string>
+    <string name="manual">Прирачник</string>
+    <string name="create_new">Креирај ново</string>
+    <string name="contact">Контакт</string>
+    <string name="name">Име</string>
+    <string name="number">Број</string>
+    <string name="hide_icon">Сокриј ја иконата</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">скријте ја иконата за фрлач /кратенка од домот на KeyOS</string>
+    <string name="block_activities">Блокирај активности</string>
+    <string name="block_unwanted_pages_activities_windows">Блокирајте несакани страници /активности /прозорци</string>
+    <string name="time_limit">Временско ограничување</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Поставете ограничување на времето На пр. 1 час на ден</string>
+    <string name="system_settings">Системски поставки</string>
+    <string name="restrictions">Ограничувања</string>
+    <string name="edit_app">Уредете ја апликацијата</string>
+    <string name="import_amp_export">Увоз извоз</string>
+    <string name="scan">Скенирање</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Скенирајте го кодот keyOS qr за да ја примените истата политика за поставки</string>
+    <string name="generate">Генерирај</string>
+    <string name="generate_keyos_qr_code">Генерирајте keyOS QrCode</string>
+    <string name="import_text">Увоз</string>
+    <string name="import_keyos_setting_from_storage">Увезете ја поставката за keyOS од меморијата</string>
+    <string name="export_text">Извоз</string>
+    <string name="import_keyos_setting_to_storage">Внесете ја поставката за keyOS во меморијата</string>
+    <string name="recovery_email">Е-пошта за обновување</string>
+    <string name="old_password">стара лозинка</string>
+    <string name="confirm_password">Потврди ја лозинката</string>
+    <string name="allow_calls">Дозволи повици</string>
+    <string name="incoming">Дојдовни</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Ова ќе им овозможи на сите дојдовни повици кон вашиот мобилен телефон</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Ова ќе им овозможи на сите појдовни повици кон вашиот мобилен телефон</string>
+    <string name="whitelist_contacts">Контакти на списокот со бели</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Контактите зачувуваат под списокот на бели, само што можат да ве повикаат</string>
+    <string name="blacklist_contacts">Контакти на црната листа</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Контактите зачувани под црната листа нема да можат да ве повикаат“</string>
+    <string name="automatic_whitelist">Автоматски бел список</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Дозволете повици доколку контактот е достапен во именикот</string>
+    <string name="additional">Дополнителни</string>
+    <string name="whitelist_amp_blacklist">Црна листа на белата листа</string>
+    <string name="phone_book">Именик</string>
+    <string name="import_amp_export_settings">Увезете поставки за извоз</string>
+    <string name="services">Услуги</string>
+    <string name="single_app">Единствена апликација</string>
+    <string name="apps_amp_services">Услуги за апликации</string>
+    <string name="peripheral">Периферни</string>
+    <string name="advance">Однапред</string>
+    <string name="disable_camera">Оневозможете ја камерата</string>
+    <string name="call_settings">Поставки за повик</string>
+    <string name="web_filter">Интернет-филтер</string>
+    <string name="screen_saver">Заштитник на екранот</string>
+    <string name="phone_settings">Поставки на телефонот</string>
+    <string name="notification_panel">Панел за известување</string>
+    <string name="security">Безбедност</string>
+    <string name="launch">Лансира</string>
+    <string name="phone_call_subheading">Ако имате какви било проблеми за остварување повици, allowубезно дозволете ги сите услуги поврзани со телефонски повик</string>
+    <string name="phone_call_subheading_hint">совет: Пребарување телефон во делот за услуги</string>
+    <string name="web_filter_subheading">Веб-филтерот е моќна услуга што ви овозможува да блокирате несакани веб-страници</string>
+    <string name="web_filter_supported_browsers">Поддржани прелистувачи: хром, firefox, храбар, раб, опера, duckduckgo</string>
+    <string name="off">Исклучено</string>
+    <string name="whitelist_websites">Веб-страници на списокот со бели списоци</string>
+    <string name="whitelist_website_info">Веб-страниците зачувуваат под списокот на бели, само на прелистувачот пристап до кој</string>
+    <string name="blacklist_websites">Веб-страници на црната листа</string>
+    <string name="blacklist_websites_info">„Веб-страниците зачувани под црната листа нема да можат да пристапуваат преку прелистувачот“</string>
+    <string name="block_adult_websites">Блокирајте веб-страници за возрасни</string>
+    <string name="adult_websites_info">Ова автоматски ќе блокира 800 веб-страници за возрасни</string>
+    <string name="whitelist">Бела листа</string>
+    <string name="add_websites">Додадете веб-страница</string>
+    <string name="website">Веб-страница</string>
+    <string name="add_websites_subheading">Внесете ја веб-страницата што сакате да ја додадете во белата листа, на пр.: Www.google.com</string>
+    <string name="otp_verification">Верификација на Otp</string>
+    <string name="otp_verification_subheading">Внесете ја 4-цифрената otp што ја испративме на вашата регистрирана адреса за е-пошта</string>
+    <string name="password_prompt_subheading">„ако сè уште не сте ја смениле лозинката, пробајте 1234“</string>
+    <string name="forget">заборави?</string>
+    <string name="user_agreement">Договор за корисник</string>
+    <string name="user_agreement_2">Ние ќе го зачуваме списокот на инсталирана апликација и телефонски број во вашиот уред. Овие податоци ќе бидат земени од вашиот уред само ако користите функција QrCode и овие податоци автоматски ќе се отстранат од серверот за еден час</string>
+    <string name="no_thanks">Не, благодарам</string>
+    <string name="accept_amp_continue">Прифати</string>
+    <string name="usage_access">Пристап до употреба</string>
+    <string name="overlay">Преклопување</string>
+    <string name="write_settings">Напиши поставки</string>
+    <string name="sound_access">Звучен пристап</string>
+    <string name="other_permissions">Други дозволи</string>
+    <string name="accessibility">Пристапност</string>
+    <string name="device_id">ID на уредот</string>
+    <string name="feedback_amp_suggestions">предлози</string>
+    <string name="quick_survey">Брзо истражување</string>
+    <string name="bug_report">Извештај за грешки</string>
+    <string name="visit">Посета</string>
+    <string name="rate">Оцени</string>
+    <string name="share">Сподели</string>
+    <string name="app_info">Информации за апликацијата</string>
+    <string name="check_for_update">Проверете дали има ажурирање</string>
+    <string name="developer_contact">Контакт со програмер</string>
+    <string name="terms_amp_conditions">Услови</string>
+    <string name="privacy_policy">Политика за приватност</string>
+    <string name="outgoing">Заминување</string>
+    <string name="always_on">на</string>
+    <string name="always_off">исклучен</string>
+    <string name="dont_care">„Не се грижи“</string>
+    <string name="landscape">Предел</string>
+    <string name="portrait">Портрет</string>
+    <string name="silent">Тивок</string>
+    <string name="normal">Нормално</string>
+    <string name="select_activity_sunHeading">Изберете кои активности /страници /прозорци сакате да ги блокирате</string>
+    <string name="apps">Апликации</string>
+    <string name="whitelist_apps">Апликации за бела листа</string>
+    <string name="whitelist_services">Услуги на списокот со бели списоци</string>
+    <string name="whitelist_apps_subheading">„Изберете кои апликации сакате да имате пристап“</string>
+    <string name="whitelist_service_heading">"Изберете кои услуги сакате да им дадете пристап"</string>
+    <string name="single_app_subheading">„Изберете која апликација сакате да биде достапна во преден план“</string>
+    <string name="blacklist">Црна листа</string>
+    <string name="contacts_blacklist_subheading">„Контактите зачувани под Црна листа нема да можат повеќе да го повикуваат вашиот телефон со Android“</string>
+    <string name="contacts_whitelist_subheading">Контактите зачувани во списокот со бели списоци можат повеќе да се јавуваат на вашиот телефон со Android</string>
+    <string name="delete">Избриши</string>
+    <string name="delete_contact_subheading">Дали сте сигурни дека сакате да ги избришете овие ставки</string>
+    <string name="invalid_name">Неважечко име</string>
+    <string name="invalid_number">Невалиден број</string>
+    <string name="hours">Часови</string>
+    <string name="minutes">Записник</string>
+    <string name="file_exported_to">Датотеката е извезена во</string>
+    <string name="select_a_file_to_upload">Изберете датотека за поставување</string>
+    <string name="please_install_a_file_manager">Ве молиме инсталирајте Менаџер на датотеки.</string>
+    <string name="invalid_backup_file">Неважечка датотека за бекап</string>
+    <string name="imported_successfully">Увезено успешно</string>
+    <string name="password_successfully_send">Лозинката е успешно испратена на вашата е-адреса</string>
+    <string name="password_recovery_failed">Враќањето на лозинката не успеа</string>
+    <string name="recovery_email_not_registered">Е-поштата за враќање не е регистрирана</string>
+    <string name="change_your">Променете го вашиот</string>
+    <string name="forgot_caps">Заборави ?</string>
+    <string name="password_successfully_changed">Вашата лозинка е успешно променета</string>
+    <string name="invalid_email_address">Невалидна адреса за е-пошта</string>
+    <string name="password_min">Лозинката мора да содржи минимум 8 карактери</string>
+    <string name="old_password_must_not_new">Старата лозинка не смее да биде нова лозинка</string>
+    <string name="password_not_match">Лозинката не се совпаѓа</string>
+    <string name="invalid_old_pasword">Невалидна стара лозинка</string>
+    <string name="phonebook_blacklist_subheading">"Изберете кои контакти сакате да ги додадете во црната листа"</string>
+    <string name="phonebook_whitelist_subheading">"Изберете кои контакти сакате да ги додадете во белата листа"</string>
+    <string name="camera_not_init">Грешка во иницијализацијата на фотоапаратот:</string>
+    <string name="please_wait">Ве молам почекајте</string>
+    <string name="invalid_qr">Невалиден QrCode!</string>
+    <string name="successfully_done">Успешно готово!</string>
+    <string name="on_caps">НА</string>
+    <string name="off_caps">ИСКЛУЧЕН</string>
+    <string name="webfilter_blacklist_subheading">„Веб-страниците зачувани под црната листа нема да можат да пристапуваат преку прелистувачот“</string>
+    <string name="webfilter_whitelist_subheading">Веб-страниците зачувуваат под списокот на бели, само на прелистувачот пристап до кој</string>
+    <string name="dialog_website_blacklist_subheading">Внесете ја веб-страницата што сакате да ја додадете во црната листа На пример: www.google.com</string>
+    <string name="dialog_website_white_subheading">Внесете ја веб-страницата што сакате да ја додадете во белата листа, на пр.: Www.google.com</string>
+    <string name="invalid_url">Неважечка адреса</string>
+    <string name="invalid_otp">Невалиден Otp</string>
+    <string name="user_agreement_1">За да го подобрите KeyOS и да бидете сигурни дека целата одлика работи правилно, некои од вашите податоци за употреба ќе бидат собрани анонимно. Мора да ја прочитате и да се согласите со нашата Политика за приватност и Услови. пред да го користите KeyOS</string>
+    <string name="select_all">Селектирај се</string>
+    <string name="initializing_desktop">Иницијализирање на работната површина</string>
+    <string name="loading_settings">Поставки за вчитување</string>
+    <string name="exiting_keyos">Излез</string>
+    <string name="dialog_qrcode_subheading">Скенирајте го овој KeyOS Qr код за да ги примените истите поставки во вашиот KeyOS уред</string>
+
+
 </resources>
