--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -141,4 +141,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"അറിയിപ്പുകളും ആപ്പുകളും ഓഫാണ്"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"അടയ്ക്കുക"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"അടച്ചു"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">കിയോസ്‌ക്കിൽ നിന്ന് പുറത്തുകടക്കുക</string>
+    <string name="button_overview_mode">അവലോകന മോഡ്</string>
+    <string name="password">Password</string>
+    <string name="activities">പ്രവർത്തനങ്ങൾ</string>
+    <string name="cancel">റദ്ദാക്കുക</string>
+    <string name="done">ചെയ്‌തു</string>
+    <string name="phoneBook">ഫോണ്നമ്പറുകള് അടങ്ങിയ പുസ്തകം</string>
+    <string name="manual">മാനുവൽ</string>
+    <string name="create_new">പുതിയത് സൃഷ്‌ടിക്കുക</string>
+    <string name="contact">ബന്ധപ്പെടുക</string>
+    <string name="name">പേര്</string>
+    <string name="number">നമ്പർ</string>
+    <string name="hide_icon">ഐക്കൺ മറയ്‌ക്കുക</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">KeyOS ഹോമിൽ നിന്ന് ലോഞ്ചർ /കുറുക്കുവഴി ഐക്കൺ മറയ്‌ക്കുക</string>
+    <string name="block_activities">പ്രവർത്തനങ്ങൾ തടയുക</string>
+    <string name="block_unwanted_pages_activities_windows">അനാവശ്യ പേജുകൾ /പ്രവർത്തനങ്ങൾ /വിൻഡോകൾ തടയുക</string>
+    <string name="time_limit">സമയ പരിധി</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">സമയ നിയന്ത്രണം സജ്ജമാക്കുക ഉദാ. പ്രതിദിനം 1 മണിക്കൂർ</string>
+    <string name="system_settings">സിസ്റ്റം ക്രമീകരണങ്ങൾ</string>
+    <string name="restrictions">നിയന്ത്രണങ്ങൾ</string>
+    <string name="edit_app">അപ്ലിക്കേഷൻ എഡിറ്റുചെയ്യുക</string>
+    <string name="import_amp_export">ഇറക്കുമതി കയറ്റുമതി</string>
+    <string name="scan">സ്കാൻ ചെയ്യുക</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">സമാന ക്രമീകരണ നയം പ്രയോഗിക്കുന്നതിന് keyOS qr കോഡ് സ്കാൻ ചെയ്യുക</string>
+    <string name="generate">സൃഷ്ടിക്കുക</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode സൃഷ്ടിക്കുക</string>
+    <string name="import_text">ഇറക്കുമതി ചെയ്യുക</string>
+    <string name="import_keyos_setting_from_storage">സ്റ്റോറേജിൽ നിന്ന് കീഒഎസ് ക്രമീകരണം ഇമ്പോർട്ടുചെയ്യുക</string>
+    <string name="export_text">കയറ്റുമതി</string>
+    <string name="import_keyos_setting_to_storage">കീഒഎസ് ക്രമീകരണം സംഭരണത്തിലേക്ക് ഇമ്പോർട്ടുചെയ്യുക</string>
+    <string name="recovery_email">വീണ്ടെടുക്കൽ ഇമെയിൽ</string>
+    <string name="old_password">പഴയ പാസ്വേഡ്</string>
+    <string name="confirm_password">പാസ്വേഡ് സ്ഥിരീകരിക്കുക</string>
+    <string name="allow_calls">കോളുകൾ അനുവദിക്കുക</string>
+    <string name="incoming">ഇൻകമിംഗ്</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">ഇത് നിങ്ങളുടെ മൊബൈലിലേക്ക് ഇൻകമിംഗ് കോളുകളെല്ലാം അനുവദിക്കും</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">ഇത് നിങ്ങളുടെ മൊബൈലിലേക്കുള്ള out ട്ട്‌ഗോയിംഗ് കോളുകളെല്ലാം അനുവദിക്കും</string>
+    <string name="whitelist_contacts">വൈറ്റ്‌ലിസ്റ്റ് കോൺടാക്റ്റുകൾ</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">നിങ്ങളെ വിളിക്കാൻ മാത്രം വൈറ്റ്‌ലിസ്റ്റിന് കീഴിൽ കോൺടാക്റ്റുകൾ സംരക്ഷിക്കുന്നു</string>
+    <string name="blacklist_contacts">ബ്ലാക്ക്‌ലിസ്റ്റ് കോൺ‌ടാക്റ്റുകൾ</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"കരിമ്പട്ടികയിൽ സംരക്ഷിക്കുന്ന കോൺ‌ടാക്റ്റുകൾ‌ക്ക് നിങ്ങളെ വിളിക്കാൻ‌ കഴിയില്ല"</string>
+    <string name="automatic_whitelist">യാന്ത്രിക വൈറ്റ്‌ലിസ്റ്റ്</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">ഫോൺ ബുക്കിൽ കോൺടാക്റ്റ് ലഭ്യമാണെങ്കിൽ കോളുകൾ അനുവദിക്കുക</string>
+    <string name="additional">അധിക</string>
+    <string name="whitelist_amp_blacklist">വൈറ്റ്‌ലിസ്റ്റ് കരിമ്പട്ടിക</string>
+    <string name="phone_book">ഫോണ്നമ്പറുകള് അടങ്ങിയ പുസ്തകം</string>
+    <string name="import_amp_export_settings">എക്‌സ്‌പോർട്ട് ക്രമീകരണങ്ങൾ ഇറക്കുമതി ചെയ്യുക</string>
+    <string name="services">സേവനങ്ങള്</string>
+    <string name="single_app">സിംഗിൾ അപ്ലിക്കേഷൻ</string>
+    <string name="apps_amp_services">അപ്ലിക്കേഷൻ സേവനങ്ങൾ</string>
+    <string name="peripheral">പെരിഫറൽ</string>
+    <string name="advance">അഡ്വാൻസ്</string>
+    <string name="disable_camera">ക്യാമറ പ്രവർത്തനരഹിതമാക്കുക</string>
+    <string name="call_settings">കോൾ ക്രമീകരണങ്ങൾ</string>
+    <string name="web_filter">വെബ് ഫിൽട്ടർ</string>
+    <string name="screen_saver">സ്ക്രീൻ സേവർ</string>
+    <string name="phone_settings">ഫോൺ ക്രമീകരണങ്ങൾ</string>
+    <string name="notification_panel">അറിയിപ്പ് പാനൽ</string>
+    <string name="security">സുരക്ഷ</string>
+    <string name="launch">സമാരംഭിക്കുക</string>
+    <string name="phone_call_subheading">കോളുകൾ‌ ചെയ്യുന്നതിന് നിങ്ങൾ‌ക്ക് എന്തെങ്കിലും പ്രശ്‌നം നേരിടുന്നുണ്ടെങ്കിൽ‌, ഫോൺ‌ കോളുമായി ബന്ധപ്പെട്ട എല്ലാ സേവനങ്ങളും ദയവായി അനുവദിക്കുക</string>
+    <string name="phone_call_subheading_hint">സൂചന: സേവന വിഭാഗത്തിൽ ഫോണിനായി തിരയുക</string>
+    <string name="web_filter_subheading">അനാവശ്യ വെബ്‌സൈറ്റുകൾ തടയാൻ നിങ്ങളെ അനുവദിക്കുന്ന ശക്തമായ സേവനമാണ് വെബ് ഫിൽട്ടർ</string>
+    <string name="web_filter_supported_browsers">പിന്തുണയ്‌ക്കുന്ന ബ്ര rowsers സറുകൾ‌: ക്രോം, ഫയർ‌ഫോക്സ്, ധൈര്യം, എഡ്ജ്, ഓപ്പറ, ഡക്ക്ഡക്ക്ഗോ</string>
+    <string name="off">ഓഫാണ്</string>
+    <string name="whitelist_websites">വൈറ്റ്‌ലിസ്റ്റ് വെബ്‌സൈറ്റുകൾ</string>
+    <string name="whitelist_website_info">വെബ്‌സൈറ്റുകൾ വൈറ്റ്‌ലിസ്റ്റിന് കീഴിൽ സംരക്ഷിച്ച് ബ്രൗസർ ആക്‌സസ്സുചെയ്യാനാകും</string>
+    <string name="blacklist_websites">കരിമ്പട്ടിക വെബ്‌സൈറ്റുകൾ</string>
+    <string name="blacklist_websites_info">"കരിമ്പട്ടികയിൽ സംരക്ഷിക്കുന്ന വെബ്‌സൈറ്റുകൾക്ക് ബ്ര browser സർ വഴി പ്രവേശിക്കാൻ കഴിയില്ല"</string>
+    <string name="block_adult_websites">മുതിർന്നവർക്കുള്ള വെബ്‌സൈറ്റുകൾ തടയുക</string>
+    <string name="adult_websites_info">ഇത് മുതിർന്നവർക്കുള്ള 800 വെബ്‌സൈറ്റുകളെ യാന്ത്രികമായി തടയും</string>
+    <string name="whitelist">വൈറ്റ്‌ലിസ്റ്റ്</string>
+    <string name="add_websites">വെബ്സൈറ്റ് ചേർക്കുക</string>
+    <string name="website">വെബ്സൈറ്റ്</string>
+    <string name="add_websites_subheading">നിങ്ങൾ‌ വൈറ്റ്‌ലിസ്റ്റിൽ‌ ചേർ‌ക്കാൻ‌ താൽ‌പ്പര്യപ്പെടുന്ന വെബ്‌സൈറ്റ് ദയവായി നൽ‌കുക ഉദാ: www.google.com</string>
+    <string name="otp_verification">Otp പരിശോധന</string>
+    <string name="otp_verification_subheading">നിങ്ങളുടെ രജിസ്റ്റർ ചെയ്ത ഇമെയിൽ വിലാസത്തിലേക്ക് ഞങ്ങൾ അയച്ച 4 അക്ക otp ദയവായി നൽകുക</string>
+    <string name="password_prompt_subheading">"നിങ്ങൾ ഇതുവരെ പാസ്‌വേഡ് മാറ്റിയിട്ടില്ലെങ്കിൽ 1234 ശ്രമിക്കുക"</string>
+    <string name="forget">മറക്കരുത് ?</string>
+    <string name="user_agreement">ഉപഭോക്തൃ കരാർ</string>
+    <string name="user_agreement_2">നിങ്ങളുടെ ഉപകരണത്തിൽ ഇൻസ്റ്റാളുചെയ്‌ത അപ്ലിക്കേഷന്റെയും ഫോൺ നമ്പറിന്റെയും ലിസ്റ്റ് ഞങ്ങൾ സംഭരിക്കും. നിങ്ങൾ QrCode സവിശേഷത ഉപയോഗിക്കുകയാണെങ്കിൽ മാത്രമേ ഈ ഡാറ്റ നിങ്ങളുടെ ഉപകരണത്തിൽ നിന്ന് എടുക്കുകയുള്ളൂ, ഈ ഡാറ്റ ഒരു മണിക്കൂറിനുള്ളിൽ സെർവറിൽ നിന്ന് യാന്ത്രികമായി നീക്കംചെയ്യപ്പെടും</string>
+    <string name="no_thanks">വേണ്ട, നന്ദി</string>
+    <string name="accept_amp_continue">അംഗീകരിക്കുക</string>
+    <string name="usage_access">ഉപയോഗ ആക്സസ്</string>
+    <string name="overlay">ഓവർലേ</string>
+    <string name="write_settings">ക്രമീകരണങ്ങൾ എഴുതുക</string>
+    <string name="sound_access">ശബ്‌ദ ആക്‌സസ്സ്</string>
+    <string name="other_permissions">മറ്റ് അനുമതികൾ</string>
+    <string name="accessibility">പ്രവേശനക്ഷമത</string>
+    <string name="device_id">ഉപകരണ ഐഡി</string>
+    <string name="feedback_amp_suggestions">നിർദ്ദേശങ്ങൾ</string>
+    <string name="quick_survey">ദ്രുത സർവേ</string>
+    <string name="bug_report">ബഗ് റിപ്പോർട്ട്</string>
+    <string name="visit">സന്ദർശിക്കുക</string>
+    <string name="rate">നിരക്ക്</string>
+    <string name="share">പങ്കിടുക</string>
+    <string name="app_info">അപ്ലിക്കേഷൻ വിവരം</string>
+    <string name="check_for_update">അപ്ഡേറ്റ് പരിശോധിക്കുക</string>
+    <string name="developer_contact">ഡവലപ്പർ കോൺടാക്റ്റ്</string>
+    <string name="terms_amp_conditions">നിബന്ധനകൾ</string>
+    <string name="privacy_policy">സ്വകാര്യതാനയം</string>
+    <string name="outgoing">Going ട്ട്‌ഗോയിംഗ്</string>
+    <string name="always_on">ഓണാണ്</string>
+    <string name="always_off">ഓഫ്</string>
+    <string name="dont_care">"ശ്രദ്ധിക്കരുത്"</string>
+    <string name="landscape">ലാൻഡ്സ്കേപ്പ്</string>
+    <string name="portrait">ഛായാചിത്രം</string>
+    <string name="silent">നിശബ്ദത</string>
+    <string name="normal">സാധാരണ</string>
+    <string name="select_activity_sunHeading">നിങ്ങൾ തടയാൻ ആഗ്രഹിക്കുന്ന പ്രവർത്തനങ്ങൾ /പേജുകൾ /വിൻഡോകൾ തിരഞ്ഞെടുക്കുക</string>
+    <string name="apps">അപ്ലിക്കേഷനുകൾ</string>
+    <string name="whitelist_apps">വൈറ്റ്‌ലിസ്റ്റ് അപ്ലിക്കേഷനുകൾ</string>
+    <string name="whitelist_services">വൈറ്റ്‌ലിസ്റ്റ് സേവനങ്ങൾ</string>
+    <string name="whitelist_apps_subheading">"ആക്സസ് ചെയ്യാൻ ആഗ്രഹിക്കുന്ന അപ്ലിക്കേഷനുകൾ തിരഞ്ഞെടുക്കുക"</string>
+    <string name="whitelist_service_heading">"ആക്സസ് നൽകാൻ ആഗ്രഹിക്കുന്ന സേവനങ്ങൾ തിരഞ്ഞെടുക്കുക"</string>
+    <string name="single_app_subheading">"ഫോർഗ്രൗണ്ടിൽ ഏത് അപ്ലിക്കേഷനാണ് നിങ്ങൾ ആഗ്രഹിക്കുന്നതെന്ന് തിരഞ്ഞെടുക്കുക"</string>
+    <string name="blacklist">കരിമ്പട്ടിക</string>
+    <string name="contacts_blacklist_subheading">"ബ്ലാക്ക്‌ലിസ്റ്റിന് കീഴിൽ സംരക്ഷിച്ച കോൺ‌ടാക്റ്റുകൾ‌ക്ക് നിങ്ങളുടെ Android ഫോണിലേക്ക് ഇനി വിളിക്കാൻ‌ കഴിയില്ല"</string>
+    <string name="contacts_whitelist_subheading">വൈറ്റ്‌ലിസ്റ്റിന് കീഴിൽ സംരക്ഷിച്ച കോൺടാക്റ്റുകൾക്ക് നിങ്ങളുടെ Android ഫോണിലേക്ക് ഇനി വിളിക്കാൻ മാത്രമേ കഴിയൂ</string>
+    <string name="delete">ഇല്ലാതാക്കുക</string>
+    <string name="delete_contact_subheading">ഈ ഇനങ്ങൾ ഇല്ലാതാക്കാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?</string>
+    <string name="invalid_name">അസാധുവായ പേര്</string>
+    <string name="invalid_number">അസാധുവായ നമ്പർ</string>
+    <string name="hours">മണിക്കൂറുകൾ</string>
+    <string name="minutes">മിനിറ്റ്</string>
+    <string name="file_exported_to">ഫയൽ എക്‌സ്‌പോർട്ടുചെയ്‌തു</string>
+    <string name="select_a_file_to_upload">അപ്‌ലോഡുചെയ്യാൻ ഒരു ഫയൽ തിരഞ്ഞെടുക്കുക</string>
+    <string name="please_install_a_file_manager">ഒരു ഫയൽ മാനേജർ ഇൻസ്റ്റാൾ ചെയ്യുക.</string>
+    <string name="invalid_backup_file">അസാധുവായ ബാക്കപ്പ് ഫയൽ</string>
+    <string name="imported_successfully">ഇറക്കുമതി ചെയ്തു</string>
+    <string name="password_successfully_send">പാസ്‌വേഡ് നിങ്ങളുടെ ഇമെയിൽ വിലാസത്തിലേക്ക് വിജയകരമായി അയച്ചു</string>
+    <string name="password_recovery_failed">പാസ്‌വേഡ് വീണ്ടെടുക്കൽ പരാജയപ്പെട്ടു</string>
+    <string name="recovery_email_not_registered">വീണ്ടെടുക്കൽ ഇമെയിൽ രജിസ്റ്റർ ചെയ്തിട്ടില്ല</string>
+    <string name="change_your">നിങ്ങളുടെ മാറ്റുക</string>
+    <string name="forgot_caps">മറന്നോ?</string>
+    <string name="password_successfully_changed">നിങ്ങളുടെ പാസ്‌വേഡ് വിജയകരമായി മാറ്റി</string>
+    <string name="invalid_email_address">അസാധുവായ ഇമെയിൽ വിലാസം</string>
+    <string name="password_min">പാസ്‌വേഡിൽ മിനിറ്റ് 8 പ്രതീകങ്ങൾ അടങ്ങിയിരിക്കണം</string>
+    <string name="old_password_must_not_new">പഴയ പാസ്‌വേഡ് പുതിയ പാസ്‌വേഡ് ആയിരിക്കരുത്</string>
+    <string name="password_not_match">പാസ്‌വേഡ് പൊരുത്തപ്പെടുന്നില്ല</string>
+    <string name="invalid_old_pasword">പഴയ പാസ്‌വേഡ് അസാധുവാണ്</string>
+    <string name="phonebook_blacklist_subheading">"കരിമ്പട്ടികയിൽ ചേർക്കാൻ ആഗ്രഹിക്കുന്ന കോൺടാക്റ്റുകൾ തിരഞ്ഞെടുക്കുക"</string>
+    <string name="phonebook_whitelist_subheading">"വൈറ്റ്‌ലിസ്റ്റിൽ ഏത് കോൺടാക്റ്റുകളാണ് ചേർക്കേണ്ടതെന്ന് തിരഞ്ഞെടുക്കുക"</string>
+    <string name="camera_not_init">ക്യാമറ സമാരംഭിക്കൽ പിശക്:</string>
+    <string name="please_wait">കാത്തിരിക്കൂ</string>
+    <string name="invalid_qr">QrCode അസാധുവാണ്!</string>
+    <string name="successfully_done">വിജയകരമായി ചെയ്തു!</string>
+    <string name="on_caps">ഓണാണ്</string>
+    <string name="off_caps">ഓഫാണ്</string>
+    <string name="webfilter_blacklist_subheading">"കരിമ്പട്ടികയിൽ സംരക്ഷിക്കുന്ന വെബ്‌സൈറ്റുകൾക്ക് ബ്ര browser സർ വഴി പ്രവേശിക്കാൻ കഴിയില്ല"</string>
+    <string name="webfilter_whitelist_subheading">വെബ്‌സൈറ്റുകൾ വൈറ്റ്‌ലിസ്റ്റിന് കീഴിൽ സംരക്ഷിച്ച് ബ്രൗസർ ആക്‌സസ്സുചെയ്യാനാകും</string>
+    <string name="dialog_website_blacklist_subheading">കരിമ്പട്ടികയിൽ ചേർക്കാൻ ആഗ്രഹിക്കുന്ന വെബ്സൈറ്റ് ദയവായി നൽകുക ഉദാ: www.google.com</string>
+    <string name="dialog_website_white_subheading">നിങ്ങൾ‌ വൈറ്റ്‌ലിസ്റ്റിൽ‌ ചേർ‌ക്കാൻ‌ താൽ‌പ്പര്യപ്പെടുന്ന വെബ്‌സൈറ്റ് ദയവായി നൽ‌കുക ഉദാ: www.google.com</string>
+    <string name="invalid_url">അസാധുവായ Url</string>
+    <string name="invalid_otp">അസാധുവായ Otp</string>
+    <string name="user_agreement_1">KeyOS മെച്ചപ്പെടുത്തുന്നതിനും എല്ലാ സവിശേഷതകളും ശരിയായി പ്രവർത്തിക്കുന്നുവെന്ന് ഉറപ്പാക്കുന്നതിനും, നിങ്ങളുടെ ചില ഉപയോഗ ഡാറ്റ അജ്ഞാതമായി ശേഖരിക്കും. ഞങ്ങളുടെ സ്വകാര്യതാ നയവും നിബന്ധനകളും നിങ്ങൾ വായിക്കുകയും അംഗീകരിക്കുകയും വേണം. KeyOS ഉപയോഗിക്കുന്നതിന് മുമ്പ്</string>
+    <string name="select_all">എല്ലാം തിരഞ്ഞെടുക്കുക</string>
+    <string name="initializing_desktop">ഡെസ്ക്ടോപ്പ് സമാരംഭിക്കുന്നു…</string>
+    <string name="loading_settings">ക്രമീകരണങ്ങൾ ലോഡുചെയ്യുന്നു</string>
+    <string name="exiting_keyos">പുറത്തുകടക്കുന്നു</string>
+    <string name="dialog_qrcode_subheading">നിങ്ങളുടെ KeyOS ഉപകരണത്തിൽ സമാന ക്രമീകരണങ്ങൾ പ്രയോഗിക്കുന്നതിന് ഈ KeyOS Qr കോഡ് സ്കാൻ ചെയ്യുക</string>
+
 </resources>
