--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -139,4 +139,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Мэдэгдэл, апп унтраалттай байна"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Хаах"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Хаасан"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">ТҮЦ машинаас гарна уу</string>
+    <string name="button_overview_mode">Тойм горим</string>
+    <string name="password">Нууц үг</string>
+    <string name="activities">Үйл ажиллагаа</string>
+    <string name="cancel">Цуцлах</string>
+    <string name="done">Дууссан</string>
+    <string name="phoneBook">Утасны дэвтэр</string>
+    <string name="manual">Гарын авлага</string>
+    <string name="create_new">Шинэ зүйл үүсгэх</string>
+    <string name="contact">Холбоо барих</string>
+    <string name="name">Нэр</string>
+    <string name="number">Дугаар</string>
+    <string name="hide_icon">Дүрсийг нуух</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">эхлүүлэх /товчлох дүрсийг KeyOS гэрээс нуух</string>
+    <string name="block_activities">Үйл ажиллагааг хориглох</string>
+    <string name="block_unwanted_pages_activities_windows">Хүсээгүй хуудас /үйл ажиллагаа /цонхыг блоклох</string>
+    <string name="time_limit">Хугацааны хязгаар</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Хугацааны хязгаарлалтыг тохируулах Ж. Өдөрт 1 цаг</string>
+    <string name="system_settings">Системийн тохиргоо</string>
+    <string name="restrictions">Хязгаарлалт</string>
+    <string name="edit_app">Аппыг засах</string>
+    <string name="import_amp_export">Экспортлох</string>
+    <string name="scan">Скан хийх</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Ижил тохиргооны бодлогыг хэрэгжүүлэхийн тулд keyOS qr кодыг сканнердах</string>
+    <string name="generate">Үүсгэх</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode үүсгэх</string>
+    <string name="import_text">Импорт</string>
+    <string name="import_keyos_setting_from_storage">KeyOS тохиргоог хадгалах сангаас импортлох</string>
+    <string name="export_text">Экспортлох</string>
+    <string name="import_keyos_setting_to_storage">KeyOS тохиргоог хадгалах санд импортлох</string>
+    <string name="recovery_email">Сэргээх имэйл</string>
+    <string name="old_password">Хуучин нууц үг</string>
+    <string name="confirm_password">Нууц үгээ баталгаажуулна уу</string>
+    <string name="allow_calls">Дуудлага хийхийг зөвшөөрөх</string>
+    <string name="incoming">Ирж буй</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Энэ нь таны гар утсанд ирж буй бүх дуудлага хийх боломжийг олгоно</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Энэ нь таны гар утас руу гарах бүх дуудлага хийх боломжийг олгоно</string>
+    <string name="whitelist_contacts">Харилцагчдын жагсаалтыг цагаан жагсаалтад оруулах</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Харилцагчид зөвхөн тантай залгах боломжтой цагаан жагсаалтын дор хадгалагдана</string>
+    <string name="blacklist_contacts">Хар жагсаалтын харилцагчид</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Хар жагсаалтад хадгалагдсан харилцагчид тан руу залгах боломжгүй болно"</string>
+    <string name="automatic_whitelist">Автомат цагаан жагсаалт</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Утасны дэвтэрт холбоо барих боломжтой бол дуудлага хийхийг зөвшөөрнө үү</string>
+    <string name="additional">Нэмэлт</string>
+    <string name="whitelist_amp_blacklist">Хар жагсаалтыг цагаан жагсаалтад оруулах</string>
+    <string name="phone_book">Утасны ном</string>
+    <string name="import_amp_export_settings">Экспортын тохиргоог импортлох</string>
+    <string name="services">Үйлчилгээ</string>
+    <string name="single_app">Нэг апп</string>
+    <string name="apps_amp_services">Апп үйлчилгээ</string>
+    <string name="peripheral">Захын</string>
+    <string name="advance">Урьдчилгаа</string>
+    <string name="disable_camera">Камерыг идэвхгүй болгох</string>
+    <string name="call_settings">Дуудлагын тохиргоо</string>
+    <string name="web_filter">Вэб шүүлтүүр</string>
+    <string name="screen_saver">Дэлгэц амраагч</string>
+    <string name="phone_settings">Утасны тохиргоо</string>
+    <string name="notification_panel">Мэдэгдлийн самбар</string>
+    <string name="security">Аюулгүй байдал</string>
+    <string name="launch">Эхлэх</string>
+    <string name="phone_call_subheading">Хэрэв танд дуудлага хийхэд ямар нэгэн асуудал тулгарвал утасны дуудлагад холбогдох бүх үйлчилгээг зөвшөөрнө үү</string>
+    <string name="phone_call_subheading_hint">зөвлөгөө: Үйлчилгээний хэсгээс утас хайх</string>
+    <string name="web_filter_subheading">Вэб шүүлтүүр нь хүсээгүй вэбсайтуудыг хаах боломжийг олгодог хүчирхэг үйлчилгээ юм</string>
+    <string name="web_filter_supported_browsers">Дэмжигдсэн хөтчүүд: хром, firefox, зоригтой, зах, дуурь, duckduckgo</string>
+    <string name="off">Унтраалттай</string>
+    <string name="whitelist_websites">Вэбсайтуудыг цагаан жагсаалтад оруулах</string>
+    <string name="whitelist_website_info">Вэбсайтууд зөвхөн хөтөчөөр нэвтрэх боломжтой цагаан жагсаалтад хадгалагддаг</string>
+    <string name="blacklist_websites">Хар жагсаалтад орсон вэбсайтууд</string>
+    <string name="blacklist_websites_info">"Хар жагсаалтад хадгалагдсан вэбсайтууд хөтөчөөр нэвтрэх боломжгүй болно"</string>
+    <string name="block_adult_websites">Насанд хүрэгчдийн вэбсайтыг блоклох</string>
+    <string name="adult_websites_info">Энэ нь насанд хүрэгчдийн 800 вэбсайтыг автоматаар хаах болно</string>
+    <string name="whitelist">Цагаан жагсаалт</string>
+    <string name="add_websites">Вэбсайт нэмэх</string>
+    <string name="website">Вэбсайт</string>
+    <string name="add_websites_subheading">Цагаан жагсаалтад оруулахыг хүссэн вэбсайтаа оруулна уу Жишээлбэл: www.google.com</string>
+    <string name="otp_verification">Otp баталгаажуулалт</string>
+    <string name="otp_verification_subheading">Таны бүртгүүлсэн имэйл хаяг руу илгээсэн 4 оронтой otp-г оруулна уу</string>
+    <string name="password_prompt_subheading">"хэрэв та нууц үгээ хараахан солиогүй байгаа бол 1234-ийг туршиж үзээрэй"</string>
+    <string name="forget">мартах уу?</string>
+    <string name="user_agreement">Хэрэглэгчийн гэрээ</string>
+    <string name="user_agreement_2">Бид суулгасан програмын жагсаалт болон утасны дугаарыг таны төхөөрөмжид хадгалах болно. Хэрэв та QrCode функцийг ашиглаж байгаа тохиолдолд л энэ өгөгдлийг таны төхөөрөмжөөс авах бөгөөд энэ өгөгдлийг нэг цагийн дотор серверээс автоматаар устгах болно.</string>
+    <string name="no_thanks">Үгүй ээ баярлалаа</string>
+    <string name="accept_amp_continue">Хүлээн зөвшөөр</string>
+    <string name="usage_access">Хэрэглээний хандалт</string>
+    <string name="overlay">Давхардсан</string>
+    <string name="write_settings">Тохиргоо бичих</string>
+    <string name="sound_access">Дууны нэвтрэлт</string>
+    <string name="other_permissions">Бусад зөвшөөрөл</string>
+    <string name="accessibility">Хандалт</string>
+    <string name="device_id">Төхөөрөмжийн дугаар</string>
+    <string name="feedback_amp_suggestions">санал</string>
+    <string name="quick_survey">Түргэн судалгаа</string>
+    <string name="bug_report">Алдааны тайлан</string>
+    <string name="visit">Айлчлах</string>
+    <string name="rate">Үнэлгээ</string>
+    <string name="share">Хуваалцах</string>
+    <string name="app_info">Аппын мэдээлэл</string>
+    <string name="check_for_update">Шинэчлэлт байгаа эсэхийг шалгана уу</string>
+    <string name="developer_contact">Хөгжүүлэгчтэй холбоо барих</string>
+    <string name="terms_amp_conditions">Нөхцөл</string>
+    <string name="privacy_policy">Нууцлалын бодлого</string>
+    <string name="outgoing">Гарах</string>
+    <string name="always_on">дээр</string>
+    <string name="always_off">унтраах</string>
+    <string name="dont_care">"Чи хамаагүй"</string>
+    <string name="landscape">Ландшафт</string>
+    <string name="portrait">Хөрөг</string>
+    <string name="silent">Чимээгүй</string>
+    <string name="normal">Хэвийн</string>
+    <string name="select_activity_sunHeading">Аль үйл ажиллагаа /Хуудас /цонхыг хаахыг хүсч байгаагаа сонгоно уу</string>
+    <string name="apps">Апп</string>
+    <string name="whitelist_apps">Цагаан жагсаалтад оруулах програмууд</string>
+    <string name="whitelist_services">Цагаан жагсаалтын үйлчилгээ</string>
+    <string name="whitelist_apps_subheading">"Хандалт өгөхийг хүсч буй програмуудаа сонгоно уу"</string>
+    <string name="whitelist_service_heading">"Аль үйлчилгээнд нэвтрэхийг хүсч байгаагаа сонгоно уу"</string>
+    <string name="single_app_subheading">"Аль апп-г урьдчилж ашиглахыг хүсч байгаагаа сонгоно уу"</string>
+    <string name="blacklist">Хар жагсаалт</string>
+    <string name="contacts_blacklist_subheading">"Хар жагсаалтад хадгалагдсан харилцагчид таны Андройд утас руу залгах боломжгүй болно"</string>
+    <string name="contacts_whitelist_subheading">Цагаан жагсаалтад хадгалагдсан харилцагчид зөвхөн таны Андройд утас руу залгах боломжтой болно</string>
+    <string name="delete">Устгах</string>
+    <string name="delete_contact_subheading">Та энэ зүйлийг устгахдаа итгэлтэй байна уу?</string>
+    <string name="invalid_name">Буруу нэр</string>
+    <string name="invalid_number">Буруу тоо</string>
+    <string name="hours">Цаг</string>
+    <string name="minutes">Минут</string>
+    <string name="file_exported_to">Файл руу экспортолсон</string>
+    <string name="select_a_file_to_upload">Байршуулах файлыг сонгоно уу</string>
+    <string name="please_install_a_file_manager">Файл менежер суулгана уу.</string>
+    <string name="invalid_backup_file">Нөөц файл буруу байна</string>
+    <string name="imported_successfully">Амжилттай оруулж ирсэн</string>
+    <string name="password_successfully_send">Нууц үгийг таны имэйл хаяг руу амжилттай илгээсэн</string>
+    <string name="password_recovery_failed">Нууц үгийг сэргээж чадсангүй</string>
+    <string name="recovery_email_not_registered">Сэргээх имэйлийг бүртгээгүй байна</string>
+    <string name="change_your">Өөрийгөө соль</string>
+    <string name="forgot_caps">Мартсан уу?</string>
+    <string name="password_successfully_changed">Таны нууц үг амжилттай солигдлоо</string>
+    <string name="invalid_email_address">хүчингүй мэйл хаяг</string>
+    <string name="password_min">Нууц үгэнд хамгийн багадаа 8 тэмдэгт байх ёстой</string>
+    <string name="old_password_must_not_new">Хуучин нууц үг нь шинэ нууц үг байх ёсгүй</string>
+    <string name="password_not_match">Нууц үг таарахгүй байна</string>
+    <string name="invalid_old_pasword">Хуучин нууц үг буруу байна</string>
+    <string name="phonebook_blacklist_subheading">"Хар жагсаалтад ямар харилцагч нэмэхээ сонгоно уу"</string>
+    <string name="phonebook_whitelist_subheading">"Цагаан жагсаалтад ямар харилцагч нэмэхээ сонгоно уу"</string>
+    <string name="camera_not_init">Камер эхлүүлэх алдаа:</string>
+    <string name="please_wait">Түр хүлээнэ үү</string>
+    <string name="invalid_qr">Буруу QrCode!</string>
+    <string name="successfully_done">Амжилттай боллоо!</string>
+    <string name="on_caps">АСААЛТТАЙ</string>
+    <string name="off_caps">УНТРАА</string>
+    <string name="webfilter_blacklist_subheading">"Хар жагсаалтад хадгалагдсан вэбсайтууд хөтөчөөр нэвтрэх боломжгүй болно"</string>
+    <string name="webfilter_whitelist_subheading">Вэбсайтууд зөвхөн хөтөчөөр нэвтрэх боломжтой цагаан жагсаалтад хадгалагддаг</string>
+    <string name="dialog_website_blacklist_subheading">Хар жагсаалтад оруулахыг хүссэн вэбсайтаа оруулна уу Жишээлбэл: www.google.com</string>
+    <string name="dialog_website_white_subheading">Цагаан жагсаалтад оруулахыг хүссэн вэбсайтаа оруулна уу Жишээлбэл: www.google.com</string>
+    <string name="invalid_url">Буруу URL</string>
+    <string name="invalid_otp">Буруу Otp</string>
+    <string name="user_agreement_1">KeyOS-ийг сайжруулж, бүх функцийг зөв ажиллуулахын тулд таны ашиглалтын зарим өгөгдлийг нэргүй цуглуулах болно. Та манай Нууцлалын бодлого, нөхцлийг уншиж, зөвшөөрөх ёстой. KeyOS ашиглахаас өмнө</string>
+    <string name="select_all">Бүгдийг сонгох</string>
+    <string name="initializing_desktop">Десктоп эхлүүлж байна ...</string>
+    <string name="loading_settings">Тохиргоог ачаалж байна</string>
+    <string name="exiting_keyos">Гарч байна</string>
+    <string name="dialog_qrcode_subheading">KeyOS төхөөрөмждөө ижил тохиргоог хийхийн тулд энэ KeyOS Qr кодыг сканнердах хэрэгтэй</string>
+
 </resources>
