--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -139,4 +139,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"सूचना आणि अॅप्स बंद आहेत"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"बंद करा"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"बंद केले"</string>
+
+
+    <string name="app_name">कीओएस</string>
+    <string name="exit_button_text">कियोस्कमधून बाहेर पडा</string>
+    <string name="button_overview_mode">विहंगावलोकन मोड</string>
+    <string name="password">संकेतशब्द</string>
+    <string name="activities">उपक्रम</string>
+    <string name="cancel">रद्द करा</string>
+    <string name="done">पूर्ण झाले</string>
+    <string name="phoneBook">फोन बुक</string>
+    <string name="manual">मॅन्युअल</string>
+    <string name="create_new">नवीन तयार करा</string>
+    <string name="contact">संपर्क</string>
+    <string name="name">नाव</string>
+    <string name="number">संख्या</string>
+    <string name="hide_icon">लपवा चिन्ह</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">कीओएस मुख्यपृष्ठावरून लाँचर /शॉर्टकट प्रतीक लपवा</string>
+    <string name="block_activities">ब्लॉक क्रियाकलाप</string>
+    <string name="block_unwanted_pages_activities_windows">अवांछित पृष्ठे /क्रियाकलाप /विंडो अवरोधित करा</string>
+    <string name="time_limit">वेळेची मर्यादा</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">वेळ निर्बंध सेट करा उदा. दररोज 1 ता</string>
+    <string name="system_settings">प्रणाली संयोजना</string>
+    <string name="restrictions">निर्बंध</string>
+    <string name="edit_app">अ‍ॅप संपादित करा</string>
+    <string name="import_amp_export">आयात निर्यात</string>
+    <string name="scan">स्कॅन</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">समान सेटिंग्ज धोरण लागू करण्यासाठी कीओएस क्यूआर कोड स्कॅन करा</string>
+    <string name="generate">उत्पन्न करा</string>
+    <string name="generate_keyos_qr_code">कीओएस क्यूआरकोड व्युत्पन्न करा</string>
+    <string name="import_text">आयात करा</string>
+    <string name="import_keyos_setting_from_storage">संचयनातून कीओएस सेटिंग आयात करा</string>
+    <string name="export_text">निर्यात करा</string>
+    <string name="import_keyos_setting_to_storage">संचयनावर कीओएस सेटिंग आयात करा</string>
+    <string name="recovery_email">पुनर्प्राप्ती ईमेल</string>
+    <string name="old_password">जुना संकेतशब्द</string>
+    <string name="confirm_password">पासवर्डची पुष्टी करा</string>
+    <string name="allow_calls">कॉलला परवानगी द्या</string>
+    <string name="incoming">इनकमिंग</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">हे आपल्या मोबाइलवर सर्व येणार्‍या कॉलना अनुमती देईल</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">हे आपल्या मोबाइलवर सर्व आउटगोइंग कॉलना अनुमती देईल</string>
+    <string name="whitelist_contacts">श्वेतसूची संपर्क</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">संपर्क केवळ आपल्याला कॉल करण्यात सक्षम व्हाईटलिस्ट अंतर्गत जतन करतात</string>
+    <string name="blacklist_contacts">ब्लॅकलिस्ट संपर्क</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"ब्लॅकलिस्ट अंतर्गत जतन केलेले संपर्क आपल्याला कॉल करण्यास सक्षम राहणार नाहीत"</string>
+    <string name="automatic_whitelist">स्वयंचलित श्वेतसूची</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">फोन बुकमध्ये संपर्क उपलब्ध असल्यास कॉलला परवानगी द्या</string>
+    <string name="additional">अतिरिक्त</string>
+    <string name="whitelist_amp_blacklist">श्वेतसूचीची काळीसूची</string>
+    <string name="phone_book">फोन बुक</string>
+    <string name="import_amp_export_settings">निर्यात सेटिंग्ज आयात करा</string>
+    <string name="services">सेवा</string>
+    <string name="single_app">एकल अ‍ॅप</string>
+    <string name="apps_amp_services">अ‍ॅप्स सेवा</string>
+    <string name="peripheral">गौण</string>
+    <string name="advance">प्रगती</string>
+    <string name="disable_camera">कॅमेरा अक्षम करा</string>
+    <string name="call_settings">कॉल सेटिंग</string>
+    <string name="web_filter">वेब फिल्टर</string>
+    <string name="screen_saver">स्क्रीन सेव्हर</string>
+    <string name="phone_settings">फोन सेटिंग्ज</string>
+    <string name="notification_panel">सूचना पॅनेल</string>
+    <string name="security">सुरक्षा</string>
+    <string name="launch">लाँच करा</string>
+    <string name="phone_call_subheading">आपणास कॉल करण्यास काही अडचण येत असल्यास कृपया फोन कॉलशी संबंधित सर्व सेवांना दयाळूपणाने परवानगी द्या</string>
+    <string name="phone_call_subheading_hint">संकेतः सेवा विभागात फोनसाठी शोधा</string>
+    <string name="web_filter_subheading">वेब फिल्टर ही एक शक्तिशाली सेवा आहे जी आपल्याला अवांछित वेबसाइट्स अवरोधित करण्यास परवानगी देते</string>
+    <string name="web_filter_supported_browsers">समर्थित ब्राउझरः क्रोम, फायरफॉक्स, बहादूर, एज, ऑपेरा, डकडॉकगो</string>
+    <string name="off">बंद</string>
+    <string name="whitelist_websites">श्वेतसूची वेबसाइट</string>
+    <string name="whitelist_website_info">वेबसाइट्स केवळ ब्राउझरद्वारे प्रवेश करण्यात सक्षम श्वेतसूचीच्या खाली जतन करतात</string>
+    <string name="blacklist_websites">ब्लॅकलिस्ट वेबसाइट्स</string>
+    <string name="blacklist_websites_info">"ब्लॅकलिस्ट अंतर्गत जतन केलेल्या वेबसाइट ब्राउझरद्वारे प्रवेश करण्यात सक्षम होणार नाहीत"</string>
+    <string name="block_adult_websites">प्रौढ वेबसाइट अवरोधित करा</string>
+    <string name="adult_websites_info">हे 800 वयस्क वेबसाइट स्वयंचलितपणे अवरोधित करेल</string>
+    <string name="whitelist">श्वेतसूची</string>
+    <string name="add_websites">वेबसाइट जोडा</string>
+    <string name="website">संकेतस्थळ</string>
+    <string name="add_websites_subheading">कृपया आपण जी वेबसाइट श्वेतसूचीमध्ये जोडू इच्छिता ती वेबसाइट प्रविष्ट करा उदा: www.google.com</string>
+    <string name="otp_verification">ओटीपी पडताळणी</string>
+    <string name="otp_verification_subheading">कृपया आम्ही आपल्या नोंदणीकृत ईमेल पत्त्यावर पाठविलेले 4 अंकी ओटीपी प्रविष्ट करा</string>
+    <string name="password_prompt_subheading">"जर आपण अद्याप आपला संकेतशब्द बदलला नसेल तर कृपया 1234 प्रयत्न करा"</string>
+    <string name="forget">विसरलात?</string>
+    <string name="user_agreement">वापरकर्ता करार</string>
+    <string name="user_agreement_2">आम्ही आपल्या डिव्हाइसमध्ये स्थापित अ‍ॅप आणि फोन नंबरची सूची संग्रहित करू. आपण क्यूआरकोड वैशिष्ट्य वापरत असाल तरच हा डेटा आपल्या डिव्हाइसमधून घेतला जाईल आणि हा डेटा एका तासात सर्व्हरवरून स्वयंचलितपणे हटविला जाईल</string>
+    <string name="no_thanks">नको धन्यवाद</string>
+    <string name="accept_amp_continue">स्वीकारा</string>
+    <string name="usage_access">वापर प्रवेश</string>
+    <string name="overlay">आच्छादन</string>
+    <string name="write_settings">सेटिंग्ज लिहा</string>
+    <string name="sound_access">ध्वनी प्रवेश</string>
+    <string name="other_permissions">इतर परवानग्या</string>
+    <string name="accessibility">प्रवेशयोग्यता</string>
+    <string name="device_id">डिव्हाइस आयडी</string>
+    <string name="feedback_amp_suggestions">सूचना</string>
+    <string name="quick_survey">द्रुत सर्वेक्षण</string>
+    <string name="bug_report">दोष अहवाल</string>
+    <string name="visit">भेट</string>
+    <string name="rate">दर</string>
+    <string name="share">सामायिक करा</string>
+    <string name="app_info">अ‍ॅप माहिती</string>
+    <string name="check_for_update">सुधारणा साठी तपासा</string>
+    <string name="developer_contact">विकसक संपर्क</string>
+    <string name="terms_amp_conditions">अटी</string>
+    <string name="privacy_policy">गोपनीयता धोरण</string>
+    <string name="outgoing">आउटगोइंग</string>
+    <string name="always_on">चालू</string>
+    <string name="always_off">बंद</string>
+    <string name="dont_care">"काळजी करू नका"</string>
+    <string name="landscape">लँडस्केप</string>
+    <string name="portrait">पोर्ट्रेट</string>
+    <string name="silent">मूक</string>
+    <string name="normal">सामान्य</string>
+    <string name="select_activity_sunHeading">आपण कोणते क्रियाकलाप /पृष्ठे /विंडो अवरोधित करू इच्छिता ते निवडा</string>
+    <string name="apps">अ‍ॅप्स</string>
+    <string name="whitelist_apps">श्वेतसूची अॅप्स</string>
+    <string name="whitelist_services">श्वेतसूची सेवा</string>
+    <string name="whitelist_apps_subheading">"आपण कोणत्या अ‍ॅप्सवर प्रवेश मिळवू इच्छिता ते निवडा"</string>
+    <string name="whitelist_service_heading">"आपण कोणत्या सेवांमध्ये प्रवेश देऊ इच्छित आहात ते निवडा"</string>
+    <string name="single_app_subheading">"अग्रभागी आपल्याला कोणता अ‍ॅप उपलब्ध हवा आहे ते निवडा"</string>
+    <string name="blacklist">ब्लॅकलिस्ट</string>
+    <string name="contacts_blacklist_subheading">"ब्लॅकलिस्ट अंतर्गत जतन केलेले संपर्क यापुढे आपल्या Android फोनवर कॉल करण्यात सक्षम होणार नाहीत"</string>
+    <string name="contacts_whitelist_subheading">श्वेतसूची अंतर्गत जतन केलेले संपर्क केवळ आपल्या Android फोनवर कॉल करण्यात सक्षम</string>
+    <string name="delete">हटवा</string>
+    <string name="delete_contact_subheading">आपली खात्री आहे की आपण हे आयटम हटवू इच्छिता</string>
+    <string name="invalid_name">अवैध नाव</string>
+    <string name="invalid_number">अवैध क्रमांक</string>
+    <string name="hours">तास</string>
+    <string name="minutes">मिनिटे</string>
+    <string name="file_exported_to">फाईल निर्यात केली</string>
+    <string name="select_a_file_to_upload">अपलोड करण्यासाठी एक फाइल निवडा</string>
+    <string name="please_install_a_file_manager">कृपया फाइल व्यवस्थापक स्थापित करा.</string>
+    <string name="invalid_backup_file">अवैध बॅकअप फाईल</string>
+    <string name="imported_successfully">यशस्वीरित्या आयात केले</string>
+    <string name="password_successfully_send">संकेतशब्द यशस्वीरित्या आपल्या ईमेल पत्त्यावर पाठविला</string>
+    <string name="password_recovery_failed">संकेतशब्द पुनर्प्राप्ती अयशस्वी</string>
+    <string name="recovery_email_not_registered">पुनर्प्राप्ती ईमेल नोंदणीकृत नाही</string>
+    <string name="change_your">आपले बदला</string>
+    <string name="forgot_caps">विसरलात?</string>
+    <string name="password_successfully_changed">आपला संकेतशब्द यशस्वीरित्या बदलला गेला आहे</string>
+    <string name="invalid_email_address">अवैध ई - मेल पत्ता</string>
+    <string name="password_min">संकेतशब्दामध्ये किमान 8 वर्ण असणे आवश्यक आहे</string>
+    <string name="old_password_must_not_new">जुना संकेतशब्द नवीन संकेतशब्द नसावा</string>
+    <string name="password_not_match">संकेतशब्द जुळत नाही</string>
+    <string name="invalid_old_pasword">अवैध जुना संकेतशब्द</string>
+    <string name="phonebook_blacklist_subheading">"आपल्याला ब्लॅकलिस्टमध्ये कोणते संपर्क जोडायचे आहेत ते निवडा"</string>
+    <string name="phonebook_whitelist_subheading">"आपण श्वेतसूचीमध्ये कोणते संपर्क जोडायचे ते निवडा"</string>
+    <string name="camera_not_init">कॅमेरा आरंभिक त्रुटी:</string>
+    <string name="please_wait">कृपया थांबा</string>
+    <string name="invalid_qr">अवैध क्यूआर कोड!</string>
+    <string name="successfully_done">यशस्वीरित्या केले!</string>
+    <string name="on_caps">चालू</string>
+    <string name="off_caps">बंद</string>
+    <string name="webfilter_blacklist_subheading">"ब्लॅकलिस्ट अंतर्गत जतन केलेल्या वेबसाइट ब्राउझरद्वारे प्रवेश करण्यात सक्षम होणार नाहीत"</string>
+    <string name="webfilter_whitelist_subheading">वेबसाइट्स केवळ ब्राउझरद्वारे प्रवेश करण्यात सक्षम श्वेतसूचीच्या खाली जतन करतात</string>
+    <string name="dialog_website_blacklist_subheading">कृपया आपण ज्या वेबसाइटला ब्लॅकलिस्टमध्ये समाविष्ट करू इच्छिता ती वेबसाइट प्रविष्ट करा उदा: www.google.com</string>
+    <string name="dialog_website_white_subheading">कृपया आपण जी वेबसाइट श्वेतसूचीमध्ये जोडू इच्छिता ती वेबसाइट प्रविष्ट करा उदा: www.google.com</string>
+    <string name="invalid_url">अवैध url</string>
+    <string name="invalid_otp">अवैध ओ.टी.पी.</string>
+    <string name="user_agreement_1">कीओएस सुधारित करण्यासाठी आणि सर्व वैशिष्ट्ये योग्य प्रकारे कार्य करत आहेत हे सुनिश्चित करण्यासाठी, आपला काही वापर डेटा अज्ञातपणे संग्रहित केला जाईल. आपण आमच्या गोपनीयता धोरण आणि अटी वाचल्या पाहिजेत आणि सहमत आहात. कीओएस वापरण्यापूर्वी</string>
+    <string name="select_all">सर्व निवडा</string>
+    <string name="initializing_desktop">डेस्कटॉप प्रारंभ करीत आहे ...</string>
+    <string name="loading_settings">सेटिंग्ज लोड करीत आहे</string>
+    <string name="exiting_keyos">बाहेर पडत आहे</string>
+    <string name="dialog_qrcode_subheading">आपल्या कीओएस डिव्हाइसमध्ये समान सेटिंग्ज लागू करण्यासाठी हा कीओएस क्यूआर कोड स्कॅन करा</string>
+
 </resources>
