--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -141,4 +141,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"सूचना र अनुप्रयोगहरू निष्क्रिय छन्‌"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"बन्द गर्नुहोस्"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"बन्द गरियो"</string>
+
+
+    <string name="app_name">कीओएस</string>
+    <string name="exit_button_text">कियोस्कबाट निस्कनुहोस्</string>
+    <string name="button_overview_mode">सिंहावलोकन मोड</string>
+    <string name="password">पासवर्ड</string>
+    <string name="activities">गतिविधिहरू</string>
+    <string name="cancel">रद्द गर्नुहोस्</string>
+    <string name="done">भयो</string>
+    <string name="phoneBook">फोन पुस्तिका</string>
+    <string name="manual">म्यानुअल</string>
+    <string name="create_new">नयाँ सिर्जना गर्नुहोस्</string>
+    <string name="contact">सम्पर्क</string>
+    <string name="name">नाम</string>
+    <string name="number">संख्या</string>
+    <string name="hide_icon">प्रतिमा लुकाउनुहोस्</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">किओएस घरबाट लन्चर /सर्टकट प्रतिमा लुकाउनुहोस्</string>
+    <string name="block_activities">गतिविधिहरू रोक्नुहोस्</string>
+    <string name="block_unwanted_pages_activities_windows">अनावश्यक पृष्ठहरू /गतिविधिहरू /विन्डोहरू रोक्नुहोस्</string>
+    <string name="time_limit">समयसीमा</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">समय प्रतिबन्ध सेट गर्नुहोस् Eg। प्रति दिन १ घण्टा</string>
+    <string name="system_settings">प्रणाली सेटिंग्स</string>
+    <string name="restrictions">प्रतिबन्धहरू</string>
+    <string name="edit_app">अनुप्रयोग सम्पादन गर्नुहोस्</string>
+    <string name="import_amp_export">आयात निर्यात</string>
+    <string name="scan">स्क्यान</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">समान सेटिंग्स नीति लागू गर्न keyOS qr कोड स्क्यान गर्नुहोस्</string>
+    <string name="generate">उत्पन्न गर्नुहोस्</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode उत्पन्न गर्नुहोस्</string>
+    <string name="import_text">आयात गर्नुहोस्</string>
+    <string name="import_keyos_setting_from_storage">भण्डारणबाट keyOS सेटिंग आयात गर्नुहोस्</string>
+    <string name="export_text">निर्यात</string>
+    <string name="import_keyos_setting_to_storage">भण्डारण गर्न कीओएस सेटिंग आयात गर्नुहोस्</string>
+    <string name="recovery_email">रिकभरी ईमेल</string>
+    <string name="old_password">पुरानो पासवर्ड</string>
+    <string name="confirm_password">पासवर्ड सुनिश्चित गर्नुहोस</string>
+    <string name="allow_calls">कलहरूलाई अनुमति दिनुहोस्</string>
+    <string name="incoming">आगमन</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">यसले तपाईंको मोबाईलमा सबै आगमन कलहरूलाई अनुमति दिनेछ</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">यसले तपाईंको मोबाईलमा सबै बाहिर जाने कलहरू अनुमति दिन्छ</string>
+    <string name="whitelist_contacts">श्वेतसूची सम्पर्कहरू</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">सम्पर्क ह्वाइटलिस्ट अन्तर्गत बचत गर्दछ केवल तपाईंलाई कल गर्न सक्षम</string>
+    <string name="blacklist_contacts">कालोसूची सम्पर्कहरू</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"कालोसूची अन्तर्गत सम्पर्कहरू बचत गर्दा तपाईंलाई कल गर्न सक्षम हुँदैन"</string>
+    <string name="automatic_whitelist">स्वचालित स्वेतसूची</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">फोन पुस्तकमा सम्पर्क उपलब्ध छ भने कलहरूलाई अनुमति दिनुहोस्</string>
+    <string name="additional">थप</string>
+    <string name="whitelist_amp_blacklist">स्वेतसूची कालोसूची</string>
+    <string name="phone_book">फोन पुस्तिका</string>
+    <string name="import_amp_export_settings">निर्यात सेटिंग्स आयात गर्नुहोस्</string>
+    <string name="services">सेवाहरू</string>
+    <string name="single_app">एकल अनुप्रयोग</string>
+    <string name="apps_amp_services">अनुप्रयोग सेवाहरू</string>
+    <string name="peripheral">परिधीय</string>
+    <string name="advance">अग्रिम</string>
+    <string name="disable_camera">क्यामेरा असक्षम गर्नुहोस्</string>
+    <string name="call_settings">कल सेटिंग्स</string>
+    <string name="web_filter">वेब फिल्टर</string>
+    <string name="screen_saver">स्क्रिन सेभर</string>
+    <string name="phone_settings">फोन सेटिंग्स</string>
+    <string name="notification_panel">अधिसूचना प्यानल</string>
+    <string name="security">सुरक्षा</string>
+    <string name="launch">सुरूवात गर्नुहोस्</string>
+    <string name="phone_call_subheading">यदि तपाईंले कल गर्नका लागि कुनै समस्याको सामना गर्नुभयो भने कृपया फोन कलसँग सम्बन्धित सबै सेवाहरूलाई अनुमति दिनुहोस्</string>
+    <string name="phone_call_subheading_hint">सुझाव: सेवा सेक्सनमा फोनका लागि खोजी गर्नुहोस्</string>
+    <string name="web_filter_subheading">वेब फिल्टर एक शक्तिशाली सेवा हो जसले तपाईंलाई अनावश्यक वेबसाइटहरू ब्लक गर्न अनुमति दिन्छ</string>
+    <string name="web_filter_supported_browsers">समर्थित ब्राउजरहरू: क्रोम, फायरफक्स, बहादुर, धार, ओपेरा, duckduckgo</string>
+    <string name="off">बन्द</string>
+    <string name="whitelist_websites">ह्वाइटलिस्ट वेबसाइटहरू</string>
+    <string name="whitelist_website_info">वेबसाइटहरू व्हाइटलिस्ट अन्तर्गत बचत गर्दछ केवल ब्राउजरले पहुँच गर्न सक्दछ</string>
+    <string name="blacklist_websites">कालोसूची वेबसाइटहरू</string>
+    <string name="blacklist_websites_info">"कालोसूची अन्तर्गत सुरक्षित गरिएका वेबसाइटहरूले ब्राउजर मार्फत पहुँच गर्न सक्षम हुने छैनन्"।</string>
+    <string name="block_adult_websites">वयस्क वेबसाइटहरू रोक्नुहोस्</string>
+    <string name="adult_websites_info">यसले स्वचालित रूपमा adult०० वयस्क वेबसाइटहरूलाई रोक्दछ</string>
+    <string name="whitelist">स्वेतसूची</string>
+    <string name="add_websites">वेबसाइट थप्नुहोस्</string>
+    <string name="website">वेबसाइट</string>
+    <string name="add_websites_subheading">कृपया वेबसाइटमा प्रविष्ट गर्नुहोस् जुन तपाईं व्हाइटलिस्ट ईग: www.google.com मा थप्न चाहानुहुन्छ</string>
+    <string name="otp_verification">ओटिप प्रमाणिकरण</string>
+    <string name="otp_verification_subheading">कृपया digit अंकको ओटिपी प्रविष्ट गर्नुहोस् जुन हामीले तपाईंको पंजीकृत ईमेल ठेगानामा पठाईएका छौं</string>
+    <string name="password_prompt_subheading">"यदि तपाईंले आफ्नो पासवर्ड परिवर्तन गर्नुभएको छैन भने कृपया १२3434 प्रयास गर्नुहोस्"</string>
+    <string name="forget">बिर्सनुभयो?</string>
+    <string name="user_agreement">प्रयोगकर्ता सम्झौता</string>
+    <string name="user_agreement_2">हामी तपाईंको उपकरणमा स्थापित अनुप्रयोग र फोन नम्बरको सूची भण्डारण गर्नेछौं। यो डाटा तपाईंको उपकरणबाट मात्र लिईन्छ यदि तपाईं QrCode सुविधा प्रयोग गर्दै हुनुहुन्छ र यो डाटा स्वतः एक घण्टामा सर्भरबाट हटाइनेछ।</string>
+    <string name="no_thanks">धन्यबाद</string>
+    <string name="accept_amp_continue">स्वीकार्नुहोस्</string>
+    <string name="usage_access">उपयोग पहुँच</string>
+    <string name="overlay">ओभरले</string>
+    <string name="write_settings">सेटिंग्स लेख्नुहोस्</string>
+    <string name="sound_access">ध्वनि पहुँच</string>
+    <string name="other_permissions">अन्य अनुमतिहरू</string>
+    <string name="accessibility">पहुँच</string>
+    <string name="device_id">उपकरण आईडी</string>
+    <string name="feedback_amp_suggestions">सुझावहरू</string>
+    <string name="quick_survey">द्रुत सर्वेक्षण</string>
+    <string name="bug_report">बग रिपोर्ट</string>
+    <string name="visit">भ्रमण गर्नुहोस्</string>
+    <string name="rate">दर</string>
+    <string name="share">सेयर गर्नुहोस्</string>
+    <string name="app_info">अनुप्रयोग जानकारी</string>
+    <string name="check_for_update">अद्यावधिकका लागि जाँच गर्नुहोस्</string>
+    <string name="developer_contact">विकासकर्ता सम्पर्क</string>
+    <string name="terms_amp_conditions">सर्तहरू</string>
+    <string name="privacy_policy">गोपनीयता नीति</string>
+    <string name="outgoing">बहिर्गमन</string>
+    <string name="always_on">खुल्ला</string>
+    <string name="always_off">बन्द</string>
+    <string name="dont_care">"मतलब नगर्नुहोस्"</string>
+    <string name="landscape">ल्यान्डस्केप</string>
+    <string name="portrait">चित्र</string>
+    <string name="silent">मौन</string>
+    <string name="normal">सामान्य</string>
+    <string name="select_activity_sunHeading">कुन गतिविधि /पृष्ठ /विन्डोज तपाईंले ब्लक गर्न चाहानुहुन्छ छान्नुहोस्</string>
+    <string name="apps">एप्स</string>
+    <string name="whitelist_apps">ह्वाइटलिस्ट अनुप्रयोगहरू</string>
+    <string name="whitelist_services">ह्वाइटलिस्ट सेवाहरू</string>
+    <string name="whitelist_apps_subheading">"कुन अनुप्रयोगहरू पहुँच ive गर्न चाहानुहुन्छ चयन गर्नुहोस्"</string>
+    <string name="whitelist_service_heading">"कुन सेवाहरू तपाइँले पहुँच दिन चाहानुहुन्छ छनौट गर्नुहोस्"</string>
+    <string name="single_app_subheading">"तपाइँ अग्रभूमिमा कुन अनुप्रयोग उपलब्ध गर्न चाहानुहुन्छ चयन गर्नुहोस्"</string>
+    <string name="blacklist">कालोसूची</string>
+    <string name="contacts_blacklist_subheading">"कालोसूची अन्तर्गत सुरक्षित गरिएका सम्पर्कहरूले तपाइँको एन्ड्रोइड फोनलाई कल गर्न सक्षम हुँदैनन्"।</string>
+    <string name="contacts_whitelist_subheading">व्हाइटलिस्ट अन्तर्गत सुरक्षित सम्पर्कहरू मात्र तपाईंको Android फोन कल गर्न सक्षम छन्</string>
+    <string name="delete">मेटाउन</string>
+    <string name="delete_contact_subheading">के तपाईं पक्का यो आईटमहरू मेट्न चाहनुहुन्छ?</string>
+    <string name="invalid_name">अवैध नाम</string>
+    <string name="invalid_number">अवैध संख्या</string>
+    <string name="hours">घण्टा</string>
+    <string name="minutes">मिनेट</string>
+    <string name="file_exported_to">फाइललाई निर्यात गरियो</string>
+    <string name="select_a_file_to_upload">अपलोड गर्न फाइल चयन गर्नुहोस्</string>
+    <string name="please_install_a_file_manager">कृपया फाईल प्रबन्धक स्थापना गर्नुहोस्।</string>
+    <string name="invalid_backup_file">अवैध ब्याकअप फाईल</string>
+    <string name="imported_successfully">सफलतापूर्वक आयात गरियो</string>
+    <string name="password_successfully_send">पासवर्ड तपाईको ईमेल ठेगानामा सफलतापूर्वक पठाइयो</string>
+    <string name="password_recovery_failed">पासवर्ड रिकभरी असफल भयो</string>
+    <string name="recovery_email_not_registered">रिकभरी ईमेल दर्ता गरिएको छैन</string>
+    <string name="change_your">तपाईंको परिवर्तन गर्नुहोस्</string>
+    <string name="forgot_caps">बिर्सनुभयो?</string>
+    <string name="password_successfully_changed">तपाईको पासवर्ड सफलतापूर्वक परिवर्तन गरिएको छ</string>
+    <string name="invalid_email_address">अवैध ईमेल ठेगाना</string>
+    <string name="password_min">पासवर्ड कम से कम characters अक्षरको हुनु पर्छ</string>
+    <string name="old_password_must_not_new">पुरानो पासवर्ड नयाँ पासवर्ड हुनु हुँदैन</string>
+    <string name="password_not_match">पासवर्ड मिलेन</string>
+    <string name="invalid_old_pasword">अवैध पुरानो पासवर्ड</string>
+    <string name="phonebook_blacklist_subheading">"तपाइँ कुन सम्पर्कहरू कालोसूचीमा थप्न चाहानुहुन्छ चयन गर्नुहोस्"</string>
+    <string name="phonebook_whitelist_subheading">"तपाइँ कुन सम्पर्कहरू सेतोसूचीमा थप्न चाहानुहुन्छ चयन गर्नुहोस्"</string>
+    <string name="camera_not_init">क्यामेरा आरम्भ त्रुटि:</string>
+    <string name="please_wait">कृपया पर्खनुहोस्</string>
+    <string name="invalid_qr">अवैध QrCode!</string>
+    <string name="successfully_done">सफलतापूर्वक भयो!</string>
+    <string name="on_caps">खुल्ला</string>
+    <string name="off_caps">बन्द</string>
+    <string name="webfilter_blacklist_subheading">"कालोसूची अन्तर्गत सुरक्षित गरिएका वेबसाइटहरूले ब्राउजर मार्फत पहुँच गर्न सक्षम हुने छैनन्"।</string>
+    <string name="webfilter_whitelist_subheading">वेबसाइटहरू व्हाइटलिस्ट अन्तर्गत बचत गर्दछ केवल ब्राउजरले पहुँच गर्न सक्दछ</string>
+    <string name="dialog_website_blacklist_subheading">कृपया वेबसाइटमा प्रविष्ट गर्नुहोस् जुन तपाईं कालोसूचीमा थप्न चाहानुहुन्छ उदाहरण: www.google.com</string>
+    <string name="dialog_website_white_subheading">कृपया वेबसाइटमा प्रविष्ट गर्नुहोस् जुन तपाईं व्हाइटलिस्ट ईग: www.google.com मा थप्न चाहानुहुन्छ</string>
+    <string name="invalid_url">अवैध url</string>
+    <string name="invalid_otp">अवैध ओटिप</string>
+    <string name="user_agreement_1">किओएस सुधार गर्न र निश्चित गर्नुहोस् कि सबै सुविधाहरू सही तरीकाले काम गर्दछन्, तपाईंको केहि प्रयोग डाटा अज्ञात रूपमा संकलन गरिनेछ। तपाइँले हाम्रो गोपनीयता नीति र सर्तहरू पढ्नुपर्दछ र त्यससँग सहमत हुनुपर्दछ। KeyOS प्रयोग गर्नु अघि</string>
+    <string name="select_all">सबै छान्नु</string>
+    <string name="initializing_desktop">डेस्कटप सुरू गर्दै ...</string>
+    <string name="loading_settings">सेटिंग्स लोड गर्दै</string>
+    <string name="exiting_keyos">बाहिर निस्किदै</string>
+    <string name="dialog_qrcode_subheading">तपाईंको किओएस उपकरणमा समान सेटिंग्स लागू गर्न यो किओओएस Qr कोड स्क्यान गर्नुहोस्</string>
+
+
+
 </resources>
