--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -141,4 +141,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"ਸੂਚਨਾਵਾਂ ਅਤੇ ਐਪਾਂ ਬੰਦ ਹਨ"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"ਬੰਦ ਕਰੋ"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"ਬੰਦ ਕੀਤਾ ਗਿਆ"</string>
+
+
+    <string name="app_name">ਕੀਓਐਸ</string>
+    <string name="exit_button_text">ਬੰਦ ਕਰੋ ਕਿਓਸਕ</string>
+    <string name="button_overview_mode">ਸੰਖੇਪ ਵਿਧੀ</string>
+    <string name="password">ਪਾਸਵਰਡ</string>
+    <string name="activities">ਗਤੀਵਿਧੀਆਂ</string>
+    <string name="cancel">ਰੱਦ ਕਰੋ</string>
+    <string name="done">ਹੋ ਗਿਆ</string>
+    <string name="phoneBook">ਫੋਨ ਬੁੱਕ</string>
+    <string name="manual">ਮੈਨੂਅਲ</string>
+    <string name="create_new">ਨਵਾਂ ਬਣਾਓ</string>
+    <string name="contact">ਸੰਪਰਕ</string>
+    <string name="name">ਨਾਮ</string>
+    <string name="number">ਗਿਣਤੀ</string>
+    <string name="hide_icon">ਆਈਕਾਨ ਓਹਲੇ</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ਕੀਓਸ ਘਰ ਤੋਂ ਲਾਂਚਰ /ਸ਼ਾਰਟਕੱਟ ਆਈਕਨ ਲੁਕਾਓ</string>
+    <string name="block_activities">ਬਲਾਕ ਗਤੀਵਿਧੀਆਂ</string>
+    <string name="block_unwanted_pages_activities_windows">ਅਣਚਾਹੇ ਪੰਨਿਆਂ /ਗਤੀਵਿਧੀਆਂ /ਵਿੰਡੋਜ਼ ਨੂੰ ਬਲੌਕ ਕਰੋ</string>
+    <string name="time_limit">ਸਮਾਂ ਸੀਮਾ</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">ਸਮਾਂ ਪਾਬੰਦੀ ਸੈਟ ਕਰੋ. ਪ੍ਰਤੀ ਦਿਨ 1 ਘੰਟਾ</string>
+    <string name="system_settings">ਸਿਸਟਮ ਸੈਟਿੰਗਾਂ</string>
+    <string name="restrictions">ਪਾਬੰਦੀਆਂ</string>
+    <string name="edit_app">ਐਪ ਨੂੰ ਸੋਧੋ</string>
+    <string name="import_amp_export">ਇੰਪੋਰਟ ਐਕਸਪੋਰਟ</string>
+    <string name="scan">ਸਕੈਨ</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">ਉਸੇ ਸੈਟਿੰਗ ਨੀਤੀ ਨੂੰ ਲਾਗੂ ਕਰਨ ਲਈ ਕੀਓਸ ਕਿ qਆਰ ਕੋਡ ਨੂੰ ਸਕੈਨ ਕਰੋ</string>
+    <string name="generate">ਤਿਆਰ ਕਰੋ</string>
+    <string name="generate_keyos_qr_code">ਕੀਓਸ ਕਿrਰਕੋਡ ਤਿਆਰ ਕਰੋ</string>
+    <string name="import_text">ਆਯਾਤ</string>
+    <string name="import_keyos_setting_from_storage">ਸਟੋਰੇਜ਼ ਤੋਂ ਕੀਓਸ ਸੈਟਿੰਗ ਆਯਾਤ ਕਰੋ</string>
+    <string name="export_text">ਨਿਰਯਾਤ</string>
+    <string name="import_keyos_setting_to_storage">ਸਟੋਰੇਜ਼ ਵਿੱਚ ਕੀਓਸ ਸੈਟਿੰਗ ਨੂੰ ਆਯਾਤ ਕਰੋ</string>
+    <string name="recovery_email">ਰਿਕਵਰੀ ਈਮੇਲ</string>
+    <string name="old_password">ਪੁਰਾਣਾ ਪਾਸਵਰਡ</string>
+    <string name="confirm_password">ਪਾਸਵਰਡ ਪੱਕਾ ਕਰੋ</string>
+    <string name="allow_calls">ਕਾਲਾਂ ਦੀ ਆਗਿਆ ਦਿਓ</string>
+    <string name="incoming">ਆਉਣ ਵਾਲੀ</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">ਇਹ ਤੁਹਾਡੇ ਮੋਬਾਈਲ ਤੇ ਆਉਣ ਵਾਲੀਆਂ ਸਾਰੀਆਂ ਕਾੱਲਾਂ ਦੀ ਆਗਿਆ ਦੇਵੇਗਾ</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">ਇਹ ਤੁਹਾਡੇ ਮੋਬਾਈਲ ਤੇ ਸਾਰੀਆਂ ਆਉਟਗੋਇੰਗ ਕਾਲਾਂ ਨੂੰ ਆਗਿਆ ਦੇਵੇਗਾ</string>
+    <string name="whitelist_contacts">ਵ੍ਹਾਈਟਲਿਸਟ ਸੰਪਰਕ</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">ਸੰਪਰਕ ਵਾਈਟਲਿਸਟ ਦੇ ਤਹਿਤ ਸੁਰੱਖਿਅਤ ਕਰਦੇ ਹਨ ਸਿਰਫ ਤੁਹਾਨੂੰ ਕਾਲ ਕਰਨ ਦੇ ਯੋਗ</string>
+    <string name="blacklist_contacts">ਬਲੈਕਲਿਸਟ ਸੰਪਰਕ</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"ਬਲੈਕਲਿਸਟ ਦੇ ਅਧੀਨ ਸੁਰੱਖਿਅਤ ਕੀਤੇ ਸੰਪਰਕ ਤੁਹਾਨੂੰ ਕਾਲ ਨਹੀਂ ਕਰ ਸਕਣਗੇ"</string>
+    <string name="automatic_whitelist">ਆਟੋਮੈਟਿਕ ਵ੍ਹਾਈਟਲਿਸਟ</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">ਜੇ ਫੋਨ ਫੋਨ ਦੀ ਕਿਤਾਬ ਵਿੱਚ ਸੰਪਰਕ ਉਪਲਬਧ ਹੋਵੇ ਤਾਂ ਕਾਲਾਂ ਦੀ ਆਗਿਆ ਦਿਓ</string>
+    <string name="additional">ਅਤਿਰਿਕਤ</string>
+    <string name="whitelist_amp_blacklist">ਵ੍ਹਾਈਟਲਿਸਟ ਬਲੈਕਲਿਸਟ</string>
+    <string name="phone_book">ਫੋਨ ਬੁੱਕ</string>
+    <string name="import_amp_export_settings">ਨਿਰਯਾਤ ਸੈਟਿੰਗਾਂ ਆਯਾਤ ਕਰੋ</string>
+    <string name="services">ਸੇਵਾਵਾਂ</string>
+    <string name="single_app">ਸਿੰਗਲ ਐਪ</string>
+    <string name="apps_amp_services">ਐਪਸ ਸੇਵਾਵਾਂ</string>
+    <string name="peripheral">ਪੈਰੀਫਿਰਲ</string>
+    <string name="advance">ਪੇਸ਼ਗੀ</string>
+    <string name="disable_camera">ਕੈਮਰਾ ਅਯੋਗ</string>
+    <string name="call_settings">ਕਾਲ ਸੈਟਿੰਗਜ਼</string>
+    <string name="web_filter">ਵੈੱਬ ਫਿਲਟਰ</string>
+    <string name="screen_saver">ਸਕਰੀਨ ਸੇਵਰ</string>
+    <string name="phone_settings">ਫੋਨ ਸੈਟਿੰਗਾਂ</string>
+    <string name="notification_panel">ਨੋਟੀਫਿਕੇਸ਼ਨ ਪੈਨਲ</string>
+    <string name="security">ਸੁਰੱਖਿਆ</string>
+    <string name="launch">ਚਲਾਓ</string>
+    <string name="phone_call_subheading">ਜੇ ਤੁਹਾਨੂੰ ਕਾਲ ਕਰਨ ਲਈ ਕਿਸੇ ਮੁਸੀਬਤ ਦਾ ਸਾਹਮਣਾ ਕਰਨਾ ਪੈਂਦਾ ਹੈ ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਫੋਨ ਕਾਲ ਨਾਲ ਸਬੰਧਤ ਸਾਰੀਆਂ ਸੇਵਾਵਾਂ ਦੀ ਆਗਿਆ ਦਿਓ</string>
+    <string name="phone_call_subheading_hint">ਸੰਕੇਤ: ਸੇਵਾ ਭਾਗ ਵਿੱਚ ਫੋਨ ਦੀ ਭਾਲ ਕਰੋ</string>
+    <string name="web_filter_subheading">ਵੈੱਬ ਫਿਲਟਰ ਇਕ ਸ਼ਕਤੀਸ਼ਾਲੀ ਸੇਵਾ ਹੈ ਜੋ ਤੁਹਾਨੂੰ ਅਣਚਾਹੇ ਵੈਬਸਾਈਟਾਂ ਨੂੰ ਰੋਕਣ ਦੀ ਆਗਿਆ ਦਿੰਦੀ ਹੈ</string>
+    <string name="web_filter_supported_browsers">ਸਹਿਯੋਗੀ ਬ੍ਰਾsersਜ਼ਰ: ਕਰੋਮ, ਫਾਇਰਫਾਕਸ, ਬਹਾਦਰ, ਕਿਨਾਰਾ, ਓਪੇਰਾ, ਡਕਡਾਕੱਕਗੋ</string>
+    <string name="off">ਬੰਦ</string>
+    <string name="whitelist_websites">ਵ੍ਹਾਈਟਲਿਸਟ ਵੈਬਸਾਈਟਾਂ</string>
+    <string name="whitelist_website_info">ਵੈਬਸਾਈਟਸ ਵ੍ਹਾਈਟਲਿਸਟ ਦੇ ਤਹਿਤ ਸੁਰੱਖਿਅਤ ਕਰਦੇ ਹਨ ਸਿਰਫ ਬ੍ਰਾ byਜ਼ਰ ਦੁਆਰਾ ਐਕਸੈਸ ਕਰਨ ਦੇ ਯੋਗ</string>
+    <string name="blacklist_websites">ਬਲੈਕਲਿਸਟ ਵੈਬਸਾਈਟਾਂ</string>
+    <string name="blacklist_websites_info">"ਬਲੈਕਲਿਸਟ ਦੇ ਅਧੀਨ ਸੁਰੱਖਿਅਤ ਕੀਤੀਆਂ ਵੈਬਸਾਈਟਾਂ ਬ੍ਰਾ browserਜ਼ਰ ਦੁਆਰਾ ਐਕਸੈਸ ਨਹੀਂ ਕਰ ਸਕਣਗੀਆਂ"</string>
+    <string name="block_adult_websites">ਬਾਲਗ ਵੈਬਸਾਈਟਸ ਨੂੰ ਬਲੌਕ ਕਰੋ</string>
+    <string name="adult_websites_info">ਇਹ 800 ਬਾਲਗ ਵੈਬਸਾਈਟਾਂ ਨੂੰ ਆਪਣੇ ਆਪ ਰੋਕ ਦੇਵੇਗਾ</string>
+    <string name="whitelist">ਵ੍ਹਾਈਟਲਿਸਟ</string>
+    <string name="add_websites">ਵੈਬਸਾਈਟ ਸ਼ਾਮਲ ਕਰੋ</string>
+    <string name="website">ਵੈੱਬਸਾਈਟ</string>
+    <string name="add_websites_subheading">ਕਿਰਪਾ ਕਰਕੇ ਉਹ ਵੈਬਸਾਈਟ ਦਾਖਲ ਕਰੋ ਜਿਸ ਨੂੰ ਤੁਸੀਂ ਵ੍ਹਾਈਟਲਿਸਟ ਵਿੱਚ ਸ਼ਾਮਲ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ ਜਿਵੇਂ ਕਿ: www.google.com</string>
+    <string name="otp_verification">ਓਟਪ ਵੈਰੀਫਿਕੇਸ਼ਨ</string>
+    <string name="otp_verification_subheading">ਕਿਰਪਾ ਕਰਕੇ 4 ਅੰਕਾਂ ਦਾ ਓਟੀਪੀ ਦਰਜ ਕਰੋ ਜੋ ਅਸੀਂ ਤੁਹਾਡੇ ਰਜਿਸਟਰਡ ਈਮੇਲ ਪਤੇ ਤੇ ਭੇਜਿਆ ਹੈ</string>
+    <string name="password_prompt_subheading">"ਜੇ ਤੁਸੀਂ ਅਜੇ ਆਪਣਾ ਪਾਸਵਰਡ ਨਹੀਂ ਬਦਲਿਆ ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ 1234 ਕੋਸ਼ਿਸ਼ ਕਰੋ"</string>
+    <string name="forget">ਭੁੱਲਣਾ ?</string>
+    <string name="user_agreement">ਉਪਭੋਗਤਾ ਇਕਰਾਰਨਾਮਾ</string>
+    <string name="user_agreement_2">ਅਸੀਂ ਤੁਹਾਡੀ ਡਿਵਾਈਸ ਵਿੱਚ ਸਥਾਪਿਤ ਐਪ ਅਤੇ ਫੋਨ ਨੰਬਰ ਦੀ ਸੂਚੀ ਸਟੋਰ ਕਰਾਂਗੇ. ਇਹ ਡਾਟਾ ਤੁਹਾਡੀ ਡਿਵਾਈਸ ਤੋਂ ਸਿਰਫ ਤਾਂ ਹੀ ਲਿਆ ਜਾਏਗਾ ਜੇ ਤੁਸੀਂ QrCode ਫੀਚਰ ਦੀ ਵਰਤੋਂ ਕਰ ਰਹੇ ਹੋ ਅਤੇ ਇਹ ਡੇਟਾ ਆਪਣੇ ਆਪ ਸਰਵਰ ਤੋਂ ਇੱਕ ਘੰਟੇ ਵਿੱਚ ਹਟਾ ਦਿੱਤਾ ਜਾਵੇਗਾ</string>
+    <string name="no_thanks">ਨਹੀਂ ਧੰਨਵਾਦ</string>
+    <string name="accept_amp_continue">ਸਵੀਕਾਰ ਕਰੋ</string>
+    <string name="usage_access">ਵਰਤੋਂ ਪਹੁੰਚ</string>
+    <string name="overlay">ਓਵਰਲੇਅ</string>
+    <string name="write_settings">ਸੈਟਿੰਗ ਲਿਖੋ</string>
+    <string name="sound_access">ਧੁਨੀ ਪਹੁੰਚ</string>
+    <string name="other_permissions">ਹੋਰ ਅਧਿਕਾਰ</string>
+    <string name="accessibility">ਪਹੁੰਚਯੋਗਤਾ</string>
+    <string name="device_id">ਡਿਵਾਈਸ ਆਈਡੀ</string>
+    <string name="feedback_amp_suggestions">ਸੁਝਾਅ</string>
+    <string name="quick_survey">ਤੇਜ਼ ਸਰਵੇਖਣ</string>
+    <string name="bug_report">ਬੱਗ ਰਿਪੋਰਟ</string>
+    <string name="visit">ਜਾਓ</string>
+    <string name="rate">ਰੇਟ</string>
+    <string name="share">ਸਾਂਝਾ ਕਰੋ</string>
+    <string name="app_info">ਐਪ ਦੀ ਜਾਣਕਾਰੀ</string>
+    <string name="check_for_update">ਅਪਡੇਟ ਲਈ ਵੇਖੋ</string>
+    <string name="developer_contact">ਡਿਵੈਲਪਰ ਸੰਪਰਕ</string>
+    <string name="terms_amp_conditions">ਸ਼ਰਤਾਂ</string>
+    <string name="privacy_policy">ਪਰਾਈਵੇਟ ਨੀਤੀ</string>
+    <string name="outgoing">ਆgoingਟਗੋਇੰਗ</string>
+    <string name="always_on">ਚਾਲੂ</string>
+    <string name="always_off">ਬੰਦ</string>
+    <string name="dont_care">"ਪਰਵਾਹ ਨਾ ਕਰੋ"</string>
+    <string name="landscape">ਲੈਂਡਸਕੇਪ</string>
+    <string name="portrait">ਪੋਰਟਰੇਟ</string>
+    <string name="silent">ਚੁੱਪ</string>
+    <string name="normal">ਸਧਾਰਣ</string>
+    <string name="select_activity_sunHeading">ਉਹ ਕਿਹੜੀਆਂ ਗਤੀਵਿਧੀਆਂ /ਪੰਨੇ /ਵਿੰਡੋਜ਼ ਨੂੰ ਬਲੌਕ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="apps">ਐਪਸ</string>
+    <string name="whitelist_apps">ਵ੍ਹਾਈਟਲਿਸਟ ਐਪਸ</string>
+    <string name="whitelist_services">ਵ੍ਹਾਈਟਲਿਸਟ ਸੇਵਾਵਾਂ</string>
+    <string name="whitelist_apps_subheading">"ਚੁਣੋ ਕਿ ਤੁਸੀਂ ਕਿਹੜੇ ਐਪਸ ਨੂੰ ਐਕਸੈਸ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ"</string>
+    <string name="whitelist_service_heading">"ਚੁਣੋ ਕਿ ਤੁਸੀਂ ਕਿਹੜੀਆਂ ਸੇਵਾਵਾਂ ਦੇਣਾ ਚਾਹੁੰਦੇ ਹੋ"</string>
+    <string name="single_app_subheading">"ਚੁਣੋ ਕਿ ਤੁਸੀਂ ਕਿਹੜਾ ਐਪ ਫਾਰਗ੍ਰਾਉਂਡ ਵਿੱਚ ਉਪਲਬਧ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ"</string>
+    <string name="blacklist">ਬਲੈਕਲਿਸਟ</string>
+    <string name="contacts_blacklist_subheading">"ਬਲੈਕਲਿਸਟ ਦੇ ਅਧੀਨ ਸੁਰੱਖਿਅਤ ਕੀਤੇ ਸੰਪਰਕ ਤੁਹਾਡੇ ਐਂਡਰਾਇਡ ਫੋਨ ਨੂੰ ਹੁਣ ਕਾਲ ਨਹੀਂ ਕਰ ਸਕਣਗੇ"</string>
+    <string name="contacts_whitelist_subheading">ਵ੍ਹਾਈਟਲਿਸਟ ਦੇ ਤਹਿਤ ਸੁਰੱਖਿਅਤ ਕੀਤੇ ਸੰਪਰਕ ਸਿਰਫ ਤੁਹਾਡੇ ਐਂਡਰਾਇਡ ਫੋਨ ਨੂੰ ਹੁਣ ਕਾਲ ਕਰਨ ਦੇ ਯੋਗ ਹਨ</string>
+    <string name="delete">ਮਿਟਾਓ</string>
+    <string name="delete_contact_subheading">ਕੀ ਤੁਸੀਂ ਨਿਸ਼ਚਤ ਰੂਪ ਤੋਂ ਇਸ ਚੀਜ਼ਾਂ ਨੂੰ ਮਿਟਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ</string>
+    <string name="invalid_name">ਅਵੈਧ ਨਾਮ</string>
+    <string name="invalid_number">ਅਵੈਧ ਨੰਬਰ</string>
+    <string name="hours">ਘੰਟੇ</string>
+    <string name="minutes">ਮਿੰਟ</string>
+    <string name="file_exported_to">ਫਾਇਲ ਨੂੰ ਐਕਸਪੋਰਟ ਕੀਤਾ</string>
+    <string name="select_a_file_to_upload">ਅਪਲੋਡ ਕਰਨ ਲਈ ਇੱਕ ਫਾਈਲ ਦੀ ਚੋਣ ਕਰੋ</string>
+    <string name="please_install_a_file_manager">ਕਿਰਪਾ ਕਰਕੇ ਇੱਕ ਫਾਈਲ ਮੈਨੇਜਰ ਸਥਾਪਤ ਕਰੋ.</string>
+    <string name="invalid_backup_file">ਅਵੈਧ ਬੈਕਅਪ ਫਾਈਲ</string>
+    <string name="imported_successfully">ਸਫਲਤਾਪੂਰਵਕ ਇੰਪੋਰਟ ਕੀਤਾ ਗਿਆ</string>
+    <string name="password_successfully_send">ਪਾਸਵਰਡ ਸਫਲਤਾਪੂਰਵਕ ਤੁਹਾਡੇ ਈਮੇਲ ਪਤੇ ਤੇ ਭੇਜਿਆ ਗਿਆ</string>
+    <string name="password_recovery_failed">ਪਾਸਵਰਡ ਦੀ ਰਿਕਵਰੀ ਅਸਫਲ</string>
+    <string name="recovery_email_not_registered">ਰਿਕਵਰੀ ਈਮੇਲ ਰਜਿਸਟਰਡ ਨਹੀਂ ਹੈ</string>
+    <string name="change_your">ਆਪਣਾ ਬਦਲੋ</string>
+    <string name="forgot_caps">ਭੁੱਲ ਗਏ?</string>
+    <string name="password_successfully_changed">ਤੁਹਾਡਾ ਪਾਸਵਰਡ ਸਫਲਤਾਪੂਰਵਕ ਬਦਲਿਆ ਗਿਆ ਹੈ</string>
+    <string name="invalid_email_address">ਗਲਤ ਈਮੇਲ ਪਤਾ</string>
+    <string name="password_min">ਪਾਸਵਰਡ ਵਿੱਚ ਘੱਟੋ ਘੱਟ 8 ਅੱਖਰ ਹੋਣੇ ਚਾਹੀਦੇ ਹਨ</string>
+    <string name="old_password_must_not_new">ਪੁਰਾਣਾ ਪਾਸਵਰਡ ਨਵਾਂ ਪਾਸਵਰਡ ਨਹੀਂ ਹੋਣਾ ਚਾਹੀਦਾ</string>
+    <string name="password_not_match">ਪਾਸਵਰਡ ਮੇਲ ਨਹੀਂ ਖਾਂਦਾ</string>
+    <string name="invalid_old_pasword">ਅਵੈਧ ਪੁਰਾਣਾ ਪਾਸਵਰਡ</string>
+    <string name="phonebook_blacklist_subheading">"ਚੁਣੋ ਕਿ ਤੁਸੀਂ ਬਲੈਕਲਿਸਟ ਵਿੱਚ ਕਿਹੜੇ ਸੰਪਰਕ ਜੋੜਨਾ ਚਾਹੁੰਦੇ ਹੋ"</string>
+    <string name="phonebook_whitelist_subheading">"ਚੁਣੋ ਕਿ ਤੁਸੀਂ ਵ੍ਹਾਈਟਲਿਸਟ ਵਿੱਚ ਕਿਹੜੇ ਸੰਪਰਕ ਜੋੜਨਾ ਚਾਹੁੰਦੇ ਹੋ"</string>
+    <string name="camera_not_init">ਕੈਮਰਾ ਸ਼ੁਰੂਆਤੀ ਤਰੁੱਟੀ:</string>
+    <string name="please_wait">ਕ੍ਰਿਪਾ ਕਰਕੇ ਉਡੀਕ ਕਰੋ</string>
+    <string name="invalid_qr">ਅਵੈਧ QrCode!</string>
+    <string name="successfully_done">ਸਫਲਤਾਪੂਰਵਕ ਕੀਤਾ ਗਿਆ!</string>
+    <string name="on_caps">ਚਾਲੂ</string>
+    <string name="off_caps">ਬੰਦ</string>
+    <string name="webfilter_blacklist_subheading">"ਬਲੈਕਲਿਸਟ ਦੇ ਅਧੀਨ ਸੁਰੱਖਿਅਤ ਕੀਤੀਆਂ ਵੈਬਸਾਈਟਾਂ ਬ੍ਰਾ browserਜ਼ਰ ਦੁਆਰਾ ਐਕਸੈਸ ਨਹੀਂ ਕਰ ਸਕਣਗੀਆਂ".</string>
+    <string name="webfilter_whitelist_subheading">ਵੈਬਸਾਈਟਸ ਵ੍ਹਾਈਟਲਿਸਟ ਦੇ ਤਹਿਤ ਸੁਰੱਖਿਅਤ ਕਰਦੇ ਹਨ ਸਿਰਫ ਬ੍ਰਾ byਜ਼ਰ ਦੁਆਰਾ ਐਕਸੈਸ ਕਰਨ ਦੇ ਯੋਗ</string>
+    <string name="dialog_website_blacklist_subheading">ਕਿਰਪਾ ਕਰਕੇ ਉਹ ਵੈਬਸਾਈਟ ਦਾਖਲ ਕਰੋ ਜਿਸ ਨੂੰ ਤੁਸੀਂ ਬਲੈਕਲਿਸਟ ਵਿੱਚ ਸ਼ਾਮਲ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ ਜਿਵੇਂ ਕਿ: www.google.com</string>
+    <string name="dialog_website_white_subheading">ਕਿਰਪਾ ਕਰਕੇ ਉਹ ਵੈਬਸਾਈਟ ਦਾਖਲ ਕਰੋ ਜਿਸ ਨੂੰ ਤੁਸੀਂ ਵ੍ਹਾਈਟਲਿਸਟ ਵਿੱਚ ਸ਼ਾਮਲ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ ਜਿਵੇਂ ਕਿ: www.google.com</string>
+    <string name="invalid_url">ਅਵੈਧ url</string>
+    <string name="invalid_otp">ਅਵੈਧ ਓ.ਟੀ.ਪੀ.</string>
+    <string name="user_agreement_1">ਕੀਓਸ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਅਤੇ ਇਹ ਸੁਨਿਸ਼ਚਿਤ ਕਰਨ ਲਈ ਕਿ ਸਾਰੀਆਂ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਸਹੀ properlyੰਗ ਨਾਲ ਕੰਮ ਕਰ ਰਹੀਆਂ ਹਨ, ਤੁਹਾਡਾ ਕੁਝ ਉਪਯੋਗਤਾ ਡਾਟਾ ਗੁਪਤ ਰੂਪ ਵਿੱਚ ਇਕੱਤਰ ਕੀਤਾ ਜਾਵੇਗਾ. ਤੁਹਾਨੂੰ ਸਾਡੀ ਗੋਪਨੀਯਤਾ ਨੀਤੀ ਅਤੇ ਨਿਯਮਾਂ ਨੂੰ ਪੜ੍ਹਨਾ ਅਤੇ ਸਹਿਮਤ ਹੋਣਾ ਚਾਹੀਦਾ ਹੈ. ਕੀਓਸ ਵਰਤਣ ਤੋਂ ਪਹਿਲਾਂ</string>
+    <string name="select_all">ਸਾਰਿਆ ਨੂੰ ਚੁਣੋ</string>
+    <string name="initializing_desktop">ਡੈਸਕਟੌਪ ਅਰੰਭ ਕਰ ਰਿਹਾ ਹੈ ...</string>
+    <string name="loading_settings">ਸੈਟਿੰਗ ਲੋਡ ਹੋ ਰਹੀ ਹੈ</string>
+    <string name="exiting_keyos">ਬਾਹਰ ਆ ਰਿਹਾ ਹੈ</string>
+    <string name="dialog_qrcode_subheading">ਆਪਣੀ ਕੀਓਸ ਡਿਵਾਈਸ ਵਿੱਚ ਉਹੀ ਸੈਟਿੰਗਜ਼ ਲਾਗੂ ਕਰਨ ਲਈ ਇਸ ਕੀਓਸ ਕਿrਰ ਕੋਡ ਨੂੰ ਸਕੈਨ ਕਰੋ</string>
+
+
 </resources>
