--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -142,4 +142,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Powiadomienia i aplikacje są wyłączone"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Zamknij"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Zamknięto"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Zamknij kiosk</string>
+    <string name="button_overview_mode">Tryb przeglądu</string>
+    <string name="password">Hasło</string>
+    <string name="activities">Zajęcia</string>
+    <string name="cancel">Anuluj</string>
+    <string name="done">Gotowe</string>
+    <string name="phoneBook">Książka telefoniczna</string>
+    <string name="manual">podręcznik</string>
+    <string name="create_new">Tworzyć nowe</string>
+    <string name="contact">Kontakt</string>
+    <string name="name">Nazwa</string>
+    <string name="number">Numer</string>
+    <string name="hide_icon">Ukryj ikonę</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ukryj ikonę programu uruchamiającego /skrótu z domu KeyOS</string>
+    <string name="block_activities">Blokuj działania</string>
+    <string name="block_unwanted_pages_activities_windows">Blokuj niechciane strony /działania /okna</string>
+    <string name="time_limit">Limit czasu</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Ustaw ograniczenie czasowe Np. 1 godz. Dziennie</string>
+    <string name="system_settings">Ustawienia systemowe</string>
+    <string name="restrictions">Ograniczenia</string>
+    <string name="edit_app">Edytuj aplikację</string>
+    <string name="import_amp_export">Import Eksport</string>
+    <string name="scan">Skanowanie</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Zeskanuj kod qr keyOS, aby zastosować te same zasady ustawień</string>
+    <string name="generate">Generować</string>
+    <string name="generate_keyos_qr_code">Wygeneruj keyOS QrCode</string>
+    <string name="import_text">Import</string>
+    <string name="import_keyos_setting_from_storage">Importuj ustawienia keyOS z pamięci</string>
+    <string name="export_text">Eksport</string>
+    <string name="import_keyos_setting_to_storage">Importuj ustawienia keyOS do pamięci</string>
+    <string name="recovery_email">Adres pomocniczy</string>
+    <string name="old_password">Stare hasło</string>
+    <string name="confirm_password">Potwierdź hasło</string>
+    <string name="allow_calls">Zezwalaj na połączenia</string>
+    <string name="incoming">Przychodzący</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Umożliwi to wszystkie połączenia przychodzące na Twój telefon komórkowy</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Umożliwi to wszystkie połączenia wychodzące na Twój telefon komórkowy</string>
+    <string name="whitelist_contacts">Biała lista kontaktów</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakty zapisane na białej liście mogą tylko do Ciebie dzwonić</string>
+    <string name="blacklist_contacts">Czarna lista kontaktów</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Kontakty zapisane na czarnej liście nie będą mogły do ​​Ciebie dzwonić”</string>
+    <string name="automatic_whitelist">Automatyczna biała lista</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Zezwalaj na połączenia, jeśli kontakt jest dostępny w książce telefonicznej</string>
+    <string name="additional">Dodatkowy</string>
+    <string name="whitelist_amp_blacklist">Czarna lista na białej liście</string>
+    <string name="phone_book">Książka telefoniczna</string>
+    <string name="import_amp_export_settings">Importuj ustawienia eksportu</string>
+    <string name="services">Usługi</string>
+    <string name="single_app">Pojedyncza aplikacja</string>
+    <string name="apps_amp_services">Usługi aplikacji</string>
+    <string name="peripheral">Peryferyjny</string>
+    <string name="advance">Postęp</string>
+    <string name="disable_camera">Wyłącz kamerę</string>
+    <string name="call_settings">Ustawienia połączeń</string>
+    <string name="web_filter">Filtr sieciowy</string>
+    <string name="screen_saver">Wygaszacz ekranu</string>
+    <string name="phone_settings">Ustawienia telefonu</string>
+    <string name="notification_panel">Panel powiadomień</string>
+    <string name="security">Bezpieczeństwo</string>
+    <string name="launch">Uruchomić</string>
+    <string name="phone_call_subheading">W przypadku problemów z wykonywaniem połączeń prosimy o zezwolenie na wszystkie usługi związane z rozmową telefoniczną</string>
+    <string name="phone_call_subheading_hint">wskazówka: Wyszukaj telefon w dziale serwisowym</string>
+    <string name="web_filter_subheading">Filtr sieciowy to potężna usługa, która pozwala blokować niechciane strony internetowe</string>
+    <string name="web_filter_supported_browsers">Obsługiwane przeglądarki: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">Poza</string>
+    <string name="whitelist_websites">Witryny internetowe na białej liście</string>
+    <string name="whitelist_website_info">Witryny internetowe są zapisywane na białej liście, do których można uzyskać dostęp tylko przez przeglądarkę</string>
+    <string name="blacklist_websites">Czarna lista witryn internetowych</string>
+    <string name="blacklist_websites_info">„Witryny zapisane na czarnej liście nie będą dostępne w przeglądarce”</string>
+    <string name="block_adult_websites">Blokuj witryny dla dorosłych</string>
+    <string name="adult_websites_info">Spowoduje to automatyczne zablokowanie 800 witryn dla dorosłych</string>
+    <string name="whitelist">Biała lista</string>
+    <string name="add_websites">Dodaj witrynę</string>
+    <string name="website">Stronie internetowej</string>
+    <string name="add_websites_subheading">Wprowadź witrynę, którą chcesz dodać do białej listy, np .: www.google.com</string>
+    <string name="otp_verification">Weryfikacja OTP</string>
+    <string name="otp_verification_subheading">Wprowadź 4-cyfrowy kod otp, który wysłaliśmy na Twój zarejestrowany adres e-mail</string>
+    <string name="password_prompt_subheading">„jeśli nie zmieniłeś jeszcze hasła, spróbuj 1234”</string>
+    <string name="forget">zapomnieć?</string>
+    <string name="user_agreement">Zgoda użytkownika</string>
+    <string name="user_agreement_2">Przechowamy listę zainstalowanych aplikacji i numer telefonu w Twoim urządzeniu. Te dane zostaną pobrane z urządzenia tylko wtedy, gdy korzystasz z funkcji QrCode, a dane te zostaną automatycznie usunięte z serwera w ciągu godziny</string>
+    <string name="no_thanks">Nie, dziękuję</string>
+    <string name="accept_amp_continue">Zaakceptować</string>
+    <string name="usage_access">Dostęp do użytkowania</string>
+    <string name="overlay">Narzuta</string>
+    <string name="write_settings">Zapisz ustawienia</string>
+    <string name="sound_access">Dostęp do dźwięku</string>
+    <string name="other_permissions">Inne uprawnienia</string>
+    <string name="accessibility">Dostępność</string>
+    <string name="device_id">Identyfikator urzadzenia</string>
+    <string name="feedback_amp_suggestions">propozycje</string>
+    <string name="quick_survey">Szybka ankieta</string>
+    <string name="bug_report">Zgłoszenie błędu</string>
+    <string name="visit">Wizyta</string>
+    <string name="rate">Oceniać</string>
+    <string name="share">Dzielić</string>
+    <string name="app_info">Informacje o aplikacji</string>
+    <string name="check_for_update">Sprawdź aktualizacje</string>
+    <string name="developer_contact">Kontakt z programistą</string>
+    <string name="terms_amp_conditions">Warunki</string>
+    <string name="privacy_policy">Polityka prywatności</string>
+    <string name="outgoing">Towarzyski</string>
+    <string name="always_on">na</string>
+    <string name="always_off">poza</string>
+    <string name="dont_care">„Nie obchodzi mnie to”</string>
+    <string name="landscape">Krajobraz</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Cichy</string>
+    <string name="normal">Normalna</string>
+    <string name="select_activity_sunHeading">Wybierz działania /strony /okna, które chcesz zablokować</string>
+    <string name="apps">Aplikacje</string>
+    <string name="whitelist_apps">Aplikacje na białej liście</string>
+    <string name="whitelist_services">Usługi białej listy</string>
+    <string name="whitelist_apps_subheading">„Wybierz aplikacje, do których chcesz mieć dostęp”</string>
+    <string name="whitelist_service_heading">„Wybierz usługi, którym chcesz przyznać dostęp”</string>
+    <string name="single_app_subheading">„Wybierz aplikację, która ma być dostępna na pierwszym planie”</string>
+    <string name="blacklist">Czarna lista</string>
+    <string name="contacts_blacklist_subheading">„Kontakty zapisane na czarnej liście nie będą już mogły dzwonić na Twój telefon z Androidem”</string>
+    <string name="contacts_whitelist_subheading">Kontakty zapisane na białej liście mogą już dzwonić tylko na Twój telefon z Androidem</string>
+    <string name="delete">Usunąć</string>
+    <string name="delete_contact_subheading">Czy na pewno chcesz usunąć te elementy</string>
+    <string name="invalid_name">Błędna nazwa</string>
+    <string name="invalid_number">Nieprawidłowy numer</string>
+    <string name="hours">godziny</string>
+    <string name="minutes">Minuty</string>
+    <string name="file_exported_to">Plik wyeksportowany do</string>
+    <string name="select_a_file_to_upload">Wybierz plik do przesłania</string>
+    <string name="please_install_a_file_manager">Zainstaluj menedżera plików.</string>
+    <string name="invalid_backup_file">Nieprawidłowy plik kopii zapasowej</string>
+    <string name="imported_successfully">Zaimportowano pomyślnie</string>
+    <string name="password_successfully_send">Hasło zostało pomyślnie wysłane na Twój adres e-mail</string>
+    <string name="password_recovery_failed">Odzyskiwanie hasła nie powiodło się</string>
+    <string name="recovery_email_not_registered">Adres pomocniczy nie został zarejestrowany</string>
+    <string name="change_your">Zmień swoje</string>
+    <string name="forgot_caps">Zapomniałeś?</string>
+    <string name="password_successfully_changed">Twoje hasło zostało zmienione</string>
+    <string name="invalid_email_address">Niepoprawny adres email</string>
+    <string name="password_min">Hasło musi zawierać co najmniej 8 znaków</string>
+    <string name="old_password_must_not_new">Stare hasło nie może być nowym hasłem</string>
+    <string name="password_not_match">Hasło nie pasuje</string>
+    <string name="invalid_old_pasword">Nieprawidłowe stare hasło</string>
+    <string name="phonebook_blacklist_subheading">„Wybierz kontakty, które chcesz dodać do czarnej listy”</string>
+    <string name="phonebook_whitelist_subheading">„Wybierz kontakty, które chcesz dodać do białej listy”</string>
+    <string name="camera_not_init">Błąd inicjalizacji aparatu:</string>
+    <string name="please_wait">Proszę czekać</string>
+    <string name="invalid_qr">Nieprawidłowy kod QR!</string>
+    <string name="successfully_done">Pomyślnie zrobione!</string>
+    <string name="on_caps">NA</string>
+    <string name="off_caps">POZA</string>
+    <string name="webfilter_blacklist_subheading">„Witryny zapisane na czarnej liście nie będą dostępne w przeglądarce”</string>
+    <string name="webfilter_whitelist_subheading">Witryny internetowe są zapisywane na białej liście, do których można uzyskać dostęp tylko przez przeglądarkę</string>
+    <string name="dialog_website_blacklist_subheading">Wprowadź witrynę, którą chcesz dodać do czarnej listy, np. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Wprowadź witrynę, którą chcesz dodać do białej listy, np. Www.google.com</string>
+    <string name="invalid_url">Nieprawidłowy URL</string>
+    <string name="invalid_otp">Nieprawidłowy OTP</string>
+    <string name="user_agreement_1">Aby ulepszyć KeyOS i upewnić się, że wszystkie funkcje działają poprawnie, niektóre dane dotyczące użytkowania będą gromadzone anonimowo. Musisz przeczytać i zaakceptować naszą Politykę prywatności i Warunki. przed użyciem KeyOS</string>
+    <string name="select_all">Zaznacz wszystko</string>
+    <string name="initializing_desktop">Inicjowanie pulpitu…</string>
+    <string name="loading_settings">Ładowanie ustawień</string>
+    <string name="exiting_keyos">Wychodzę</string>
+    <string name="dialog_qrcode_subheading">Zeskanuj ten kod KeyOS Qr, aby zastosować te same ustawienia w urządzeniu KeyOS</string>
+
+
 </resources>
