--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -140,4 +140,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"As notificações e as aplicações estão desativadas."</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Fechar"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Fechado"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Sair do quiosque</string>
+    <string name="button_overview_mode">Modo Visão Geral</string>
+    <string name="password">Senha</string>
+    <string name="activities">Atividades</string>
+    <string name="cancel">Cancelar</string>
+    <string name="done">Feito</string>
+    <string name="phoneBook">Lista telefônica</string>
+    <string name="manual">Manual</string>
+    <string name="create_new">Crie um novo</string>
+    <string name="contact">Contato</string>
+    <string name="name">Nome</string>
+    <string name="number">Número</string>
+    <string name="hide_icon">Esconder ícone</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ocultar ícone de iniciador /atalho da página inicial do KeyOS</string>
+    <string name="block_activities">Atividades de bloco</string>
+    <string name="block_unwanted_pages_activities_windows">Bloquear páginas /atividades /janelas indesejadas</string>
+    <string name="time_limit">Limite de Tempo</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Definir restrição de tempo, por exemplo. 1 hora por dia</string>
+    <string name="system_settings">Configurações de sistema</string>
+    <string name="restrictions">Restrições</string>
+    <string name="edit_app">Editar aplicativo</string>
+    <string name="import_amp_export">Importar Exportar</string>
+    <string name="scan">Varredura</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Leia o código qr do keyOS para aplicar a mesma política de configurações</string>
+    <string name="generate">Gerar</string>
+    <string name="generate_keyos_qr_code">Gerar keyOS QrCode</string>
+    <string name="import_text">Importar</string>
+    <string name="import_keyos_setting_from_storage">Importar configuração keyOS do armazenamento</string>
+    <string name="export_text">Exportar</string>
+    <string name="import_keyos_setting_to_storage">Importar configuração keyOS para armazenamento</string>
+    <string name="recovery_email">Email de recuperação</string>
+    <string name="old_password">Senha Antiga</string>
+    <string name="confirm_password">Confirme a Senha</string>
+    <string name="allow_calls">Permitir chamadas</string>
+    <string name="incoming">Entrada</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Isso permitirá que todas as chamadas recebidas no seu celular</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Isso permitirá todas as chamadas feitas para o seu celular</string>
+    <string name="whitelist_contacts">Lista branca de contatos</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Os contatos salvos na lista de permissões só podem ligar para você</string>
+    <string name="blacklist_contacts">Contatos da lista negra</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Os contatos salvos na lista negra não poderão ligar para você"</string>
+    <string name="automatic_whitelist">Lista de permissões automática</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Permitir chamadas se o contato estiver disponível na lista telefônica</string>
+    <string name="additional">Adicional</string>
+    <string name="whitelist_amp_blacklist">Whitelist blacklist</string>
+    <string name="phone_book">Lista telefônica</string>
+    <string name="import_amp_export_settings">Importar configurações de exportação</string>
+    <string name="services">Serviços</string>
+    <string name="single_app">Aplicativo único</string>
+    <string name="apps_amp_services">Serviços de aplicativos</string>
+    <string name="peripheral">Periférico</string>
+    <string name="advance">Avançar</string>
+    <string name="disable_camera">Desativar câmera</string>
+    <string name="call_settings">Configurações de chamada</string>
+    <string name="web_filter">Filtro da web</string>
+    <string name="screen_saver">Protetor de tela</string>
+    <string name="phone_settings">Configurações do telefone</string>
+    <string name="notification_panel">Painel de Notificação</string>
+    <string name="security">Segurança</string>
+    <string name="launch">Lançamento</string>
+    <string name="phone_call_subheading">Se você enfrentar qualquer problema para fazer chamadas, por favor, permita todos os serviços relacionados à chamada telefônica</string>
+    <string name="phone_call_subheading_hint">dica: Pesquise por telefone na seção de serviço</string>
+    <string name="web_filter_subheading">O filtro da web é um serviço poderoso que permite bloquear sites indesejados</string>
+    <string name="web_filter_supported_browsers">Navegadores suportados: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">Fora</string>
+    <string name="whitelist_websites">Sites da lista de permissões</string>
+    <string name="whitelist_website_info">Os sites salvos na lista de permissões só podem ser acessados ​​pelo navegador</string>
+    <string name="blacklist_websites">Sites da lista negra</string>
+    <string name="blacklist_websites_info">"Os sites salvos na lista negra não poderão ser acessados ​​pelo navegador"</string>
+    <string name="block_adult_websites">Bloquear sites adultos</string>
+    <string name="adult_websites_info">Isso bloqueará automaticamente 800 sites adultos</string>
+    <string name="whitelist">Whitelist</string>
+    <string name="add_websites">Adicionar site</string>
+    <string name="website">Local na rede Internet</string>
+    <string name="add_websites_subheading">Insira o site que deseja adicionar à lista de permissões Ex: www.google.com</string>
+    <string name="otp_verification">Verificação Otp</string>
+    <string name="otp_verification_subheading">Por favor, digite o otp de 4 dígitos que enviamos para seu endereço de e-mail registrado</string>
+    <string name="password_prompt_subheading">"se você ainda não alterou sua senha, tente 1234"</string>
+    <string name="forget">esqueço ?</string>
+    <string name="user_agreement">Termo de Acordo do Usuário</string>
+    <string name="user_agreement_2">Iremos armazenar a lista de aplicativos instalados e número de telefone em seu dispositivo. Esses dados serão retirados do seu dispositivo apenas se você estiver usando o recurso QrCode e esses dados serão automaticamente removidos do servidor em uma hora</string>
+    <string name="no_thanks">Não, obrigado</string>
+    <string name="accept_amp_continue">Aceitar</string>
+    <string name="usage_access">Acesso de uso</string>
+    <string name="overlay">Sobreposição</string>
+    <string name="write_settings">Configurações de gravação</string>
+    <string name="sound_access">Acesso ao Som</string>
+    <string name="other_permissions">Outras Permissões</string>
+    <string name="accessibility">Acessibilidade</string>
+    <string name="device_id">Identificador do dispositivo</string>
+    <string name="feedback_amp_suggestions">sugestões</string>
+    <string name="quick_survey">Pesquisa rápida</string>
+    <string name="bug_report">Relatório de erro</string>
+    <string name="visit">Visita</string>
+    <string name="rate">Taxa</string>
+    <string name="share">Compartilhar</string>
+    <string name="app_info">Informações do aplicativo</string>
+    <string name="check_for_update">Verifique atualizações</string>
+    <string name="developer_contact">Contato do desenvolvedor</string>
+    <string name="terms_amp_conditions">Termos</string>
+    <string name="privacy_policy">Política de Privacidade</string>
+    <string name="outgoing">Extrovertido</string>
+    <string name="always_on">em</string>
+    <string name="always_off">fora</string>
+    <string name="dont_care">"Não me importo"</string>
+    <string name="landscape">Panorama</string>
+    <string name="portrait">Retrato</string>
+    <string name="silent">Silencioso</string>
+    <string name="normal">Normal</string>
+    <string name="select_activity_sunHeading">Selecione quais atividades /páginas /janelas você deseja bloquear</string>
+    <string name="apps">Apps</string>
+    <string name="whitelist_apps">Aplicativos da lista de permissões</string>
+    <string name="whitelist_services">Serviços de lista branca</string>
+    <string name="whitelist_apps_subheading">"Selecione quais aplicativos você deseja acessar"</string>
+    <string name="whitelist_service_heading">"Selecione quais serviços você deseja dar acesso"</string>
+    <string name="single_app_subheading">"Selecione qual aplicativo você deseja disponibilizar em primeiro plano"</string>
+    <string name="blacklist">Lista negra</string>
+    <string name="contacts_blacklist_subheading">"Contatos salvos na lista negra não poderão mais ligar para o seu telefone Android"</string>
+    <string name="contacts_whitelist_subheading">Os contatos salvos na Lista de permissões só podem ligar para o seu telefone Android</string>
+    <string name="delete">Excluir</string>
+    <string name="delete_contact_subheading">Tem certeza que deseja deletar estes itens</string>
+    <string name="invalid_name">Nome inválido</string>
+    <string name="invalid_number">Número inválido</string>
+    <string name="hours">Horas</string>
+    <string name="minutes">Minutos</string>
+    <string name="file_exported_to">Arquivo exportado para</string>
+    <string name="select_a_file_to_upload">Selecione um arquivo para carregar</string>
+    <string name="please_install_a_file_manager">Instale um gerenciador de arquivos.</string>
+    <string name="invalid_backup_file">Arquivo de backup inválido</string>
+    <string name="imported_successfully">Importado com sucesso</string>
+    <string name="password_successfully_send">Senha enviada com sucesso para o seu endereço de e-mail</string>
+    <string name="password_recovery_failed">A recuperação da senha falhou</string>
+    <string name="recovery_email_not_registered">Email de recuperação não registrado</string>
+    <string name="change_your">Mude o seu</string>
+    <string name="forgot_caps">Esqueceu?</string>
+    <string name="password_successfully_changed">Sua senha foi alterada com sucesso</string>
+    <string name="invalid_email_address">Endereço de email invalido</string>
+    <string name="password_min">A senha deve conter no mínimo 8 caracteres</string>
+    <string name="old_password_must_not_new">A senha antiga não deve ser a nova senha</string>
+    <string name="password_not_match">Senha não coincide</string>
+    <string name="invalid_old_pasword">Senha antiga inválida</string>
+    <string name="phonebook_blacklist_subheading">"Selecione quais contatos você deseja adicionar na lista negra"</string>
+    <string name="phonebook_whitelist_subheading">"Selecione quais contatos você deseja adicionar na lista de permissões"</string>
+    <string name="camera_not_init">Erro de inicialização da câmera:</string>
+    <string name="please_wait">Por favor, espere</string>
+    <string name="invalid_qr">QrCode inválido!</string>
+    <string name="successfully_done">Feito com sucesso!</string>
+    <string name="on_caps">EM</string>
+    <string name="off_caps">FORA</string>
+    <string name="webfilter_blacklist_subheading">"Os sites salvos na lista negra não poderão ser acessados ​​pelo navegador"</string>
+    <string name="webfilter_whitelist_subheading">Os sites salvos na lista de permissões só podem ser acessados ​​pelo navegador</string>
+    <string name="dialog_website_blacklist_subheading">Por favor, insira o site que você deseja adicionar na lista negra Ex: www.google.com</string>
+    <string name="dialog_website_white_subheading">Insira o site que deseja adicionar à lista de permissões Ex: www.google.com</string>
+    <string name="invalid_url">URL inválida</string>
+    <string name="invalid_otp">Otp inválido</string>
+    <string name="user_agreement_1">Para melhorar o KeyOS e garantir que todos os recursos funcionem corretamente, alguns de seus dados de uso serão coletados anonimamente. Você deve ler e concordar com nossa Política de Privacidade e Termos. antes de usar KeyOS</string>
+    <string name="select_all">Selecionar tudo</string>
+    <string name="initializing_desktop">Inicializando a área de trabalho…</string>
+    <string name="loading_settings">Carregando configurações</string>
+    <string name="exiting_keyos">Saindo</string>
+    <string name="dialog_qrcode_subheading">Digitalize este código KeyOS Qr para aplicar as mesmas configurações em seu dispositivo KeyOS</string>
+
 </resources>
