--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -141,4 +141,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Notificările și aplicațiile sunt dezactivate"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Închideți"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Închis"</string>
+
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Ieșiți din chioșc</string>
+    <string name="button_overview_mode">Mod de prezentare generală</string>
+    <string name="password">Parola</string>
+    <string name="activities">Activități</string>
+    <string name="cancel">Anulare</string>
+    <string name="done">Terminat</string>
+    <string name="phoneBook">Carte de telefoane</string>
+    <string name="manual">Manual</string>
+    <string name="create_new">Creaza nou</string>
+    <string name="contact">Contact</string>
+    <string name="name">Nume</string>
+    <string name="number">Număr</string>
+    <string name="hide_icon">Ascunde icoana</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ascundeți pictograma lansator /comandă rapidă de la KeyOS acasă</string>
+    <string name="block_activities">Activități de blocare</string>
+    <string name="block_unwanted_pages_activities_windows">Blocați paginile /activitățile /ferestrele nedorite</string>
+    <string name="time_limit">Limita</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Setați restricția de sincronizare Ex. 1 oră pe zi</string>
+    <string name="system_settings">Setarile sistemului</string>
+    <string name="restrictions">Restricții</string>
+    <string name="edit_app">Editați aplicația</string>
+    <string name="import_amp_export">Import Export</string>
+    <string name="scan">Scanează</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Scanați codul keyOS qr pentru a aplica aceeași politică de setări</string>
+    <string name="generate">Genera</string>
+    <string name="generate_keyos_qr_code">Generați keyOS QrCode</string>
+    <string name="import_text">Import</string>
+    <string name="import_keyos_setting_from_storage">Importați setarea keyOS din stocare</string>
+    <string name="export_text">Export</string>
+    <string name="import_keyos_setting_to_storage">Importați setarea keyOS în stocare</string>
+    <string name="recovery_email">E-mail de recuperare</string>
+    <string name="old_password">Parola veche</string>
+    <string name="confirm_password">Confirmă parola</string>
+    <string name="allow_calls">Permiteți apelurile</string>
+    <string name="incoming">Primite</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Acest lucru va permite toate apelurile primite către telefonul mobil</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Acest lucru va permite toate apelurile efectuate către telefonul dvs. mobil</string>
+    <string name="whitelist_contacts">Contacte de pe lista albă</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Salvarea contactelor în lista albă vă poate apela numai</string>
+    <string name="blacklist_contacts">Contacte pe lista neagră</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Contactele salvate în lista neagră nu vă vor putea apela”</string>
+    <string name="automatic_whitelist">Listă albă automată</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Permiteți apelurile dacă contactul este disponibil în agenda telefonică</string>
+    <string name="additional">Adiţional</string>
+    <string name="whitelist_amp_blacklist">Lista neagră de pe lista albă</string>
+    <string name="phone_book">Carte de telefoane</string>
+    <string name="import_amp_export_settings">Importați setările de export</string>
+    <string name="services">Servicii</string>
+    <string name="single_app">Aplicație unică</string>
+    <string name="apps_amp_services">Servicii de aplicații</string>
+    <string name="peripheral">Periferic</string>
+    <string name="advance">Avans</string>
+    <string name="disable_camera">Disable Camera</string>
+    <string name="call_settings">Setări apel</string>
+    <string name="web_filter">Filtru web</string>
+    <string name="screen_saver">Screen saver</string>
+    <string name="phone_settings">Setările telefonului</string>
+    <string name="notification_panel">Panoul de notificări</string>
+    <string name="security">Securitate</string>
+    <string name="launch">Lansa</string>
+    <string name="phone_call_subheading">Dacă vă confruntați cu probleme pentru efectuarea de apeluri, vă rugăm să permiteți toate serviciile legate de apelul telefonic</string>
+    <string name="phone_call_subheading_hint">sfat: Căutați telefonul în secțiunea de service</string>
+    <string name="web_filter_subheading">Filtrul web este un serviciu puternic care vă permite să blocați site-urile web nedorite</string>
+    <string name="web_filter_supported_browsers">Browsere acceptate: crom, firefox, curajos, edge, opera, duckduckgo</string>
+    <string name="off">Dezactivat</string>
+    <string name="whitelist_websites">Site-uri pe lista albă</string>
+    <string name="whitelist_website_info">Site-urile web salvează în lista albă și pot fi accesate numai de browser</string>
+    <string name="blacklist_websites">Site-uri pe lista neagră</string>
+    <string name="blacklist_websites_info">„Site-urile web salvate în lista neagră nu vor putea fi accesate de browser”</string>
+    <string name="block_adult_websites">Blocați site-urile pentru adulți</string>
+    <string name="adult_websites_info">Aceasta va bloca automat 800 de site-uri web pentru adulți</string>
+    <string name="whitelist">Listă albă</string>
+    <string name="add_websites">Adăugați un site web</string>
+    <string name="website">Site-ul web</string>
+    <string name="add_websites_subheading">Vă rugăm să introduceți site-ul web pe care doriți să îl adăugați în lista albă. De exemplu: www.google.com</string>
+    <string name="otp_verification">Verificare Otp</string>
+    <string name="otp_verification_subheading">Vă rugăm să introduceți otp-ul din 4 cifre pe care l-am trimis la adresa dvs. de e-mail înregistrată</string>
+    <string name="password_prompt_subheading">"dacă încă nu v-ați schimbat parola, vă rugăm să încercați 1234"</string>
+    <string name="forget">a uita ?</string>
+    <string name="user_agreement">Acordul Utilizatorului</string>
+    <string name="user_agreement_2">Vom stoca lista aplicației instalate și numărul de telefon pe dispozitivul dvs. Aceste date vor fi preluate de pe dispozitiv numai dacă utilizați caracteristica QrCode și aceste date vor fi eliminate automat de pe server într-o oră</string>
+    <string name="no_thanks">Nu multumesc</string>
+    <string name="accept_amp_continue">Accept</string>
+    <string name="usage_access">Acces de utilizare</string>
+    <string name="overlay">Acoperire</string>
+    <string name="write_settings">Setări de scriere</string>
+    <string name="sound_access">Acces sunet</string>
+    <string name="other_permissions">Alte permisiuni</string>
+    <string name="accessibility">Accesibilitate</string>
+    <string name="device_id">Identificatorul dispozitivului</string>
+    <string name="feedback_amp_suggestions">sugestii</string>
+    <string name="quick_survey">Sondaj rapid</string>
+    <string name="bug_report">Raport de eroare</string>
+    <string name="visit">Vizita</string>
+    <string name="rate">Rată</string>
+    <string name="share">Acțiune</string>
+    <string name="app_info">Informații despre aplicație</string>
+    <string name="check_for_update">Verifica pentru actualizare</string>
+    <string name="developer_contact">Developer contact</string>
+    <string name="terms_amp_conditions">Termeni</string>
+    <string name="privacy_policy">Politica de Confidențialitate</string>
+    <string name="outgoing">De ieșire</string>
+    <string name="always_on">pe</string>
+    <string name="always_off">oprit</string>
+    <string name="dont_care">„Nu-mi pasă”</string>
+    <string name="landscape">Peisaj</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Tăcut</string>
+    <string name="normal">Normal</string>
+    <string name="select_activity_sunHeading">Selectați activitățile /paginile /ferestrele pe care doriți să le blocați</string>
+    <string name="apps">Aplicații</string>
+    <string name="whitelist_apps">Aplicații pe lista albă</string>
+    <string name="whitelist_services">Servicii de pe lista albă</string>
+    <string name="whitelist_apps_subheading">„Selectați ce aplicații doriți să accesați ive”</string>
+    <string name="whitelist_service_heading">„Selectați serviciilor pe care doriți să le accesați”</string>
+    <string name="single_app_subheading">„Selectați ce aplicație doriți să fie disponibilă în prim-plan”</string>
+    <string name="blacklist">Lista neagră</string>
+    <string name="contacts_blacklist_subheading">„Persoanele de contact salvate în lista neagră nu vor mai putea să vă apeleze telefonul Android”</string>
+    <string name="contacts_whitelist_subheading">Persoanele de contact salvate în lista albă pot să vă mai apeleze telefonul Android</string>
+    <string name="delete">Șterge</string>
+    <string name="delete_contact_subheading">Sigur doriți să ștergeți aceste elemente</string>
+    <string name="invalid_name">Nume invalid</string>
+    <string name="invalid_number">Numar invalid</string>
+    <string name="hours">Ore</string>
+    <string name="minutes">Minute</string>
+    <string name="file_exported_to">Fișier exportat în</string>
+    <string name="select_a_file_to_upload">Selectați un fișier de încărcat</string>
+    <string name="please_install_a_file_manager">Vă rugăm să instalați un Manager de fișiere.</string>
+    <string name="invalid_backup_file">Fișier de rezervă nevalid</string>
+    <string name="imported_successfully">Importat cu succes</string>
+    <string name="password_successfully_send">Parola a fost trimisă cu succes la adresa dvs. de e-mail</string>
+    <string name="password_recovery_failed">Recuperarea parolei nu a reușit</string>
+    <string name="recovery_email_not_registered">E-mailul de recuperare nu a fost înregistrat</string>
+    <string name="change_your">Schimba-ti</string>
+    <string name="forgot_caps">Uitat ?</string>
+    <string name="password_successfully_changed">Parola dvs. a fost modificată cu succes</string>
+    <string name="invalid_email_address">Adresa email invalida</string>
+    <string name="password_min">Parola trebuie să conțină minimum 8 caractere</string>
+    <string name="old_password_must_not_new">Parola veche nu trebuie să fie o parolă nouă</string>
+    <string name="password_not_match">Parola nu se potrivește</string>
+    <string name="invalid_old_pasword">Parolă veche nevalidă</string>
+    <string name="phonebook_blacklist_subheading">„Selectați ce contacte doriți să adăugați în lista neagră”</string>
+    <string name="phonebook_whitelist_subheading">„Selectați persoanele de contact pe care doriți să le adăugați în lista albă”</string>
+    <string name="camera_not_init">Camera initialization error :</string>
+    <string name="please_wait">Te rog asteapta</string>
+    <string name="invalid_qr">QrCode nevalid!</string>
+    <string name="successfully_done">Finalizat cu succes!</string>
+    <string name="on_caps">PE</string>
+    <string name="off_caps">OPRIT</string>
+    <string name="webfilter_blacklist_subheading">„Site-urile web salvate în lista neagră nu vor putea fi accesate de browser”</string>
+    <string name="webfilter_whitelist_subheading">Site-urile web salvează în lista albă și pot fi accesate numai de browser</string>
+    <string name="dialog_website_blacklist_subheading">Vă rugăm să introduceți site-ul web pe care doriți să îl adăugați pe lista neagră. De exemplu: www.google.com</string>
+    <string name="dialog_website_white_subheading">Vă rugăm să introduceți site-ul web pe care doriți să îl adăugați în lista albă. De exemplu: www.google.com</string>
+    <string name="invalid_url">URL invalid</string>
+    <string name="invalid_otp">Otp nevalid</string>
+    <string name="user_agreement_1">Pentru a îmbunătăți KeyOS și a vă asigura că toate caracteristicile funcționează corect, unele dintre datele dvs. de utilizare vor fi colectate anonim. Trebuie să citiți și să acceptați Politica și Termenii noștri de confidențialitate. înainte de a utiliza KeyOS</string>
+    <string name="select_all">Selectează tot</string>
+    <string name="initializing_desktop">Se inițializează desktopul ...</string>
+    <string name="loading_settings">Se încarcă setările</string>
+    <string name="exiting_keyos">Ieșind</string>
+    <string name="dialog_qrcode_subheading">Scanați acest cod KeyOS Qr pentru a aplica aceleași setări pe dispozitivul dvs. KeyOS</string>
+
+
 </resources>
