--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -139,4 +139,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"දැනුම්දීම් සහ යෙදුම් ක්‍රියාවිරහිතයි"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"වසන්න"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"වසා ඇත"</string>
+
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">කියොස්ක් වලින් ඉවත් වන්න</string>
+    <string name="button_overview_mode">දළ විශ්ලේෂණ ප්‍රකාරය</string>
+    <string name="password">රහස් පදය</string>
+    <string name="activities">කටයුතු</string>
+    <string name="cancel">අවලංගු කරන්න</string>
+    <string name="done">සිදු විය</string>
+    <string name="phoneBook">දුරකථන නාමාවලිය</string>
+    <string name="manual">අත්පොත</string>
+    <string name="create_new">අලුතින් නිර්මාණය කරන්න</string>
+    <string name="contact">අමතන්න</string>
+    <string name="name">නම</string>
+    <string name="number">අංකය</string>
+    <string name="hide_icon">අයිකනය සඟවන්න</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">KeyOS නිවසේ සිට දියත් කිරීමේ /කෙටිමං නිරූපකය සඟවන්න</string>
+    <string name="block_activities">ක්‍රියාකාරකම් අවහිර කරන්න</string>
+    <string name="block_unwanted_pages_activities_windows">අනවශ්‍ය පිටු /ක්‍රියාකාරකම් /කවුළු අවහිර කරන්න</string>
+    <string name="time_limit">කාල සීමාව</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">කාල සීමාව සකසන්න උදා. දිනකට පැය 1 යි</string>
+    <string name="system_settings">පද්ධති සැකසීම්</string>
+    <string name="restrictions">සීමා</string>
+    <string name="edit_app">යෙදුම සංස්කරණය කරන්න</string>
+    <string name="import_amp_export">ආනයන අපනයන</string>
+    <string name="scan">ස්කෑන් කරන්න</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">එකම සැකසුම් ප්‍රතිපත්තියක් ක්‍රියාත්මක කිරීම සඳහා keyOS qr කේතය පරිලෝකනය කරන්න</string>
+    <string name="generate">ජනනය කරන්න</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode ජනනය කරන්න</string>
+    <string name="import_text">ආනයන</string>
+    <string name="import_keyos_setting_from_storage">KeyOS සැකසුම ආචයනයෙන් ආයාත කරන්න</string>
+    <string name="export_text">අපනයන</string>
+    <string name="import_keyos_setting_to_storage">KeyOS සැකසුම ආචයනය වෙත ආයාත කරන්න</string>
+    <string name="recovery_email">ප්‍රතිසාධන විද්‍යුත් තැපෑල</string>
+    <string name="old_password">පැරණි මුරපදය</string>
+    <string name="confirm_password">මුරපදය තහවුරු කරන්න</string>
+    <string name="allow_calls">ඇමතුම් වලට ඉඩ දෙන්න</string>
+    <string name="incoming">එන</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">මෙය ඔබගේ ජංගම දුරකථනයට ලැබෙන සියලුම ඇමතුම් සඳහා ඉඩ ලබා දේ</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">මෙය ඔබගේ ජංගම දුරකථනයට පිටතට යන සියලුම ඇමතුම් සඳහා ඉඩ ලබා දේ</string>
+    <string name="whitelist_contacts">සුදු ලැයිස්තු සම්බන්ධතා</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">ඔබට ඇමතීමට හැකි සුදු ලැයිස්තු යටතේ සම්බන්ධතා සුරකිනු ඇත</string>
+    <string name="blacklist_contacts">බ්ලැක්ලිස්ට් සම්බන්ධතා</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"අසාදු ලේඛනය යටතේ සුරකින සම්බන්ධතා ඔබට ඇමතිය නොහැක"</string>
+    <string name="automatic_whitelist">ස්වයංක්‍රීය සුදු ලැයිස්තුව</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">දුරකථන පොතේ සම්බන්ධතා තිබේ නම් ඇමතුම් වලට ඉඩ දෙන්න</string>
+    <string name="additional">අතිරේක</string>
+    <string name="whitelist_amp_blacklist">සුදු ලැයිස්තු අසාදු ලේඛනය</string>
+    <string name="phone_book">දුරකථන නාමාවලිය</string>
+    <string name="import_amp_export_settings">අපනයන සැකසුම් ආයාත කරන්න</string>
+    <string name="services">සේවාවන්</string>
+    <string name="single_app">තනි යෙදුම</string>
+    <string name="apps_amp_services">යෙදුම් සේවා</string>
+    <string name="peripheral">පර්යන්ත</string>
+    <string name="advance">අත්තිකාරම්</string>
+    <string name="disable_camera">කැමරාව අක්‍රීය කරන්න</string>
+    <string name="call_settings">සැකසුම් අමතන්න</string>
+    <string name="web_filter">වෙබ් පෙරණය</string>
+    <string name="screen_saver">තිර සුරැකුම</string>
+    <string name="phone_settings">දුරකථන සැකසුම්</string>
+    <string name="notification_panel">දැනුම්දීම් පැනලය</string>
+    <string name="security">ආරක්ෂක</string>
+    <string name="launch">දියත් කරන්න</string>
+    <string name="phone_call_subheading">ඇමතුම් ලබා ගැනීම සඳහා ඔබට කිසියම් කරදරයකට මුහුණ දීමට සිදුවුවහොත් දුරකථන ඇමතුමට අදාළ සියලුම සේවාවන්ට කාරුණිකව ඉඩ දෙන්න</string>
+    <string name="phone_call_subheading_hint">ඉඟිය: සේවා අංශයේ දුරකථනය සොයන්න</string>
+    <string name="web_filter_subheading">වෙබ් පෙරණය යනු අනවශ්‍ය වෙබ් අඩවි අවහිර කිරීමට ඔබට ඉඩ සලසන ප්‍රබල සේවාවකි</string>
+    <string name="web_filter_supported_browsers">සහාය දක්වන බ්‍රව්සර්: ක්‍රෝම්, ෆයර්ෆොක්ස්, නිර්භීත, දාරය, ඔපෙරා, ඩක්ඩක්ගෝ</string>
+    <string name="off">අක්‍රියයි</string>
+    <string name="whitelist_websites">සුදු ලැයිස්තු වෙබ් අඩවි</string>
+    <string name="whitelist_website_info">වෙබ් අඩවි බ්‍රව්සරයට ප්‍රවේශ විය හැකි සුදු ලැයිස්තුව යටතේ සුරකිනු ඇත</string>
+    <string name="blacklist_websites">බ්ලැක්ලිස්ට් වෙබ් අඩවි</string>
+    <string name="blacklist_websites_info">"අසාදු ලේඛනය යටතේ සුරකින වෙබ් අඩවි වලට බ්‍රව්සරයෙන් ප්‍රවේශ විය නොහැක"</string>
+    <string name="block_adult_websites">වැඩිහිටි වෙබ් අඩවි අවහිර කරන්න</string>
+    <string name="adult_websites_info">මෙය වැඩිහිටි වෙබ් අඩවි 800 ක් ස්වයංක්‍රීයව අවහිර කරනු ඇත</string>
+    <string name="whitelist">සුදු ලැයිස්තුව</string>
+    <string name="add_websites">වෙබ් අඩවිය එක් කරන්න</string>
+    <string name="website">වෙබ් අඩවිය</string>
+    <string name="add_websites_subheading">කරුණාකර ඔබට සුදු ලැයිස්තුවට ඇතුළත් කිරීමට අවශ්‍ය වෙබ් අඩවිය ඇතුළත් කරන්න උදා: www.google.com</string>
+    <string name="otp_verification">Otp සත්‍යාපනය</string>
+    <string name="otp_verification_subheading">කරුණාකර අපි ඔබගේ ලියාපදිංචි ඊමේල් ලිපිනයට යැවූ ඉලක්කම් 4 ක otp ඇතුලත් කරන්න</string>
+    <string name="password_prompt_subheading">"ඔබ තවමත් ඔබගේ මුරපදය වෙනස් කර නොමැති නම් කරුණාකර 1234 උත්සාහ කරන්න"</string>
+    <string name="forget">අමතක කරනවා ?</string>
+    <string name="user_agreement">පරිශීලක ගිවිසුම</string>
+    <string name="user_agreement_2">ඔබගේ උපාංගයේ ස්ථාපනය කර ඇති යෙදුම සහ දුරකථන අංකය අපි ගබඩා කරන්නෙමු. මෙම දත්ත ඔබගේ උපාංගයෙන් ලබා ගන්නේ ඔබ QrCode විශේෂාංගය භාවිතා කරන්නේ නම් පමණක් වන අතර මෙම දත්ත පැයකින් ස්වයංක්‍රීයව සේවාදායකයෙන් ඉවත් වේ</string>
+    <string name="no_thanks">නැ ස්තුතියි</string>
+    <string name="accept_amp_continue">පිළිගන්න</string>
+    <string name="usage_access">භාවිත ප්‍රවේශය</string>
+    <string name="overlay">උඩිස්</string>
+    <string name="write_settings">සැකසුම් ලියන්න</string>
+    <string name="sound_access">ශබ්ද ප්‍රවේශය</string>
+    <string name="other_permissions">වෙනත් අවසර</string>
+    <string name="accessibility">ප්රවේශ</string>
+    <string name="device_id">උපාංග හැඳුනුම්පත</string>
+    <string name="feedback_amp_suggestions">යෝජනා</string>
+    <string name="quick_survey">ඉක්මන් සමීක්ෂණය</string>
+    <string name="bug_report">දෝෂ වාර්තාව</string>
+    <string name="visit">සංචාරය</string>
+    <string name="rate">අනුපාතය</string>
+    <string name="share">බෙදාගන්න</string>
+    <string name="app_info">යෙදුම් තොරතුරු</string>
+    <string name="check_for_update">යාවත්කාලීන කිරීම සඳහා පරීක්ෂා කරන්න</string>
+    <string name="developer_contact">සංවර්ධක සම්බන්ධතා</string>
+    <string name="terms_amp_conditions">කොන්දේසි</string>
+    <string name="privacy_policy">රහස්යතා ප්රතිපත්තිය</string>
+    <string name="outgoing">පිටතට යන</string>
+    <string name="always_on">මත</string>
+    <string name="always_off">අක්‍රියයි</string>
+    <string name="dont_care">"ගණන් ගන්න එපා"</string>
+    <string name="landscape">භූ දර්ශනය</string>
+    <string name="portrait">ආලේඛ්‍ය චිත්‍රය</string>
+    <string name="silent">නිහ .යි</string>
+    <string name="normal">සාමාන්‍යයි</string>
+    <string name="select_activity_sunHeading">ඔබට අවහිර කිරීමට අවශ්‍ය ක්‍රියාකාරකම් /පිටු /කවුළු තෝරන්න</string>
+    <string name="apps">යෙදුම්</string>
+    <string name="whitelist_apps">සුදු ලැයිස්තු යෙදුම්</string>
+    <string name="whitelist_services">සුදු ලැයිස්තු සේවා</string>
+    <string name="whitelist_apps_subheading">"ඔබට ප්‍රවේශ වීමට අවශ්‍ය යෙදුම් තෝරන්න"</string>
+    <string name="whitelist_service_heading">"ඔබට ප්‍රවේශය ලබා දීමට අවශ්‍ය සේවාවන් තෝරන්න"</string>
+    <string name="single_app_subheading">"ඔබට පෙරබිමෙහි ලබා ගැනීමට අවශ්‍ය යෙදුම තෝරන්න"</string>
+    <string name="blacklist">අසාදු ලේඛනය</string>
+    <string name="contacts_blacklist_subheading">"බ්ලැක්ලිස්ට් යටතේ සුරකින ලද සම්බන්ධතා වලට ඔබගේ ඇන්ඩ්‍රොයිඩ් දුරකථනය ඇමතීමට තවදුරටත් නොහැකි වනු ඇත"</string>
+    <string name="contacts_whitelist_subheading">සුදු ලැයිස්තු යටතේ සුරකින ලද සම්බන්ධතා වලට ඔබගේ ඇන්ඩ්‍රොයිඩ් දුරකථනයට තවදුරටත් ඇමතිය හැකිය</string>
+    <string name="delete">මකන්න</string>
+    <string name="delete_contact_subheading">ඔබට විශ්වාසද ඔබට මෙම අයිතම මකා දැමීමට අවශ්‍ය බව</string>
+    <string name="invalid_name">අවලංගු නම</string>
+    <string name="invalid_number">අවලංගු අංකය</string>
+    <string name="hours">පැය</string>
+    <string name="minutes">මිනිත්තු</string>
+    <string name="file_exported_to">ගොනුව අපනයනය කර ඇත</string>
+    <string name="select_a_file_to_upload">උඩුගත කිරීමට ගොනුවක් තෝරන්න</string>
+    <string name="please_install_a_file_manager">කරුණාකර ගොනු කළමනාකරුවෙකු ස්ථාපනය කරන්න.</string>
+    <string name="invalid_backup_file">වලංගු නොවන උපස්ථ ගොනුව</string>
+    <string name="imported_successfully">ආනයනය කිරීම සාර්ථකයි</string>
+    <string name="password_successfully_send">මුරපදය ඔබගේ විද්‍යුත් තැපැල් ලිපිනයට සාර්ථකව යවන ලදි</string>
+    <string name="password_recovery_failed">මුරපද ප්‍රතිසාධනය අසාර්ථක විය</string>
+    <string name="recovery_email_not_registered">ප්‍රතිසාධන විද්‍යුත් තැපෑල ලියාපදිංචි කර නොමැත</string>
+    <string name="change_your">ඔබේ වෙනස් කරන්න</string>
+    <string name="forgot_caps">අමතක වුනාද?</string>
+    <string name="password_successfully_changed">ඔබගේ මුරපදය සාර්ථකව වෙනස් කර ඇත</string>
+    <string name="invalid_email_address">අවලංගු ඊමේල් ලිපිනය</string>
+    <string name="password_min">මුරපදයේ අවම අක්ෂර 8 ක් අඩංගු විය යුතුය</string>
+    <string name="old_password_must_not_new">පැරණි මුරපදය නව මුරපද නොවිය යුතුය</string>
+    <string name="password_not_match">මුරපදය නොගැලපේ</string>
+    <string name="invalid_old_pasword">වලංගු නොවන පැරණි මුරපදය</string>
+    <string name="phonebook_blacklist_subheading">"ඔබට අසාදු ලේඛනයේ එකතු කිරීමට අවශ්‍ය සම්බන්ධතා තෝරන්න"</string>
+    <string name="phonebook_whitelist_subheading">"ඔබට සුදු ලැයිස්තුවට එක් කිරීමට අවශ්‍ය සම්බන්ධතා තෝරන්න"</string>
+    <string name="camera_not_init">කැමරා ආරම්භක දෝෂය:</string>
+    <string name="please_wait">කරුණාකර රැඳී සිටින්න</string>
+    <string name="invalid_qr">වලංගු නොවන QrCode!</string>
+    <string name="successfully_done">සාර්ථකව සිදු කර ඇත!</string>
+    <string name="on_caps">මත</string>
+    <string name="off_caps">අක්‍රියයි</string>
+    <string name="webfilter_blacklist_subheading">"අසාදු ලේඛනය යටතේ සුරකින වෙබ් අඩවි වලට බ්‍රව්සරයෙන් ප්‍රවේශ විය නොහැක"</string>
+    <string name="webfilter_whitelist_subheading">වෙබ් අඩවි බ්‍රව්සරයට ප්‍රවේශ විය හැකි සුදු ලැයිස්තුව යටතේ සුරකිනු ඇත</string>
+    <string name="dialog_website_blacklist_subheading">කරුණාකර ඔබට අසාදු ලේඛනයට එක් කිරීමට අවශ්‍ය වෙබ් අඩවිය ඇතුළත් කරන්න උදා: www.google.com</string>
+    <string name="dialog_website_white_subheading">කරුණාකර ඔබට සුදු ලැයිස්තුවට ඇතුළත් කිරීමට අවශ්‍ය වෙබ් අඩවිය ඇතුළත් කරන්න උදා: www.google.com</string>
+    <string name="invalid_url">වලංගු නැති URL</string>
+    <string name="invalid_otp">අවලංගු Otp</string>
+    <string name="user_agreement_1">KeyOS වැඩි දියුණු කිරීමට සහ සියලුම අංග නිසි ලෙස ක්‍රියාත්මක වන බවට වග බලා ගැනීමට, ඔබගේ සමහර භාවිත දත්ත නිර්නාමිකව එකතු කරනු ලැබේ. ඔබ අපගේ රහස්‍යතා ප්‍රතිපත්තිය සහ නියමයන් කියවා එකඟ විය යුතුය. KeyOS භාවිතා කිරීමට පෙර</string>
+    <string name="select_all">සියල්ල තෝරන්න</string>
+    <string name="initializing_desktop">ඩෙස්ක්ටොප් ආරම්භ කිරීම…</string>
+    <string name="loading_settings">සැකසුම් පූරණය වේ</string>
+    <string name="exiting_keyos">පිටවීම</string>
+    <string name="dialog_qrcode_subheading">ඔබගේ KeyOS උපාංගයේ එකම සැකසුම් යෙදීම සඳහා මෙම KeyOS Qr කේතය පරිලෝකනය කරන්න</string>
+
+
 </resources>
