--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -142,4 +142,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Upozornenia a aplikácie sú vypnuté"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Zavrieť"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Zavreté"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Vyjdite z kiosku</string>
+    <string name="button_overview_mode">Režim prehľadu</string>
+    <string name="password">Heslo</string>
+    <string name="activities">Činnosti</string>
+    <string name="cancel">Zrušiť</string>
+    <string name="done">hotový</string>
+    <string name="phoneBook">Telefónny zoznam</string>
+    <string name="manual">Manuálny</string>
+    <string name="create_new">Vytvor nový</string>
+    <string name="contact">Kontakt</string>
+    <string name="name">názov</string>
+    <string name="number">Číslo</string>
+    <string name="hide_icon">Skryť ikonu</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">skryť ikonu spúšťača /odkazu z domovskej stránky systému KeyOS</string>
+    <string name="block_activities">Blokovať aktivity</string>
+    <string name="block_unwanted_pages_activities_windows">Blokujte nežiaduce stránky /aktivity /okná</string>
+    <string name="time_limit">Lehota</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Nastaviť časové obmedzenie Napr. 1 hodinu denne</string>
+    <string name="system_settings">Systémové nastavenia</string>
+    <string name="restrictions">Obmedzenia</string>
+    <string name="edit_app">Upraviť aplikáciu</string>
+    <string name="import_amp_export">Importovať a exportovať</string>
+    <string name="scan">Skenovať</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Naskenujte kód keyOS qr, aby ste použili rovnakú politiku nastavení</string>
+    <string name="generate">Generovať</string>
+    <string name="generate_keyos_qr_code">Vygenerujte keyOS QrCode</string>
+    <string name="import_text">Import</string>
+    <string name="import_keyos_setting_from_storage">Importovať nastavenie keyOS z úložiska</string>
+    <string name="export_text">Export</string>
+    <string name="import_keyos_setting_to_storage">Importovať nastavenie keyOS do úložiska</string>
+    <string name="recovery_email">E-mail na obnovenie</string>
+    <string name="old_password">Staré heslo</string>
+    <string name="confirm_password">Potvrďte heslo</string>
+    <string name="allow_calls">Povoliť hovory</string>
+    <string name="incoming">Prichádzajúce</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Toto umožní všetky prichádzajúce hovory na váš mobil</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Toto umožní všetky odchádzajúce hovory na váš mobil</string>
+    <string name="whitelist_contacts">Kontakty na bielu listinu</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontakty sa ukladajú do zoznamu povolených iba preto, aby vám mohli volať</string>
+    <string name="blacklist_contacts">Kontakty na čiernej listine</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Kontakty uložené na čiernej listine vám nebudú môcť volať“</string>
+    <string name="automatic_whitelist">Automatická biela listina</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Povoliť hovory, ak je kontakt k dispozícii v telefónnom zozname</string>
+    <string name="additional">Dodatočné</string>
+    <string name="whitelist_amp_blacklist">Zoznam povolených položiek</string>
+    <string name="phone_book">Telefónny zoznam</string>
+    <string name="import_amp_export_settings">Importovať nastavenia exportu</string>
+    <string name="services">Služby</string>
+    <string name="single_app">Single App</string>
+    <string name="apps_amp_services">Aplikácie</string>
+    <string name="peripheral">Periférne</string>
+    <string name="advance">Vopred</string>
+    <string name="disable_camera">Zakázať fotoaparát</string>
+    <string name="call_settings">Nastavenia hovoru</string>
+    <string name="web_filter">Webový filter</string>
+    <string name="screen_saver">Šetrič obrazovky</string>
+    <string name="phone_settings">Nastavenia telefónu</string>
+    <string name="notification_panel">Oznamovací panel</string>
+    <string name="security">Bezpečnosť</string>
+    <string name="launch">Spustiť</string>
+    <string name="phone_call_subheading">Ak máte pri telefonovaní nejaké problémy, láskavo povoľte všetky služby spojené s telefónnym hovorom</string>
+    <string name="phone_call_subheading_hint">rada: Vyhľadajte telefón v servisnej časti</string>
+    <string name="web_filter_subheading">Webový filter je výkonná služba, ktorá umožňuje blokovať nežiaduce webové stránky</string>
+    <string name="web_filter_supported_browsers">Podporované prehliadače: Chrome, Firefox, Brave, Edge, Opera, Duckduckgo</string>
+    <string name="off">Vypnuté</string>
+    <string name="whitelist_websites">Webové stránky na bielu listinu</string>
+    <string name="whitelist_website_info">Webové stránky sa ukladajú pod bielu listinu, ku ktorej má prístup iba prehliadač</string>
+    <string name="blacklist_websites">Webové stránky na čiernej listine</string>
+    <string name="blacklist_websites_info">„Webové stránky uložené na čiernej listine nebudú mať prístup pomocou prehľadávača“</string>
+    <string name="block_adult_websites">Blokujte webové stránky pre dospelých</string>
+    <string name="adult_websites_info">Týmto sa automaticky zablokuje 800 webových stránok pre dospelých</string>
+    <string name="whitelist">Biela listina</string>
+    <string name="add_websites">Pridajte web</string>
+    <string name="website">Webová stránka</string>
+    <string name="add_websites_subheading">Zadajte webovú stránku, ktorú chcete pridať do zoznamu povolených, napr. Www.google.com</string>
+    <string name="otp_verification">Otp overenie</string>
+    <string name="otp_verification_subheading">Zadajte 4-ciferné ďalšie čísla, ktoré sme poslali na vašu registrovanú e-mailovú adresu</string>
+    <string name="password_prompt_subheading">„ak ste si ešte nezmenili heslo, skúste 1234“</string>
+    <string name="forget">zabudnúť?</string>
+    <string name="user_agreement">súhlas používateľa</string>
+    <string name="user_agreement_2">Uložíme zoznam nainštalovaných aplikácií a telefónne číslo do vášho zariadenia. Tieto údaje sa z vášho zariadenia získajú iba vtedy, ak používate funkciu QrCode a tieto údaje sa automaticky odstránia zo servera za jednu hodinu</string>
+    <string name="no_thanks">Nie ďakujem</string>
+    <string name="accept_amp_continue">súhlasiť</string>
+    <string name="usage_access">Prístup k používaniu</string>
+    <string name="overlay">Prekrytie</string>
+    <string name="write_settings">Nastavenia zápisu</string>
+    <string name="sound_access">Prístup k zvuku</string>
+    <string name="other_permissions">Ostatné povolenia</string>
+    <string name="accessibility">Prístupnosť</string>
+    <string name="device_id">ID zariadenia</string>
+    <string name="feedback_amp_suggestions">Návrhy</string>
+    <string name="quick_survey">Rýchly prieskum</string>
+    <string name="bug_report">Hlásenie o chybe</string>
+    <string name="visit">Navštívte</string>
+    <string name="rate">Sadzba</string>
+    <string name="share">zdieľam</string>
+    <string name="app_info">Informácie o aplikácii</string>
+    <string name="check_for_update">Skontrolovať aktualizácie</string>
+    <string name="developer_contact">Kontakt na vývojára</string>
+    <string name="terms_amp_conditions">Podmienky</string>
+    <string name="privacy_policy">Zásady ochrany osobných údajov</string>
+    <string name="outgoing">Vychádzajúce</string>
+    <string name="always_on">na</string>
+    <string name="always_off">vypnutý</string>
+    <string name="dont_care">„Je mi to jedno“</string>
+    <string name="landscape">Krajina</string>
+    <string name="portrait">Portrét</string>
+    <string name="silent">Ticho</string>
+    <string name="normal">Normálne</string>
+    <string name="select_activity_sunHeading">Vyberte, ktoré aktivity /stránky /okná chcete blokovať</string>
+    <string name="apps">Aplikácie</string>
+    <string name="whitelist_apps">Aplikácie na bielu listinu</string>
+    <string name="whitelist_services">Služby na bielu listinu</string>
+    <string name="whitelist_apps_subheading">„Vyberte aplikácie, ku ktorým chcete povoliť prístup.“</string>
+    <string name="whitelist_service_heading">„Vyberte, ku ktorým službám chcete dať prístup“</string>
+    <string name="single_app_subheading">„Vyberte aplikáciu, ktorá má byť k dispozícii v popredí“</string>
+    <string name="blacklist">Čierna listina</string>
+    <string name="contacts_blacklist_subheading">„Kontakty uložené v zozname zakázaných položiek už nebudú môcť volať na váš telefón s Androidom.“</string>
+    <string name="contacts_whitelist_subheading">Kontakty uložené v zozname povolených aplikácií už môžu volať iba na váš telefón Android</string>
+    <string name="delete">Odstrániť</string>
+    <string name="delete_contact_subheading">Naozaj chcete tieto položky odstrániť</string>
+    <string name="invalid_name">Neplatné meno</string>
+    <string name="invalid_number">Zlé číslo</string>
+    <string name="hours">Hodiny</string>
+    <string name="minutes">Zápisnice</string>
+    <string name="file_exported_to">Súbor exportovaný do</string>
+    <string name="select_a_file_to_upload">Vyberte súbor, ktorý chcete nahrať</string>
+    <string name="please_install_a_file_manager">Nainštalujte si Správcu súborov.</string>
+    <string name="invalid_backup_file">Neplatný záložný súbor</string>
+    <string name="imported_successfully">Importované úspešne</string>
+    <string name="password_successfully_send">Heslo bolo úspešne odoslané na vašu e-mailovú adresu</string>
+    <string name="password_recovery_failed">Obnovenie hesla zlyhalo</string>
+    <string name="recovery_email_not_registered">E-mail na obnovenie nie je zaregistrovaný</string>
+    <string name="change_your">Zmeňte svoj</string>
+    <string name="forgot_caps">Zabudol ?</string>
+    <string name="password_successfully_changed">Vaše heslo bolo úspešne zmenené</string>
+    <string name="invalid_email_address">neplatná emailová adresa</string>
+    <string name="password_min">Heslo musí obsahovať minimálne 8 znakov</string>
+    <string name="old_password_must_not_new">Staré heslo nesmie byť nové heslo</string>
+    <string name="password_not_match">Heslo sa nezhoduje</string>
+    <string name="invalid_old_pasword">Staré heslo je neplatné</string>
+    <string name="phonebook_blacklist_subheading">„Vyberte kontakty, ktoré chcete pridať na čiernu listinu“</string>
+    <string name="phonebook_whitelist_subheading">„Vyberte kontakty, ktoré chcete pridať na zoznam povolených“</string>
+    <string name="camera_not_init">Chyba inicializácie fotoaparátu:</string>
+    <string name="please_wait">Prosím čakajte</string>
+    <string name="invalid_qr">Neplatný QrCode!</string>
+    <string name="successfully_done">Úspešne!</string>
+    <string name="on_caps">ZAP</string>
+    <string name="off_caps">VYPNUTÉ</string>
+    <string name="webfilter_blacklist_subheading">„Webové stránky uložené na čiernej listine nebudú mať prístup pomocou prehľadávača“</string>
+    <string name="webfilter_whitelist_subheading">Webové stránky sa ukladajú pod bielu listinu, ku ktorej má prístup iba prehliadač</string>
+    <string name="dialog_website_blacklist_subheading">Zadajte web, ktorý chcete pridať na čiernu listinu, napr. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Zadajte webovú stránku, ktorú chcete pridať do zoznamu povolených, napr. Www.google.com</string>
+    <string name="invalid_url">Neplatná URL adresa</string>
+    <string name="invalid_otp">Neplatný Otp</string>
+    <string name="user_agreement_1">S cieľom vylepšiť KeyOS a zaistiť správne fungovanie všetkých funkcií budú niektoré vaše údaje o použití zhromaždené anonymne. Musíte si prečítať naše Pravidlá ochrany osobných údajov a Podmienky a súhlasiť s nimi. pred použitím KeyOS</string>
+    <string name="select_all">Vybrať všetko</string>
+    <string name="initializing_desktop">Inicializuje sa pracovná plocha ...</string>
+    <string name="loading_settings">Načítavajú sa nastavenia</string>
+    <string name="exiting_keyos">Končí sa</string>
+    <string name="dialog_qrcode_subheading">Naskenujte tento kód KeyOS Qr a použite rovnaké nastavenia vo svojom zariadení KeyOS</string>
+
 </resources>
