--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -141,4 +141,172 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Obvestila in aplikacije – izklopljeno"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Zapri"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Zaprto"</string>
+
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Izhodni kiosk</string>
+    <string name="button_overview_mode">Pregledni način</string>
+    <string name="password">Geslo</string>
+    <string name="activities">Dejavnosti</string>
+    <string name="cancel">Prekliči</string>
+    <string name="done">Končano</string>
+    <string name="phoneBook">Imenik</string>
+    <string name="manual">Priročnik</string>
+    <string name="create_new">Ustvari novo</string>
+    <string name="contact">Kontakt</string>
+    <string name="name">Ime</string>
+    <string name="number">Številka</string>
+    <string name="hide_icon">Skrij ikono</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">skrij ikono zaganjalnika /bližnjice iz domačega doma KeyOS</string>
+    <string name="block_activities">Blokiranje dejavnosti</string>
+    <string name="block_unwanted_pages_activities_windows">Blokirajte neželene strani /dejavnosti /okna</string>
+    <string name="time_limit">Rok</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Nastavite časovno omejitev Npr. 1 uro na dan</string>
+    <string name="system_settings">Sistemske nastavitve</string>
+    <string name="restrictions">Omejitve</string>
+    <string name="edit_app">Uredi aplikacijo</string>
+    <string name="import_amp_export">Uvozno-izvoznih</string>
+    <string name="scan">Optično branje</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Optično preberite kodo qr keyOS, da uporabite isti pravilnik o nastavitvah</string>
+    <string name="generate">Ustvari</string>
+    <string name="generate_keyos_qr_code">Ustvari keyOS QrCode</string>
+    <string name="import_text">Uvozi</string>
+    <string name="import_keyos_setting_from_storage">Uvozi nastavitev keyOS iz pomnilnika</string>
+    <string name="export_text">Izvozi</string>
+    <string name="import_keyos_setting_to_storage">Uvozite nastavitev keyOS v pomnilnik</string>
+    <string name="recovery_email">E-poštni naslov za obnovitev</string>
+    <string name="old_password">staro geslo</string>
+    <string name="confirm_password">Potrdi geslo</string>
+    <string name="allow_calls">Dovoli klice</string>
+    <string name="incoming">Dohodni</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">To bo omogočilo vse dohodne klice v vaš mobilni telefon</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">To bo omogočilo vse odhodne klice v vaš mobilni telefon</string>
+    <string name="whitelist_contacts">Seznam dovoljenih stikov</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Stiki, shranjeni na belem seznamu, vas lahko samo pokličejo</string>
+    <string name="blacklist_contacts">Črni seznam stikov</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Stiki, shranjeni na črnem seznamu, vas ne bodo mogli poklicati"</string>
+    <string name="automatic_whitelist">Samodejni seznam dovoljenih</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Dovoli klice, če je stik na voljo v imeniku</string>
+    <string name="additional">Dodatno</string>
+    <string name="whitelist_amp_blacklist">Črni seznam dovoljenih</string>
+    <string name="phone_book">Imenik</string>
+    <string name="import_amp_export_settings">Uvozi nastavitve izvoza</string>
+    <string name="services">Storitve</string>
+    <string name="single_app">Posamezna aplikacija</string>
+    <string name="apps_amp_services">Storitve za aplikacije</string>
+    <string name="peripheral">Periferno</string>
+    <string name="advance">Vnaprej</string>
+    <string name="disable_camera">Onemogoči kamero</string>
+    <string name="call_settings">Nastavitve klica</string>
+    <string name="web_filter">Spletni filter</string>
+    <string name="screen_saver">Ohranjevalnik zaslona</string>
+    <string name="phone_settings">Nastavitve telefona</string>
+    <string name="notification_panel">Oglasna plošča</string>
+    <string name="security">Varnost</string>
+    <string name="launch">Kosilo</string>
+    <string name="phone_call_subheading">Če imate kakršne koli težave s klicanjem, dovolite vse storitve, povezane s telefonskim klicem</string>
+    <string name="phone_call_subheading_hint">namig: Poiščite telefon v servisnem delu</string>
+    <string name="web_filter_subheading">Spletni filter je zmogljiva storitev, ki omogoča blokiranje neželenih spletnih mest</string>
+    <string name="web_filter_supported_browsers">Podprti brskalniki: chrome, firefox, pogumen, edge, opera, duckduckgo</string>
+    <string name="off">Izklopljeno</string>
+    <string name="whitelist_websites">Spletna mesta na belem seznamu</string>
+    <string name="whitelist_website_info">Spletna mesta shranjujejo na beli seznam, do katerega lahko dostopa samo brskalnik</string>
+    <string name="blacklist_websites">Spletna mesta s črnim seznamom</string>
+    <string name="blacklist_websites_info">"Spletna mesta, shranjena na črnem seznamu, ne bodo mogla dostopati prek brskalnika"</string>
+    <string name="block_adult_websites">Blokirajte spletna mesta za odrasle</string>
+    <string name="adult_websites_info">To bo samodejno blokiralo 800 spletnih mest za odrasle</string>
+    <string name="whitelist">Seznam dovoljenih</string>
+    <string name="add_websites">Dodajte spletno mesto</string>
+    <string name="website">Spletna stran</string>
+    <string name="add_websites_subheading">Prosimo, vnesite spletno mesto, ki ga želite dodati na seznam dovoljenih, na primer: www.google.com</string>
+    <string name="otp_verification">Preverjanje Otp</string>
+    <string name="otp_verification_subheading">Vnesite štirimestno številko odp, ki smo jo poslali na vaš registrirani e-poštni naslov</string>
+    <string name="password_prompt_subheading">"če še niste spremenili gesla, poskusite 1234"</string>
+    <string name="forget">pozabiš?</string>
+    <string name="user_agreement">Uporabniška pogodba</string>
+    <string name="user_agreement_2">Seznam nameščene aplikacije in telefonsko številko bomo shranili v vaši napravi. Ti podatki bodo vzeti iz vaše naprave samo, če uporabljate funkcijo QrCode in bodo ti podatki samodejno odstranjeni s strežnika v roku ene ure</string>
+    <string name="no_thanks">Ne hvala</string>
+    <string name="accept_amp_continue">Sprejmi</string>
+    <string name="usage_access">Dostop do uporabe</string>
+    <string name="overlay">Prekrivanje</string>
+    <string name="write_settings">Napišite nastavitve</string>
+    <string name="sound_access">Dostop do zvoka</string>
+    <string name="other_permissions">Druga dovoljenja</string>
+    <string name="accessibility">Dostopnost</string>
+    <string name="device_id">ID naprave</string>
+    <string name="feedback_amp_suggestions">predlogi</string>
+    <string name="quick_survey">Hitra anketa</string>
+    <string name="bug_report">Poročilo o napaki</string>
+    <string name="visit">Obiščite</string>
+    <string name="rate">Oceniti</string>
+    <string name="share">Deliti</string>
+    <string name="app_info">Informacije o aplikaciji</string>
+    <string name="check_for_update">Preveri posodobitve</string>
+    <string name="developer_contact">Kontakt za razvijalce</string>
+    <string name="terms_amp_conditions">Pogoji</string>
+    <string name="privacy_policy">Politika zasebnosti</string>
+    <string name="outgoing">Odhodni</string>
+    <string name="always_on">na</string>
+    <string name="always_off">izključeno</string>
+    <string name="dont_care">"Vseeno mi je"</string>
+    <string name="landscape">Pokrajina</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Tiho</string>
+    <string name="normal">Običajno</string>
+    <string name="select_activity_sunHeading">Izberite, katere dejavnosti /strani /okna želite blokirati</string>
+    <string name="apps">Aplikacije</string>
+    <string name="whitelist_apps">Aplikacije s seznama dovoljenih</string>
+    <string name="whitelist_services">Storitve na belem seznamu</string>
+    <string name="whitelist_apps_subheading">"Izberite, do katerih aplikacij želite dostopati"</string>
+    <string name="whitelist_service_heading">"Izberite, do katerih storitev želite omogočiti dostop"</string>
+    <string name="single_app_subheading">"Izberite, katero aplikacijo želite imeti na voljo v ospredju"</string>
+    <string name="blacklist">Črna lista</string>
+    <string name="contacts_blacklist_subheading">»Stiki, shranjeni na črnem seznamu, ne bodo mogli več klicati vašega telefona Android«</string>
+    <string name="contacts_whitelist_subheading">Stiki, shranjeni na seznamu dovoljenih, lahko več kličejo vaš telefon Android</string>
+    <string name="delete">Izbriši</string>
+    <string name="delete_contact_subheading">Ali ste prepričani, da želite izbrisati te elemente</string>
+    <string name="invalid_name">Neveljavno ime</string>
+    <string name="invalid_number">Neveljavna številka</string>
+    <string name="hours">Ure</string>
+    <string name="minutes">Zapisnik</string>
+    <string name="file_exported_to">Datoteka izvožena v</string>
+    <string name="select_a_file_to_upload">Izberite datoteko za nalaganje</string>
+    <string name="please_install_a_file_manager">Namestite upravitelja datotek.</string>
+    <string name="invalid_backup_file">Neveljavna datoteka varnostne kopije</string>
+    <string name="imported_successfully">Uvoženo uspešno</string>
+    <string name="password_successfully_send">Geslo je bilo uspešno poslano na vaš e-poštni naslov</string>
+    <string name="password_recovery_failed">Obnovitev gesla ni uspela</string>
+    <string name="recovery_email_not_registered">E-poštni naslov za obnovitev ni registriran</string>
+    <string name="change_your">Spremenite svoje</string>
+    <string name="forgot_caps">Pozabil ?</string>
+    <string name="password_successfully_changed">Vaše geslo je bilo uspešno spremenjeno</string>
+    <string name="invalid_email_address">napačen naslov elektronske pošte</string>
+    <string name="password_min">Geslo mora vsebovati najmanj 8 znakov</string>
+    <string name="old_password_must_not_new">Staro geslo ne sme biti novo geslo</string>
+    <string name="password_not_match">Geslo se ne ujema</string>
+    <string name="invalid_old_pasword">Neveljavno staro geslo</string>
+    <string name="phonebook_blacklist_subheading">"Izberite, katere stike želite dodati na črni seznam"</string>
+    <string name="phonebook_whitelist_subheading">"Izberite stike, ki jih želite dodati na seznam dovoljenih"</string>
+    <string name="camera_not_init">Napaka inicializacije kamere:</string>
+    <string name="please_wait">Prosim počakaj</string>
+    <string name="invalid_qr">Neveljavna koda Qr!</string>
+    <string name="successfully_done">Uspešno opravljeno!</string>
+    <string name="on_caps">VKLOPLJENO</string>
+    <string name="off_caps">IZKLOPLJENO</string>
+    <string name="webfilter_blacklist_subheading">"Spletna mesta, shranjena na črnem seznamu, ne bodo mogla dostopati prek brskalnika"</string>
+    <string name="webfilter_whitelist_subheading">Spletna mesta shranjujejo na beli seznam, do katerega lahko dostopa samo brskalnik</string>
+    <string name="dialog_website_blacklist_subheading">Prosimo, vnesite spletno mesto, ki ga želite dodati na črni seznam, npr. Www.google.com</string>
+    <string name="dialog_website_white_subheading">Prosimo, vnesite spletno mesto, ki ga želite dodati na seznam dovoljenih, na primer: www.google.com</string>
+    <string name="invalid_url">Neveljaven URL</string>
+    <string name="invalid_otp">Neveljaven Otp</string>
+    <string name="user_agreement_1">Da bi izboljšali KeyOS in zagotovili pravilno delovanje vseh funkcij, bodo nekateri podatki o uporabi zbrani anonimno. Prebrati morate našo politiko zasebnosti in pogoje ter se z njo strinjati. pred uporabo KeyOS-a</string>
+    <string name="select_all">Izberi vse</string>
+    <string name="initializing_desktop">Inicializacija namizja ...</string>
+    <string name="loading_settings">Nastavitve nalaganja</string>
+    <string name="exiting_keyos">Izhod</string>
+    <string name="dialog_qrcode_subheading">Optično preberite to kodo KeyOS Qr, če želite uporabiti enake nastavitve v napravi KeyOS</string>
+
+
+
 </resources>
