--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -72,7 +72,6 @@
     <string name="folder_closed" msgid="4100806530910930934">"Dosja u mbyll"</string>
     <string name="folder_renamed" msgid="1794088362165669656">"Dosja u riemërtua në <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="folder_name_format" msgid="6629239338071103179">"Dosja: <xliff:g id="NAME">%1$s</xliff:g>"</string>
-    <string name="widget_button_text" msgid="2880537293434387943">"Miniaplikacionet"</string>
     <string name="settings_button_text" msgid="8873672322605444408">"Cilësimet e Home"</string>
     <string name="allow_rotation_title" msgid="7728578836261442095">"Lejo rrotullimin e ekranit kryesor"</string>
     <string name="icon_badging_title" msgid="874121399231955394">"Pikat e njoftimeve"</string>
@@ -139,4 +138,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Njoftimet dhe aplikacionet janë joaktive"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Mbyll"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Mbyllur"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Dalja në Kiosk</string>
+    <string name="widget_button_text">Vegla</string>
+    <string name="button_overview_mode">Modaliteti i përmbledhjes</string>
+    <string name="password">Fjalëkalimi</string>
+    <string name="activities">Aktivitetet</string>
+    <string name="cancel">Anulo</string>
+    <string name="done">Bërë</string>
+    <string name="phoneBook">Libri i telefonit</string>
+    <string name="manual">Manual</string>
+    <string name="create_new">Krijoni të Reja</string>
+    <string name="contact">Kontaktoni</string>
+    <string name="name">Emrin</string>
+    <string name="number">Numrin</string>
+    <string name="hide_icon">Fshih ikonën</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">fshehni ikonën e lëshuesit /shkurtore nga shtëpia e KeyOS</string>
+    <string name="block_activities">Bllokoni Aktivitetet</string>
+    <string name="block_unwanted_pages_activities_windows">Bllokoni faqet /aktivitetet /dritaret e padëshiruara</string>
+    <string name="time_limit">Afat kohor</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Vendosni kufizimin e kohës P.sh. 1 orë në ditë</string>
+    <string name="system_settings">Cilësimet e sistemit</string>
+    <string name="restrictions">Kufizimet</string>
+    <string name="edit_app">Redakto aplikacionin</string>
+    <string name="import_amp_export">Importo eksportin</string>
+    <string name="scan">Skanoni</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Skanoni kodin keyOS qr për të zbatuar të njëjtën politikë cilësimesh</string>
+    <string name="generate">Gjeneroni</string>
+    <string name="generate_keyos_qr_code">Gjeneroni QRCode të keyOS</string>
+    <string name="import_text">Importit</string>
+    <string name="import_keyos_setting_from_storage">Importo cilësimin e keyOS nga hapësira ruajtëse</string>
+    <string name="export_text">Eksporto</string>
+    <string name="import_keyos_setting_to_storage">Importo cilësimin e keyOS në hapësirë ​​ruajtëse</string>
+    <string name="recovery_email">Email-i i rikuperimit</string>
+    <string name="old_password">Fjalëkalimi i vjetër</string>
+    <string name="confirm_password">Konfirmo fjalëkalimin</string>
+    <string name="allow_calls">Lejo telefonatat</string>
+    <string name="incoming">Hyrëse</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Kjo do të lejojë të gjitha thirrjet hyrëse në celularin tuaj</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Kjo do të lejojë të gjitha telefonatat dalëse në celularin tuaj</string>
+    <string name="whitelist_contacts">Kontaktet e listës së bardhë</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontaktet ruhen në listën e bardhë në gjendje t\'ju telefonojnë vetëm</string>
+    <string name="blacklist_contacts">Kontaktet në listën e zezë</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Kontaktet e ruajtura në listën e zezë nuk do të jenë në gjendje t\'ju telefonojnë"</string>
+    <string name="automatic_whitelist">Lista e bardhë automatike</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Lejoni telefonatat nëse kontaktet janë të disponueshme në librin e telefonit</string>
+    <string name="additional">Shtesë</string>
+    <string name="whitelist_amp_blacklist">Lista e zezë e listës së bardhë</string>
+    <string name="phone_book">Libri i telefonit</string>
+    <string name="import_amp_export_settings">Importo cilësimet e eksportit</string>
+    <string name="services">Shërbimet</string>
+    <string name="single_app">Aplikacion i vetëm</string>
+    <string name="apps_amp_services">Shërbimet e Aplikacioneve</string>
+    <string name="peripheral">Periferike</string>
+    <string name="advance">Paraprakisht</string>
+    <string name="disable_camera">Çaktivizo kamerën</string>
+    <string name="call_settings">Cilësimet e thirrjes</string>
+    <string name="web_filter">Filtri i uebit</string>
+    <string name="screen_saver">Mbrojtës Ekrani</string>
+    <string name="phone_settings">Cilësimet e telefonit</string>
+    <string name="notification_panel">Paneli i njoftimit</string>
+    <string name="security">Siguria</string>
+    <string name="launch">Nisja</string>
+    <string name="phone_call_subheading">Nëse hasni ndonjë telashe për të bërë thirrje, lejoni me mirësi të gjitha shërbimet që lidhen me thirrjen telefonike</string>
+    <string name="phone_call_subheading_hint">aluzion: Kërkoni për telefonin në seksionin e shërbimit</string>
+    <string name="web_filter_subheading">Filtri në internet është një shërbim i fuqishëm i cili ju lejon të bllokoni faqet e internetit të padëshiruara</string>
+    <string name="web_filter_supported_browsers">Shfletuesit e mbështetur: krom, firefox, trim, edge, opera, duckduckgo</string>
+    <string name="off">Joaktive</string>
+    <string name="whitelist_websites">Uebsajtet e listave të bardha</string>
+    <string name="whitelist_website_info">Uebsajtet ruajnë nën listën e bardhë në gjendje të hyjnë vetëm nga shfletuesi</string>
+    <string name="blacklist_websites">Uebsajtet e listës së zezë</string>
+    <string name="blacklist_websites_info">"Faqet e internetit të ruajtura nën listën e zezë nuk do të kenë mundësi të hyjnë nga shfletuesi"</string>
+    <string name="block_adult_websites">Blloko faqet e internetit të të rriturve</string>
+    <string name="adult_websites_info">Kjo automatikisht do të bllokojë 800 uebfaqe për të rritur</string>
+    <string name="whitelist">Lista e bardhë</string>
+    <string name="add_websites">Shto faqe në internet</string>
+    <string name="website">Uebfaqe</string>
+    <string name="add_websites_subheading">Ju lutemi futni faqen e internetit që dëshironi të shtoni në listën e bardhë P.sh .: www.google.com</string>
+    <string name="otp_verification">Verifikimi i Otp</string>
+    <string name="otp_verification_subheading">Ju lutemi shkruani otp 4 shifror të cilin e kemi dërguar në adresën tuaj të postës elektronike të regjistruar</string>
+    <string name="password_prompt_subheading">"nëse nuk e keni ndryshuar fjalëkalimin tuaj, ju lutem provoni 1234"</string>
+    <string name="forget">harroj?</string>
+    <string name="user_agreement">Marrëveshja e përdoruesit</string>
+    <string name="user_agreement_2">Ne do të ruajmë listën e aplikacionit dhe numrit të telefonit të instaluar në pajisjen tuaj. Këto të dhëna do të merren nga pajisja juaj vetëm nëse jeni duke përdorur funksionin QrCode dhe këto të dhëna do të hiqen automatikisht nga serveri me brenda një ore</string>
+    <string name="no_thanks">Jo faleminderit</string>
+    <string name="accept_amp_continue">Pranoj</string>
+    <string name="usage_access">Aksesi i Përdorimit</string>
+    <string name="overlay">Mbivendosja</string>
+    <string name="write_settings">Shkruaj Cilësimet</string>
+    <string name="sound_access">Hyrja në tingull</string>
+    <string name="other_permissions">Lejet e tjera</string>
+    <string name="accessibility">Mundësia e hyrjes</string>
+    <string name="device_id">ID e pajisjes</string>
+    <string name="feedback_amp_suggestions">sugjerime</string>
+    <string name="quick_survey">Sondazh i shpejtë</string>
+    <string name="bug_report">Raporti i defektit në kod</string>
+    <string name="visit">Vizitoni</string>
+    <string name="rate">Vlerësoni</string>
+    <string name="share">Ndani</string>
+    <string name="app_info">Informacioni i aplikacionit</string>
+    <string name="check_for_update">Kontrolloni për përditësim</string>
+    <string name="developer_contact">Kontakt zhvilluesi</string>
+    <string name="terms_amp_conditions">Kushtet</string>
+    <string name="privacy_policy">Politika e privatësisë</string>
+    <string name="outgoing">Në dalje</string>
+    <string name="always_on">në</string>
+    <string name="always_off">i fikur</string>
+    <string name="dont_care">"Mos u intereso"</string>
+    <string name="landscape">Peisazhi</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">I heshtur</string>
+    <string name="normal">Normale</string>
+    <string name="select_activity_sunHeading">Zgjidhni cilat aktivitete /Faqet /dritaret dëshironi të bllokoni</string>
+    <string name="apps">Aplikacionet</string>
+    <string name="whitelist_apps">Aplikacionet e listave të bardha</string>
+    <string name="whitelist_services">Shërbimet e listave të bardha</string>
+    <string name="whitelist_apps_subheading">"Zgjidhni cilat aplikacione dëshironi të përdorni"</string>
+    <string name="whitelist_service_heading">"Zgjidhni cilat shërbime dëshironi të jepni hyrje"</string>
+    <string name="single_app_subheading">"Zgjidhni cilin aplikacion dëshironi të jetë i disponueshëm në plan të parë"</string>
+    <string name="blacklist">Listë e zezë</string>
+    <string name="contacts_blacklist_subheading">"Kontaktet e ruajtura nën Listën e Zezë nuk do të mund të telefonojnë më në telefonin tuaj Android"</string>
+    <string name="contacts_whitelist_subheading">Kontaktet e ruajtura nën Listën e Bardhë mund të telefonojnë vetëm në telefonin tuaj Android</string>
+    <string name="delete">Fshij</string>
+    <string name="delete_contact_subheading">Jeni i sigurt që dëshironi t\'i fshini këto artikuj</string>
+    <string name="invalid_name">Emër i pavlefshëm</string>
+    <string name="invalid_number">Numër i pavlefshëm</string>
+    <string name="hours">Orët</string>
+    <string name="minutes">Procesverbalet</string>
+    <string name="file_exported_to">Skedari u eksportua në</string>
+    <string name="select_a_file_to_upload">Zgjidhni një skedar për ta ngarkuar</string>
+    <string name="please_install_a_file_manager">Ju lutemi instaloni një File Manager.</string>
+    <string name="invalid_backup_file">Skedar rezervë i pavlefshëm</string>
+    <string name="imported_successfully">Importuar me sukses</string>
+    <string name="password_successfully_send">Fjalëkalimi u dërgua me sukses në adresën tuaj të postës elektronike</string>
+    <string name="password_recovery_failed">Riparimi i fjalëkalimit dështoi</string>
+    <string name="recovery_email_not_registered">Emaili i rikuperimit nuk është regjistruar</string>
+    <string name="change_your">Ndryshoni tuajin</string>
+    <string name="forgot_caps">Harruar?</string>
+    <string name="password_successfully_changed">Fjalëkalimi juaj është ndryshuar me sukses</string>
+    <string name="invalid_email_address">Adresa e emailit e pavlefshme</string>
+    <string name="password_min">Fjalëkalimi duhet të përmbajë min 8 karaktere</string>
+    <string name="old_password_must_not_new">Fjalëkalimi i vjetër nuk duhet të jetë fjalëkalim i ri</string>
+    <string name="password_not_match">Fjalëkalimi nuk përputhet</string>
+    <string name="invalid_old_pasword">Fjalëkalim i vjetër i pavlefshëm</string>
+    <string name="phonebook_blacklist_subheading">"Zgjidhni cilat kontakte dëshironi të shtoni në listën e zezë"</string>
+    <string name="phonebook_whitelist_subheading">"Zgjidhni cilat kontakte dëshironi të shtoni në listën e bardhë"</string>
+    <string name="camera_not_init">Gabimi i fillimit të kamerës:</string>
+    <string name="please_wait">Te lutem prit</string>
+    <string name="invalid_qr">QrCode i pavlefshëm!</string>
+    <string name="successfully_done">Bërë me sukses!</string>
+    <string name="on_caps">ON</string>
+    <string name="off_caps">OFF</string>
+    <string name="webfilter_blacklist_subheading">"Faqet e internetit të ruajtura nën listën e zezë nuk do të kenë mundësi të hyjnë nga shfletuesi"</string>
+    <string name="webfilter_whitelist_subheading">Uebsajtet ruajnë nën listën e bardhë në gjendje të hyjnë vetëm nga shfletuesi</string>
+    <string name="dialog_website_blacklist_subheading">Ju lutemi futni uebfaqen që dëshironi të shtoni në listën e zezë P.sh .: www.google.com</string>
+    <string name="dialog_website_white_subheading">Ju lutemi futni faqen e internetit që dëshironi të shtoni në listën e bardhë P.sh .: www.google.com</string>
+    <string name="invalid_url">Url e pavlefshme</string>
+    <string name="invalid_otp">Otp i pavlefshëm</string>
+    <string name="user_agreement_1">Për të përmirësuar KeyOS dhe për t\'u siguruar që të gjitha funksionet funksionojnë siç duhet, disa nga të dhënat tuaja të përdorimit do të mblidhen në mënyrë anonime. Ju duhet të lexoni dhe të bini dakord me Politikën dhe Kushtet tona të Privatësisë. para se të përdorni KeyOS</string>
+    <string name="select_all">Selektoj të gjitha</string>
+    <string name="initializing_desktop">Fillimi i desktopit</string>
+    <string name="loading_settings">Cilësimet e ngarkimit</string>
+    <string name="exiting_keyos">Dalja</string>
+    <string name="dialog_qrcode_subheading">Skanoni këtë kod KeyOS Qr për të aplikuar të njëjtat cilësime në pajisjen tuaj KeyOS</string>
+
+
 </resources>
