--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -141,4 +141,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"నోటిఫికేషన్‌లు మరియు యాప్‌లు ఆఫ్ చేయబడ్డాయి"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"మూసివేయి"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"మూసివేయబడింది"</string>
+
+
+    <string name="app_name">కీఓఎస్</string>
+    <string name="exit_button_text">కియోస్క్ నుండి నిష్క్రమించండి</string>
+    <string name="button_overview_mode">అవలోకనం మోడ్</string>
+    <string name="password">పాస్వర్డ్</string>
+    <string name="activities">చర్యలు</string>
+    <string name="cancel">రద్దు చేయండి</string>
+    <string name="done">పూర్తి</string>
+    <string name="phoneBook">ఫోన్ బుక్</string>
+    <string name="manual">మాన్యువల్</string>
+    <string name="create_new">క్రొత్తదాన్ని సృష్టించండి</string>
+    <string name="contact">సంప్రదించండి</string>
+    <string name="name">పేరు</string>
+    <string name="number">సంఖ్య</string>
+    <string name="hide_icon">చిహ్నాన్ని దాచు</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">KeyOS ఇంటి నుండి లాంచర్ /సత్వరమార్గం చిహ్నాన్ని దాచండి</string>
+    <string name="block_activities">బ్లాక్ కార్యకలాపాలు</string>
+    <string name="block_unwanted_pages_activities_windows">అవాంఛిత పేజీలు /కార్యకలాపాలు /విండోలను బ్లాక్ చేయండి</string>
+    <string name="time_limit">నిర్ణీత కాలం</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">సమయ పరిమితిని సెట్ చేయండి ఉదా. రోజుకు 1 గం</string>
+    <string name="system_settings">సిస్టమ్ అమరికలను</string>
+    <string name="restrictions">పరిమితులు</string>
+    <string name="edit_app">అనువర్తనాన్ని సవరించండి</string>
+    <string name="import_amp_export">దిగుమతి ఎగుమతి</string>
+    <string name="scan">స్కాన్ చేయండి</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">ఒకే సెట్టింగుల విధానాన్ని వర్తింపచేయడానికి keyOS qr కోడ్‌ను స్కాన్ చేయండి</string>
+    <string name="generate">ఉత్పత్తి</string>
+    <string name="generate_keyos_qr_code">కీఓఎస్ QrCode ను రూపొందించండి</string>
+    <string name="import_text">దిగుమతి</string>
+    <string name="import_keyos_setting_from_storage">కీఓఎస్ సెట్టింగ్‌ను నిల్వ నుండి దిగుమతి చేయండి</string>
+    <string name="export_text">ఎగుమతి</string>
+    <string name="import_keyos_setting_to_storage">కీఓఎస్ సెట్టింగ్‌ను నిల్వకు దిగుమతి చేయండి</string>
+    <string name="recovery_email">రికవరీ ఇమెయిల్</string>
+    <string name="old_password">పాత పాస్‌వర్డ్</string>
+    <string name="confirm_password">పాస్వర్డ్ను నిర్ధారించండి</string>
+    <string name="allow_calls">కాల్‌లను అనుమతించండి</string>
+    <string name="incoming">ఇన్కమింగ్</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">ఇది మీ మొబైల్‌కు వచ్చే అన్ని కాల్‌లను అనుమతిస్తుంది</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">ఇది మీ మొబైల్‌కు అవుట్‌గోయింగ్ కాల్‌లన్నింటినీ అనుమతిస్తుంది</string>
+    <string name="whitelist_contacts">వైట్‌లిస్ట్ పరిచయాలు</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">పరిచయాలు మిమ్మల్ని కాల్ చేయగలిగే వైట్‌లిస్ట్ కింద సేవ్ చేస్తాయి</string>
+    <string name="blacklist_contacts">బ్లాక్లిస్ట్ పరిచయాలు</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"బ్లాక్‌లిస్ట్ కింద సేవ్ చేసిన పరిచయాలు మీకు కాల్ చేయలేవు"</string>
+    <string name="automatic_whitelist">స్వయంచాలక అనుమతి జాబితా</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">ఫోన్ పుస్తకంలో పరిచయం అందుబాటులో ఉంటే కాల్‌లను అనుమతించండి</string>
+    <string name="additional">అదనపు</string>
+    <string name="whitelist_amp_blacklist">వైట్‌లిస్ట్ బ్లాక్లిస్ట్</string>
+    <string name="phone_book">ఫోన్ బుక్</string>
+    <string name="import_amp_export_settings">ఎగుమతి సెట్టింగ్‌లను దిగుమతి చేయండి</string>
+    <string name="services">సేవలు</string>
+    <string name="single_app">ఒకే అనువర్తనం</string>
+    <string name="apps_amp_services">అనువర్తనాల సేవలు</string>
+    <string name="peripheral">పరిధీయ</string>
+    <string name="advance">అడ్వాన్స్</string>
+    <string name="disable_camera">కెమెరాను నిలిపివేయండి</string>
+    <string name="call_settings">కాల్ సెట్టింగ్లు</string>
+    <string name="web_filter">వెబ్ ఫిల్టర్</string>
+    <string name="screen_saver">స్క్రీన్ సేవర్</string>
+    <string name="phone_settings">ఫోన్ సెట్టింగ్స్</string>
+    <string name="notification_panel">నోటిఫికేషన్ ప్యానెల్</string>
+    <string name="security">భద్రత</string>
+    <string name="launch">ప్రారంభించండి</string>
+    <string name="phone_call_subheading">కాల్స్ చేయడానికి మీకు ఏమైనా ఇబ్బంది ఎదురైతే, ఫోన్ కాల్‌కు సంబంధించిన అన్ని సేవలను దయచేసి అనుమతించండి</string>
+    <string name="phone_call_subheading_hint">సూచన: సేవా విభాగంలో ఫోన్ కోసం శోధించండి</string>
+    <string name="web_filter_subheading">వెబ్ ఫిల్టర్ అనేది అవాంఛిత వెబ్‌సైట్‌లను నిరోధించడానికి మిమ్మల్ని అనుమతించే శక్తివంతమైన సేవ</string>
+    <string name="web_filter_supported_browsers">మద్దతు ఉన్న బ్రౌజర్‌లు: క్రోమ్, ఫైర్‌ఫాక్స్, బ్రేవ్, ఎడ్జ్, ఒపెరా, డక్‌డక్గో</string>
+    <string name="off">ఆఫ్</string>
+    <string name="whitelist_websites">వైట్‌లిస్ట్ వెబ్‌సైట్‌లు</string>
+    <string name="whitelist_website_info">వెబ్‌సైట్‌లు బ్రౌజర్ ద్వారా మాత్రమే ప్రాప్యత చేయగల వైట్‌లిస్ట్ కింద సేవ్ చేస్తాయి</string>
+    <string name="blacklist_websites">బ్లాక్‌లిస్ట్ వెబ్‌సైట్‌లు</string>
+    <string name="blacklist_websites_info">"బ్లాక్‌లిస్ట్ కింద సేవ్ చేసిన వెబ్‌సైట్‌లు బ్రౌజర్ ద్వారా యాక్సెస్ చేయలేవు"</string>
+    <string name="block_adult_websites">వయోజన వెబ్‌సైట్‌లను బ్లాక్ చేయండి</string>
+    <string name="adult_websites_info">ఇది స్వయంచాలకంగా 800 వయోజన వెబ్‌సైట్‌లను బ్లాక్ చేస్తుంది</string>
+    <string name="whitelist">వైట్లిస్ట్</string>
+    <string name="add_websites">వెబ్‌సైట్‌ను జోడించండి</string>
+    <string name="website">వెబ్‌సైట్</string>
+    <string name="add_websites_subheading">దయచేసి మీరు వైట్‌లిస్ట్‌లో జోడించదలచిన వెబ్‌సైట్‌ను నమోదు చేయండి ఉదా: www.google.com</string>
+    <string name="otp_verification">Otp ధృవీకరణ</string>
+    <string name="otp_verification_subheading">దయచేసి మీ రిజిస్టర్డ్ ఇమెయిల్ చిరునామాకు మేము పంపిన 4 అంకెల otp ని నమోదు చేయండి</string>
+    <string name="password_prompt_subheading">"మీరు ఇంకా మీ పాస్‌వర్డ్ మార్చకపోతే దయచేసి 1234 ప్రయత్నించండి"</string>
+    <string name="forget">మర్చిపోతారా?</string>
+    <string name="user_agreement">వాడుకరి ఒప్పందం</string>
+    <string name="user_agreement_2">మేము మీ పరికరంలో ఇన్‌స్టాల్ చేసిన అనువర్తనం మరియు ఫోన్ నంబర్ జాబితాను నిల్వ చేస్తాము. మీరు QrCode లక్షణాన్ని ఉపయోగిస్తుంటే మాత్రమే ఈ డేటా మీ పరికరం నుండి తీసుకోబడుతుంది మరియు ఈ డేటా ఒక గంటలో సర్వర్ నుండి స్వయంచాలకంగా తీసివేయబడుతుంది</string>
+    <string name="no_thanks">ధన్యవాదాలు లేదు</string>
+    <string name="accept_amp_continue">అంగీకరించు</string>
+    <string name="usage_access">వినియోగ ప్రాప్యత</string>
+    <string name="overlay">అతివ్యాప్తి</string>
+    <string name="write_settings">సెట్టింగులను వ్రాయండి</string>
+    <string name="sound_access">సౌండ్ యాక్సెస్</string>
+    <string name="other_permissions">ఇతర అనుమతులు</string>
+    <string name="accessibility">సౌలభ్యాన్ని</string>
+    <string name="device_id">పరికర ID</string>
+    <string name="feedback_amp_suggestions">సూచనలు</string>
+    <string name="quick_survey">త్వరిత సర్వే</string>
+    <string name="bug_report">తప్పుల నివేదిక</string>
+    <string name="visit">సందర్శించండి</string>
+    <string name="rate">రేటు</string>
+    <string name="share">భాగస్వామ్యం చేయండి</string>
+    <string name="app_info">అనువర్తన సమాచారం</string>
+    <string name="check_for_update">నవీకరణ కోసం తనిఖీ చేయండి</string>
+    <string name="developer_contact">డెవలపర్ పరిచయం</string>
+    <string name="terms_amp_conditions">నిబంధనలు</string>
+    <string name="privacy_policy">గోప్యతా విధానం</string>
+    <string name="outgoing">అవుట్గోయింగ్</string>
+    <string name="always_on">పై</string>
+    <string name="always_off">ఆఫ్</string>
+    <string name="dont_care">"పట్టించుకోకండి"</string>
+    <string name="landscape">ప్రకృతి దృశ్యం</string>
+    <string name="portrait">చిత్రం</string>
+    <string name="silent">నిశ్శబ్దం</string>
+    <string name="normal">సాధారణం</string>
+    <string name="select_activity_sunHeading">మీరు నిరోధించదలిచిన కార్యాచరణలు /పేజీలు /విండోలను ఎంచుకోండి</string>
+    <string name="apps">అనువర్తనాలు</string>
+    <string name="whitelist_apps">వైట్‌లిస్ట్ అనువర్తనాలు</string>
+    <string name="whitelist_services">వైట్‌లిస్ట్ సేవలు</string>
+    <string name="whitelist_apps_subheading">"మీరు ఏ అనువర్తనాలను యాక్సెస్ చేయాలనుకుంటున్నారో ఎంచుకోండి"</string>
+    <string name="whitelist_service_heading">"మీరు ఏ సేవలను యాక్సెస్ చేయాలనుకుంటున్నారో ఎంచుకోండి"</string>
+    <string name="single_app_subheading">"ముందుభాగంలో మీకు ఏ అనువర్తనం అందుబాటులో ఉండాలో ఎంచుకోండి"</string>
+    <string name="blacklist">బ్లాక్లిస్ట్</string>
+    <string name="contacts_blacklist_subheading">"బ్లాక్లిస్ట్ క్రింద సేవ్ చేయబడిన పరిచయాలు ఇకపై మీ Android ఫోన్కు కాల్ చేయలేవు"</string>
+    <string name="contacts_whitelist_subheading">వైట్‌లిస్ట్ కింద సేవ్ చేసిన పరిచయాలు ఇకపై మీ Android ఫోన్‌కు మాత్రమే కాల్ చేయగలవు</string>
+    <string name="delete">తొలగించు</string>
+    <string name="delete_contact_subheading">మీరు ఖచ్చితంగా ఈ అంశాలను తొలగించాలనుకుంటున్నారా?</string>
+    <string name="invalid_name">చెల్లని పేరు</string>
+    <string name="invalid_number">చెల్లని సంఖ్య</string>
+    <string name="hours">గంటలు</string>
+    <string name="minutes">నిమిషాలు</string>
+    <string name="file_exported_to">ఫైల్ ఎగుమతి చేయబడింది</string>
+    <string name="select_a_file_to_upload">అప్‌లోడ్ చేయడానికి ఫైల్‌ను ఎంచుకోండి</string>
+    <string name="please_install_a_file_manager">దయచేసి ఫైల్ మేనేజర్‌ను ఇన్‌స్టాల్ చేయండి.</string>
+    <string name="invalid_backup_file">చెల్లని బ్యాకప్ ఫైల్</string>
+    <string name="imported_successfully">విజయవంతంగా దిగుమతి చేయబడింది</string>
+    <string name="password_successfully_send">పాస్వర్డ్ మీ ఇమెయిల్ చిరునామాకు విజయవంతంగా పంపబడింది</string>
+    <string name="password_recovery_failed">పాస్వర్డ్ రికవరీ విఫలమైంది</string>
+    <string name="recovery_email_not_registered">రికవరీ ఇమెయిల్ నమోదు కాలేదు</string>
+    <string name="change_your">మీ మార్చండి</string>
+    <string name="forgot_caps">మర్చిపోయారా?</string>
+    <string name="password_successfully_changed">మీ పాస్‌వర్డ్ విజయవంతంగా మార్చబడింది</string>
+    <string name="invalid_email_address">చెల్లని ఇమెయిల్ చిరునామా</string>
+    <string name="password_min">పాస్‌వర్డ్‌లో కనీసం 8 అక్షరాలు ఉండాలి</string>
+    <string name="old_password_must_not_new">పాత పాస్‌వర్డ్ కొత్త పాస్‌వర్డ్ కాకూడదు</string>
+    <string name="password_not_match">పాస్‌వర్డ్ సరిపోలలేదు</string>
+    <string name="invalid_old_pasword">పాత పాస్‌వర్డ్ చెల్లదు</string>
+    <string name="phonebook_blacklist_subheading">"మీరు బ్లాక్లిస్ట్‌లో ఏ పరిచయాలను జోడించాలనుకుంటున్నారో ఎంచుకోండి"</string>
+    <string name="phonebook_whitelist_subheading">"మీరు వైట్‌లిస్ట్‌లో ఏ పరిచయాలను జోడించాలనుకుంటున్నారో ఎంచుకోండి"</string>
+    <string name="camera_not_init">కెమెరా ప్రారంభ లోపం:</string>
+    <string name="please_wait">దయచేసి వేచి ఉండండి</string>
+    <string name="invalid_qr">QrCode చెల్లదు!</string>
+    <string name="successfully_done">విజయవంతంగా పూర్తయింది!</string>
+    <string name="on_caps">పై</string>
+    <string name="off_caps">ఆఫ్</string>
+    <string name="webfilter_blacklist_subheading">"బ్లాక్‌లిస్ట్ కింద సేవ్ చేసిన వెబ్‌సైట్‌లు బ్రౌజర్ ద్వారా యాక్సెస్ చేయలేవు"</string>
+    <string name="webfilter_whitelist_subheading">వెబ్‌సైట్‌లు బ్రౌజర్ ద్వారా మాత్రమే ప్రాప్యత చేయగల వైట్‌లిస్ట్ కింద సేవ్ చేస్తాయి</string>
+    <string name="dialog_website_blacklist_subheading">దయచేసి మీరు బ్లాక్లిస్ట్‌లో జోడించదలిచిన వెబ్‌సైట్‌ను నమోదు చేయండి ఉదా: www.google.com</string>
+    <string name="dialog_website_white_subheading">దయచేసి మీరు వైట్‌లిస్ట్‌లో జోడించదలచిన వెబ్‌సైట్‌ను నమోదు చేయండి ఉదా: www.google.com</string>
+    <string name="invalid_url">చెల్లని URL</string>
+    <string name="invalid_otp">చెల్లని Otp</string>
+    <string name="user_agreement_1">కీఓఎస్‌ను మెరుగుపరచడానికి మరియు అన్ని ఫీచర్ సరిగ్గా పనిచేస్తుందని నిర్ధారించుకోవడానికి, మీ వినియోగ డేటా కొన్ని అనామకంగా సేకరించబడతాయి. మీరు మా గోప్యతా విధానం మరియు నిబంధనలను తప్పక చదివి అంగీకరించాలి. కీఓఎస్ ఉపయోగించే ముందు</string>
+    <string name="select_all">అన్ని ఎంచుకోండి</string>
+    <string name="initializing_desktop">డెస్క్‌టాప్‌ను ప్రారంభిస్తోంది…</string>
+    <string name="loading_settings">సెట్టింగులను లోడ్ చేస్తోంది</string>
+    <string name="exiting_keyos">నిష్క్రమించడం</string>
+    <string name="dialog_qrcode_subheading">మీ KeyOS పరికరంలో ఒకే సెట్టింగులను వర్తింపచేయడానికి ఈ KeyOS Qr కోడ్‌ను స్కాన్ చేయండి</string>
+
+
 </resources>
