--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -139,4 +139,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"ปิดการแจ้งเตือนและแอปอยู่"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"ปิด"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"ปิด"</string>
+
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">ออกจาก Kiosk</string>
+    <string name="button_overview_mode">โหมดภาพรวม</string>
+    <string name="password">รหัสผ่าน</string>
+    <string name="activities">กิจกรรม</string>
+    <string name="cancel">ยกเลิก</string>
+    <string name="done">เสร็จแล้ว</string>
+    <string name="phoneBook">สมุดโทรศัพท์</string>
+    <string name="manual">คู่มือ</string>
+    <string name="create_new">สร้างใหม่</string>
+    <string name="contact">ติดต่อ</string>
+    <string name="name">ชื่อ</string>
+    <string name="number">จำนวน</string>
+    <string name="hide_icon">ซ่อนไอค่อน</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ซ่อนไอคอนตัวเรียกใช้ /ทางลัดจากหน้าแรกของ KeyOS</string>
+    <string name="block_activities">บล็อกกิจกรรม</string>
+    <string name="block_unwanted_pages_activities_windows">บล็อกเพจ /กิจกรรม /หน้าต่างที่ไม่ต้องการ</string>
+    <string name="time_limit">เวลาที่ จำกัด</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">ตั้งค่าการ จำกัด เวลาเช่น 1 ชม. ต่อวัน</string>
+    <string name="system_settings">การตั้งค่าระบบ</string>
+    <string name="restrictions">ข้อ จำกัด</string>
+    <string name="edit_app">แก้ไขแอป</string>
+    <string name="import_amp_export">นำเข้าส่งออก</string>
+    <string name="scan">สแกน</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">สแกนรหัส keyOS qr เพื่อใช้นโยบายการตั้งค่าเดียวกัน</string>
+    <string name="generate">สร้าง</string>
+    <string name="generate_keyos_qr_code">สร้าง keyOS QrCode</string>
+    <string name="import_text">นำเข้า</string>
+    <string name="import_keyos_setting_from_storage">นำเข้าการตั้งค่า keyOS จากที่เก็บข้อมูล</string>
+    <string name="export_text">ส่งออก</string>
+    <string name="import_keyos_setting_to_storage">นำเข้าการตั้งค่า keyOS ไปยังที่เก็บข้อมูล</string>
+    <string name="recovery_email">อีเมลกู้คืน</string>
+    <string name="old_password">รหัสผ่านเก่า</string>
+    <string name="confirm_password">ยืนยันรหัสผ่าน</string>
+    <string name="allow_calls">อนุญาตให้โทร</string>
+    <string name="incoming">ขาเข้า</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">วิธีนี้จะอนุญาตให้มีสายเรียกเข้าทั้งหมดไปยังมือถือของคุณ</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">วิธีนี้จะอนุญาตให้โทรออกทั้งหมดไปยังมือถือของคุณ</string>
+    <string name="whitelist_contacts">รายชื่อติดต่อที่อนุญาต</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">รายชื่อติดต่อบันทึกภายใต้รายการที่อนุญาตเท่านั้นที่สามารถโทรหาคุณได้</string>
+    <string name="blacklist_contacts">ผู้ติดต่อบัญชีดำ</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"รายชื่อติดต่อที่บันทึกไว้ในบัญชีดำจะไม่สามารถโทรหาคุณได้"</string>
+    <string name="automatic_whitelist">รายการที่อนุญาตอัตโนมัติ</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">อนุญาตการโทรหากมีรายชื่อติดต่อในสมุดโทรศัพท์</string>
+    <string name="additional">เพิ่มเติม</string>
+    <string name="whitelist_amp_blacklist">บัญชีดำรายการที่อนุญาต</string>
+    <string name="phone_book">สมุดโทรศัพท์</string>
+    <string name="import_amp_export_settings">นำเข้าการตั้งค่าการส่งออก</string>
+    <string name="services">บริการ</string>
+    <string name="single_app">แอพเดียว</string>
+    <string name="apps_amp_services">บริการแอพ</string>
+    <string name="peripheral">อุปกรณ์ต่อพ่วง</string>
+    <string name="advance">ล่วงหน้า</string>
+    <string name="disable_camera">ปิดการใช้งานกล้อง</string>
+    <string name="call_settings">การตั้งค่าการโทร</string>
+    <string name="web_filter">ตัวกรองเว็บ</string>
+    <string name="screen_saver">โปรแกรมรักษาหน้าจอ</string>
+    <string name="phone_settings">การตั้งค่าโทรศัพท์</string>
+    <string name="notification_panel">แผงการแจ้งเตือน</string>
+    <string name="security">ความปลอดภัย</string>
+    <string name="launch">เปิด</string>
+    <string name="phone_call_subheading">หากคุณประสบปัญหาในการโทรโปรดอนุญาตบริการทั้งหมดที่เกี่ยวข้องกับการโทร</string>
+    <string name="phone_call_subheading_hint">คำใบ้: ค้นหาโทรศัพท์ในส่วนบริการ</string>
+    <string name="web_filter_subheading">ตัวกรองเว็บเป็นบริการที่มีประสิทธิภาพซึ่งช่วยให้คุณสามารถบล็อกเว็บไซต์ที่ไม่ต้องการได้</string>
+    <string name="web_filter_supported_browsers">เบราว์เซอร์ที่รองรับ: chrome, firefox, brace, edge, opera, duckduckgo</string>
+    <string name="off">ปิด</string>
+    <string name="whitelist_websites">เว็บไซต์ที่อนุญาตพิเศษ</string>
+    <string name="whitelist_website_info">เว็บไซต์บันทึกภายใต้รายการที่อนุญาตเท่านั้นที่สามารถเข้าถึงได้โดยเบราว์เซอร์</string>
+    <string name="blacklist_websites">เว็บไซต์บัญชีดำ</string>
+    <string name="blacklist_websites_info">"เว็บไซต์ที่ถูกบันทึกภายใต้บัญชีดำจะไม่สามารถเข้าถึงได้โดยเบราว์เซอร์"</string>
+    <string name="block_adult_websites">บล็อกเว็บไซต์สำหรับผู้ใหญ่</string>
+    <string name="adult_websites_info">การดำเนินการนี้จะบล็อกเว็บไซต์สำหรับผู้ใหญ่ 800 เว็บไซต์โดยอัตโนมัติ</string>
+    <string name="whitelist">รายการที่อนุญาต</string>
+    <string name="add_websites">เพิ่มเว็บไซต์</string>
+    <string name="website">เว็บไซต์</string>
+    <string name="add_websites_subheading">โปรดป้อนเว็บไซต์ที่คุณต้องการเพิ่มในรายการที่อนุญาตเช่น www.google.com</string>
+    <string name="otp_verification">การตรวจสอบ Otp</string>
+    <string name="otp_verification_subheading">กรุณากรอก otp 4 หลักที่เราส่งไปยังที่อยู่อีเมลที่คุณลงทะเบียนไว้</string>
+    <string name="password_prompt_subheading">"หากคุณยังไม่ได้เปลี่ยนรหัสผ่านโปรดลอง 1234"</string>
+    <string name="forget">ลืม?</string>
+    <string name="user_agreement">ข้อตกลงการใช้</string>
+    <string name="user_agreement_2">เราจะจัดเก็บรายการแอพและหมายเลขโทรศัพท์ที่ติดตั้งไว้ในอุปกรณ์ของคุณ ข้อมูลนี้จะนำมาจากอุปกรณ์ของคุณก็ต่อเมื่อคุณใช้คุณสมบัติ QrCode และข้อมูลนี้จะถูกลบออกจากเซิร์ฟเวอร์โดยอัตโนมัติภายในหนึ่งชั่วโมง</string>
+    <string name="no_thanks">ไม่เป็นไรขอบคุณ</string>
+    <string name="accept_amp_continue">ยอมรับ</string>
+    <string name="usage_access">การเข้าถึงการใช้งาน</string>
+    <string name="overlay">ซ้อนทับ</string>
+    <string name="write_settings">เขียนการตั้งค่า</string>
+    <string name="sound_access">การเข้าถึงเสียง</string>
+    <string name="other_permissions">สิทธิ์อื่น ๆ</string>
+    <string name="accessibility">การเข้าถึง</string>
+    <string name="device_id">ID อุปกรณ์</string>
+    <string name="feedback_amp_suggestions">ข้อเสนอแนะ</string>
+    <string name="quick_survey">สำรวจด่วน</string>
+    <string name="bug_report">รายงานข้อบกพร่อง</string>
+    <string name="visit">เยี่ยมชม</string>
+    <string name="rate">ประเมินค่า</string>
+    <string name="share">แบ่งปัน</string>
+    <string name="app_info">ข้อมูลแอป</string>
+    <string name="check_for_update">ตรวจสอบสำหรับการปรับปรุง</string>
+    <string name="developer_contact">ติดต่อผู้พัฒนา</string>
+    <string name="terms_amp_conditions">เงื่อนไข</string>
+    <string name="privacy_policy">นโยบายความเป็นส่วนตัว</string>
+    <string name="outgoing">ขาออก</string>
+    <string name="always_on">บน</string>
+    <string name="always_off">ปิด</string>
+    <string name="dont_care">"ไม่สนใจ"</string>
+    <string name="landscape">ภูมิทัศน์</string>
+    <string name="portrait">แนวตั้ง</string>
+    <string name="silent">เงียบ</string>
+    <string name="normal">ปกติ</string>
+    <string name="select_activity_sunHeading">เลือกกิจกรรม /เพจ /หน้าต่างที่คุณต้องการบล็อก</string>
+    <string name="apps">แอป</string>
+    <string name="whitelist_apps">แอปที่อนุญาตพิเศษ</string>
+    <string name="whitelist_services">บริการที่อนุญาตพิเศษ</string>
+    <string name="whitelist_apps_subheading">"เลือกแอปที่คุณต้องการเข้าถึง"</string>
+    <string name="whitelist_service_heading">"เลือกบริการที่คุณต้องการให้เข้าถึง"</string>
+    <string name="single_app_subheading">"เลือกแอปที่คุณต้องการให้ใช้งานเบื้องหน้า"</string>
+    <string name="blacklist">บัญชีดำ</string>
+    <string name="contacts_blacklist_subheading">"ผู้ติดต่อที่บันทึกไว้ในบัญชีดำจะไม่สามารถโทรเข้าโทรศัพท์ Android ของคุณได้อีกต่อไป"</string>
+    <string name="contacts_whitelist_subheading">ผู้ติดต่อที่บันทึกไว้ในรายการที่อนุญาตเท่านั้นที่สามารถโทรเข้าโทรศัพท์ Android ของคุณได้อีกต่อไป</string>
+    <string name="delete">ลบ</string>
+    <string name="delete_contact_subheading">แน่ใจไหมว่าต้องการลบรายการนี้</string>
+    <string name="invalid_name">ชื่อไม่ถูกต้อง</string>
+    <string name="invalid_number">หมายเลขไม่ถูกต้อง</string>
+    <string name="hours">ชั่วโมง</string>
+    <string name="minutes">นาที</string>
+    <string name="file_exported_to">ไฟล์ที่ส่งออกไปยัง</string>
+    <string name="select_a_file_to_upload">เลือกไฟล์ที่จะอัปโหลด</string>
+    <string name="please_install_a_file_manager">โปรดติดตั้งตัวจัดการไฟล์</string>
+    <string name="invalid_backup_file">ไฟล์สำรองไม่ถูกต้อง</string>
+    <string name="imported_successfully">นำเข้าเรียบร้อยแล้ว</string>
+    <string name="password_successfully_send">ส่งรหัสผ่านไปยังที่อยู่อีเมลของคุณเรียบร้อยแล้ว</string>
+    <string name="password_recovery_failed">การกู้คืนรหัสผ่านล้มเหลว</string>
+    <string name="recovery_email_not_registered">ไม่ได้ลงทะเบียนอีเมลสำรอง</string>
+    <string name="change_your">เปลี่ยนไฟล์</string>
+    <string name="forgot_caps">ลืม?</string>
+    <string name="password_successfully_changed">เปลี่ยนรหัสผ่านของคุณสำเร็จแล้ว</string>
+    <string name="invalid_email_address">ที่อยู่อีเมลที่ไม่ถูกต้อง</string>
+    <string name="password_min">รหัสผ่านต้องมีอักขระอย่างน้อย 8 ตัว</string>
+    <string name="old_password_must_not_new">รหัสผ่านเก่าต้องไม่ใช่รหัสผ่านใหม่</string>
+    <string name="password_not_match">รหัสผ่านไม่ตรงกัน</string>
+    <string name="invalid_old_pasword">รหัสผ่านเก่าไม่ถูกต้อง</string>
+    <string name="phonebook_blacklist_subheading">"เลือกผู้ติดต่อที่คุณต้องการเพิ่มในบัญชีดำ"</string>
+    <string name="phonebook_whitelist_subheading">"เลือกผู้ติดต่อที่คุณต้องการเพิ่มในรายการที่อนุญาตพิเศษ"</string>
+    <string name="camera_not_init">ข้อผิดพลาดในการเริ่มต้นกล้อง:</string>
+    <string name="please_wait">โปรดรอ</string>
+    <string name="invalid_qr">QrCode ไม่ถูกต้อง!</string>
+    <string name="successfully_done">สำเร็จแล้ว!</string>
+    <string name="on_caps">บน</string>
+    <string name="off_caps">ปิด</string>
+    <string name="webfilter_blacklist_subheading">"เว็บไซต์ที่ถูกบันทึกภายใต้บัญชีดำจะไม่สามารถเข้าถึงได้โดยเบราว์เซอร์"</string>
+    <string name="webfilter_whitelist_subheading">เว็บไซต์บันทึกภายใต้รายการที่อนุญาตเท่านั้นที่สามารถเข้าถึงได้โดยเบราว์เซอร์</string>
+    <string name="dialog_website_blacklist_subheading">โปรดป้อนเว็บไซต์ที่คุณต้องการเพิ่มในบัญชีดำเช่น www.google.com</string>
+    <string name="dialog_website_white_subheading">โปรดป้อนเว็บไซต์ที่คุณต้องการเพิ่มในรายการที่อนุญาตเช่น www.google.com</string>
+    <string name="invalid_url">URL ไม่ถูกต้อง</string>
+    <string name="invalid_otp">Otp ไม่ถูกต้อง</string>
+    <string name="user_agreement_1">เพื่อปรับปรุง KeyOS และตรวจสอบว่าฟีเจอร์ทั้งหมดทำงานอย่างถูกต้องข้อมูลการใช้งานบางส่วนของคุณจะถูกรวบรวมโดยไม่ระบุตัวตน คุณต้องอ่านและยอมรับนโยบายความเป็นส่วนตัวและข้อกำหนดของเรา ก่อนใช้ KeyOS</string>
+    <string name="select_all">เลือกทั้งหมด</string>
+    <string name="initializing_desktop">กำลังเริ่มต้นเดสก์ท็อป …</string>
+    <string name="loading_settings">กำลังโหลดการตั้งค่า</string>
+    <string name="exiting_keyos">กำลังออก</string>
+    <string name="dialog_qrcode_subheading">สแกนรหัส KeyOS Qr นี้เพื่อใช้การตั้งค่าเดียวกันในอุปกรณ์ KeyOS ของคุณ</string>
+
+
 </resources>
