--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -140,4 +140,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Bildirimler ve uygulamalar kapalı"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Kapat"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Kapalı"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Kiosk\'tan Çık</string>
+    <string name="button_overview_mode">Genel Bakış Modu</string>
+    <string name="password">Parola</string>
+    <string name="activities">Aktiviteler</string>
+    <string name="cancel">İptal etmek</string>
+    <string name="done">Bitti</string>
+    <string name="phoneBook">Telefon rehberi</string>
+    <string name="manual">Manuel</string>
+    <string name="create_new">Yeni oluşturmak</string>
+    <string name="contact">İletişim</string>
+    <string name="name">İsim</string>
+    <string name="number">Numara</string>
+    <string name="hide_icon">Simgeyi gizle</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">başlatıcı /kısayol simgesini KeyOS ana sayfasından gizle</string>
+    <string name="block_activities">Aktiviteleri Engelle</string>
+    <string name="block_unwanted_pages_activities_windows">İstenmeyen sayfaları /etkinlikleri /pencereleri engelleyin</string>
+    <string name="time_limit">Zaman sınırı</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Zamanlama kısıtlamasını ayarlayın Örn. Günde 1 saat</string>
+    <string name="system_settings">Sistem ayarları</string>
+    <string name="restrictions">Kısıtlamalar</string>
+    <string name="edit_app">Uygulamayı Düzenle</string>
+    <string name="import_amp_export">İthalat ihracat</string>
+    <string name="scan">Tarama</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Aynı ayar politikasını uygulamak için keyOS qr kodunu tarayın</string>
+    <string name="generate">Oluştur</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode oluştur</string>
+    <string name="import_text">İthalat</string>
+    <string name="import_keyos_setting_from_storage">KeyOS ayarını depodan içe aktar</string>
+    <string name="export_text">İhracat</string>
+    <string name="import_keyos_setting_to_storage">KeyOS ayarını depolamaya aktar</string>
+    <string name="recovery_email">Kurtarma Postası</string>
+    <string name="old_password">eski şifre</string>
+    <string name="confirm_password">Şifreyi Onayla</string>
+    <string name="allow_calls">Aramalara İzin Ver</string>
+    <string name="incoming">Gelen</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Bu, cep telefonunuza gelen tüm aramalara izin verecektir</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Bu, cep telefonunuza giden tüm aramalara izin verecektir</string>
+    <string name="whitelist_contacts">Kişileri Beyaz Listeye Ekleyin</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Beyaz listeye kaydedilen kişiler yalnızca sizi arayabilir</string>
+    <string name="blacklist_contacts">Kara Liste Kişileri</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Kara listeye kaydedilen kişiler sizi arayamayacak"</string>
+    <string name="automatic_whitelist">Otomatik beyaz liste</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Kişi telefon rehberinde mevcutsa aramalara izin ver</string>
+    <string name="additional">Ek</string>
+    <string name="whitelist_amp_blacklist">Beyaz liste kara listesi</string>
+    <string name="phone_book">Telefon rehberi</string>
+    <string name="import_amp_export_settings">Dışa aktarma ayarlarını içe aktar</string>
+    <string name="services">Hizmetler</string>
+    <string name="single_app">Tek Uygulama</string>
+    <string name="apps_amp_services">Uygulama Hizmetleri</string>
+    <string name="peripheral">Çevresel</string>
+    <string name="advance">İlerlemek</string>
+    <string name="disable_camera">Kamerayı Devre Dışı Bırak</string>
+    <string name="call_settings">Çağrı ayarları</string>
+    <string name="web_filter">Web Filtresi</string>
+    <string name="screen_saver">Ekran koruyucusu</string>
+    <string name="phone_settings">Telefon ayarları</string>
+    <string name="notification_panel">Bildirim paneli</string>
+    <string name="security">Güvenlik</string>
+    <string name="launch">Başlatmak</string>
+    <string name="phone_call_subheading">Arama yapmakta herhangi bir sorunla karşılaşırsanız lütfen telefon görüşmesi ile ilgili tüm hizmetlere izin verin</string>
+    <string name="phone_call_subheading_hint">ipucu: Servis bölümünde telefon arayın</string>
+    <string name="web_filter_subheading">Web filtresi, istenmeyen web sitelerini engellemenizi sağlayan güçlü bir hizmettir</string>
+    <string name="web_filter_supported_browsers">Desteklenen tarayıcılar: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">Kapalı</string>
+    <string name="whitelist_websites">Web Sitelerini Beyaz Listeye Ekleyin</string>
+    <string name="whitelist_website_info">Beyaz listeye kaydedilen web siteleri yalnızca tarayıcıyla erişebilir</string>
+    <string name="blacklist_websites">Kara Liste Web Siteleri</string>
+    <string name="blacklist_websites_info">"Kara listeye kaydedilen web siteleri tarayıcıdan erişemeyecek"</string>
+    <string name="block_adult_websites">Yetişkinlere yönelik web sitelerini engelle</string>
+    <string name="adult_websites_info">Bu, 800 yetişkin web sitesini otomatik olarak engeller</string>
+    <string name="whitelist">Beyaz liste</string>
+    <string name="add_websites">Web sitesi ekle</string>
+    <string name="website">İnternet sitesi</string>
+    <string name="add_websites_subheading">Lütfen beyaz listeye eklemek istediğiniz web sitesini girin Örneğin: www.google.com</string>
+    <string name="otp_verification">Otp Doğrulaması</string>
+    <string name="otp_verification_subheading">Lütfen kayıtlı e-posta adresinize gönderdiğimiz 4 haneli otp\'yi girin</string>
+    <string name="password_prompt_subheading">"şifrenizi henüz değiştirmediyseniz lütfen 1234\'ü deneyin"</string>
+    <string name="forget">unutmak ?</string>
+    <string name="user_agreement">Kullanıcı Sözleşmesi</string>
+    <string name="user_agreement_2">Yüklü uygulama listesini ve telefon numarasını cihazınızda saklayacağız. Bu veriler, yalnızca QrCode özelliğini kullanıyorsanız cihazınızdan alınacak ve bu veriler bir saat içinde sunucudan otomatik olarak kaldırılacaktır.</string>
+    <string name="no_thanks">Hayır teşekkürler</string>
+    <string name="accept_amp_continue">Kabul etmek</string>
+    <string name="usage_access">Kullanım Erişimi</string>
+    <string name="overlay">Kaplama</string>
+    <string name="write_settings">Yazma Ayarları</string>
+    <string name="sound_access">Ses Erişimi</string>
+    <string name="other_permissions">Diğer İzinler</string>
+    <string name="accessibility">Ulaşılabilirlik</string>
+    <string name="device_id">Cihaz kimliği</string>
+    <string name="feedback_amp_suggestions">öneriler</string>
+    <string name="quick_survey">Hızlı Anket</string>
+    <string name="bug_report">Hata raporu</string>
+    <string name="visit">Ziyaret etmek</string>
+    <string name="rate">Oranı</string>
+    <string name="share">Paylaş</string>
+    <string name="app_info">Uygulama bilgisi</string>
+    <string name="check_for_update">Güncellemeleri kontrol ediniz</string>
+    <string name="developer_contact">Geliştirici kişisi</string>
+    <string name="terms_amp_conditions">Koşullar</string>
+    <string name="privacy_policy">Gizlilik Politikası</string>
+    <string name="outgoing">Dışa dönük</string>
+    <string name="always_on">açık</string>
+    <string name="always_off">kapalı</string>
+    <string name="dont_care">"Umurumda değil"</string>
+    <string name="landscape">Manzara</string>
+    <string name="portrait">Vesika</string>
+    <string name="silent">Sessiz</string>
+    <string name="normal">Normal</string>
+    <string name="select_activity_sunHeading">Engellemek istediğiniz etkinlikleri /Sayfaları /pencereleri seçin</string>
+    <string name="apps">Uygulamalar</string>
+    <string name="whitelist_apps">Beyaz Liste Uygulamaları</string>
+    <string name="whitelist_services">Beyaz Liste Hizmetleri</string>
+    <string name="whitelist_apps_subheading">"Erişmek istediğiniz uygulamaları seçin"</string>
+    <string name="whitelist_service_heading">"Erişim vermek istediğiniz hizmetleri seçin"</string>
+    <string name="single_app_subheading">"Ön planda kullanılmasını istediğiniz uygulamayı seçin"</string>
+    <string name="blacklist">Kara liste</string>
+    <string name="contacts_blacklist_subheading">"Kara Liste altına kaydedilen kişiler artık Android telefonunuzu arayamayacak"</string>
+    <string name="contacts_whitelist_subheading">Beyaz Liste altına kaydedilen kişiler artık yalnızca Android telefonunuzu arayabilir</string>
+    <string name="delete">Sil</string>
+    <string name="delete_contact_subheading">Bu öğeleri silmek istediğinizden emin misiniz</string>
+    <string name="invalid_name">Geçersiz isim</string>
+    <string name="invalid_number">Geçersiz numara</string>
+    <string name="hours">Saatler</string>
+    <string name="minutes">Dakika</string>
+    <string name="file_exported_to">Dosya dışa aktarıldı</string>
+    <string name="select_a_file_to_upload">Yüklenecek Dosyayı Seçin</string>
+    <string name="please_install_a_file_manager">Lütfen bir Dosya Yöneticisi kurun.</string>
+    <string name="invalid_backup_file">Geçersiz yedekleme dosyası</string>
+    <string name="imported_successfully">Başarıyla İçe Aktarıldı</string>
+    <string name="password_successfully_send">Şifre e-posta adresinize başarıyla gönderildi</string>
+    <string name="password_recovery_failed">Şifre kurtarma başarısız oldu</string>
+    <string name="recovery_email_not_registered">Kurtarma e-postası kayıtlı değil</string>
+    <string name="change_your">Değiştir</string>
+    <string name="forgot_caps">Unuttun ?</string>
+    <string name="password_successfully_changed">Şifreniz başarıyla değiştirildi</string>
+    <string name="invalid_email_address">Geçersiz e-posta adresi</string>
+    <string name="password_min">Parola en az 8 karakter içermelidir</string>
+    <string name="old_password_must_not_new">Eski şifre yeni şifre olmamalıdır</string>
+    <string name="password_not_match">Şifre eşleşmiyor</string>
+    <string name="invalid_old_pasword">Geçersiz eski şifre</string>
+    <string name="phonebook_blacklist_subheading">"Kara listeye eklemek istediğiniz kişileri seçin"</string>
+    <string name="phonebook_whitelist_subheading">"Beyaz listeye eklemek istediğiniz kişileri seçin"</string>
+    <string name="camera_not_init">Kamera başlatma hatası:</string>
+    <string name="please_wait">Lütfen bekle</string>
+    <string name="invalid_qr">Geçersiz QrCode!</string>
+    <string name="successfully_done">Başarıyla tamamlandı!</string>
+    <string name="on_caps">AÇIK</string>
+    <string name="off_caps">KAPALI</string>
+    <string name="webfilter_blacklist_subheading">"Kara listeye kaydedilen web siteleri tarayıcıdan erişemeyecek"</string>
+    <string name="webfilter_whitelist_subheading">Beyaz listeye kaydedilen web siteleri yalnızca tarayıcıyla erişebilir</string>
+    <string name="dialog_website_blacklist_subheading">Lütfen kara listeye eklemek istediğiniz web sitesini girin Ör: www.google.com</string>
+    <string name="dialog_website_white_subheading">Lütfen beyaz listeye eklemek istediğiniz web sitesini girin Örneğin: www.google.com</string>
+    <string name="invalid_url">Geçersiz URL</string>
+    <string name="invalid_otp">Geçersiz Otp</string>
+    <string name="user_agreement_1">KeyOS\'u iyileştirmek ve tüm özelliklerin düzgün çalıştığından emin olmak için, kullanım verilerinizin bir kısmı anonim olarak toplanacaktır. Gizlilik Politikamızı ve Şartlarımızı okumalı ve kabul etmelisiniz. KeyOS kullanmadan önce</string>
+    <string name="select_all">Hepsini seç</string>
+    <string name="initializing_desktop">Masaüstü başlatılıyor…</string>
+    <string name="loading_settings">Ayarlar yükleniyor</string>
+    <string name="exiting_keyos">Çıkılıyor</string>
+    <string name="dialog_qrcode_subheading">KeyOS cihazınızda aynı ayarları uygulamak için bu KeyOS Qr kodunu tarayın</string>
+
+
 </resources>
