--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -139,4 +139,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Bildirishnomalar va ilovalar faol emas"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Yopish"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Yopiq"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Kioskdan chiqing</string>
+    <string name="button_overview_mode">Umumiy ko\'rish rejimi</string>
+    <string name="password">Parol</string>
+    <string name="activities">Faoliyat</string>
+    <string name="cancel">Bekor qilish</string>
+    <string name="done">Bajarildi</string>
+    <string name="phoneBook">Telefon kitobi</string>
+    <string name="manual">Qo\'lda</string>
+    <string name="create_new">Yangisini yarating</string>
+    <string name="contact">Aloqa</string>
+    <string name="name">Ism</string>
+    <string name="number">Raqam</string>
+    <string name="hide_icon">Belgini yashirish</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ishga tushirish /yorliq belgisini KeyOS uyidan yashirish</string>
+    <string name="block_activities">Faoliyatni bloklash</string>
+    <string name="block_unwanted_pages_activities_windows">Kiruvchi sahifalarni /tadbirlarni /oynalarni bloklash</string>
+    <string name="time_limit">Vaqt chegarasi</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Vaqt cheklovini o\'rnating Masalan. Kuniga 1 soat</string>
+    <string name="system_settings">Tizim sozlamalari</string>
+    <string name="restrictions">Cheklovlar</string>
+    <string name="edit_app">Ilovani tahrirlash</string>
+    <string name="import_amp_export">Import eksporti</string>
+    <string name="scan">Skanerlash</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Xuddi shu sozlamalar siyosatini qo\'llash uchun keyOS qr kodini skanerlang</string>
+    <string name="generate">Yarating</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode yaratish</string>
+    <string name="import_text">Import</string>
+    <string name="import_keyos_setting_from_storage">KeyOS sozlamalarini saqlash joyidan import qiling</string>
+    <string name="export_text">Eksport</string>
+    <string name="import_keyos_setting_to_storage">KeyOS sozlamalarini saqlashga import qiling</string>
+    <string name="recovery_email">Qutqaruvchi elektron pochta</string>
+    <string name="old_password">eski parol</string>
+    <string name="confirm_password">Parolni tasdiqlang</string>
+    <string name="allow_calls">Qo\'ng\'iroqlarga ruxsat berish</string>
+    <string name="incoming">Kiruvchi</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Bu sizning mobil telefoningizga barcha kiruvchi qo\'ng\'iroqlarni amalga oshirishga imkon beradi</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Bu sizning mobil telefoningizga barcha chiquvchi qo\'ng\'iroqlarni amalga oshirishga imkon beradi</string>
+    <string name="whitelist_contacts">Kontaktlarni oq ro\'yxatiga kiritish</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Kontaktlar faqat sizga qo\'ng\'iroq qilish uchun oq ro\'yxat ostida saqlanadi</string>
+    <string name="blacklist_contacts">Qora ro\'yxatdagi aloqalar</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Qora ro\'yxat bo\'yicha saqlangan kontaktlar sizga qo\'ng\'iroq qila olmaydi"</string>
+    <string name="automatic_whitelist">Avtomatik oq ro\'yxat</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Agar telefon kitobida aloqa mavjud bo\'lsa, qo\'ng\'iroqlarga ruxsat bering</string>
+    <string name="additional">Qo\'shimcha</string>
+    <string name="whitelist_amp_blacklist">Oq ro\'yxatdagi qora ro\'yxat</string>
+    <string name="phone_book">Telefon kitobi</string>
+    <string name="import_amp_export_settings">Eksport sozlamalarini import qilish</string>
+    <string name="services">Xizmatlar</string>
+    <string name="single_app">Yagona ilova</string>
+    <string name="apps_amp_services">Ilovalar xizmatlari</string>
+    <string name="peripheral">Periferik</string>
+    <string name="advance">Oldindan</string>
+    <string name="disable_camera">Kamerani o\'chirib qo\'ying</string>
+    <string name="call_settings">Qo\'ng\'iroq sozlamalari</string>
+    <string name="web_filter">Veb-filtr</string>
+    <string name="screen_saver">Ekran saqlovchi</string>
+    <string name="phone_settings">Telefon sozlamalari</string>
+    <string name="notification_panel">Bildirishnoma paneli</string>
+    <string name="security">Xavfsizlik</string>
+    <string name="launch">Ishga tushirish</string>
+    <string name="phone_call_subheading">Agar siz qo\'ng\'iroq qilishda muammoga duch kelsangiz, iltimos, telefon qo\'ng\'irog\'i bilan bog\'liq barcha xizmatlarga ruxsat bering</string>
+    <string name="phone_call_subheading_hint">Maslahat: Xizmat bo\'limida telefonni qidiring</string>
+    <string name="web_filter_subheading">Veb-filtr - bu istalmagan veb-saytlarni blokirovka qilishga imkon beruvchi kuchli xizmat</string>
+    <string name="web_filter_supported_browsers">Qo\'llab-quvvatlanadigan brauzerlar: xrom, firefox, jasur, chekka, opera, duckduckgo</string>
+    <string name="off">O\'chirilgan</string>
+    <string name="whitelist_websites">Oq ro\'yxatdagi veb-saytlar</string>
+    <string name="whitelist_website_info">Veb-saytlar faqat brauzer orqali kirish imkoniyatiga ega bo\'lgan oq ro\'yxat ostida saqlanadi</string>
+    <string name="blacklist_websites">Qora ro\'yxatdagi veb-saytlar</string>
+    <string name="blacklist_websites_info">"Qora ro\'yxatdagi veb-saytlarga brauzer orqali kirish imkoni bo\'lmaydi"</string>
+    <string name="block_adult_websites">Voyaga etganlarning veb-saytlarini bloklash</string>
+    <string name="adult_websites_info">Bu 800 ta kattalar veb-saytlarini avtomatik ravishda blokirovka qiladi</string>
+    <string name="whitelist">Oq ro\'yxat</string>
+    <string name="add_websites">Veb-sayt qo\'shish</string>
+    <string name="website">Veb-sayt</string>
+    <string name="add_websites_subheading">Iltimos, oq ro\'yxatga qo\'shmoqchi bo\'lgan veb-saytga kiring Masalan: www.google.com</string>
+    <string name="otp_verification">Otp tekshiruvi</string>
+    <string name="otp_verification_subheading">Iltimos, biz ro\'yxatdan o\'tgan elektron pochta manzilingizga yuborgan 4 xonali otpni kiriting</string>
+    <string name="password_prompt_subheading">"agar siz hali parolingizni o\'zgartirmagan bo\'lsangiz, iltimos, 1234 raqamini sinab ko\'ring."</string>
+    <string name="forget">unutdingizmi?</string>
+    <string name="user_agreement">Foydalanuvchi shartnomasi</string>
+    <string name="user_agreement_2">O\'rnatilgan dastur va telefon raqamlarini qurilmangizda saqlaymiz. Ushbu ma\'lumotlar sizning qurilmangizdan faqat QrCode xususiyatidan foydalanganingizda olinadi va ushbu ma\'lumotlar serverdan bir soat ichida avtomatik ravishda o\'chiriladi</string>
+    <string name="no_thanks">Yo\'q, rahmat</string>
+    <string name="accept_amp_continue">Qabul qiling</string>
+    <string name="usage_access">Foydalanishga kirish</string>
+    <string name="overlay">Qatlam</string>
+    <string name="write_settings">Sozlamalarni yozing</string>
+    <string name="sound_access">Ovozga kirish</string>
+    <string name="other_permissions">Boshqa ruxsatnomalar</string>
+    <string name="accessibility">Kirish imkoniyati</string>
+    <string name="device_id">Qurilma identifikatori</string>
+    <string name="feedback_amp_suggestions">takliflar</string>
+    <string name="quick_survey">Tez so\'rov</string>
+    <string name="bug_report">Xatoliklar haqida hisobot</string>
+    <string name="visit">Tashrif</string>
+    <string name="rate">Tezlik</string>
+    <string name="share">Baham ko\'ring</string>
+    <string name="app_info">Ilova haqida ma\'lumot</string>
+    <string name="check_for_update">Yangilashni tekshiring</string>
+    <string name="developer_contact">Tuzuvchi bilan aloqa</string>
+    <string name="terms_amp_conditions">Shartlar</string>
+    <string name="privacy_policy">Maxfiylik siyosati</string>
+    <string name="outgoing">Chiqish</string>
+    <string name="always_on">kuni</string>
+    <string name="always_off">yopiq</string>
+    <string name="dont_care">"Parvo qilma"</string>
+    <string name="landscape">Landshaft</string>
+    <string name="portrait">Portret</string>
+    <string name="silent">Jim</string>
+    <string name="normal">Oddiy</string>
+    <string name="select_activity_sunHeading">Bloklashni xohlagan tadbirlarni /Sahifalarni /oynalarni tanlang</string>
+    <string name="apps">Ilovalar</string>
+    <string name="whitelist_apps">Oq ro\'yxatdagi ilovalar</string>
+    <string name="whitelist_services">Oq ro\'yxat xizmatlari</string>
+    <string name="whitelist_apps_subheading">"Qaysi ilovalarga kirishni xohlayotganingizni tanlang"</string>
+    <string name="whitelist_service_heading">"Qaysi xizmatlarga kirishni xohlayotganingizni tanlang"</string>
+    <string name="single_app_subheading">"Oldingizda qaysi ilovani tanlashni tanlang"</string>
+    <string name="blacklist">Qora ro\'yxat</string>
+    <string name="contacts_blacklist_subheading">"Qora ro\'yxat bo\'yicha saqlangan kontaktlar endi Android telefoningizga qo\'ng\'iroq qila olmaydi"</string>
+    <string name="contacts_whitelist_subheading">Oq ro\'yxat ostida saqlangan kontaktlar endi faqat Android telefoningizga qo\'ng\'iroq qilish imkoniyatiga ega</string>
+    <string name="delete">O\'chirish</string>
+    <string name="delete_contact_subheading">Ushbu elementlarni o\'chirishni xohlaysizmi?</string>
+    <string name="invalid_name">Ism noto‘g‘ri</string>
+    <string name="invalid_number">Raqam yaroqsiz</string>
+    <string name="hours">Soatlar</string>
+    <string name="minutes">Daqiqalar</string>
+    <string name="file_exported_to">Fayl eksport qilindi</string>
+    <string name="select_a_file_to_upload">Yuklash uchun faylni tanlang</string>
+    <string name="please_install_a_file_manager">Iltimos, fayl menejerini o\'rnating.</string>
+    <string name="invalid_backup_file">Fayl yaroqsiz</string>
+    <string name="imported_successfully">Muvaffaqiyatli ravishda import qilindi</string>
+    <string name="password_successfully_send">Parol elektron pochta manzilingizga muvaffaqiyatli yuborildi</string>
+    <string name="password_recovery_failed">Parolni tiklash amalga oshmadi</string>
+    <string name="recovery_email_not_registered">Muqobil elektron pochta ro\'yxatdan o\'tmagan</string>
+    <string name="change_your">O\'zingizni o\'zgartiring</string>
+    <string name="forgot_caps">Unutdingizmi?</string>
+    <string name="password_successfully_changed">Parolingiz muvaffaqiyatli o\'zgartirildi</string>
+    <string name="invalid_email_address">Elektron pochta manzili noto‘g‘ri</string>
+    <string name="password_min">Parol min 8 belgidan iborat bo\'lishi kerak</string>
+    <string name="old_password_must_not_new">Eski parol yangi parol bo\'lmasligi kerak</string>
+    <string name="password_not_match">Parol mos kelmadi</string>
+    <string name="invalid_old_pasword">Eski parol yaroqsiz</string>
+    <string name="phonebook_blacklist_subheading">"Qora ro\'yxatga qaysi kontaktlarni qo\'shishni tanlang"</string>
+    <string name="phonebook_whitelist_subheading">"Qaysi kontaktlarni oq ro\'yxatga qo\'shishni tanlang"</string>
+    <string name="camera_not_init">Kamerani ishga tushirish xatosi:</string>
+    <string name="please_wait">Iltimos kuting</string>
+    <string name="invalid_qr">Noto\'g\'ri QrCode!</string>
+    <string name="successfully_done">Muvaffaqiyatli bajarildi!</string>
+    <string name="on_caps">YOQDI</string>
+    <string name="off_caps">O\'chirilgan</string>
+    <string name="webfilter_blacklist_subheading">"Qora ro\'yxatdagi veb-saytlarga brauzer orqali kirish imkoni bo\'lmaydi"</string>
+    <string name="webfilter_whitelist_subheading">Veb-saytlar faqat brauzer orqali kirish imkoniyatiga ega bo\'lgan oq ro\'yxat ostida saqlanadi</string>
+    <string name="dialog_website_blacklist_subheading">Iltimos, qora ro\'yxatga qo\'shmoqchi bo\'lgan veb-saytga kiring Masalan: www.google.com</string>
+    <string name="dialog_website_white_subheading">Iltimos, oq ro\'yxatga qo\'shmoqchi bo\'lgan veb-saytga kiring Masalan: www.google.com</string>
+    <string name="invalid_url">URL manzili yaroqsiz</string>
+    <string name="invalid_otp">Yaroqsiz Otp</string>
+    <string name="user_agreement_1">KeyOS-ni takomillashtirish va barcha funktsiyalarning to\'g\'ri ishlashiga ishonch hosil qilish uchun sizning ba\'zi ma\'lumotlaringiz noma\'lum holda to\'planadi. Siz bizning Maxfiylik siyosati va shartlarini o\'qib, rozilik bildirishingiz kerak. KeyOS-dan foydalanishdan oldin</string>
+    <string name="select_all">Hammasini belgilash</string>
+    <string name="initializing_desktop">Ish stoli ishga tushirilmoqda…</string>
+    <string name="loading_settings">Sozlamalar yuklanmoqda</string>
+    <string name="exiting_keyos">Chiqmoqda</string>
+    <string name="dialog_qrcode_subheading">KeyOS qurilmangizda bir xil sozlamalarni qo\'llash uchun ushbu KeyOS Qr kodini skanerlang</string>
+
+
 </resources>
