--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -140,4 +140,171 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Thông báo và ứng dụng đang tắt"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Đóng"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Đã đóng"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Kiosk thoát</string>
+    <string name="button_overview_mode">Chế độ Tổng quan</string>
+    <string name="password">Mật khẩu</string>
+    <string name="activities">Hoạt động</string>
+    <string name="cancel">Huỷ bỏ</string>
+    <string name="done">Làm xong</string>
+    <string name="phoneBook">Danh bạ điện thoại</string>
+    <string name="manual">Thủ công</string>
+    <string name="create_new">Tạo mới</string>
+    <string name="contact">Tiếp xúc</string>
+    <string name="name">Tên</string>
+    <string name="number">Con số</string>
+    <string name="hide_icon">Ẩn biểu tượng</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">ẩn biểu tượng trình khởi chạy /lối tắt khỏi trang chủ KeyOS</string>
+    <string name="block_activities">Chặn hoạt động</string>
+    <string name="block_unwanted_pages_activities_windows">Chặn các trang /hoạt động /cửa sổ không mong muốn</string>
+    <string name="time_limit">Thời gian giới hạn</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Đặt giới hạn thời gian Ví dụ: 1h mỗi ngày</string>
+    <string name="system_settings">Cài đặt hệ thống</string>
+    <string name="restrictions">Những hạn chế</string>
+    <string name="edit_app">Chỉnh sửa ứng dụng</string>
+    <string name="import_amp_export">Nhập khẩu xuất khẩu</string>
+    <string name="scan">Quét</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Quét mã qr keyOS để áp dụng chính sách cài đặt tương tự</string>
+    <string name="generate">Tạo</string>
+    <string name="generate_keyos_qr_code">Tạo mã QrCode keyOS</string>
+    <string name="import_text">Nhập khẩu</string>
+    <string name="import_keyos_setting_from_storage">Nhập cài đặt keyOS từ bộ nhớ</string>
+    <string name="export_text">Xuất khẩu</string>
+    <string name="import_keyos_setting_to_storage">Nhập cài đặt keyOS vào bộ nhớ</string>
+    <string name="recovery_email">Email khôi phục</string>
+    <string name="old_password">Mật khẩu cũ</string>
+    <string name="confirm_password">Xác nhận mật khẩu</string>
+    <string name="allow_calls">Cho phép cuộc gọi</string>
+    <string name="incoming">Mới đến</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Điều này sẽ cho phép tất cả các cuộc gọi đến di động của bạn</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Điều này sẽ cho phép tất cả các cuộc gọi đi đến điện thoại di động của bạn</string>
+    <string name="whitelist_contacts">Danh sách liên hệ cho phép</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Danh bạ lưu trong danh sách trắng chỉ có thể gọi cho bạn</string>
+    <string name="blacklist_contacts">Danh sách đen liên hệ</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Danh sách liên hệ được lưu trong danh sách đen sẽ không thể gọi cho bạn"</string>
+    <string name="automatic_whitelist">Danh sách trắng tự động</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Cho phép cuộc gọi nếu số liên lạc có trong danh bạ</string>
+    <string name="additional">Bổ sung</string>
+    <string name="whitelist_amp_blacklist">Danh sách đen danh sách trắng</string>
+    <string name="phone_book">Danh bạ điện thoại</string>
+    <string name="import_amp_export_settings">Nhập cài đặt xuất</string>
+    <string name="services">Dịch vụ</string>
+    <string name="single_app">Ứng dụng đơn</string>
+    <string name="apps_amp_services">Dịch vụ ứng dụng</string>
+    <string name="peripheral">Ngoại vi</string>
+    <string name="advance">Nâng cao</string>
+    <string name="disable_camera">Tắt máy ảnh</string>
+    <string name="call_settings">Cài đặt cuộc gọi</string>
+    <string name="web_filter">Bộ lọc Web</string>
+    <string name="screen_saver">Bảo vệ màn hình</string>
+    <string name="phone_settings">Cài đặt điện thoại</string>
+    <string name="notification_panel">Bảng thông báo</string>
+    <string name="security">Bảo vệ</string>
+    <string name="launch">Phóng</string>
+    <string name="phone_call_subheading">Nếu bạn gặp bất kỳ rắc rối nào khi thực hiện cuộc gọi, vui lòng cho phép tất cả các dịch vụ liên quan đến cuộc gọi điện thoại</string>
+    <string name="phone_call_subheading_hint">gợi ý: Tìm kiếm điện thoại trong phần dịch vụ</string>
+    <string name="web_filter_subheading">Bộ lọc web là một dịch vụ mạnh mẽ cho phép bạn chặn các trang web không mong muốn</string>
+    <string name="web_filter_supported_browsers">Các trình duyệt được hỗ trợ: chrome, firefox, dũng cảm, edge, opera, duckduckgo</string>
+    <string name="off">Tắt</string>
+    <string name="whitelist_websites">Danh sách trắng các trang web</string>
+    <string name="whitelist_website_info">Các trang web lưu dưới danh sách trắng chỉ có thể truy cập bằng trình duyệt</string>
+    <string name="blacklist_websites">Trang web danh sách đen</string>
+    <string name="blacklist_websites_info">"Các trang web được lưu trong danh sách đen sẽ không thể truy cập bằng trình duyệt"</string>
+    <string name="block_adult_websites">Chặn các trang web người lớn</string>
+    <string name="adult_websites_info">Điều này sẽ tự động chặn 800 trang web người lớn</string>
+    <string name="whitelist">Danh sách trắng</string>
+    <string name="add_websites">Thêm trang web</string>
+    <string name="website">Trang mạng</string>
+    <string name="add_websites_subheading">Vui lòng nhập trang web mà bạn muốn thêm vào danh sách trắng VD: www.google.com</string>
+    <string name="otp_verification">Xác minh Otp</string>
+    <string name="otp_verification_subheading">Vui lòng nhập otp 4 chữ số mà chúng tôi đã gửi đến địa chỉ email đã đăng ký của bạn</string>
+    <string name="password_prompt_subheading">"nếu bạn chưa thay đổi mật khẩu của mình, vui lòng thử 1234"</string>
+    <string name="forget">quên ?</string>
+    <string name="user_agreement">sự thỏa thuận của người dùng</string>
+    <string name="user_agreement_2">Chúng tôi sẽ lưu trữ danh sách ứng dụng đã cài đặt và số điện thoại trong thiết bị của bạn. Dữ liệu này sẽ chỉ được lấy từ thiết bị của bạn nếu bạn đang sử dụng tính năng QrCode và dữ liệu này sẽ tự động bị xóa khỏi máy chủ sau một giờ</string>
+    <string name="no_thanks">Không, cám ơn</string>
+    <string name="accept_amp_continue">Chấp nhận</string>
+    <string name="usage_access">Quyền truy cập sử dụng</string>
+    <string name="overlay">Lớp phủ</string>
+    <string name="write_settings">Viết Cài đặt</string>
+    <string name="sound_access">Truy cập âm thanh</string>
+    <string name="other_permissions">Các quyền khác</string>
+    <string name="accessibility">Khả năng tiếp cận</string>
+    <string name="device_id">ID thiết bị</string>
+    <string name="feedback_amp_suggestions">gợi ý</string>
+    <string name="quick_survey">Khảo sát nhanh</string>
+    <string name="bug_report">Báo cáo lỗi</string>
+    <string name="visit">Chuyến thăm</string>
+    <string name="rate">Tỷ lệ</string>
+    <string name="share">Chia sẻ</string>
+    <string name="app_info">Thông tin ứng dụng</string>
+    <string name="check_for_update">Kiểm tra cập nhật</string>
+    <string name="developer_contact">Liên hệ nhà phát triển</string>
+    <string name="terms_amp_conditions">Điều kiện</string>
+    <string name="privacy_policy">Chính sách bảo mật</string>
+    <string name="outgoing">Hướng ngoaị</string>
+    <string name="always_on">trên</string>
+    <string name="always_off">tắt</string>
+    <string name="dont_care">"Đừng quan tâm"</string>
+    <string name="landscape">Phong cảnh</string>
+    <string name="portrait">Chân dung</string>
+    <string name="silent">Im lặng</string>
+    <string name="normal">Bình thường</string>
+    <string name="select_activity_sunHeading">Chọn hoạt động /Trang /cửa sổ bạn muốn chặn</string>
+    <string name="apps">Ứng dụng</string>
+    <string name="whitelist_apps">Ứng dụng trong danh sách trắng</string>
+    <string name="whitelist_services">Dịch vụ danh sách trắng</string>
+    <string name="whitelist_apps_subheading">"Chọn những ứng dụng bạn muốn truy cập"</string>
+    <string name="whitelist_service_heading">"Chọn dịch vụ bạn muốn cấp quyền truy cập"</string>
+    <string name="single_app_subheading">"Chọn ứng dụng bạn muốn có sẵn ở nền trước"</string>
+    <string name="blacklist">Danh sách đen</string>
+    <string name="contacts_blacklist_subheading">"Các liên hệ được lưu trong Danh sách đen sẽ không thể gọi đến điện thoại Android của bạn nữa"</string>
+    <string name="contacts_whitelist_subheading">Các liên hệ được lưu trong Danh sách trắng chỉ có thể gọi đến điện thoại Android của bạn nữa</string>
+    <string name="delete">Xóa bỏ</string>
+    <string name="delete_contact_subheading">Bạn có chắc chắn muốn xóa các mục này không</string>
+    <string name="invalid_name">Tên không hợp lệ</string>
+    <string name="invalid_number">Số không hợp lệ</string>
+    <string name="hours">Giờ</string>
+    <string name="minutes">Phút</string>
+    <string name="file_exported_to">Tệp được xuất sang</string>
+    <string name="select_a_file_to_upload">Chọn một tệp để tải lên</string>
+    <string name="please_install_a_file_manager">Vui lòng cài đặt Trình quản lý tệp.</string>
+    <string name="invalid_backup_file">Tệp sao lưu không hợp lệ</string>
+    <string name="imported_successfully">Đã nhập thành công</string>
+    <string name="password_successfully_send">Mật khẩu được gửi thành công đến địa chỉ email của bạn</string>
+    <string name="password_recovery_failed">Khôi phục mật khẩu không thành công</string>
+    <string name="recovery_email_not_registered">Email khôi phục chưa được đăng ký</string>
+    <string name="change_your">Thay đổi của bạn</string>
+    <string name="forgot_caps">Quên mất ?</string>
+    <string name="password_successfully_changed">Mật khẩu của bạn đã được thay đổi thành công</string>
+    <string name="invalid_email_address">địa chỉ email không hợp lệ</string>
+    <string name="password_min">Mật khẩu phải chứa tối thiểu 8 ký tự</string>
+    <string name="old_password_must_not_new">Mật khẩu cũ không được là mật khẩu mới</string>
+    <string name="password_not_match">Mật khẩu không khớp</string>
+    <string name="invalid_old_pasword">Mật khẩu cũ không hợp lệ</string>
+    <string name="phonebook_blacklist_subheading">"Chọn liên hệ bạn muốn thêm vào danh sách đen"</string>
+    <string name="phonebook_whitelist_subheading">"Chọn địa chỉ liên hệ bạn muốn thêm vào danh sách trắng"</string>
+    <string name="camera_not_init">Lỗi khởi tạo máy ảnh:</string>
+    <string name="please_wait">Vui lòng đợi</string>
+    <string name="invalid_qr">QrCode không hợp lệ!</string>
+    <string name="successfully_done">Thực hiện thành công!</string>
+    <string name="on_caps">TRÊN</string>
+    <string name="off_caps">TẮT</string>
+    <string name="webfilter_blacklist_subheading">"Các trang web được lưu trong danh sách đen sẽ không thể truy cập bằng trình duyệt"</string>
+    <string name="webfilter_whitelist_subheading">Các trang web lưu dưới danh sách trắng chỉ có thể truy cập bằng trình duyệt</string>
+    <string name="dialog_website_blacklist_subheading">Vui lòng nhập trang web mà bạn muốn thêm vào danh sách đen Vd: www.google.com</string>
+    <string name="dialog_website_white_subheading">Vui lòng nhập trang web mà bạn muốn thêm vào danh sách trắng VD: www.google.com</string>
+    <string name="invalid_url">Url không hợp lệ</string>
+    <string name="invalid_otp">Otp không hợp lệ</string>
+    <string name="user_agreement_1">Để cải thiện KeyOS và đảm bảo tất cả các tính năng hoạt động bình thường, một số dữ liệu sử dụng của bạn sẽ được thu thập ẩn danh. Bạn phải đọc và đồng ý với Chính sách bảo mật và Điều khoản của chúng tôi. trước khi sử dụng KeyOS</string>
+    <string name="select_all">Chọn tất cả</string>
+    <string name="initializing_desktop">Đang khởi tạo màn hình…</string>
+    <string name="loading_settings">Đang tải cài đặt</string>
+    <string name="exiting_keyos">Thoát</string>
+    <string name="dialog_qrcode_subheading">Quét mã KeyOS Qr này để áp dụng các cài đặt tương tự trong thiết bị KeyOS của bạn</string>
+
+
+
 </resources>
