--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -139,4 +139,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Izaziso nezinhlelo zokusebenza kuvaliwe"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Vala"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Kuvaliwe"</string>
+
+
+    <string name="app_name">I-KeyOS</string>
+    <string name="exit_button_text">Phuma eKiosk</string>
+    <string name="button_overview_mode">Imodi yokubuka konke</string>
+    <string name="password">Iphasiwedi</string>
+    <string name="activities">Imisebenzi</string>
+    <string name="cancel">Khansela</string>
+    <string name="done">Kwenziwe</string>
+    <string name="phoneBook">Incwadi yocingo</string>
+    <string name="manual">Ngokwenziwa ngesandla</string>
+    <string name="create_new">Dala okusha</string>
+    <string name="contact">Imininingwane</string>
+    <string name="name">Igama</string>
+    <string name="number">Inombolo</string>
+    <string name="hide_icon">Fihla isithonjana</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">fihla isithonjana sokuqalisa /isinqamuleli ekhaya le-KeyOS</string>
+    <string name="block_activities">Vimba Imisebenzi</string>
+    <string name="block_unwanted_pages_activities_windows">Vimba amakhasi /imisebenzi /amawindi angafuneki</string>
+    <string name="time_limit">Umkhawulo Wesikhathi</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Setha umkhawulo wesikhathi Isib. 1 ihora ngosuku</string>
+    <string name="system_settings">Izilungiselelo zohlelo</string>
+    <string name="restrictions">Imikhawulo</string>
+    <string name="edit_app">Hlela uhlelo lokusebenza</string>
+    <string name="import_amp_export">Ngenisa Ukuthekelisa</string>
+    <string name="scan">Skena</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Skena ikhodi ye-key qr ukuze usebenzise inqubomgomo yezilungiselelo efanayo</string>
+    <string name="generate">Khiqiza</string>
+    <string name="generate_keyos_qr_code">Khiqiza ukhiyeOS QrCode</string>
+    <string name="import_text">Ngenisa</string>
+    <string name="import_keyos_setting_from_storage">Ngenisa isilungiselelo se-keyOS kusuka kusitoreji</string>
+    <string name="export_text">Thumela</string>
+    <string name="import_keyos_setting_to_storage">Ngenisa isilungiselelo se-keyOS kusitoreji</string>
+    <string name="recovery_email">I-imeyili yokutakula</string>
+    <string name="old_password">Iphasiwedi Endala</string>
+    <string name="confirm_password">Qinisekisa Iphasiwedi</string>
+    <string name="allow_calls">Vumela Izingcingo</string>
+    <string name="incoming">Okungenayo</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Lokhu kuzovumela zonke izingcingo ezingenayo kuselula yakho</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Lokhu kuzovumela zonke izingcingo eziphumayo kuselula yakho</string>
+    <string name="whitelist_contacts">Oxhumana nabo Abagunyaziwe</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Oxhumana nabo balondolozwa ngaphansi kohlu olumhlophe kuphela abakwazi ukukushayela</string>
+    <string name="blacklist_contacts">Oxhumana Nabo Abavinjelwe</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"Oxhumana nabo abalondolozwa ngaphansi kohlu lwabamnyama ngeke bakwazi ukukushayela"</string>
+    <string name="automatic_whitelist">Uhlu olumhlophe oluzenzakalelayo</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Vumela izingcingo uma otholakala etholakala encwadini yezingcingo</string>
+    <string name="additional">Okungeziwe</string>
+    <string name="whitelist_amp_blacklist">Uhlu olumnyama lwabagunyaziwe</string>
+    <string name="phone_book">Incwadi Yezincingo</string>
+    <string name="import_amp_export_settings">Ngenisa izilungiselelo zokuthekelisa</string>
+    <string name="services">Imisebenzi</string>
+    <string name="single_app">Uhlelo lokusebenza olulodwa</string>
+    <string name="apps_amp_services">Izinhlelo Zokusebenza</string>
+    <string name="peripheral">Umngcele</string>
+    <string name="advance">Phambili</string>
+    <string name="disable_camera">Khubaza ikhamera</string>
+    <string name="call_settings">Shayela izilungiselelo</string>
+    <string name="web_filter">Isihlungi sewebhu</string>
+    <string name="screen_saver">Isihenqo sesikrini</string>
+    <string name="phone_settings">Amasethingi wefoni</string>
+    <string name="notification_panel">Iphaneli yesaziso</string>
+    <string name="security">Ukuphepha</string>
+    <string name="launch">Qalisa</string>
+    <string name="phone_call_subheading">Uma ubhekene nenkinga yokwenza izingcingo ngomusa vumela zonke izinsizakalo ezihlobene nokushaya ucingo</string>
+    <string name="phone_call_subheading_hint">ukusikisela: Sesha ifoni engxenyeni yesevisi</string>
+    <string name="web_filter_subheading">Isihlungi sewebhu yisevisi enamandla ekuvumela ukuthi uvimbele amawebhusayithi angafuneki</string>
+    <string name="web_filter_supported_browsers">Iziphequluli ezisekelwayo: i-chrome, i-firefox, isibindi, i-edge, i-opera, i-duckduckgo</string>
+    <string name="off">Cishiwe</string>
+    <string name="whitelist_websites">Amawebhusayithi Abamhlophe</string>
+    <string name="whitelist_website_info">Amawebhusayithi alondolozwa ngaphansi kohlu olumhlophe kuphela akwazi ukufinyelela ngesiphequluli</string>
+    <string name="blacklist_websites">Amawebhusayithi Abamnyama</string>
+    <string name="blacklist_websites_info">"Amawebhusayithi alondolozwe ngaphansi kohlu lokuvimba ngeke akwazi ukufinyelela ngesiphequluli"</string>
+    <string name="block_adult_websites">Vimba amawebhusayithi wabantu abadala</string>
+    <string name="adult_websites_info">Lokhu kuzovimba ngokuzenzakalela amawebhusayithi wabantu abadala angama-800</string>
+    <string name="whitelist">Ukugunyazwa</string>
+    <string name="add_websites">Faka iwebhusayithi</string>
+    <string name="website">Iwebhusayithi</string>
+    <string name="add_websites_subheading">Sicela ufake iwebhusayithi ofuna ukuyifaka ohlwini olugunyaziwe Isib: www.google.com</string>
+    <string name="otp_verification">Ukuqinisekiswa kwe-Otp</string>
+    <string name="otp_verification_subheading">Sicela ufake i-otp enezinombolo ezi-4 esizithumele ekhelini lakho le-imeyili elibhalisiwe</string>
+    <string name="password_prompt_subheading">"uma ungakashintshi iphasiwedi yakho sicela uzame u-1234"</string>
+    <string name="forget">khohlwa?</string>
+    <string name="user_agreement">Isivumelwano Somsebenzisi</string>
+    <string name="user_agreement_2">Sizogcina uhlu lohlelo lokusebenza olufakiwe nenombolo yocingo kudivayisi yakho. Le datha izothathwa kudivayisi yakho kuphela uma usebenzisa isici se-QrCode futhi le datha izosuswa ngokuzenzekelayo kusuka kuseva ngehora elilodwa</string>
+    <string name="no_thanks">Cha ngiyabonga</string>
+    <string name="accept_amp_continue">Yamukela</string>
+    <string name="usage_access">Ukufinyelela kokusebenzisa</string>
+    <string name="overlay">Imbondela</string>
+    <string name="write_settings">Bhala izilungiselelo</string>
+    <string name="sound_access">Ukufinyelela komsindo</string>
+    <string name="other_permissions">Ezinye izimvume</string>
+    <string name="accessibility">Ukufinyeleleka</string>
+    <string name="device_id">I-ID yedivayisi</string>
+    <string name="feedback_amp_suggestions">iziphakamiso</string>
+    <string name="quick_survey">Ucwaningo olusheshayo</string>
+    <string name="bug_report">Umbiko wesiphazamisi</string>
+    <string name="visit">Vakashela</string>
+    <string name="rate">Linganisa</string>
+    <string name="share">Yabelana</string>
+    <string name="app_info">Imininingwane yohlelo lokusebenza</string>
+    <string name="check_for_update">Bheka isibuyekezo</string>
+    <string name="developer_contact">Oxhumana naye wonjiniyela</string>
+    <string name="terms_amp_conditions">Imigomo</string>
+    <string name="privacy_policy">Inqubomgomo yobumfihlo</string>
+    <string name="outgoing">Okuphumayo</string>
+    <string name="always_on">vula</string>
+    <string name="always_off">kuvaliwe</string>
+    <string name="dont_care">"Ungakhathali"</string>
+    <string name="landscape">Ukubukeka komhlaba</string>
+    <string name="portrait">Ukuma ngobude</string>
+    <string name="silent">Athule</string>
+    <string name="normal">Jwayelekile</string>
+    <string name="select_activity_sunHeading">Khetha ukuthi imiphi imisebenzi /Amakhasi /amawindi ofuna ukuwavimba</string>
+    <string name="apps">Izinhlelo zokusebenza</string>
+    <string name="whitelist_apps">Izinhlelo zokusebenza ezimhlophe</string>
+    <string name="whitelist_services">Izinsizakalo ze-Whitelist</string>
+    <string name="whitelist_apps_subheading">"Khetha ukuthi iziphi izinhlelo zokusebenza ofuna ukufinyelela kuzo"</string>
+    <string name="whitelist_service_heading">"Khetha ukuthi imaphi amasevisi ofuna ukunika ukufinyelela"</string>
+    <string name="single_app_subheading">"Khetha ukuthi yiluphi uhlelo lokusebenza ofuna ukutholakala ngaphambili"</string>
+    <string name="blacklist">Uhlu olumnyama</string>
+    <string name="contacts_blacklist_subheading">"Oxhumana nabo abalondolozwe ngaphansi kohlu lwabamnyama ngeke besakwazi ukushayela ucingo lwakho lwe-Android"</string>
+    <string name="contacts_whitelist_subheading">Oxhumana nabo abalondolozwe ngaphansi koGunyaziwe bakwazi kuphela ukushayela ifoni yakho ye-Android</string>
+    <string name="delete">Susa</string>
+    <string name="delete_contact_subheading">Uqinisekile ukuthi ufuna ukususa lezi zinto</string>
+    <string name="invalid_name">Igama elingavumelekile</string>
+    <string name="invalid_number">Inombolo engavumelekile</string>
+    <string name="hours">Amahora</string>
+    <string name="minutes">Amaminithi</string>
+    <string name="file_exported_to">Ifayela lithunyelwe ku-</string>
+    <string name="select_a_file_to_upload">Khetha Ifayela ozoLilayisha</string>
+    <string name="please_install_a_file_manager">Sicela ufake iMenenja yefayela.</string>
+    <string name="invalid_backup_file">Ifayela lokusekelayo elingavumelekile</string>
+    <string name="imported_successfully">Kungeniswe ngempumelelo</string>
+    <string name="password_successfully_send">Iphasiwedi ithunyelwe ngempumelelo kukheli lakho le-imeyili</string>
+    <string name="password_recovery_failed">Ukutholwa kwephasiwedi kwehlulekile</string>
+    <string name="recovery_email_not_registered">I-imeyili yokutakula ayibhalisiwe</string>
+    <string name="change_your">Shintsha i-Your</string>
+    <string name="forgot_caps">Ukhohliwe?</string>
+    <string name="password_successfully_changed">Iphasiwedi yakho ishintshwe ngempumelelo</string>
+    <string name="invalid_email_address">Ikheli le-imeyili elingavumelekile</string>
+    <string name="password_min">Iphasiwedi kufanele ibe nezinhlamvu eziyi-8</string>
+    <string name="old_password_must_not_new">Iphasiwedi yakudala akumele ibe yiphasiwedi entsha</string>
+    <string name="password_not_match">Iphasiwedi ayifani</string>
+    <string name="invalid_old_pasword">Iphasiwedi yakudala engavumelekile</string>
+    <string name="phonebook_blacklist_subheading">"Khetha ukuthi yibaphi oxhumana nabo ofuna ukubangeza ohlwini lwabashokobezi"</string>
+    <string name="phonebook_whitelist_subheading">"Khetha ukuthi ibaphi oxhumana nabo ofuna ukubangeza ohlwini olumhlophe"</string>
+    <string name="camera_not_init">Iphutha lokuqalisa ikhamera:</string>
+    <string name="please_wait">Ngicela ulinde</string>
+    <string name="invalid_qr">I-QrCode engavumelekile!</string>
+    <string name="successfully_done">Kwenziwe ngempumelelo!</string>
+    <string name="on_caps">VULA</string>
+    <string name="off_caps">VALIWE</string>
+    <string name="webfilter_blacklist_subheading">"Amawebhusayithi alondolozwe ngaphansi kohlu lokuvimba ngeke akwazi ukufinyelela ngesiphequluli"</string>
+    <string name="webfilter_whitelist_subheading">Amawebhusayithi alondolozwa ngaphansi kohlu olumhlophe kuphela akwazi ukufinyelela ngesiphequluli</string>
+    <string name="dialog_website_blacklist_subheading">Sicela ufake iwebhusayithi ofuna ukuyifaka ohlwini lwabashokobezi: Isib: www.google.com</string>
+    <string name="dialog_website_white_subheading">Sicela ufake iwebhusayithi ofuna ukuyifaka ohlwini olugunyaziwe Isib: www.google.com</string>
+    <string name="invalid_url">I-Url engavumelekile</string>
+    <string name="invalid_otp">I-Otp engavumelekile</string>
+    <string name="user_agreement_1">Ukuze uthuthukise i-KeyOS futhi uqiniseke ukuthi zonke izici zisebenza kahle, enye idatha yakho yokusetshenziswa izoqoqwa ngokungaziwa. Kufanele ufunde futhi uvumelane nenqubomgomo yethu yobumfihlo nemigomo. ngaphambi kokusebenzisa i-KeyOS</string>
+    <string name="select_all">Khetha konke</string>
+    <string name="initializing_desktop">Iqalisa ideskithophu…</string>
+    <string name="loading_settings">Kulayishwa izilungiselelo</string>
+    <string name="exiting_keyos">Iyaphuma</string>
+    <string name="dialog_qrcode_subheading">Skena le khodi ye-KeyOS Qr ukuze usebenzise izilungiselelo ezifanayo kudivayisi yakho ye-KeyOS</string>
+
+
 </resources>
