--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -142,4 +142,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"सूचनाएं और ऐप्लिकेशन बंद हैं"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"बंद करें"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"बंद कर दिया गया"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">कियोस्क से बाहर निकलें</string>
+    <string name="button_overview_mode">अवलोकन मोड</string>
+    <string name="password">कुंजिका</string>
+    <string name="activities">गतिविधियों</string>
+    <string name="cancel">रद्द करना</string>
+    <string name="done">किया हुआ</string>
+    <string name="phoneBook">फोन बुक</string>
+    <string name="manual">गाइड</string>
+    <string name="create_new">नया बनाओ</string>
+    <string name="contact">संपर्क करें</string>
+    <string name="name">नाम</string>
+    <string name="number">संख्या</string>
+    <string name="hide_icon">ऑइकन छुपायें</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">KeyOS होम से लॉन्चर /शॉर्टकट आइकन छिपाएं</string>
+    <string name="block_activities">ब्लॉक गतिविधियाँ</string>
+    <string name="block_unwanted_pages_activities_windows">अवांछित पृष्ठों /गतिविधियों /खिड़कियों को ब्लॉक करें</string>
+    <string name="time_limit">समय सीमा</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">समय प्रतिबंध एजी सेट करें। 1 दिन प्रति दिन</string>
+    <string name="system_settings">प्रणाली व्यवस्था</string>
+    <string name="restrictions">प्रतिबंध</string>
+    <string name="edit_app">ऐप को संपादित करें</string>
+    <string name="import_amp_export">आयात निर्यात</string>
+    <string name="scan">स्कैन</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">उसी सेटिंग नीति को लागू करने के लिए keyOS qr कोड को स्कैन करें</string>
+    <string name="generate">उत्पन्न</string>
+    <string name="generate_keyos_qr_code">KeyOS QrCode उत्पन्न करें</string>
+    <string name="import_text">आयात</string>
+    <string name="import_keyos_setting_from_storage">संग्रहण से आयात कीओएसओ सेटिंग</string>
+    <string name="export_text">निर्यात</string>
+    <string name="import_keyos_setting_to_storage">भंडारण के लिए कीओस सेटिंग आयात करें</string>
+    <string name="recovery_email">रिकवरी ईमेल</string>
+    <string name="old_password">पुराना पासवर्ड</string>
+    <string name="confirm_password">पासवर्ड की पुष्टि कीजिये</string>
+    <string name="allow_calls">कॉल की अनुमति दें</string>
+    <string name="incoming">आने वाली</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">यह आपके मोबाइल पर आने वाली सभी कॉल की अनुमति देगा</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">यह आपके मोबाइल पर सभी आउटगोइंग कॉल की अनुमति देगा</string>
+    <string name="whitelist_contacts">श्वेतसूची संपर्क</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">श्वेतसूची के तहत संपर्क केवल आपको कॉल करने में सक्षम होते हैं</string>
+    <string name="blacklist_contacts">ब्लैकलिस्ट संपर्क</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"संपर्क ब्लैकलिस्ट के तहत सहेजें आपको कॉल नहीं कर पाएंगे"</string>
+    <string name="automatic_whitelist">स्वचालित श्वेतसूची</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">यदि फोन बुक में संपर्क उपलब्ध है तो कॉल की अनुमति दें</string>
+    <string name="additional">अतिरिक्त</string>
+    <string name="whitelist_amp_blacklist">श्वेतसूची में काली सूची में डालना</string>
+    <string name="phone_book">फोन बुक</string>
+    <string name="import_amp_export_settings">निर्यात सेटिंग्स आयात करें</string>
+    <string name="services">सेवाएं</string>
+    <string name="single_app">सिंगल ऐप</string>
+    <string name="apps_amp_services">ऐप्स सेवाएँ</string>
+    <string name="peripheral">परिधीय</string>
+    <string name="advance">अग्रिम</string>
+    <string name="disable_camera">कैमरा अक्षम करें</string>
+    <string name="call_settings">कॉल सेटिंग</string>
+    <string name="web_filter">वेब फ़िल्टर</string>
+    <string name="screen_saver">स्क्रीन सेवर</string>
+    <string name="phone_settings">फोन सेटिंग</string>
+    <string name="notification_panel">अधिसूचना पैनल</string>
+    <string name="security">सुरक्षा</string>
+    <string name="launch">प्रक्षेपण</string>
+    <string name="phone_call_subheading">यदि आप कॉल करने के लिए किसी भी परेशानी का सामना करते हैं तो कृपया फोन कॉल से संबंधित सभी सेवाओं की अनुमति दें</string>
+    <string name="phone_call_subheading_hint">संकेत: सेवा अनुभाग में फ़ोन खोजें</string>
+    <string name="web_filter_subheading">वेब फ़िल्टर एक शक्तिशाली सेवा है जो आपको अवांछित वेबसाइटों को ब्लॉक करने की अनुमति देती है</string>
+    <string name="web_filter_supported_browsers">समर्थित ब्राउज़र: क्रोम, फ़ायरफ़ॉक्स, बहादुर, एज, ओपेरा, डकडकगो</string>
+    <string name="off">बंद</string>
+    <string name="whitelist_websites">श्वेतसूची वेबसाइटें</string>
+    <string name="whitelist_website_info">वेबसाइटें श्वेतसूची के अंतर्गत केवल ब्राउज़र द्वारा एक्सेस करने में सक्षम बचाती हैं</string>
+    <string name="blacklist_websites">ब्लैकलिस्ट वेबसाइटों</string>
+    <string name="blacklist_websites_info">"ब्लैकलिस्ट के तहत सहेजने वाली वेबसाइटें ब्राउज़र द्वारा एक्सेस नहीं कर पाएंगी"</string>
+    <string name="block_adult_websites">वयस्क वेबसाइटों को ब्लॉक करें</string>
+    <string name="adult_websites_info">यह स्वचालित रूप से 800 वयस्क वेबसाइटों को अवरुद्ध करेगा</string>
+    <string name="whitelist">श्वेतसूची</string>
+    <string name="add_websites">वेबसाइट जोड़ें</string>
+    <string name="website">वेबसाइट</string>
+    <string name="add_websites_subheading">कृपया वह वेबसाइट दर्ज करें जिसे आप श्वेतसूची में जोड़ना चाहते हैं जैसे: www.google.com</string>
+    <string name="otp_verification">ओटप सत्यापन</string>
+    <string name="otp_verification_subheading">कृपया 4 अंक ओटीपी दर्ज करें जिसे हमने आपके पंजीकृत ईमेल पते पर भेजा है</string>
+    <string name="password_prompt_subheading">"अगर आपने अपना पासवर्ड नहीं बदला है तो कृपया 1234 आज़माएं"</string>
+    <string name="forget">भूल जाओ ?</string>
+    <string name="user_agreement">उपयोगकर्ता समझौता</string>
+    <string name="user_agreement_2">हम आपके डिवाइस में इंस्टॉल किए गए ऐप और फोन नंबर की सूची को स्टोर करेंगे। यह डेटा आपके डिवाइस से तभी लिया जाएगा जब आप QrCode फीचर का उपयोग कर रहे हों और एक घंटे में यह डेटा अपने आप सर्वर से हट जाएगा</string>
+    <string name="no_thanks">जी नहीं, धन्यवाद</string>
+    <string name="accept_amp_continue">स्वीकार करना</string>
+    <string name="usage_access">उपयोग का उपयोग</string>
+    <string name="overlay">उपरिशायी</string>
+    <string name="write_settings">सेटिंग्स लिखें</string>
+    <string name="sound_access">ध्वनि का उपयोग</string>
+    <string name="other_permissions">अन्य अनुमतियाँ</string>
+    <string name="accessibility">सरल उपयोग</string>
+    <string name="device_id">डिवाइस आईडी</string>
+    <string name="feedback_amp_suggestions">सुझाव</string>
+    <string name="quick_survey">तुरंत सर्वेक्षण</string>
+    <string name="bug_report">बग रिपोर्ट</string>
+    <string name="visit">यात्रा</string>
+    <string name="rate">मूल्यांकन करें</string>
+    <string name="share">शेयर</string>
+    <string name="app_info">अनुप्रयोग की जानकारी</string>
+    <string name="check_for_update">अपडेट के लिये जांचें</string>
+    <string name="developer_contact">डेवलपर से संपर्क करें</string>
+    <string name="terms_amp_conditions">मामले</string>
+    <string name="privacy_policy">गोपनीयता नीति</string>
+    <string name="outgoing">निवर्तमान</string>
+    <string name="always_on">पर</string>
+    <string name="always_off">बंद</string>
+    <string name="dont_care">"डोंट वरी"</string>
+    <string name="landscape">परिदृश्य</string>
+    <string name="portrait">चित्र</string>
+    <string name="silent">मूक</string>
+    <string name="normal">साधारण</string>
+    <string name="select_activity_sunHeading">उन गतिविधियों /पृष्ठों /खिड़कियों का चयन करें जिन्हें आप ब्लॉक करना चाहते हैं</string>
+    <string name="apps">ऐप्स</string>
+    <string name="whitelist_apps">व्हिटेलिस्ट ऐप्स</string>
+    <string name="whitelist_services">श्वेतसूची सेवाएँ</string>
+    <string name="whitelist_apps_subheading">"वह एप्लिकेशन चुनें जिसे आप एक्सेस करना चाहते हैं"</string>
+    <string name="whitelist_service_heading">"वह सेवा चुनें जिसे आप एक्सेस देना चाहते हैं"</string>
+    <string name="single_app_subheading">"चुनें कि आप किस ऐप को अग्रभूमि में उपलब्ध करना चाहते हैं"</string>
+    <string name="blacklist">काला सूची में डालना</string>
+    <string name="contacts_blacklist_subheading">"ब्लैकलिस्ट के तहत सहेजे गए संपर्क अब आपके Android फ़ोन को कॉल नहीं कर पाएंगे"</string>
+    <string name="contacts_whitelist_subheading">श्वेतसूची के तहत सहेजे गए संपर्क केवल आपके Android फ़ोन को कॉल करने में सक्षम हैं</string>
+    <string name="delete">हटाएं</string>
+    <string name="delete_contact_subheading">क्या आप वाकई इस आइटम को हटाना चाहते हैं?</string>
+    <string name="invalid_name">गलत नाम</string>
+    <string name="invalid_number">अमान्य संख्या</string>
+    <string name="hours">घंटे</string>
+    <string name="minutes">मिनट</string>
+    <string name="file_exported_to">को निर्यात की गई फ़ाइल</string>
+    <string name="select_a_file_to_upload">अपलोड करने के लिए एक फ़ाइल का चयन करें</string>
+    <string name="please_install_a_file_manager">कृपया एक फ़ाइल प्रबंधक स्थापित करें।</string>
+    <string name="invalid_backup_file">अमान्य बैकअप फ़ाइल</string>
+    <string name="imported_successfully">सफलतापूर्वक आयात किया गया</string>
+    <string name="password_successfully_send">पासवर्ड सफलतापूर्वक आपके ईमेल पते पर भेजा गया</string>
+    <string name="password_recovery_failed">पासवर्ड पुनर्प्राप्ति विफल</string>
+    <string name="recovery_email_not_registered">रिकवरी ईमेल पंजीकृत नहीं है</string>
+    <string name="change_your">अपना बदलें</string>
+    <string name="forgot_caps">भूल गया ?</string>
+    <string name="password_successfully_changed">आपका पासवर्ड सफलतापूर्वक बदल दिया गया है</string>
+    <string name="invalid_email_address">अमान्य ईमेल पता</string>
+    <string name="password_min">पासवर्ड में न्यूनतम 8 वर्ण होने चाहिए</string>
+    <string name="old_password_must_not_new">पुराना पासवर्ड नया पासवर्ड नहीं होना चाहिए</string>
+    <string name="password_not_match">पासवर्ड मेल नहीं खाता</string>
+    <string name="invalid_old_pasword">अमान्य पुराना पासवर्ड</string>
+    <string name="phonebook_blacklist_subheading">"चयन करें कि आप कौन से संपर्क ब्लैकलिस्ट में जोड़ना चाहते हैं"</string>
+    <string name="phonebook_whitelist_subheading">"चयन करें कि आप कौन से संपर्क श्वेतसूची में जोड़ना चाहते हैं"</string>
+    <string name="camera_not_init">कैमरा आरंभीकरण त्रुटि:</string>
+    <string name="please_wait">कृपया प्रतीक्षा करें</string>
+    <string name="invalid_qr">अमान्य QrCode!</string>
+    <string name="successfully_done">सफलतापूर्वक किया!</string>
+    <string name="on_caps">पर</string>
+    <string name="off_caps">बंद</string>
+    <string name="webfilter_blacklist_subheading">"ब्लैकलिस्ट के तहत सहेजने वाली वेबसाइटें ब्राउज़र द्वारा एक्सेस नहीं कर पाएंगी"</string>
+    <string name="webfilter_whitelist_subheading">वेबसाइटें श्वेतसूची के अंतर्गत केवल ब्राउज़र द्वारा एक्सेस करने में सक्षम बचाती हैं</string>
+    <string name="dialog_website_blacklist_subheading">कृपया वह वेबसाइट दर्ज करें जिसे आप ब्लैकलिस्ट में जोड़ना चाहते हैं जैसे: www.google.com</string>
+    <string name="dialog_website_white_subheading">कृपया वह वेबसाइट दर्ज करें जिसे आप श्वेतसूची में जोड़ना चाहते हैं जैसे: www.google.com</string>
+    <string name="invalid_url">अवैध यूआरएल</string>
+    <string name="invalid_otp">अमान्य ओ.टी.पी.</string>
+    <string name="user_agreement_1">कीओएस में सुधार करने और यह सुनिश्चित करने के लिए कि सभी फीचर ठीक से काम करते हैं, आपके उपयोग के कुछ डेटा गुमनाम रूप से एकत्र किए जाएंगे। आपको हमारी गोपनीयता नीति और शर्तों को पढ़ना और उनसे सहमत होना चाहिए। KeyOS का उपयोग करने से पहले</string>
+    <string name="select_all">सभी का चयन करे</string>
+    <string name="initializing_desktop">डेस्कटॉप को प्रारंभ कर रहा है ...</string>
+    <string name="loading_settings">लोड हो रहा है सेटिंग्स</string>
+    <string name="exiting_keyos">बाहर निकल रहा है</string>
+    <string name="dialog_qrcode_subheading">अपने KeyOS डिवाइस में समान सेटिंग्स लागू करने के लिए इस KeyOS Qr कोड को स्कैन करें</string>
+
+
 </resources>
