--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -140,4 +140,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Az értesítések és az alkalmazások ki vannak kapcsolva"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Bezárás"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Bezárva"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Kilépés a kioszkból</string>
+    <string name="button_overview_mode">Áttekintés mód</string>
+    <string name="password">Jelszó</string>
+    <string name="activities">Tevékenységek</string>
+    <string name="cancel">Megszünteti</string>
+    <string name="done">Kész</string>
+    <string name="phoneBook">Telefonkönyv</string>
+    <string name="manual">Kézikönyv</string>
+    <string name="create_new">Újat készíteni</string>
+    <string name="contact">Kapcsolatba lépni</string>
+    <string name="name">Név</string>
+    <string name="number">Szám</string>
+    <string name="hide_icon">Ikon elrejtése</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">az indító /parancsikon elrejtése a KeyOS otthonából</string>
+    <string name="block_activities">Tevékenységek letiltása</string>
+    <string name="block_unwanted_pages_activities_windows">Blokkolja a nem kívánt oldalakat /tevékenységeket /ablakokat</string>
+    <string name="time_limit">Határidő</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Időzítési korlátozás beállítása pl. 1 óra naponta</string>
+    <string name="system_settings">Rendszerbeállítások</string>
+    <string name="restrictions">Korlátozások</string>
+    <string name="edit_app">Alkalmazás szerkesztése</string>
+    <string name="import_amp_export">Import Export</string>
+    <string name="scan">Letapogatás</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Vizsgálja meg a keyOS qr kódot ugyanazok a beállítások házirendjének alkalmazásához</string>
+    <string name="generate">generál</string>
+    <string name="generate_keyos_qr_code">Generálja a keyOS QrCode-ot</string>
+    <string name="import_text">Importálás</string>
+    <string name="import_keyos_setting_from_storage">Import keyOS beállításokat a tárolóból</string>
+    <string name="export_text">Export</string>
+    <string name="import_keyos_setting_to_storage">Import keyOS beállításokat a tárolóba</string>
+    <string name="recovery_email">Helyreállítási e-mail</string>
+    <string name="old_password">régi jelszó</string>
+    <string name="confirm_password">Jelszó megerősítése</string>
+    <string name="allow_calls">Hívások engedélyezése</string>
+    <string name="incoming">Beérkező</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Ez lehetővé teszi az összes bejövő hívást a mobiljára</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Ez lehetővé teszi az összes kimenő hívást a mobiljára</string>
+    <string name="whitelist_contacts">A névjegyzék engedélyezőlistája</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">A névjegyzék mentése az engedélyezőlistán csak akkor hívható</string>
+    <string name="blacklist_contacts">Feketelista névjegyek</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"A feketelistára mentett névjegyek nem fognak tudni hívni"</string>
+    <string name="automatic_whitelist">Automatikus engedélyezőlista</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Hívások engedélyezése, ha a névjegy elérhető a telefonkönyvben</string>
+    <string name="additional">További</string>
+    <string name="whitelist_amp_blacklist">Az engedélyezõk feketelistája</string>
+    <string name="phone_book">Telefonkönyv</string>
+    <string name="import_amp_export_settings">Exportálási beállítások importálása</string>
+    <string name="services">Szolgáltatások</string>
+    <string name="single_app">Egyetlen alkalmazás</string>
+    <string name="apps_amp_services">Apps Services</string>
+    <string name="peripheral">Kerületi</string>
+    <string name="advance">Előleg</string>
+    <string name="disable_camera">Tiltsa le a fényképezőgépet</string>
+    <string name="call_settings">Hívás beállítások</string>
+    <string name="web_filter">Internetes szűrő</string>
+    <string name="screen_saver">Képernyőkímélő</string>
+    <string name="phone_settings">Telefon beállítások</string>
+    <string name="notification_panel">Értesítési panel</string>
+    <string name="security">Biztonság</string>
+    <string name="launch">Dob</string>
+    <string name="phone_call_subheading">Ha bármilyen problémája van a hívás kezdeményezésével, kérjük, engedélyezze a telefonhívással kapcsolatos összes szolgáltatást</string>
+    <string name="phone_call_subheading_hint">tipp: Telefon keresése a szolgáltatási részben</string>
+    <string name="web_filter_subheading">A webszűrő egy hatékony szolgáltatás, amely lehetővé teszi a nem kívánt webhelyek blokkolását</string>
+    <string name="web_filter_supported_browsers">Támogatott böngészők: króm, Firefox, bátor, edge, opera, duckduckgo</string>
+    <string name="off">Ki</string>
+    <string name="whitelist_websites">Engedélyezőlistás webhelyek</string>
+    <string name="whitelist_website_info">Az engedélyezőlistán lévő webhelyek csak a böngésző által férhetnek hozzá</string>
+    <string name="blacklist_websites">Feketelista webhelyek</string>
+    <string name="blacklist_websites_info">"A feketelistára mentett webhelyek nem férhetnek hozzá böngészővel"</string>
+    <string name="block_adult_websites">Blokkolja a felnőtteknek szóló webhelyeket</string>
+    <string name="adult_websites_info">Ez automatikusan blokkolja a 800 felnőtt webhelyet</string>
+    <string name="whitelist">Engedélyezőlista</string>
+    <string name="add_websites">Webhely hozzáadása</string>
+    <string name="website">Weboldal</string>
+    <string name="add_websites_subheading">Kérjük, írja be a hozzáadni kívánt weboldalt az engedélyezőlistára. Pl .: www.google.com</string>
+    <string name="otp_verification">Otp ellenőrzés</string>
+    <string name="otp_verification_subheading">Kérjük, adja meg a négyjegyű otp-t, amelyet elküldtünk a regisztrált e-mail címére</string>
+    <string name="password_prompt_subheading">"ha még nem változtatta meg a jelszavát, kérjük, próbálja meg az 1234-et"</string>
+    <string name="forget">elfelejt ?</string>
+    <string name="user_agreement">Felhasználói Szerződés</string>
+    <string name="user_agreement_2">Az eszközön tároljuk a telepített alkalmazás és telefonszám listáját. Ezeket az adatokat csak akkor veszi el az eszközéről, ha a QrCode szolgáltatást használja, és ezeket az adatokat egy órán belül automatikusan eltávolítja a szerverről</string>
+    <string name="no_thanks">Nem köszönöm</string>
+    <string name="accept_amp_continue">Elfogad</string>
+    <string name="usage_access">Használati hozzáférés</string>
+    <string name="overlay">Overlay</string>
+    <string name="write_settings">Beállítások írása</string>
+    <string name="sound_access">Hangelérés</string>
+    <string name="other_permissions">Egyéb engedélyek</string>
+    <string name="accessibility">Megközelíthetőség</string>
+    <string name="device_id">Eszköz azonosító</string>
+    <string name="feedback_amp_suggestions">javaslatok</string>
+    <string name="quick_survey">Gyors felmérés</string>
+    <string name="bug_report">Hibajelentés</string>
+    <string name="visit">Látogatás</string>
+    <string name="rate">Mérték</string>
+    <string name="share">Ossza meg</string>
+    <string name="app_info">Alkalmazás információk</string>
+    <string name="check_for_update">Ellenőrizze a frissítést</string>
+    <string name="developer_contact">Fejlesztői kapcsolatfelvétel</string>
+    <string name="terms_amp_conditions">Feltételek</string>
+    <string name="privacy_policy">Adatvédelmi irányelvek</string>
+    <string name="outgoing">Kimenő</string>
+    <string name="always_on">tovább</string>
+    <string name="always_off">ki</string>
+    <string name="dont_care">"Nem érdekel"</string>
+    <string name="landscape">Tájkép</string>
+    <string name="portrait">portré</string>
+    <string name="silent">Csendes</string>
+    <string name="normal">Normál</string>
+    <string name="select_activity_sunHeading">Válassza ki a blokkolni kívánt tevékenységeket /oldalakat /ablakokat</string>
+    <string name="apps">Alkalmazások</string>
+    <string name="whitelist_apps">Engedélyezőlista alkalmazások</string>
+    <string name="whitelist_services">Engedélyezőlista szolgáltatások</string>
+    <string name="whitelist_apps_subheading">"Válassza ki, mely alkalmazásokhoz kíván hozzáférni"</string>
+    <string name="whitelist_service_heading">"Válassza ki, mely szolgáltatásokhoz kíván hozzáférést adni"</string>
+    <string name="single_app_subheading">"Válassza ki, melyik alkalmazást szeretné elérni az előtérben"</string>
+    <string name="blacklist">Feketelista</string>
+    <string name="contacts_blacklist_subheading">"A feketelistára mentett névjegyek többé nem fogják tudni felhívni androidos telefonját"</string>
+    <string name="contacts_whitelist_subheading">Az engedélyezőlistán mentett névjegyek már csak az Android-telefonjára hívhatók</string>
+    <string name="delete">Töröl</string>
+    <string name="delete_contact_subheading">Biztosan törli ezeket az elemeket</string>
+    <string name="invalid_name">Érvénytelen név</string>
+    <string name="invalid_number">Érvénytelen szám</string>
+    <string name="hours">Órák</string>
+    <string name="minutes">Percek</string>
+    <string name="file_exported_to">A fájl exportálva ide:</string>
+    <string name="select_a_file_to_upload">Válasszon egy feltöltendő fájlt</string>
+    <string name="please_install_a_file_manager">Kérjük, telepítse a Fájlkezelőt.</string>
+    <string name="invalid_backup_file">Érvénytelen biztonsági fájl</string>
+    <string name="imported_successfully">Sikeresen importálva</string>
+    <string name="password_successfully_send">A jelszó sikeresen elküldve az Ön e-mail címére</string>
+    <string name="password_recovery_failed">A jelszó helyreállítása nem sikerült</string>
+    <string name="recovery_email_not_registered">A helyreállítási e-mail nincs regisztrálva</string>
+    <string name="change_your">Változtassa meg</string>
+    <string name="forgot_caps">Elfelejtette?</string>
+    <string name="password_successfully_changed">Jelszavát sikeresen megváltoztattuk</string>
+    <string name="invalid_email_address">Érvénytelen e-mail cím</string>
+    <string name="password_min">A jelszónak legalább 8 karakterből kell állnia</string>
+    <string name="old_password_must_not_new">A régi jelszó nem lehet új jelszó</string>
+    <string name="password_not_match">A jelszó nem egyezik</string>
+    <string name="invalid_old_pasword">Érvénytelen régi jelszó</string>
+    <string name="phonebook_blacklist_subheading">"Válassza ki, mely névjegyeket kívánja hozzáadni a feketelistához"</string>
+    <string name="phonebook_whitelist_subheading">"Válassza ki, mely névjegyeket kívánja hozzáadni az engedélyezőlistához"</string>
+    <string name="camera_not_init">Kamera inicializálási hiba:</string>
+    <string name="please_wait">Kérlek várj</string>
+    <string name="invalid_qr">Érvénytelen QrCode!</string>
+    <string name="successfully_done">Sikeresen elkészült!</string>
+    <string name="on_caps">TOVÁBB</string>
+    <string name="off_caps">KI</string>
+    <string name="webfilter_blacklist_subheading">"A feketelistára mentett webhelyek nem férhetnek hozzá böngészővel"</string>
+    <string name="webfilter_whitelist_subheading">Az engedélyezőlistán lévő webhelyek csak a böngésző által férhetnek hozzá</string>
+    <string name="dialog_website_blacklist_subheading">Kérjük, adja meg azt a weboldalt, amelyet feketelistára szeretne venni. Például: www.google.com</string>
+    <string name="dialog_website_white_subheading">Kérjük, írja be a hozzáadni kívánt weboldalt az engedélyezőlistára. Pl .: www.google.com</string>
+    <string name="invalid_url">Érvénytelen URL</string>
+    <string name="invalid_otp">Érvénytelen Otp</string>
+    <string name="user_agreement_1">A KeyOS fejlesztése és az összes szolgáltatás megfelelő működésének biztosítása érdekében a felhasználási adatok egy részét névtelenül gyűjtjük. El kell olvasnia és el kell fogadnia adatvédelmi irányelveinket és feltételeinket. a KeyOS használata előtt</string>
+    <string name="select_all">Mindet kiválaszt</string>
+    <string name="initializing_desktop">Asztal inicializálása…</string>
+    <string name="loading_settings">Beállítások betöltése</string>
+    <string name="exiting_keyos">Kilépés</string>
+    <string name="dialog_qrcode_subheading">Vizsgálja meg ezt a KeyOS Qr kódot, hogy ugyanazokat a beállításokat alkalmazza a KeyOS eszközön</string>
+
+
 </resources>
