--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -140,4 +140,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Le notifiche e le app non sono attive"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Chiudi"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Chiusa"</string>
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">Esci dal chiosco</string>
+    <string name="button_overview_mode">Modalità panoramica</string>
+    <string name="password">Parola d\'ordine</string>
+    <string name="activities">Attività</string>
+    <string name="cancel">Annulla</string>
+    <string name="done">Fatto</string>
+    <string name="phoneBook">Rubrica telefonica</string>
+    <string name="manual">Manuale</string>
+    <string name="create_new">Creare nuovo</string>
+    <string name="contact">Contatto</string>
+    <string name="name">Nome</string>
+    <string name="number">Numero</string>
+    <string name="hide_icon">Nascondi icona</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">nascondi l\'icona di avvio /collegamento dalla home page di KeyOS</string>
+    <string name="block_activities">Attività di blocco</string>
+    <string name="block_unwanted_pages_activities_windows">Blocca pagine /attività /finestre indesiderate</string>
+    <string name="time_limit">Limite di tempo</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Impostare la limitazione del tempo Es. 1 ora al giorno</string>
+    <string name="system_settings">Impostazioni di sistema</string>
+    <string name="restrictions">Restrizioni</string>
+    <string name="edit_app">Modifica app</string>
+    <string name="import_amp_export">Import Export</string>
+    <string name="scan">Scansione</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Scansiona il codice qr keyOS per applicare la stessa politica delle impostazioni</string>
+    <string name="generate">creare</string>
+    <string name="generate_keyos_qr_code">Genera keyOS QrCode</string>
+    <string name="import_text">Importare</string>
+    <string name="import_keyos_setting_from_storage">Importa l\'impostazione keyOS dalla memoria</string>
+    <string name="export_text">Esportare</string>
+    <string name="import_keyos_setting_to_storage">Importa l\'impostazione keyOS nell\'archivio</string>
+    <string name="recovery_email">Email di recupero</string>
+    <string name="old_password">vecchia password</string>
+    <string name="confirm_password">Conferma password</string>
+    <string name="allow_calls">Consenti chiamate</string>
+    <string name="incoming">In arrivo</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Ciò consentirà tutte le chiamate in arrivo sul tuo cellulare</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Ciò consentirà tutte le chiamate in uscita sul tuo cellulare</string>
+    <string name="whitelist_contacts">Contatti whitelist</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">I contatti salvati nella whitelist possono solo chiamarti</string>
+    <string name="blacklist_contacts">Contatti nella lista nera</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"I contatti salvati nella lista nera non potranno chiamarti"</string>
+    <string name="automatic_whitelist">Automatic whitelist</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Consenti chiamate se il contatto è disponibile nella rubrica</string>
+    <string name="additional">Aggiuntivo</string>
+    <string name="whitelist_amp_blacklist">Whitelist blacklist</string>
+    <string name="phone_book">Rubrica telefonica</string>
+    <string name="import_amp_export_settings">Importa le impostazioni di esportazione</string>
+    <string name="services">Servizi</string>
+    <string name="single_app">Single App</string>
+    <string name="apps_amp_services">Servizi app</string>
+    <string name="peripheral">Periferica</string>
+    <string name="advance">Avanzare</string>
+    <string name="disable_camera">Disable Camera</string>
+    <string name="call_settings">Impostazioni di chiamata</string>
+    <string name="web_filter">Web Filter</string>
+    <string name="screen_saver">Salvaschermo</string>
+    <string name="phone_settings">Impostazioni del telefono</string>
+    <string name="notification_panel">Pannello di notifica</string>
+    <string name="security">Sicurezza</string>
+    <string name="launch">Lanciare</string>
+    <string name="phone_call_subheading">In caso di problemi per effettuare chiamate, si prega di consentire tutti i servizi relativi alla chiamata</string>
+    <string name="phone_call_subheading_hint">suggerimento: cerca il telefono nella sezione dei servizi</string>
+    <string name="web_filter_subheading">Il filtro web è un potente servizio che ti consente di bloccare i siti web indesiderati</string>
+    <string name="web_filter_supported_browsers">Browser supportati: chrome, firefox, brave, edge, opera, duckduckgo</string>
+    <string name="off">Off</string>
+    <string name="whitelist_websites">Siti Web in whitelist</string>
+    <string name="whitelist_website_info">I siti web vengono salvati nella whitelist e possono accedere solo dal browser</string>
+    <string name="blacklist_websites">Siti web in blacklist</string>
+    <string name="blacklist_websites_info">"I siti web salvati nella lista nera non potranno accedere tramite browser"</string>
+    <string name="block_adult_websites">Blocca i siti Web per adulti</string>
+    <string name="adult_websites_info">Ciò bloccherà automaticamente 800 siti Web per adulti</string>
+    <string name="whitelist">Whitelist</string>
+    <string name="add_websites">Aggiungi sito web</string>
+    <string name="website">Sito web</string>
+    <string name="add_websites_subheading">Immettere il sito Web che si desidera aggiungere alla whitelist, ad esempio: www.google.com</string>
+    <string name="otp_verification">Verifica Otp</string>
+    <string name="otp_verification_subheading">Inserisci l\'otp a 4 cifre che abbiamo inviato al tuo indirizzo email registrato</string>
+    <string name="password_prompt_subheading">"se non hai ancora cambiato la password, prova 1234"</string>
+    <string name="forget">dimenticare ?</string>
+    <string name="user_agreement">Accordo per gli utenti</string>
+    <string name="user_agreement_2">Memorizzeremo l\'elenco delle app installate e del numero di telefono sul tuo dispositivo. Questi dati verranno presi dal tuo dispositivo solo se stai utilizzando la funzione QrCode e questi dati verranno automaticamente rimossi dal server entro un\'ora</string>
+    <string name="no_thanks">No grazie</string>
+    <string name="accept_amp_continue">Accettare</string>
+    <string name="usage_access">Accesso all\'utilizzo</string>
+    <string name="overlay">Sovrapposizione</string>
+    <string name="write_settings">Impostazioni di scrittura</string>
+    <string name="sound_access">Accesso al suono</string>
+    <string name="other_permissions">Altre autorizzazioni</string>
+    <string name="accessibility">Accessibilità</string>
+    <string name="device_id">ID del dispositivo</string>
+    <string name="feedback_amp_suggestions">suggerimenti</string>
+    <string name="quick_survey">Sondaggio rapido</string>
+    <string name="bug_report">Riportare un errore</string>
+    <string name="visit">Visitare</string>
+    <string name="rate">Vota</string>
+    <string name="share">Condividere</string>
+    <string name="app_info">App info</string>
+    <string name="check_for_update">Ricerca aggiornamenti</string>
+    <string name="developer_contact">Contatto sviluppatore</string>
+    <string name="terms_amp_conditions">Termini</string>
+    <string name="privacy_policy">politica sulla riservatezza</string>
+    <string name="outgoing">Estroverso</string>
+    <string name="always_on">sopra</string>
+    <string name="always_off">spento</string>
+    <string name="dont_care">"Non importa"</string>
+    <string name="landscape">Paesaggio</string>
+    <string name="portrait">Ritratto</string>
+    <string name="silent">Silenzioso</string>
+    <string name="normal">Normale</string>
+    <string name="select_activity_sunHeading">Seleziona le attività /pagine /finestre che desideri bloccare</string>
+    <string name="apps">App</string>
+    <string name="whitelist_apps">Whitelist Apps</string>
+    <string name="whitelist_services">Servizi whitelist</string>
+    <string name="whitelist_apps_subheading">"Seleziona le app a cui desideri accedere"</string>
+    <string name="whitelist_service_heading">"Seleziona i servizi a cui vuoi concedere l\'accesso"</string>
+    <string name="single_app_subheading">"Seleziona l\'app che desideri rendere disponibile in primo piano"</string>
+    <string name="blacklist">Blacklist</string>
+    <string name="contacts_blacklist_subheading">"I contatti salvati nella lista nera non potranno più chiamare il tuo telefono Android"</string>
+    <string name="contacts_whitelist_subheading">I contatti salvati in Whitelist possono più chiamare solo il tuo telefono Android</string>
+    <string name="delete">Elimina</string>
+    <string name="delete_contact_subheading">Sei sicuro di voler eliminare questi elementi</string>
+    <string name="invalid_name">Nome non valido</string>
+    <string name="invalid_number">Numero non valido</string>
+    <string name="hours">Ore</string>
+    <string name="minutes">Minuti</string>
+    <string name="file_exported_to">File esportato in</string>
+    <string name="select_a_file_to_upload">Seleziona un file da caricare</string>
+    <string name="please_install_a_file_manager">Installa un file manager.</string>
+    <string name="invalid_backup_file">File di backup non valido</string>
+    <string name="imported_successfully">Importato con successo</string>
+    <string name="password_successfully_send">Password inviata con successo al tuo indirizzo email</string>
+    <string name="password_recovery_failed">Recupero password non riuscito</string>
+    <string name="recovery_email_not_registered">Email di recupero non registrata</string>
+    <string name="change_your">Cambia il tuo</string>
+    <string name="forgot_caps">Dimenticato?</string>
+    <string name="password_successfully_changed">La tua password è stata cambiata con successo</string>
+    <string name="invalid_email_address">indirizzo email non valido</string>
+    <string name="password_min">La password deve contenere almeno 8 caratteri</string>
+    <string name="old_password_must_not_new">La vecchia password non deve essere una nuova password</string>
+    <string name="password_not_match">La password non corrisponde</string>
+    <string name="invalid_old_pasword">Vecchia password non valida</string>
+    <string name="phonebook_blacklist_subheading">"Seleziona i contatti che desideri aggiungere alla lista nera"</string>
+    <string name="phonebook_whitelist_subheading">"Seleziona i contatti che desideri aggiungere alla whitelist"</string>
+    <string name="camera_not_init">Errore di inizializzazione della telecamera:</string>
+    <string name="please_wait">attendere prego</string>
+    <string name="invalid_qr">QrCode non valido!</string>
+    <string name="successfully_done">Fatto con successo!</string>
+    <string name="on_caps">SOPRA</string>
+    <string name="off_caps">OFF</string>
+    <string name="webfilter_blacklist_subheading">"I siti web salvati nella lista nera non potranno accedere tramite browser"</string>
+    <string name="webfilter_whitelist_subheading">I siti web vengono salvati nella whitelist e possono accedere solo dal browser</string>
+    <string name="dialog_website_blacklist_subheading">Immettere il sito Web che si desidera aggiungere alla lista nera, ad esempio: www.google.com</string>
+    <string name="dialog_website_white_subheading">Immettere il sito Web che si desidera aggiungere alla whitelist Es: www.google.com</string>
+    <string name="invalid_url">URL non valido</string>
+    <string name="invalid_otp">Otp non valido</string>
+    <string name="user_agreement_1">Per migliorare KeyOS e assicurarti che tutte le funzionalità funzionino correttamente, alcuni dei tuoi dati di utilizzo verranno raccolti in modo anonimo. È necessario leggere e accettare la nostra politica sulla privacy e i termini. prima di utilizzare KeyOS</string>
+    <string name="select_all">Seleziona tutto</string>
+    <string name="initializing_desktop">Inizializzazione desktop ...</string>
+    <string name="loading_settings">Caricamento delle impostazioni</string>
+    <string name="exiting_keyos">Uscita</string>
+    <string name="dialog_qrcode_subheading">Scansiona questo codice Qr KeyOS per applicare le stesse impostazioni nel tuo dispositivo KeyOS</string>
+
+
 </resources>
