--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -140,4 +140,170 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"通知とアプリは OFF です"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"閉じる"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"終了"</string>
+
+
+    <string name="app_name">KeyOS</string>
+    <string name="exit_button_text">キオスクを終了します</string>
+    <string name="button_overview_mode">概要モード</string>
+    <string name="password">パスワード</string>
+    <string name="activities">活動</string>
+    <string name="cancel">キャンセル</string>
+    <string name="done">完了</string>
+    <string name="phoneBook">電話帳</string>
+    <string name="manual">マニュアル</string>
+    <string name="create_new">新しく作る</string>
+    <string name="contact">連絡先</string>
+    <string name="name">名前</string>
+    <string name="number">数</string>
+    <string name="hide_icon">非表示のアイコン</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">KeyOSホームからランチャー/ショートカットアイコンを非表示</string>
+    <string name="block_activities">ブロックアクティビティ</string>
+    <string name="block_unwanted_pages_activities_windows">不要なページ/アクティビティ/ウィンドウをブロックする</string>
+    <string name="time_limit">制限時間</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">タイミング制限を設定します。 1日1時間</string>
+    <string name="system_settings">システム設定</string>
+    <string name="restrictions">制限</string>
+    <string name="edit_app">アプリの編集</string>
+    <string name="import_amp_export">インポート・エクスポート</string>
+    <string name="scan">スキャン</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">keyOS qrコードをスキャンして、同じ設定ポリシーを適用します</string>
+    <string name="generate">生む</string>
+    <string name="generate_keyos_qr_code">keyOSQrCodeを生成する</string>
+    <string name="import_text">インポート</string>
+    <string name="import_keyos_setting_from_storage">keyOS設定をストレージからインポートする</string>
+    <string name="export_text">書き出す</string>
+    <string name="import_keyos_setting_to_storage">keyOS設定をストレージにインポートします</string>
+    <string name="recovery_email">回復メール</string>
+    <string name="old_password">以前のパスワード</string>
+    <string name="confirm_password">パスワードを認証する</string>
+    <string name="allow_calls">通話を許可する</string>
+    <string name="incoming">着信</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">これにより、携帯電話へのすべての着信が可能になります</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">これにより、携帯電話へのすべての発信が可能になります</string>
+    <string name="whitelist_contacts">ホワイトリストの連絡先</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">連絡先はホワイトリストに保存され、電話をかけることしかできません</string>
+    <string name="blacklist_contacts">ブラックリストの連絡先</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">「ブラックリストに保存されている連絡先はあなたに電話をかけることができません」</string>
+    <string name="automatic_whitelist">自動ホワイトリスト</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">電話帳に連絡先がある場合は通話を許可する</string>
+    <string name="additional">追加</string>
+    <string name="whitelist_amp_blacklist">ホワイトリストブラックリスト</string>
+    <string name="phone_book">電話帳</string>
+    <string name="import_amp_export_settings">エクスポート設定のインポート</string>
+    <string name="services">サービス</string>
+    <string name="single_app">単一のアプリ</string>
+    <string name="apps_amp_services">アプリサービス</string>
+    <string name="peripheral">周辺</string>
+    <string name="advance">前進</string>
+    <string name="disable_camera">カメラを無効にする</string>
+    <string name="call_settings">通話設定</string>
+    <string name="web_filter">Webフィルター</string>
+    <string name="screen_saver">スクリーンセーバー</string>
+    <string name="phone_settings">電話の設定</string>
+    <string name="notification_panel">通知パネル</string>
+    <string name="security">セキュリティ</string>
+    <string name="launch">打ち上げ</string>
+    <string name="phone_call_subheading">電話をかける際に問題が発生した場合は、電話に関連するすべてのサービスを許可してください</string>
+    <string name="phone_call_subheading_hint">ヒント：サービスセクションで電話を検索する</string>
+    <string name="web_filter_subheading">Webフィルタは、不要なWebサイトをブロックできる強力なサービスです。</string>
+    <string name="web_filter_supported_browsers">サポートされているブラウザ：chrome、firefox、brave、edge、opera、duckduckgo</string>
+    <string name="off">オフ</string>
+    <string name="whitelist_websites">ホワイトリストWebサイト</string>
+    <string name="whitelist_website_info">ウェブサイトはホワイトリストの下に保存され、ブラウザからのみアクセスできます</string>
+    <string name="blacklist_websites">ブラックリストのウェブサイト</string>
+    <string name="blacklist_websites_info">「ブラックリストに保存されているウェブサイトはブラウザからアクセスできません」</string>
+    <string name="block_adult_websites">アダルトサイトをブロックする</string>
+    <string name="adult_websites_info">これにより、800のアダルトWebサイトが自動的にブロックされます</string>
+    <string name="whitelist">ホワイトリスト</string>
+    <string name="add_websites">ウェブサイトを追加</string>
+    <string name="website">ウェブサイト</string>
+    <string name="add_websites_subheading">ホワイトリストに追加したいウェブサイトを入力してください例：www.google.com</string>
+    <string name="otp_verification">Otp検証</string>
+    <string name="otp_verification_subheading">登録したメールアドレスに送信した4桁のOTPを入力してください</string>
+    <string name="password_prompt_subheading">「まだパスワードを変更していない場合は、1234をお試しください」</string>
+    <string name="forget">忘れる ？</string>
+    <string name="user_agreement">ユーザー規約</string>
+    <string name="user_agreement_2">インストールされているアプリと電話番号のリストをデバイスに保存します。このデータは、QrCode機能を使用している場合にのみデバイスから取得され、このデータは1時間以内にサーバーから自動的に削除されます</string>
+    <string name="no_thanks">結構です</string>
+    <string name="accept_amp_continue">受け入れる</string>
+    <string name="usage_access">使用アクセス</string>
+    <string name="overlay">オーバーレイ</string>
+    <string name="write_settings">書き込み設定</string>
+    <string name="sound_access">サウンドアクセス</string>
+    <string name="other_permissions">その他の権限</string>
+    <string name="accessibility">アクセシビリティ</string>
+    <string name="device_id">デバイスID</string>
+    <string name="feedback_amp_suggestions">提案</string>
+    <string name="quick_survey">迅速な調査</string>
+    <string name="bug_report">バグレポート</string>
+    <string name="visit">訪問</string>
+    <string name="rate">割合</string>
+    <string name="share">シェア</string>
+    <string name="app_info">アプリ情報</string>
+    <string name="check_for_update">更新を確認</string>
+    <string name="developer_contact">開発者の連絡先</string>
+    <string name="terms_amp_conditions">条項</string>
+    <string name="privacy_policy">個人情報保護方針</string>
+    <string name="outgoing">発信</string>
+    <string name="always_on">オン</string>
+    <string name="always_off">オフ</string>
+    <string name="dont_care">「気にしないで」</string>
+    <string name="landscape">風景</string>
+    <string name="portrait">ポートレート</string>
+    <string name="silent">サイレント</string>
+    <string name="normal">正常</string>
+    <string name="select_activity_sunHeading">ブロックするアクティビティ/ページ/ウィンドウを選択します</string>
+    <string name="apps">アプリ</string>
+    <string name="whitelist_apps">ホワイトリストアプリ</string>
+    <string name="whitelist_services">ホワイトリストサービス</string>
+    <string name="whitelist_apps_subheading">「アクセスしたいアプリを選択してください」</string>
+    <string name="whitelist_service_heading">「アクセスを許可するサービスを選択してください」</string>
+    <string name="single_app_subheading">「フォアグラウンドで利用できるようにするアプリを選択してください」</string>
+    <string name="blacklist">ブラックリスト</string>
+    <string name="contacts_blacklist_subheading">「ブラックリストに保存された連絡先は、Androidフォンに電話をかけることができなくなります」</string>
+    <string name="contacts_whitelist_subheading">ホワイトリストに保存された連絡先は、Androidフォンにのみ電話をかけることができます</string>
+    <string name="delete">削除</string>
+    <string name="delete_contact_subheading">このアイテムを削除してもよろしいですか</string>
+    <string name="invalid_name">無効な名前</string>
+    <string name="invalid_number">無効な番号</string>
+    <string name="hours">時間</string>
+    <string name="minutes">議事録</string>
+    <string name="file_exported_to">にエクスポートされたファイル</string>
+    <string name="select_a_file_to_upload">アップロードするファイルを選択します</string>
+    <string name="please_install_a_file_manager">ファイルマネージャをインストールしてください。</string>
+    <string name="invalid_backup_file">無効なバックアップファイル</string>
+    <string name="imported_successfully">正常にインポートされました</string>
+    <string name="password_successfully_send">パスワードがメールアドレスに正常に送信されました</string>
+    <string name="password_recovery_failed">パスワードの回復に失敗しました</string>
+    <string name="recovery_email_not_registered">リカバリメールが登録されていません</string>
+    <string name="change_your">あなたを変える</string>
+    <string name="forgot_caps">忘れましたか？</string>
+    <string name="password_successfully_changed">パスワードが正常に変更されました</string>
+    <string name="invalid_email_address">無効なメールアドレス</string>
+    <string name="password_min">パスワードには最低8文字を含める必要があります</string>
+    <string name="old_password_must_not_new">古いパスワードは新しいパスワードであってはなりません</string>
+    <string name="password_not_match">パスワードが一致しません</string>
+    <string name="invalid_old_pasword">古いパスワードが無効です</string>
+    <string name="phonebook_blacklist_subheading">「ブラックリストに追加する連絡先を選択してください」</string>
+    <string name="phonebook_whitelist_subheading">「ホワイトリストに追加する連絡先を選択してください」</string>
+    <string name="camera_not_init">カメラ初期化エラー：</string>
+    <string name="please_wait">お待ちください</string>
+    <string name="invalid_qr">無効なQrCode！</string>
+    <string name="successfully_done">成功しました！</string>
+    <string name="on_caps">オン</string>
+    <string name="off_caps">オフ</string>
+    <string name="webfilter_blacklist_subheading">「ブラックリストに保存されているウェブサイトはブラウザからアクセスできません」</string>
+    <string name="webfilter_whitelist_subheading">ウェブサイトはホワイトリストの下に保存され、ブラウザからのみアクセスできます</string>
+    <string name="dialog_website_blacklist_subheading">ブラックリストに追加したいウェブサイトを入力してください例：www.google.com</string>
+    <string name="dialog_website_white_subheading">ホワイトリストに追加したいウェブサイトを入力してください例：www.google.com</string>
+    <string name="invalid_url">無効なURL</string>
+    <string name="invalid_otp">無効なOTP</string>
+    <string name="user_agreement_1">KeyOSを改善し、すべての機能が正しく機能するようにするために、使用状況データの一部は匿名で収集されます。あなたは私たちのプライバシーポリシーと規約を読んで同意する必要があります。 KeyOSを使用する前に</string>
+    <string name="select_all">すべて選択</string>
+    <string name="initializing_desktop">デスクトップを初期化しています…</string>
+    <string name="loading_settings">設定の読み込み</string>
+    <string name="exiting_keyos">終了</string>
+    <string name="dialog_qrcode_subheading">このKeyOSQrコードをスキャンして、KeyOSデバイスに同じ設定を適用します</string>
+
+
 </resources>
