--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -141,4 +141,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"Обавештења и апликације су искључени"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"Затвори"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"Затворено"</string>
+
+
+    <string name="app_name">КеиОС</string>
+    <string name="exit_button_text">Излазни киоск</string>
+    <string name="button_overview_mode">Режим прегледа</string>
+    <string name="password">Лозинка</string>
+    <string name="activities">Активности</string>
+    <string name="cancel">Поништити, отказати</string>
+    <string name="done">Готово</string>
+    <string name="phoneBook">Телефонски именик</string>
+    <string name="manual">Упутство</string>
+    <string name="create_new">Створи ново</string>
+    <string name="contact">Контакт</string>
+    <string name="name">Име</string>
+    <string name="number">Број</string>
+    <string name="hide_icon">Сакриј икону</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">сакријте икону покретача /пречице са куће КеиОС</string>
+    <string name="block_activities">Блокирај активности</string>
+    <string name="block_unwanted_pages_activities_windows">Блокирајте нежељене странице /активности /прозоре</string>
+    <string name="time_limit">Рок</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">Подесите временско ограничење Нпр. 1 сат дневно</string>
+    <string name="system_settings">Подешавања система</string>
+    <string name="restrictions">Ограничења</string>
+    <string name="edit_app">Измени апликацију</string>
+    <string name="import_amp_export">Увоз извоз</string>
+    <string name="scan">Сцан</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">Скенирајте кеиОС кр код да бисте применили исту политику подешавања</string>
+    <string name="generate">Генериши</string>
+    <string name="generate_keyos_qr_code">Генериши кеиОС КрЦоде</string>
+    <string name="import_text">Увоз</string>
+    <string name="import_keyos_setting_from_storage">Увезите подешавање кеиОС-а из складишта</string>
+    <string name="export_text">Извоз</string>
+    <string name="import_keyos_setting_to_storage">Увоз подешавања кеиОС-а у складиште</string>
+    <string name="recovery_email">Опоравак е-маил</string>
+    <string name="old_password">стара шифра</string>
+    <string name="confirm_password">Потврди лозинку</string>
+    <string name="allow_calls">Дозволи позиве</string>
+    <string name="incoming">Долазни</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">Ово ће омогућити све долазне позиве на ваш мобилни телефон</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">Ово ће омогућити све одлазне позиве на ваш мобилни телефон</string>
+    <string name="whitelist_contacts">Бела листа Контакти</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">Контакти сачувани на белој листи могу само да вас зову</string>
+    <string name="blacklist_contacts">Црна листа контаката</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">„Контакти сачувани на црној листи неће моћи да вас зову“</string>
+    <string name="automatic_whitelist">Аутоматска бела листа</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">Дозволи позиве ако је контакт доступан у именику</string>
+    <string name="additional">Додатни</string>
+    <string name="whitelist_amp_blacklist">Црна листа на белој листи</string>
+    <string name="phone_book">Телефонски именик</string>
+    <string name="import_amp_export_settings">Увоз подешавања извоза</string>
+    <string name="services">Услуге</string>
+    <string name="single_app">Сингле Апп</string>
+    <string name="apps_amp_services">Услуге апликација</string>
+    <string name="peripheral">Периферни</string>
+    <string name="advance">Напред</string>
+    <string name="disable_camera">Онемогући камеру</string>
+    <string name="call_settings">Подешавања позива</string>
+    <string name="web_filter">Веб филтер</string>
+    <string name="screen_saver">Сцреен савер</string>
+    <string name="phone_settings">Подешавања телефона</string>
+    <string name="notification_panel">Панел за обавештавање</string>
+    <string name="security">Сигурност</string>
+    <string name="launch">Лансирање</string>
+    <string name="phone_call_subheading">Ако наиђете на било какве проблеме приликом упућивања позива, допустите све услуге повезане са телефонским позивом</string>
+    <string name="phone_call_subheading_hint">савет: Потражите телефон у одељку сервиса</string>
+    <string name="web_filter_subheading">Веб филтер је моћна услуга која вам омогућава да блокирате нежељене веб локације</string>
+    <string name="web_filter_supported_browsers">Подржани прегледачи: цхроме, фирефок, храбри, ивица, опера, дуцкдуцкго</string>
+    <string name="off">Ван</string>
+    <string name="whitelist_websites">Беле листе веб локација</string>
+    <string name="whitelist_website_info">Веб локације се чувају на белој листи, а прегледач им може приступити</string>
+    <string name="blacklist_websites">Веб странице са црне листе</string>
+    <string name="blacklist_websites_info">„Веб локације сачуване на црној листи неће моћи да приступе преко прегледача“</string>
+    <string name="block_adult_websites">Блокирајте веб локације за одрасле</string>
+    <string name="adult_websites_info">Ово ће аутоматски блокирати 800 веб локација за одрасле</string>
+    <string name="whitelist">Вхителист</string>
+    <string name="add_websites">Додајте веб локацију</string>
+    <string name="website">Веб сајт</string>
+    <string name="add_websites_subheading">Молимо вас унесите веб локацију коју желите да додате на белу листу. Нпр .: ввв.гоогле.цом</string>
+    <string name="otp_verification">Отп Верифицатион</string>
+    <string name="otp_verification_subheading">Унесите четвороцифрени отп који смо послали на вашу регистровану адресу е-поште</string>
+    <string name="password_prompt_subheading">"ако још увек нисте променили лозинку, покушајте 1234"</string>
+    <string name="forget">заборавити?</string>
+    <string name="user_agreement">Кориснички Уговор</string>
+    <string name="user_agreement_2">Листа инсталираних апликација и телефонски број чуваћемо на вашем уређају. Ови подаци ће се преузети са вашег уређаја само ако користите функцију КрЦоде и они ће се аутоматски уклонити са сервера за један сат</string>
+    <string name="no_thanks">Не хвала</string>
+    <string name="accept_amp_continue">Прихвати</string>
+    <string name="usage_access">Приступ коришћењу</string>
+    <string name="overlay">Прекривање</string>
+    <string name="write_settings">Врите Сеттингс</string>
+    <string name="sound_access">Приступ звуку</string>
+    <string name="other_permissions">Остале дозволе</string>
+    <string name="accessibility">Приступачност</string>
+    <string name="device_id">ИД уређаја</string>
+    <string name="feedback_amp_suggestions">сугестије</string>
+    <string name="quick_survey">Брзи преглед</string>
+    <string name="bug_report">Извештај о грешкама</string>
+    <string name="visit">Посетите</string>
+    <string name="rate">Оцените</string>
+    <string name="share">Објави</string>
+    <string name="app_info">Информације о апликацији</string>
+    <string name="check_for_update">Проверити ажурирање</string>
+    <string name="developer_contact">Контакт програмера</string>
+    <string name="terms_amp_conditions">Услови</string>
+    <string name="privacy_policy">Правила о приватности</string>
+    <string name="outgoing">Одлазни</string>
+    <string name="always_on">на</string>
+    <string name="always_off">ван</string>
+    <string name="dont_care">"Не занима ме"</string>
+    <string name="landscape">Пејзаж</string>
+    <string name="portrait">Портрет</string>
+    <string name="silent">Тихо</string>
+    <string name="normal">Нормално</string>
+    <string name="select_activity_sunHeading">Изаберите које активности /странице /прозоре желите да блокирате</string>
+    <string name="apps">Апликације</string>
+    <string name="whitelist_apps">Апликације са беле листе</string>
+    <string name="whitelist_services">Услуге на белој листи</string>
+    <string name="whitelist_apps_subheading">„Изаберите којим апликацијама желите да приступите“</string>
+    <string name="whitelist_service_heading">„Изаберите којим услугама желите да омогућите приступ“</string>
+    <string name="single_app_subheading">„Изаберите коју апликацију желите да буде доступна у првом плану“</string>
+    <string name="blacklist">Црна листа</string>
+    <string name="contacts_blacklist_subheading">„Контакти сачувани на црној листи више неће моћи да позивају ваш Андроид телефон“</string>
+    <string name="contacts_whitelist_subheading">Контакти сачувани на белој листи више могу само да позивају ваш Андроид телефон</string>
+    <string name="delete">Избриши</string>
+    <string name="delete_contact_subheading">Да ли сте сигурни да желите да избришете ове ставке</string>
+    <string name="invalid_name">Погрешно име</string>
+    <string name="invalid_number">Неважећи број</string>
+    <string name="hours">Сати</string>
+    <string name="minutes">Минута</string>
+    <string name="file_exported_to">Датотека је извезена у</string>
+    <string name="select_a_file_to_upload">Изаберите датотеку за отпремање</string>
+    <string name="please_install_a_file_manager">Молимо инсталирајте Филе Манагер.</string>
+    <string name="invalid_backup_file">Неважећа датотека резервне копије</string>
+    <string name="imported_successfully">Увежено успешно</string>
+    <string name="password_successfully_send">Лозинка је успешно послата на вашу адресу е-поште</string>
+    <string name="password_recovery_failed">Опоравак лозинке није успео</string>
+    <string name="recovery_email_not_registered">Е-адреса за опоравак није регистрована</string>
+    <string name="change_your">Мењају своје</string>
+    <string name="forgot_caps">Заборавили?</string>
+    <string name="password_successfully_changed">Ваша лозинка је успешно промењена</string>
+    <string name="invalid_email_address">Погрешна емаил адреса</string>
+    <string name="password_min">Лозинка мора садржавати најмање 8 знакова</string>
+    <string name="old_password_must_not_new">Стара лозинка не сме бити нова лозинка</string>
+    <string name="password_not_match">Лозинка се не подудара</string>
+    <string name="invalid_old_pasword">Неважећа стара лозинка</string>
+    <string name="phonebook_blacklist_subheading">„Изаберите које контакте желите да додате на црну листу“</string>
+    <string name="phonebook_whitelist_subheading">„Изаберите које контакте желите да додате на белу листу“</string>
+    <string name="camera_not_init">Грешка иницијализације камере:</string>
+    <string name="please_wait">Сачекајте</string>
+    <string name="invalid_qr">Неважећи КрЦоде!</string>
+    <string name="successfully_done">Успешно урађено!</string>
+    <string name="on_caps">НА</string>
+    <string name="off_caps">ВАН</string>
+    <string name="webfilter_blacklist_subheading">„Веб локације сачуване на црној листи неће моћи да приступе преко прегледача“</string>
+    <string name="webfilter_whitelist_subheading">Веб локације се чувају на белој листи, а прегледач им може приступити</string>
+    <string name="dialog_website_blacklist_subheading">Унесите веб локацију коју желите да додате на црну листу Нпр. Ввв.гоогле.цом</string>
+    <string name="dialog_website_white_subheading">Молимо вас унесите веб локацију коју желите да додате на белу листу. Нпр .: ввв.гоогле.цом</string>
+    <string name="invalid_url">Неважећи УРЛ</string>
+    <string name="invalid_otp">Неважећи отп</string>
+    <string name="user_agreement_1">Да бисмо побољшали КеиОС и осигурали да све функције раде исправно, неки ваши подаци о употреби прикупљаће се анонимно. Морате прочитати и прихватити нашу Политику приватности и услове. пре употребе КеиОС-а</string>
+    <string name="select_all">Изабери све</string>
+    <string name="initializing_desktop">Иницијализација радне површине ...</string>
+    <string name="loading_settings">Подешавања учитавања</string>
+    <string name="exiting_keyos">Излаз</string>
+    <string name="dialog_qrcode_subheading">Скенирајте овај КеиОС Кр код да бисте применили исте поставке на свом КеиОС уређају</string>
+
 </resources>
