--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -141,4 +141,169 @@
     <string name="work_mode_off_label" msgid="3194894777601421047">"اطلاعات اور ایپس آف ہیں"</string>
     <string name="bottom_work_tab_user_education_close_button" msgid="4224492243977802135">"بند کریں"</string>
     <string name="bottom_work_tab_user_education_closed" msgid="1098340939861869465">"بند"</string>
+
+
+    <string name="app_name">کیوس</string>
+    <string name="exit_button_text">کیوسک سے باہر نکلیں</string>
+    <string name="button_overview_mode">جائزہ وضع</string>
+    <string name="password">پاس ورڈ</string>
+    <string name="activities">سرگرمیاں</string>
+    <string name="cancel">منسوخ کریں</string>
+    <string name="done">ہو گیا</string>
+    <string name="phoneBook">فون بک</string>
+    <string name="manual">دستی</string>
+    <string name="create_new">نیا بنائیں</string>
+    <string name="contact">رابطہ کریں</string>
+    <string name="name">نام</string>
+    <string name="number">نمبر</string>
+    <string name="hide_icon">آئیکن چھپائیں</string>
+    <string name="hide_launcher_shortcut_icon_from_keyos_home">کیوس ہوم سے لانچر /شارٹ کٹ آئیکن چھپائیں</string>
+    <string name="block_activities">سرگرمیاں بلاک کریں</string>
+    <string name="block_unwanted_pages_activities_windows">ناپسندیدہ صفحات /سرگرمیاں /ونڈوز کو مسدود کریں</string>
+    <string name="time_limit">وقت کی حد</string>
+    <string name="set_timing_restriction_eg_1hr_per_day">وقت کی پابندی کو طے کریں۔ 1hr فی دن</string>
+    <string name="system_settings">سسٹم کی ترتیبات</string>
+    <string name="restrictions">پابندیاں</string>
+    <string name="edit_app">ایپ میں ترمیم کریں</string>
+    <string name="import_amp_export">درآمد برآمد</string>
+    <string name="scan">اسکین کریں</string>
+    <string name="scan_keyos_qr_code_to_apply_same_settings_policy">اسی سیٹنگ کی پالیسی کو لاگو کرنے کے لئے keyOS qr کوڈ اسکین کریں</string>
+    <string name="generate">پیدا کرنا</string>
+    <string name="generate_keyos_qr_code">کی او ایس کیو آر کوڈ تیار کریں</string>
+    <string name="import_text">درآمد کریں</string>
+    <string name="import_keyos_setting_from_storage">اسٹوریج سے کیوس کی ترتیب کو درآمد کریں</string>
+    <string name="export_text">برآمد کریں</string>
+    <string name="import_keyos_setting_to_storage">اسٹوریج میں کیوس کی ترتیب کو درآمد کریں</string>
+    <string name="recovery_email">بازیابی ای میل</string>
+    <string name="old_password">پرانا پاسورڈ</string>
+    <string name="confirm_password">پاس ورڈ کی تصدیق کریں</string>
+    <string name="allow_calls">کالوں کی اجازت دیں</string>
+    <string name="incoming">آنے والی</string>
+    <string name="this_will_allow_all_incoming_calls_to_your_mobile">اس سے آپ کے موبائل پر آنے والی تمام کالوں کی اجازت ہوگی</string>
+    <string name="this_will_allow_all_outgoing_calls_to_your_mobile">اس سے آپ کے موبائل پر سبھی سبکدوش ہونے والی کالوں کی اجازت ہوگی</string>
+    <string name="whitelist_contacts">وائٹ لسٹ رابطے</string>
+    <string name="contacts_save_under_whitelist_only_able_to_call_you">رابطے وہائٹ ​​لسٹ کے تحت صرف آپ کو کال کرنے کے اہل ہیں</string>
+    <string name="blacklist_contacts">بلیک لسٹ رابطے</string>
+    <string name="contacts_save_under_blacklist_won_t_be_able_to_call_you">"بلیک لسٹ کے تحت محفوظ کردہ رابطے آپ کو کال نہیں کرسکیں گے"۔</string>
+    <string name="automatic_whitelist">خودکار وائٹ لسٹ</string>
+    <string name="allow_calls_if_contact_available_in_phone_book">اگر فون کی کتاب میں رابطہ دستیاب ہو تو کالوں کی اجازت دیں</string>
+    <string name="additional">اضافی</string>
+    <string name="whitelist_amp_blacklist">وائٹ لسٹ بلیک لسٹ</string>
+    <string name="phone_book">فون بک</string>
+    <string name="import_amp_export_settings">برآمد کی ترتیبات درآمد کریں</string>
+    <string name="services">خدمات</string>
+    <string name="single_app">سنگل ایپ</string>
+    <string name="apps_amp_services">ایپس کی خدمات</string>
+    <string name="peripheral">پیریفیریل</string>
+    <string name="advance">ایڈوانس</string>
+    <string name="disable_camera">کیمرا غیر فعال کریں</string>
+    <string name="call_settings">کال کی ترتیبات</string>
+    <string name="web_filter">ویب فلٹر</string>
+    <string name="screen_saver">اسکرین سیور</string>
+    <string name="phone_settings">فون کی ترتیبات</string>
+    <string name="notification_panel">نوٹیفکیشن پینل</string>
+    <string name="security">سیکیورٹی</string>
+    <string name="launch">لانچ کریں</string>
+    <string name="phone_call_subheading">اگر آپ کو کال کرنے میں کوئی پریشانی کا سامنا کرنا پڑتا ہے تو براہ کرم فون کال سے متعلق تمام خدمات کی اجازت دیں</string>
+    <string name="phone_call_subheading_hint">اشارہ: خدمت کے حصے میں فون کے لئے تلاش کریں</string>
+    <string name="web_filter_subheading">ویب فلٹر ایک طاقتور خدمت ہے جو آپ کو ناپسندیدہ ویب سائٹوں کو بلاک کرنے کی اجازت دیتی ہے</string>
+    <string name="web_filter_supported_browsers">تائید شدہ براؤزرز: کروم ، فائر فاکس ، بہادر ، کنارے ، اوپیرا ، بتک ڈیکگو</string>
+    <string name="off">بند</string>
+    <string name="whitelist_websites">وائٹ لسٹ ویب سائٹیں</string>
+    <string name="whitelist_website_info">ویب سائٹیں وائٹ لسٹ کے تحت محفوظ کرتی ہیں صرف براؤزر کے ذریعہ ان تک رسائی حاصل ہوتی ہے</string>
+    <string name="blacklist_websites">بلیک لسٹ ویب سائٹیں</string>
+    <string name="blacklist_websites_info">"بلیک لسٹ کے تحت محفوظ کردہ ویب سائٹیں براؤزر کے ذریعہ رسائی حاصل نہیں کرسکتی ہیں۔"</string>
+    <string name="block_adult_websites">بالغ ویب سائٹوں کو مسدود کریں</string>
+    <string name="adult_websites_info">یہ 800 بالغ ویب سائٹوں کو خودبخود مسدود کردے گی</string>
+    <string name="whitelist">وائٹ لسٹ</string>
+    <string name="add_websites">ویب سائٹ شامل کریں</string>
+    <string name="website">ویب سائٹ</string>
+    <string name="add_websites_subheading">براہ کرم وہ ویب سائٹ درج کریں جسے آپ وائٹ لسٹ میں شامل کرنا چاہتے ہیں جیسے: www.google.com</string>
+    <string name="otp_verification">او ٹی پی کی توثیق</string>
+    <string name="otp_verification_subheading">براہ کرم 4 ہندسوں کی او پی پی درج کریں جسے ہم نے آپ کے رجسٹرڈ ای میل ایڈریس پر بھیجا ہے</string>
+    <string name="password_prompt_subheading">"اگر آپ نے ابھی تک اپنا پاس ورڈ نہیں بدلا تو براہ کرم 1234 آزمائیں"</string>
+    <string name="forget">بھول گئے؟</string>
+    <string name="user_agreement">صارف کا معاہدہ</string>
+    <string name="user_agreement_2">ہم آپ کے آلے میں انسٹال کردہ ایپ اور فون نمبر کی فہرست اسٹور کریں گے۔ یہ اعداد و شمار آپ کے آلے سے صرف اس صورت میں لیا جائے گا جب آپ QrCode خصوصیت استعمال کررہے ہیں اور یہ ڈیٹا سرور سے خود بخود ایک گھنٹہ میں ختم ہوجائے گا</string>
+    <string name="no_thanks">نہیں شکریہ</string>
+    <string name="accept_amp_continue">قبول کریں</string>
+    <string name="usage_access">استعمال تک رسائی</string>
+    <string name="overlay">اتبشایی</string>
+    <string name="write_settings">ترتیبات لکھیں</string>
+    <string name="sound_access">صوتی رسائی</string>
+    <string name="other_permissions">دوسرے اجازت نامے</string>
+    <string name="accessibility">رسائ</string>
+    <string name="device_id">ڈیوائس کی شناخت</string>
+    <string name="feedback_amp_suggestions">تجاویز</string>
+    <string name="quick_survey">فوری سروے</string>
+    <string name="bug_report">غلطیوں کی تفصیل</string>
+    <string name="visit">ملاحظہ کریں</string>
+    <string name="rate">شرح</string>
+    <string name="share">بانٹیں</string>
+    <string name="app_info">ایپ کی معلومات</string>
+    <string name="check_for_update">اپ ڈیٹ کے لئے چیک کریں</string>
+    <string name="developer_contact">ڈویلپر سے رابطہ</string>
+    <string name="terms_amp_conditions">شرائط</string>
+    <string name="privacy_policy">رازداری کی پالیسی</string>
+    <string name="outgoing">سبکدوش ہونے والے</string>
+    <string name="always_on">پر</string>
+    <string name="always_off">بند</string>
+    <string name="dont_care">"پرواہ نہیں"</string>
+    <string name="landscape">زمین کی تزئین</string>
+    <string name="portrait">پورٹریٹ</string>
+    <string name="silent">خاموش</string>
+    <string name="normal">عام</string>
+    <string name="select_activity_sunHeading">منتخب کریں کہ آپ کون سی سرگرمیاں /صفحات /ونڈوز کو مسدود کرنا چاہتے ہیں</string>
+    <string name="apps">اطلاقات</string>
+    <string name="whitelist_apps">وائٹ لسٹ ایپس</string>
+    <string name="whitelist_services">وائٹ لسٹ سروسز</string>
+    <string name="whitelist_apps_subheading">"منتخب کریں کہ آپ کس ایپس تک رسائی حاصل کرنا چاہتے ہیں"۔</string>
+    <string name="whitelist_service_heading">"منتخب کریں کہ آپ کون سی خدمات تک رسائی دینا چاہتے ہیں"</string>
+    <string name="single_app_subheading">"منتخب کریں کہ آپ کس ایپ کو پیش منظر میں دستیاب کرنا چاہتے ہیں"۔</string>
+    <string name="blacklist">بلیک لسٹ</string>
+    <string name="contacts_blacklist_subheading">"بلیک لسٹ کے تحت محفوظ کردہ رابطے اب آپ کے Android فون پر کال نہیں کرسکیں گے۔"</string>
+    <string name="contacts_whitelist_subheading">وائٹ لسٹ کے تحت محفوظ کردہ رابطے صرف آپ کے Android فون پر کال کرنے کے اہل ہیں</string>
+    <string name="delete">حذف کریں</string>
+    <string name="delete_contact_subheading">کیا آپ واقعی اس آئٹمز کو حذف کرنا چاہتے ہیں؟</string>
+    <string name="invalid_name">غلط نام</string>
+    <string name="invalid_number">ناموزوں نمبر</string>
+    <string name="hours">اوقات</string>
+    <string name="minutes">منٹ</string>
+    <string name="file_exported_to">فائل کو برآمد کیا گیا</string>
+    <string name="select_a_file_to_upload">اپ لوڈ کرنے کیلئے ایک فائل منتخب کریں</string>
+    <string name="please_install_a_file_manager">براہ کرم فائل منیجر انسٹال کریں۔</string>
+    <string name="invalid_backup_file">غلط بیک اپ فائل</string>
+    <string name="imported_successfully">کامیابی کے ساتھ درآمد کیا گیا</string>
+    <string name="password_successfully_send">پاس ورڈ کامیابی کے ساتھ آپ کے ای میل پتے پر بھیج دیا گیا</string>
+    <string name="password_recovery_failed">پاس ورڈ کی بازیابی ناکام ہوگئی</string>
+    <string name="recovery_email_not_registered">بازیابی کا ای میل رجسٹرڈ نہیں ہے</string>
+    <string name="change_your">آپ کو تبدیل کریں</string>
+    <string name="forgot_caps">بھول ؟</string>
+    <string name="password_successfully_changed">آپ کا پاس ورڈ کامیابی کے ساتھ تبدیل کر دیا گیا ہے</string>
+    <string name="invalid_email_address">غلط ای میل ایڈریس</string>
+    <string name="password_min">پاس ورڈ میں کم از کم 8 حرف ہونے چاہ.</string>
+    <string name="old_password_must_not_new">پرانا پاس ورڈ نیا پاس ورڈ نہیں ہونا چاہئے</string>
+    <string name="password_not_match">پاس ورڈ مماثل نہیں ہے</string>
+    <string name="invalid_old_pasword">غلط پرانا پاس ورڈ</string>
+    <string name="phonebook_blacklist_subheading">"منتخب کریں کہ آپ کون سے رابطے کو بلیک لسٹ میں شامل کرنا چاہتے ہیں"۔</string>
+    <string name="phonebook_whitelist_subheading">"منتخب کریں کہ آپ کون سے رابطے کو وائٹ لسٹ میں شامل کرنا چاہتے ہیں"۔</string>
+    <string name="camera_not_init">کیمرے کی ابتدا میں خرابی:</string>
+    <string name="please_wait">برائے مہربانی انتظار کریں</string>
+    <string name="invalid_qr">غلط QrCode!</string>
+    <string name="successfully_done">کامیابی کے ساتھ!</string>
+    <string name="on_caps">آن</string>
+    <string name="off_caps">بند</string>
+    <string name="webfilter_blacklist_subheading">"بلیک لسٹ کے تحت محفوظ کردہ ویب سائٹیں براؤزر کے ذریعہ رسائی حاصل نہیں کرسکتی ہیں۔"</string>
+    <string name="webfilter_whitelist_subheading">ویب سائٹیں وائٹ لسٹ کے تحت محفوظ کرتی ہیں صرف براؤزر کے ذریعہ ان تک رسائی حاصل ہوتی ہے</string>
+    <string name="dialog_website_blacklist_subheading">براہ کرم وہ ویب سائٹ درج کریں جسے آپ بلیک لسٹ میں شامل کرنا چاہتے ہیں مثال کے طور پر: www.google.com</string>
+    <string name="dialog_website_white_subheading">براہ کرم وہ ویب سائٹ درج کریں جسے آپ وائٹ لسٹ میں شامل کرنا چاہتے ہیں جیسے: www.google.com</string>
+    <string name="invalid_url">غلط url</string>
+    <string name="invalid_otp">غلط او پی ٹی</string>
+    <string name="user_agreement_1">کیوس کو بہتر بنانے اور یہ یقینی بنانا ہے کہ تمام خصوصیت ٹھیک طرح سے کام کرتی ہے ، آپ کے استعمال کے کچھ کوائف گمنامی میں جمع کیے جائیں گے۔ آپ کو ہماری رازداری کی پالیسی اور شرائط کو ضرور پڑھنا اور ماننا ہوگا۔ کیوس استعمال کرنے سے پہلے</string>
+    <string name="select_all">تمام منتخب کریں</string>
+    <string name="initializing_desktop">ڈیسک ٹاپ کی شروعات کی جا رہی ہے…</string>
+    <string name="loading_settings">ترتیبات لوڈ ہو رہا ہے</string>
+    <string name="exiting_keyos">باہر نکلنا</string>
+    <string name="dialog_qrcode_subheading">اپنے کیوس آلہ میں اسی سیٹنگوں کو لاگو کرنے کے لئے اس کیوس Qr کوڈ کو اسکین کریں</string>
+
 </resources>
